chore: fetch latest crowdin strings

--- a/_locales/af/messages.json
+++ b/_locales/af/messages.json
@@ -2,7 +2,7 @@
   "about": "oor",
   "accept": "aanvaar",
   "accountIDCopy": "Kopieer Rekening ID",
-  "accountIdCopied": " Rekening gekopieer",
+  "accountIdCopied": "Rekening gekopieer",
   "accountIdCopyDescription": "Kopieer jou Rekening ID en deel dit met jou vriende sodat hulle vir jou boodskappe kan stuur.",
   "accountIdEnter": "Voer Rekening-ID in",
   "accountIdErrorInvalid": "Hierdie Rekening-ID is ongeldig. Gaan dit asseblief na en probeer weer.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Wil jy <b>{name}</b> en <b>{count} ander</b> verwyder uit <b>{group_name}?</b>",
   "groupRemoveDescriptionTwo": "Wil jy <b>{name}</b> en <b>{other_name}</b> verwyder uit <b>{group_name}?</b>",
   "groupRemoveMessages": "{count, plural, one [Verwyder gebruiker en hul boodskappe] other [Verwyder gebruikers en hul boodskappe]}",
-  "groupRemoveUserOnly": "{count, plural, one [Verwyder gebruiker ] other [Verwyder gebruikers]}",
+  "groupRemoveUserOnly": "{count, plural, one [Verwyder gebruiker] other [Verwyder gebruikers]}",
   "groupRemoved": "<b>{name}</b> is as lede van die groep verwyder",
   "groupRemovedMultiple": "<b>{name}</b> en <b>{count} ander</b> is uit die groep verwyder.",
   "groupRemovedTwo": "<b>{name}</b> en <b>{other_name}</b> is uit die groep verwyder.",
@@ -639,24 +639,24 @@
   "passwordSet": "Stel Wagwoord",
   "passwordSetDescription": "Jou wagwoord is gestel. Hou dit asseblief veilig.",
   "paste": "Plak",
-  "permissionMusicAudioDenied": "{app_name} benodig musiek en oudio toegang om lêers, musiek en oudio te stuur, maar dit is permanent geweier. Tik Instellings -> Toestemmings, en skakel \"Musiek en oudio\" aan.",
+  "permissionMusicAudioDenied": "{app_name} benodig musiek en oudio toegang om lêers, musiek en oudio te stuur, maar dit is permanent geweier. Tik Instellings → Toestemmings, en skakel \"Musiek en oudio\" aan.",
   "permissionsAppleMusic": "{app_name} moet Apple Music gebruik om media-aanhegsels te speel.",
   "permissionsAutoUpdate": "Auto Opdateer",
   "permissionsAutoUpdateDescription": "Kyk outomaties vir opdaterings by opstart",
-  "permissionsCameraDenied": "{app_name} benodig kamera toegang om foto's en video's te neem, maar dit is permanent geweier. Tik Instellings -> Toestemmings, en skakel \"Kamera\" aan.",
+  "permissionsCameraDenied": "{app_name} benodig kamera toegang om foto's en video's te neem, maar dit is permanent geweier. Tik Instellings → Toestemmings, en skakel \"Kamera\" aan.",
   "permissionsFaceId": "Die skermsluitfunksie op {app_name} gebruik Face ID.",
   "permissionsKeepInSystemTray": "Hou in sisteemtray",
   "permissionsKeepInSystemTrayDescription": "{app_name} loop aan in die agtergrond wanneer jy die venster sluit",
   "permissionsLibrary": "{app_name} het foto biblioteek toegang nodig om voort te gaan. Jy kan toegang in die iOS instellings aanskakel.",
   "permissionsMicrophone": "Mikrofoon",
-  "permissionsMicrophoneAccessRequired": "{app_name} het mikrofoontoegang nodig om oproepe te maak en oudioboodskappe te stuur, maar dit is permanent geweier. Tik op Instellings -> Permissions, en skakel \"Microphone\" aan.",
+  "permissionsMicrophoneAccessRequired": "{app_name} het mikrofoontoegang nodig om oproepe te maak en oudioboodskappe te stuur, maar dit is permanent geweier. Tik op Instellings → Permissions, en skakel \"Microphone\" aan.",
   "permissionsMicrophoneAccessRequiredDesktop": "Jy kan mikrofoon toegang aktiveer in {app_name} se privaatheidsinstellings",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} het mikrofoon toegang nodig om oproepe te maak en oudioboodskappe op te neem.",
   "permissionsMicrophoneDescription": "Laat toegang tot mikrofoon toe.",
   "permissionsMusicAudio": "{app_name} het musiek en oudiotoegang nodig om lêers, musiek en klank te stuur.",
   "permissionsRequired": "Toestemming benodig",
-  "permissionsStorageDenied": "{app_name} benodig foto-biblioteek toegang sodat jy foto's en video's kan stuur, maar dit is permanent geweier. Tik Instellings -> Toestemmings, en skakel \"Foto's en video's\" aan.",
-  "permissionsStorageDeniedLegacy": "{app_name} benodig stoor toegang sodat jy aanhegsels kan stuur en stoor. Tik Instellings -> Toestemmings, en skakel \"Stoor\" aan.",
+  "permissionsStorageDenied": "{app_name} benodig foto-biblioteek toegang sodat jy foto's en video's kan stuur, maar dit is permanent geweier. Tik Instellings → Toestemmings, en skakel \"Foto's en video's\" aan.",
+  "permissionsStorageDeniedLegacy": "{app_name} benodig stoor toegang sodat jy aanhegsels kan stuur en stoor. Tik Instellings → Toestemmings, en skakel \"Stoor\" aan.",
   "permissionsStorageSave": "{app_name} het berging toegang nodig om aanhegsels en media te stoor.",
   "permissionsStorageSaveDenied": "{app_name} het berging toegang nodig om foto's en video's te stoor, maar dit is permanent geweier. Gaan asseblief na die toepassing se instellings, kies \"Permissions\", en skakel \"Storage\" aan.",
   "permissionsStorageSend": "{app_name} het berging toegang nodig om foto's en video's te stuur.",
@@ -773,7 +773,7 @@
   "updateError": "Kan nie Opdateer nie",
   "updateErrorDescription": "{app_name} kon nie opdateer nie. Gaan asseblief na {session_download_url} en installeer die nuwe weergawe handmatig, en kontak dan ons Hulp Sentrum om ons van hierdie probleem in kennis te stel.",
   "updateNewVersion": "n Nuwe weergawe van {app_name} is beskikbaar tik om op te dateer",
-  "updateNewVersionDescription": " n Nuwe weergawe van {app_name} is beskikbaar",
+  "updateNewVersionDescription": "n Nuwe weergawe van {app_name} is beskikbaar",
   "updateReleaseNotes": "Gaan na Vrylating notules",
   "updateSession": "{app_name} Opdateer",
   "updateVersion": "Weergawe {version}",
