--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -313,7 +313,7 @@
   "disappearingMessagesSet": "<b>{name}</b> قام بتعيين الرسائل لتختفي بعد {time} من {disappearing_messages_type}.",
   "disappearingMessagesSetYou": "<b>أنت</b> قمت بتعيين الرسائل لتختفي بعد {time} من {disappearing_messages_type}.",
   "disappearingMessagesTimer": "المؤقت",
-  "disappearingMessagesTurnedOff": "<b>{name}</b> قام بإيقاف الرسائل المختفية. لن تختفي الرسائل التي يرسلها بعد الآن. ",
+  "disappearingMessagesTurnedOff": "<b>{name}</b> قام بإيقاف الرسائل المختفية. لن تختفي الرسائل التي يرسلها بعد الآن.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> قام/ت بإيقاف تشغيل الرسائل المختفية <b>إيقاف</b>.",
   "disappearingMessagesTurnedOffYou": "<b>أنت</b> أوقفت <b>الرسائل المختفية</b>. لم تعد الرسائل التي ترسلها تختفي.",
   "disappearingMessagesTurnedOffYouGroup": "<b>قمت</b> بإيقاف <b>تشغيل</b> الرسائل المختفية.",
@@ -426,7 +426,7 @@
   "groupRemoveDescriptionMultiple": "هل تود إزالة <b>{name}</b> و<b>{count} آخرين</b> من <b>{group_name}</b>؟",
   "groupRemoveDescriptionTwo": "هل تود إزالة <b>{name}</b> و<b>{other_name}</b> من <b>{group_name}</b>؟",
   "groupRemoveMessages": "{count, plural, zero [إزالة المستخدمين ورسائلهم] one [إزالة المستخدم ورسائله] two [إزالة المستخدمين ورسائلهم] few [إزالة المستخدمين ورسائلهم] many [إزالة المستخدمين ورسائلهم] other [إزالة المستخدمين ورسائلهم]}",
-  "groupRemoveUserOnly": "{count, plural, zero [إزالة المستخدمين] one [إزالة المستخدم ] two [إزالة المستخدمين] few [إزالة المستخدمين] many [إزالة المستخدمين] other [إزالة المستخدمين]}",
+  "groupRemoveUserOnly": "{count, plural, zero [إزالة المستخدمين] one [إزالة المستخدم] two [إزالة المستخدمين] few [إزالة المستخدمين] many [إزالة المستخدمين] other [إزالة المستخدمين]}",
   "groupRemoved": "<b>{name}</b> تم إزالته من المجموعة.",
   "groupRemovedMultiple": "<b>{name}</b> و <b>{count} آخرين</b> تم إزالتهم من المجموعة.",
   "groupRemovedTwo": "<b>{name}</b> و <b>{other_name}</b> تم إزالتهم من المجموعة.",
@@ -515,7 +515,7 @@
   "messageReplyingTo": "الرد على",
   "messageRequestGroupInvite": "<b>{name}</b> دعاك للانضمام إلى <b>{group_name}</b>.",
   "messageRequestGroupInviteDescription": "إرسال رسالة إلى هذه المجموعة سوف يقبل تلقائيًا دعوة المجموعة.",
-  "messageRequestPending": "طلب رسالتك قيد الانتظار.\nطلب رسالتك حاليًا قيد الانتظار.",
+  "messageRequestPending": "طلب رسالتك قيد الانتظار.",
   "messageRequestPendingDescription": "ستتمكن من إرسال الرسائل الصوتية والمرفقات بمجرد موافقة المستلم على طلب الرسالة هذا.",
   "messageRequestYouHaveAccepted": "لقد وافقتَ على طلب الرسالة من <b>{name}.</b>",
   "messageRequestsAcceptDescription": "إرسال رسالة إلى هذا المستخدم سوف يقبل تلقائيًا طلب الرسالة الخاص به ويكشف عن معرف حسابك.",
@@ -634,24 +634,24 @@
   "passwordSet": "تعيين كلمة المرور",
   "passwordSetDescription": "تم تعيين كلمة المرور الخاصة بك. احفظها في مامن من فضلك.",
   "paste": "لصق",
-  "permissionMusicAudioDenied": "{app_name} يحتاج إلى الوصول إلى الموسيقى والصوت من أجل إرسال الملفات والموسيقى والصوت، ولكن تم رفض هذا الأذن بشكل دائم. انقر على الإعدادات -> الأذونات، وقم بتشغيل \"الموسيقى والصوت\".",
+  "permissionMusicAudioDenied": "{app_name} يحتاج إلى الوصول إلى الموسيقى والصوت من أجل إرسال الملفات والموسيقى والصوت، ولكن تم رفض هذا الأذن بشكل دائم. انقر على الإعدادات → الأذونات، وقم بتشغيل \"الموسيقى والصوت\".",
   "permissionsAppleMusic": "{app_name} يحتاج استخدام Apple Music لتشغيل مرفقات الوسائط.",
   "permissionsAutoUpdate": "تحديث تلقائي",
   "permissionsAutoUpdateDescription": "التحقق تلقائيًا من التحديثات عند بدء التشغيل",
-  "permissionsCameraDenied": "{app_name} يحتاج إذن الوصول إلى الكاميرا لالتقاط الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الكاميرا\".",
+  "permissionsCameraDenied": "{app_name} يحتاج إذن الوصول إلى الكاميرا لالتقاط الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات → الأذونات، وقم بتفعيل \"الكاميرا\".",
   "permissionsFaceId": "ميزة قفل الشاشة على {app_name} تستخدم Face ID.",
   "permissionsKeepInSystemTray": "إبقاء في قالب النظام",
   "permissionsKeepInSystemTrayDescription": "{app_name} يستمر في العمل في الخلفية عندما تقوم بإغلاق النافذة",
   "permissionsLibrary": "{app_name} يحتاج إذن الوصول إلى مكتبة الصور لمواصلة العمل. يمكنك تفعيل الوصول من خلال إعدادات iOS.",
   "permissionsMicrophone": "ميكروفون",
-  "permissionsMicrophoneAccessRequired": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وإرسال الرسائل الصوتية، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الميكروفون\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وإرسال الرسائل الصوتية، ولكن تم رفضه نهائيًا. انقر على الإعدادات → الأذونات، وقم بتفعيل \"الميكروفون\".",
   "permissionsMicrophoneAccessRequiredDesktop": "يمكنك تفعيل الوصول للميكروفون في إعدادات الخصوصية في {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} يحتاج إذن الوصول إلى الميكروفون لإجراء المكالمات وتسجيل الرسائل الصوتية.",
   "permissionsMicrophoneDescription": "السماح بالوصول إلى الميكروفون.",
   "permissionsMusicAudio": "يحتاج {app_name} إلى الوصول إلى الموسيقى والصوت من أجل إرسال الملفات والموسيقى والصوت.",
   "permissionsRequired": "منح إحدى الأذونات مطلوب",
-  "permissionsStorageDenied": "{app_name} يحتاج إذن الوصول إلى مكتبة الصور لإرسال الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"الصور ومقاطع الفيديو\".",
-  "permissionsStorageDeniedLegacy": "{app_name} يحتاج إذن الوصول إلى التخزين لإرسال وحفظ المرفقات. انقر على الإعدادات -> الأذونات، وقم بتفعيل \"التخزين\".",
+  "permissionsStorageDenied": "{app_name} يحتاج إذن الوصول إلى مكتبة الصور لإرسال الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. انقر على الإعدادات → الأذونات، وقم بتفعيل \"الصور ومقاطع الفيديو\".",
+  "permissionsStorageDeniedLegacy": "{app_name} يحتاج إذن الوصول إلى التخزين لإرسال وحفظ المرفقات. انقر على الإعدادات → الأذونات، وقم بتفعيل \"التخزين\".",
   "permissionsStorageSave": "{app_name} يحتاج إذن الوصول إلى التخزين لحفظ المرفقات والوسائط.",
   "permissionsStorageSaveDenied": "{app_name} يحتاج إذن الوصول إلى التخزين لحفظ الصور ومقاطع الفيديو، ولكن تم رفضه نهائيًا. يرجى الانتقال إلى إعدادات التطبيق، واختيار \"الأذونات\"، وتفعيل \"التخزين\".",
   "permissionsStorageSend": "{app_name} يحتاج إذن الوصول إلى التخزين لإرسال الصور ومقاطع الفيديو.",
