--- a/_locales/bal/messages.json
+++ b/_locales/bal/messages.json
@@ -342,7 +342,7 @@
   "emojiCategoryActivities": "کارینک",
   "emojiCategoryAnimals": "حیوانات و خزاں",
   "emojiCategoryFlags": "بیرقاں",
-  "emojiCategoryFood": "ګزا و شربت ",
+  "emojiCategoryFood": "ګزا و شربت",
   "emojiCategoryObjects": "چیز",
   "emojiCategoryRecentlyUsed": "حالھی کوشی کں",
   "emojiCategorySmileys": "مسکراتی پیپل",
@@ -639,7 +639,7 @@
   "passwordSet": "رمز مقرر کـــــــن",
   "passwordSetDescription": "ما گپ درخواست قبول کردی بیک پاسکوڈ برنکی. براہپس محفوظے کہ.",
   "paste": "چسپاء",
-  "permissionMusicAudioDenied": "{app_name} کی موسیقی اور آڈیو تک رسائی ضروری ہے تاکہ آپ فائلیں، موسیقی اور آڈیو بھیج سکیں، لیکن اسے مستقل طور پر ممنوع کر دیا گیا ہے۔ سیٹنگز ٹیپ کریں -> اجازتیں، اور \"موسیقی اور آڈیو\" کو آن کریں۔",
+  "permissionMusicAudioDenied": "{app_name} کی موسیقی اور آڈیو تک رسائی ضروری ہے تاکہ آپ فائلیں، موسیقی اور آڈیو بھیج سکیں، لیکن اسے مستقل طور پر ممنوع کر دیا گیا ہے۔ سیٹنگز ٹیپ کریں → اجازتیں، اور \"موسیقی اور آڈیو\" کو آن کریں۔",
   "permissionsAppleMusic": "{app_name} xیس پاتبسینہ ایپل موزیک لو پہ اجرأ ہٰن اختیارات استعمالے",
   "permissionsAutoUpdate": "خودکار اپڈیٹ",
   "permissionsAutoUpdateDescription": "اسٹارٹ اپ پر خود کار طریقے سے اپڈیٹس چیک کریں",
@@ -649,14 +649,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} ھنوک پد پسینی چشماں بند بو تک پس زمینه أٹھے چا",
   "permissionsLibrary": "{app_name} تصویرکتاب پاتبسینہ وسان شدید، کہ جو قدیم انکہرفتہ فعالت توڑٔو یو یلودسہ دےیے نو شکایت",
   "permissionsMicrophone": "Microphone",
-  "permissionsMicrophoneAccessRequired": "{app_name} مایکروفون پاتبسینہ لازم نودہ زوان بیتگ و موکلاد پہود پیغامیں، ءَ ولے هہ مئ بی ہوں بکرءِ و. قارت وضیجت -> درگونک، ءَ مایکروفون\" ءً فعال کنے.",
+  "permissionsMicrophoneAccessRequired": "{app_name} مایکروفون پاتبسینہ لازم نودہ زوان بیتگ و موکلاد پہود پیغامیں، ءَ ولے هہ مئ بی ہوں بکرءِ و. قارت وضیجت → درگونک، ءَ مایکروفون\" ءً فعال کنے.",
   "permissionsMicrophoneAccessRequiredDesktop": "شما گوں {app_name} ونجن سیٹنگاں سکرا کنگ دلپیٹریں بوک یارکنت۔",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} مایکروفون پاتبسینہ حاصل نودہ کلمات پیغامشین زانت",
   "permissionsMicrophoneDescription": "مائکروفون تک رسائی کی اجازت دیں.",
   "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
   "permissionsRequired": "اجازت درکار",
   "permissionsStorageDenied": "{app_name} کماٹ پاتبسینہ محفوظ ثبت، چہ جو مکمبے افعیلت بیزی. لہ کہتت کو قٔائیں وضیجت تیبسینہ پایمر دےیے.",
-  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name} ذخیرہ پاتبسینہ محفوظ عریض او ذرہے",
   "permissionsStorageSaveDenied": "{app_name} ذخیرہ پاتبسینہ محفوظ ثبت، چہ جو مکمبے افعیلت بیزی. لہ کہتت کو قٔائیں وضیجت تیبسینہ پایمر دےیے",
   "permissionsStorageSend": "{app_name} ذخیرہ پاتبسینہ بھیجنے تصویریں دکنیں",
