--- a/_locales/be/messages.json
+++ b/_locales/be/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Увядзіце назву групы",
   "groupNameEnterPlease": "Калі ласка, увядзіце назву групы.",
   "groupNameEnterShorter": "Калі ласка, увядзіце карацейшую назву групы.",
-  "groupNameNew": "Цяпер група называецца \"{group_name}\". ",
+  "groupNameNew": "Цяпер група называецца \"{group_name}\".",
   "groupNameUpdated": "Назва групы абноўлена.",
   "groupNoMessages": "У вас няма паведамленняў ад <b>{group_name}</b>. Адпраўце паведамленне, каб пачаць размову!",
   "groupOnlyAdmin": "Вы з'яўляецеся адзіным адміністратарам у <b>{group_name}</b>.<br/><br/>Удзельнікі групы і наладкі не могуць быць змененыя без адміністратара.",
@@ -639,28 +639,28 @@
   "passwordSet": "Задаць пароль",
   "passwordSetDescription": "Ваш пароль быў усталяваны. Захавайце яго ў бяспецы.",
   "paste": "Уставіць",
-  "permissionMusicAudioDenied": "{app_name} патрабуе доступу да музыкі і аўдыё для адпраўкі файлаў, музыкі і аўдыё, але доступ быў пастаянна забаронены. Націсніце «Налады» -> «Дазволы» і актывуйце «Музыка і аўдыё».",
+  "permissionMusicAudioDenied": "{app_name} патрабуе доступу да музыкі і аўдыё для адпраўкі файлаў, музыкі і аўдыё, але доступ быў пастаянна забаронены. Націсніце «Налады» → «Дазволы» і актывуйце «Музыка і аўдыё».",
   "permissionsAppleMusic": "{app_name} патрэбен доступ да Apple Music, каб прайграваць медыя ўкладанні.",
   "permissionsAutoUpdate": "Аўтаматычнае абнаўленне",
   "permissionsAutoUpdateDescription": "Аўтаматычна правяраць наяўнасць абнаўленняў пры запуску",
-  "permissionsCameraDenied": "{app_name} патрабуе доступу да камеры для здымкі фота і відэа, але доступ быў пастаянна забаронены. Націсніце «Налады» -> «Дазволы» і актывуйце «Камера».",
+  "permissionsCameraDenied": "{app_name} патрабуе доступу да камеры для здымкі фота і відэа, але доступ быў пастаянна забаронены. Націсніце «Налады» → «Дазволы» і актывуйце «Камера».",
   "permissionsFaceId": "Функцыя блакіроўкі экрана ў {app_name} выкарыстоўвае Face ID.",
   "permissionsKeepInSystemTray": "Захаваць у сістэмным трэю",
   "permissionsKeepInSystemTrayDescription": "{app_name} працягвае працу ў фонавым рэжыме, калі вы закрываеце акно",
   "permissionsLibrary": "{app_name} патрэбен доступ да фотабібліятэкі. Вы можаце дазволіць доступ у наладах iOS.",
   "permissionsMicrophone": "Мікрафон",
-  "permissionsMicrophoneAccessRequired": "{app_name} патрабуе дазволу да мікрафона каб рабіць званкі і дасылаць аўдыяпаведамленні, але зараз дазволу няма. Націсніце Налады -> Дазволы, і ўключыце \"Мікрафон\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} патрабуе дазволу да мікрафона каб рабіць званкі і дасылаць аўдыяпаведамленні, але зараз дазволу няма. Націсніце Налады → Дазволы, і ўключыце \"Мікрафон\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Вы можаце ўключыць доступ да мікрафона ў наладах прыватнасці {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} патрэбен доступ да мікрафона, каб здзяйсняць званкі і запісваць аўдыя паведамленні.",
   "permissionsMicrophoneDescription": "Дазволіць доступ да мікрафона.",
   "permissionsMusicAudio": "{app_name} патрабуе доступу да музыкі і аўдыё, каб адпраўляць файлы, музыку і аўдыё.",
   "permissionsRequired": "Патрабуецца дазвол",
-  "permissionsStorageDenied": "{app_name} патрабуе доступу да бібліятэкі фота для адпраўкі фота і відэа, але доступ быў пастаянна забаронены. Націсніце «Налады» -> «Дазволы» і актывуйце «Фота і відэа».",
-  "permissionsStorageDeniedLegacy": "{app_name} патрабуе доступу да сховішча для адпраўкі і захавання ўкладанняў. Націсніце «Налады» -> «Дазволы» і актывуйце «Сховішча».",
+  "permissionsStorageDenied": "{app_name} патрабуе доступу да бібліятэкі фота для адпраўкі фота і відэа, але доступ быў пастаянна забаронены. Націсніце «Налады» → «Дазволы» і актывуйце «Фота і відэа».",
+  "permissionsStorageDeniedLegacy": "{app_name} патрабуе доступу да сховішча для адпраўкі і захавання ўкладанняў. Націсніце «Налады» → «Дазволы» і актывуйце «Сховішча».",
   "permissionsStorageSave": "{app_name} патрабуе дазволу да сховішча каб захоўваць ўкладанні і медыя.",
   "permissionsStorageSaveDenied": "{app_name} патрабуе дазволу да сховішча каб захоўваць фота і відэа, але зараз дазволу няма. Калі ласка, перайдзіце ў меню налад праграмы, абярыце \"Дазволы\" і ўключыце \"Сховішча\".",
   "permissionsStorageSend": "{app_name} патрабуе дазволу да сховішча каб дасылаць фота і відэа.",
-  "pin": "Замацаваць ",
+  "pin": "Замацаваць",
   "pinConversation": "Замацаваць размову",
   "pinUnpin": "Адмацаваць",
   "pinUnpinConversation": "Адмацаваць размову",
@@ -773,7 +773,7 @@
   "updateError": "Немагчыма абнавіць",
   "updateErrorDescription": "{app_name} не ўдалося абнавіць. Калі ласка, перайдзіце на {session_download_url} і ўсталявайце новую версію ўручную, затым звяжыцеся з нашым цэнтрам дапамогі, каб паведаміць пра гэтую праблему.",
   "updateNewVersion": "Даступна новая версія {app_name}, націсніце для абнаўлення",
-  "updateNewVersionDescription": "Даступна новая версія {app_name}. ",
+  "updateNewVersionDescription": "Даступна новая версія {app_name}.",
   "updateReleaseNotes": "Перайсці да Release Notes",
   "updateSession": "Абнаўленне {app_name}",
   "updateVersion": "Версія {version}",
