--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -144,7 +144,7 @@
   "callsIncomingUnknown": "Входящо обаждане",
   "callsMissed": "Пропуснато обаждане",
   "callsMissedCallFrom": "Пропуснато обаждане от {name}",
-  "callsNotificationsRequired": "Гласовите и видео обаждания изискват известията да бъдат активирани в настройките на системата на вашето устройство. ",
+  "callsNotificationsRequired": "Гласовите и видео обаждания изискват известията да бъдат активирани в настройките на системата на вашето устройство.",
   "callsPermissionsRequired": "Необходими са разрешения за обаждане",
   "callsPermissionsRequiredDescription": "Можете да разрешите разрешението \"Гласови и видео разговори\" в настройките за поверителност.",
   "callsReconnecting": "Възстановяване на връзката…",
@@ -170,7 +170,7 @@
   "clearDataAll": "Изчистване на всички данни",
   "clearDataAllDescription": "Това ще изтрие постоянно вашите съобщения и контакти. Бихте ли искали да изчистите само това устройство или да изтриете също данните си от мрежата?",
   "clearDataError": "Данните не са изтрити",
-  "clearDataErrorDescription": "{count, plural, one [Данните не са изтрити от # Service Node. Service Node ID: {service_node_id}.] other [Данните не са изтрити от # Service Nodes. Service Node IDs: {service_node_id}.]}",
+  "clearDataErrorDescription": "{count, plural, one [Данните не са изтрити от # обслужващи звена. Service Node IDs: {service_node_id}.] other [Данните не са изтрити от # Service Nodes. Service Node IDs: {service_node_id}.]}",
   "clearDataErrorDescriptionGeneric": "Възникна неизвестна грешка и вашите данни не бяха изтрити. Искате ли да изтриете данните си само от това устройство?",
   "clearDevice": "Изчистване на устройството",
   "clearDeviceAndNetwork": "Изчистване на устройство и мрежа",
@@ -419,7 +419,7 @@
   "groupNameEnter": "Въведете название группы",
   "groupNameEnterPlease": "Моля, въведете име на групата.",
   "groupNameEnterShorter": "Моля, въведете по-кратко име на групата.",
-  "groupNameNew": "Името на групата вече е {group_name}. ",
+  "groupNameNew": "Името на групата вече е {group_name}.",
   "groupNameUpdated": "Името на групата е обновено.",
   "groupNoMessages": "Нямате съобщения от <b>{group_name}</b>. Изпратете съобщение, за да започнете разговор!",
   "groupOnlyAdmin": "Вие сте единственият администратор в <b>{group_name}</b>.<br/><br/>Членовете и настройките на групата не могат да бъдат променяни без администратор.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Искате ли да отстраните <b>{name}</b> и <b>{count} други</b> от <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Искате ли да отстраните <b>{name}</b> и <b>{other_name}</b> от <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Премахване на потребител и неговите съобщения] other [Премахване на потребители и техните съобщения]}",
-  "groupRemoveUserOnly": "{count, plural, one [Премахване на потребителя ] other [Премахване на потребители]}",
+  "groupRemoveUserOnly": "{count, plural, one [Премахване на потребителя] other [Премахване на потребители]}",
   "groupRemoved": "<b>{name}</b> беше премахнат от групата.",
   "groupRemovedMultiple": "<b>{name}</b> и <b>{count} други</b> бяха премахнати от групата.",
   "groupRemovedTwo": "<b>{name}</b> и <b>{other_name}</b> бяха премахнати от групата.",
@@ -494,7 +494,7 @@
   "max": "Максимално",
   "media": "Медия",
   "members": "{count, plural, one [# член] other [# члена]}",
-  "membersActive": "{count, plural, one [# активен член] other [# активни члена]}",
+  "membersActive": "{count, plural, one [# активни участници] other [# активни члена]}",
   "membersAddAccountIdOrOns": "Добавяне на Account ID или ONS",
   "membersInvite": "Покани приятели",
   "membersInviteSend": "{count, plural, one [Изпращане на покана] other [Изпращане на покани]}",
@@ -639,24 +639,24 @@
   "passwordSet": "Задаване на парола",
   "passwordSetDescription": "Вашата парола беше зададена. Моля, пазете я безопасно.",
   "paste": "Поставяне",
-  "permissionMusicAudioDenied": "{app_name} се нуждае от достъп до музика и аудио, за да може да изпращате файлове, музика и аудио, но достъпът е бил отказан постоянен. Отидете в Настройки -> Разрешения и включете \"Музика и аудио\".",
+  "permissionMusicAudioDenied": "{app_name} се нуждае от достъп до музика и аудио, за да може да изпращате файлове, музика и аудио, но достъпът е бил отказан постоянен. Отидете в Настройки → Разрешения и включете \"Музика и аудио\".",
   "permissionsAppleMusic": "{app_name} трябва да използва Apple Music, за да възпроизвежда медийни прикачени файлове.",
   "permissionsAutoUpdate": "Автоматически обновления",
   "permissionsAutoUpdateDescription": "Автоматически проверявай за обновления при стартиране",
-  "permissionsCameraDenied": "{app_name} се нуждае от достъп до камерата, за да може да прави снимки и видеа, но достъпът е бил отказан постоянен. Отидете в Настройки -> Разрешения и включете \"Камера\".",
+  "permissionsCameraDenied": "{app_name} се нуждае от достъп до камерата, за да може да прави снимки и видеа, но достъпът е бил отказан постоянен. Отидете в Настройки → Разрешения и включете \"Камера\".",
   "permissionsFaceId": "Функцията за заключване на екрана в {app_name} използва Face ID.",
   "permissionsKeepInSystemTray": "Задръж в системната лента",
-  "permissionsKeepInSystemTrayDescription": "{app_name} продължава да работи във фона, когато затворите прозореца",
+  "permissionsKeepInSystemTrayDescription": "При затваряне на прозореца с програмата {app_name}, тя остава включена и продължава паралелно да работи",
   "permissionsLibrary": "{app_name} се нуждае от достъп до фото библиотеката за да продължи. Можете да активирате достъпа в настройките на iOS.",
   "permissionsMicrophone": "Микрофон",
-  "permissionsMicrophoneAccessRequired": "{app_name} се нуждае от достъп до микрофона, за да прави обаждания и изпраща аудио съобщения, но достъпът е бил окончателно отказан. Натиснете настройки -> Разрешения и включете \"Микрофон\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} се нуждае от достъп до микрофона, за да прави обаждания и изпраща аудио съобщения, но достъпът е бил окончателно отказан. Натиснете настройки → Разрешения и включете \"Микрофон\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Можете да разрешите достъпа до микрофона в настройките за поверителност на {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} се нуждае от достъп до микрофона, за да осъществява обаждания и записва аудио съобщения.",
   "permissionsMicrophoneDescription": "Разреши достъп до микрофона.",
   "permissionsMusicAudio": "{app_name} се нуждае от достъп до музика и аудио, за да може да изпращате файлове, музика и аудио.",
   "permissionsRequired": "Необходимо е разрешение",
-  "permissionsStorageDenied": "{app_name} се нуждае от достъп до фото библиотеката, за да може да изпращате снимки и видеа, но достъпът е бил отказан постоянен. Отидете в Настройки -> Разрешения и включете \"Снимки и видеа\".",
-  "permissionsStorageDeniedLegacy": "{app_name} се нуждае от достъп до хранилището, за да може да изпращате и запазвате прикачени файлове. Отидете в Настройки -> Разрешения и включете \"Хранилище\".",
+  "permissionsStorageDenied": "{app_name} се нуждае от достъп до фото библиотеката, за да може да изпращате снимки и видеа, но достъпът е бил отказан постоянен. Отидете в Настройки → Разрешения и включете \"Снимки и видеа\".",
+  "permissionsStorageDeniedLegacy": "{app_name} се нуждае от достъп до хранилището, за да може да изпращате и запазвате прикачени файлове. Отидете в Настройки → Разрешения и включете \"Хранилище\".",
   "permissionsStorageSave": "{app_name} се нуждае от достъп до хранилището, за да запазва прикачени файлове и медия.",
   "permissionsStorageSaveDenied": "{app_name} се нуждае от достъп до хранилището, за да запазва снимки и видеота, но достъпът е бил окончателно отказан. Моля, продължете до настройките на приложението, изберете \"Разрешения\" и активирайте \"Хранилище\".",
   "permissionsStorageSend": "{app_name} се нуждае от достъп до хранилището, за да изпраща снимки и видеота.",
@@ -725,7 +725,7 @@
   "searchContacts": "Търсене на контакти",
   "searchConversation": "Търсене на разговор",
   "searchEnter": "Моля, въведете вашето търсене.",
-  "searchMatches": "{count, plural, one [{found_count} от # съвпадат] other [{found_count} от # съвпадат]}",
+  "searchMatches": "{count, plural, one [# от {found_count} съвпадения] other [# от {found_count} съвпадения]}",
   "searchMatchesNone": "Няма открити резултати.",
   "searchMatchesNoneSpecific": "Не са открити резултати за {query}",
   "searchMembers": "Търсене на членове",
@@ -771,9 +771,9 @@
   "updateDownloaded": "Актуализацията е инсталирана, кликнете, за да рестартирате",
   "updateDownloading": "Изтегляне на актуализация: {percent_loader}%",
   "updateError": "Не може да се актуализира",
-  "updateErrorDescription": "{app_name} не успя да се актуализира. Моля, отидете на {session_download_url} и инсталирайте новата версия ръчно, след това се свържете с нашия Център за помощ, за да ни уведомите за този проблем.",
+  "updateErrorDescription": "{app_name} не успешна актуализация. Моля, отидете на {session_download_url} и инсталирайте новата версия, която ще намерите там. Моля свържете се с нашия отдел по поддръжка, за да ни уведомите за този проблем.",
   "updateNewVersion": "Налична е нова версия на {app_name}, докоснете за обновление.",
-  "updateNewVersionDescription": "Налична е нова версия на {app_name}. ",
+  "updateNewVersionDescription": "Налична е нова версия на {app_name}.",
   "updateReleaseNotes": "Отворете бележките за изданието",
   "updateSession": "Актуализация на {app_name}",
   "updateVersion": "Версия {version}",
