--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Voleu eliminar <b>{name}</b> i <b>{count} altres</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Voleu eliminar <b>{name}</b> i <b>{other_name}</b> de <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Suprimeix l'usuari i els seus missatges] other [Suprimeix els usuaris i els seus missatges]}",
-  "groupRemoveUserOnly": "{count, plural, one [Suprimeix usuari ] other [Suprimeix usuaris]}",
+  "groupRemoveUserOnly": "{count, plural, one [Suprimeix usuari] other [Suprimeix usuaris]}",
   "groupRemoved": "<b>{name}</b> s'ha suprimit del grup.",
   "groupRemovedMultiple": "<b>{name}</b> i <b>{count} altres</b> han estat eliminats del grup.",
   "groupRemovedTwo": "<b>{name}</b> i <b>{other_name}</b> han estat eliminats del grup.",
@@ -639,28 +639,28 @@
   "passwordSet": "Definir contrasenya",
   "passwordSetDescription": "La vostra contrasenya s'ha definit. Mantingueu-la segura.",
   "paste": "Enganxa",
-  "permissionMusicAudioDenied": "{app_name} necessita accés a la música i l'àudio per enviar fitxers, música i àudio, però s'ha denegat permanentment. Toqueu Configuració -> Permisos, i activeu \"Música i àudio\".",
+  "permissionMusicAudioDenied": "{app_name} necessita accés a la música i l'àudio per enviar fitxers, música i àudio, però s'ha denegat permanentment. Toqueu Configuració → Permisos, i activeu \"Música i àudio\".",
   "permissionsAppleMusic": "{app_name} necessita utilitzar Apple Music per reproduir fitxers adjunts de suports.",
   "permissionsAutoUpdate": "Actualització automàtica",
   "permissionsAutoUpdateDescription": "Comproveu automàticament les actualitzacions en iniciar l'aplicació",
-  "permissionsCameraDenied": "{app_name} necessita accés a la càmera per fer fotos i vídeos, però s'ha denegat permanentment. Toqueu Configuració -> Permisos, i activeu \"Càmera\".",
+  "permissionsCameraDenied": "{app_name} necessita accés a la càmera per fer fotos i vídeos, però s'ha denegat permanentment. Toqueu Configuració → Permisos, i activeu \"Càmera\".",
   "permissionsFaceId": "La funció de bloqueig de pantalla en {app_name} utilitza Face ID.",
   "permissionsKeepInSystemTray": "Mantén a la safata del sistema",
   "permissionsKeepInSystemTrayDescription": "{app_name} continua funcionant en segon pla quan tanqueu la finestra",
   "permissionsLibrary": "{app_name} necessita accés a la biblioteca de fotografies per continuar. Podeu activar l'accés a la configuració d'iOS.",
   "permissionsMicrophone": "Micròfon",
-  "permissionsMicrophoneAccessRequired": "Al {app_name} li cal el permís del micròfon per fer crides i enviar missatges d'àudio, però s'ha denegat permanentment. Toqueu configuració -> Permisos, i activeu el \"Micròfon\".",
+  "permissionsMicrophoneAccessRequired": "Al {app_name} li cal el permís del micròfon per fer crides i enviar missatges d'àudio, però s'ha denegat permanentment. Toqueu configuració → Permisos, i activeu el \"Micròfon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Podeu habilitar l'accés al micròfon a la configuració de privadesa d'{app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} necessita accés al micròfon per fer trucades i gravar missatges d'àudio.",
   "permissionsMicrophoneDescription": "Permet l'accés al micròfon.",
   "permissionsMusicAudio": "{app_name} necessita accés a la música i l'àudio per enviar fitxers, música i àudio.",
   "permissionsRequired": "Cal permís",
-  "permissionsStorageDenied": "{app_name} necessita accés a la biblioteca de fotos per enviar fotos i vídeos, però s'ha denegat permanentment. Aneu a Configuració -> Permisos, i activeu \"Fotos i vídeos\".",
-  "permissionsStorageDeniedLegacy": "{app_name} necessita accés a l'emmagatzematge per enviar i desar adjunts. Aneu a Configuració -> Permisos, i activeu \"Emmagatzematge\".",
+  "permissionsStorageDenied": "{app_name} necessita accés a la biblioteca de fotos per enviar fotos i vídeos, però s'ha denegat permanentment. Aneu a Configuració → Permisos, i activeu \"Fotos i vídeos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} necessita accés a l'emmagatzematge per enviar i desar adjunts. Aneu a Configuració → Permisos, i activeu \"Emmagatzematge\".",
   "permissionsStorageSave": "{app_name} necessita accés a l'emmagatzematge per desar els fitxers adjunts i els suports.",
   "permissionsStorageSaveDenied": "{app_name} necessita accés a l'emmagatzematge per desar fotografies i vídeos, però s'ha denegat permanentment. Per favor, continueu cap al menú de configuració de l'aplicació, seleccioneu Permisos i habiliteu-hi l'Emmagatzematge.",
   "permissionsStorageSend": "{app_name} necessita accés a l'emmagatzematge per enviar fotografies i vídeos.",
-  "pin": "Ancoreu ",
+  "pin": "Ancoreu",
   "pinConversation": "Ancoreu la conversa",
   "pinUnpin": "Desancoreu",
   "pinUnpinConversation": "Desancorar la conversa",
