--- a/_locales/cy/messages.json
+++ b/_locales/cy/messages.json
@@ -145,7 +145,7 @@
   "callsMicrophonePermissionsRequired": "Buoch yn methu alwad gan <b>{name}</b> oherwydd nad ydych wedi rhoi <b>mynediad meicroffon</b>.",
   "callsMissed": "Galwad Coll",
   "callsMissedCallFrom": "Galwad coll gan {name}",
-  "callsNotificationsRequired": "Mae galwadau Llais a Fideo yn gofyn am hysbysiadau wedi'u caniatáu yng ngosodiadau system eich dyfais. ",
+  "callsNotificationsRequired": "Mae galwadau Llais a Fideo yn gofyn am hysbysiadau wedi'u caniatáu yng ngosodiadau system eich dyfais.",
   "callsPermissionsRequired": "Angen Caniatâd Galwadau",
   "callsPermissionsRequiredDescription": "Gallwch alluogi'r caniatâd \"Galwadau Llais a Fideo\" yn y Gosodiadau Preifatrwydd.",
   "callsReconnecting": "Aildrefnu…",
@@ -274,7 +274,9 @@
   "deleteAfterLegacyGroupsGroupCreation": "Arhoswch tra mae'r grŵp yn cael ei greu...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Methwyd diweddaru'r grŵp",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Nid oes gennych ganiatâd i ddileu negeseuon pobl eraill",
+  "deleteMessage": "{count, plural, zero [Dileu Negeseuon] one [Dileu Neges] two [Dileu Negeseuon] few [Dileu Negeseuon] many [Dileu Negeseuon] other [Dileu Negeseuon]}",
   "deleteMessageConfirm": "Ydych chi'n siŵr eich bod am ddileu'r neges hon?",
+  "deleteMessageDeleted": "{count, plural, zero [Negeseuon wedi'u dileu] one [Neges wedi'i dileu] two [Negeseuon wedi'u dileu] few [Negeseuon wedi'u dileu] many [Negeseuon wedi'u dileu] other [Negeseuon wedi'u dileu]}",
   "deleteMessageDeletedGlobally": "Dilewyd y neges hon",
   "deleteMessageDeletedLocally": "Dilewyd y neges hon ar y ddyfais hon",
   "deleteMessageDescriptionDevice": "Ydych chi'n siŵr eich bod am ddileu'r neges hon oddi ar y ddyfais hon yn unig?",
@@ -282,6 +284,7 @@
   "deleteMessageDeviceOnly": "Dileu ar y ddyfais hon yn unig",
   "deleteMessageDevicesAll": "Dileu ar fy holl ddyfeisiau",
   "deleteMessageEveryone": "Dileu i bawb",
+  "deleteMessageFailed": "{count, plural, zero [Methu dileu neges] one [Methu dileu neges] two [Methu dileu negeseuon] few [Methu dileu negeseuon] many [Methwyd dileu negeseuon] other [Methu dileu negeseuon]}",
   "deleteMessagesConfirm": "Ydych chi'n siŵr eich bod am ddileu'r neges(au) hyn?",
   "deleteMessagesDescriptionDevice": "Ydych chi'n siŵr eich bod am ddileu'r negeseuon hyn o'r ddyfais hon yn unig?",
   "deleteMessagesDescriptionEveryone": "Ydych chi'n siŵr eich bod am ddileu'r negeseuon hyn i bawb?",
@@ -417,7 +420,7 @@
   "groupNameEnter": "Rhowch enw'r grŵp",
   "groupNameEnterPlease": "Rhowch enw grŵp.",
   "groupNameEnterShorter": "Rhowch enw grŵp byrrach.",
-  "groupNameNew": "Enw'r grŵp nawr yw {group_name}. ",
+  "groupNameNew": "Enw'r grŵp nawr yw {group_name}.",
   "groupNameUpdated": "Enw'r grŵp wedi'i ddiweddaru.",
   "groupNoMessages": "Nid oes gennych unrhyw negeseuon gan <b>{group_name}</b>. Anfonwch neges i ddechrau'r sgwrs!",
   "groupOnlyAdmin": "Chi yw'r unig weinyddwr yn <b>{group_name}</b>.<br/><br/>Ni ellir newid aelodau a gosodiadau'r grŵp heb weinyddwr.",
@@ -427,6 +430,8 @@
   "groupRemoveDescription": "Hoffech chi dynnu <b>{name}</b> o <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "Hoffech chi dynnu <b>{name}</b> a <b>{count} eraill</b> o <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Hoffech chi dynnu <b>{name}</b> a <b>{other_name}</b> o <b>{group_name}</b>?",
+  "groupRemoveMessages": "{count, plural, zero [Tynnu defnyddwyr a'u negeseuon] one [Tynnu defnyddiwr a'u negeseuon] two [Tynnu defnyddwyr a'u negeseuon] few [Tynnu defnyddwyr a'u negeseuon] many [Tynnu defnyddwyr a'u negeseuon] other [Tynnu defnyddwyr a'u negeseuon]}",
+  "groupRemoveUserOnly": "{count, plural, zero [Tynnu defnyddwyr] one [Tynnu defnyddiwr] two [Tynnu defnyddwyr] few [Tynnu defnyddwyr] many [Tynnu defnyddwyr] other [Tynnu defnyddwyr]}",
   "groupRemoved": "Tynnwyd <b>{name}</b> o'r grŵp.",
   "groupRemovedMultiple": "<b>{name} y</b> a <b>{count} eraill</b> wedi cael eu symud o'r grŵp.",
   "groupRemovedTwo": "<b>{name} y</b> a <b>{other_name}</b> wedi cael eu symud o'r grŵp.",
@@ -493,6 +498,7 @@
   "membersActive": "{count, plural, zero [# aelodau gweithgar] one [# aelodau gweithgar] two [# aelodau gweithgar] few [# aelodau gweithgar] many [# aelodau gweithgar] other [# aelodau gweithgar]}",
   "membersAddAccountIdOrOns": "Ychwanegu ID Cyfrif neu ONS",
   "membersInvite": "Gwahodd Cysylltiadau",
+  "membersInviteSend": "{count, plural, zero [Anfon Gwahoddiadau] one [Anfon Gwahoddiad] two [Anfon Gwahoddiadau] few [Anfon Gwahoddiadau] many [Anfon Gwahoddiadau] other [Anfon Gwahoddiadau]}",
   "membersInviteShareDescription": "Hoffech chi rannu hanes neges grŵp gyda <b>{name}</b>?",
   "membersInviteShareDescriptionMultiple": "Hoffech chi rannu hanes neges grŵp gyda <b>{name}</b> a <b>{count} eraill</b>?",
   "membersInviteShareDescriptionTwo": "Hoffech chi rannu hanes neges grŵp gyda <b>{name}</b> a <b>{other_name}</b>?",
@@ -508,6 +514,7 @@
   "messageInfo": "Gwybodaeth am y Neges",
   "messageMarkRead": "Marcio wedi'i ddarllen",
   "messageMarkUnread": "Marcio heb ei ddarllen",
+  "messageNew": "{count, plural, zero [Negeseuon Newydd] one [Neges Newydd] two [Negeseuon Newydd] few [Negeseuon Newydd] many [Negeseuon Newydd] other [Negeseuon Newydd]}",
   "messageNewDescriptionDesktop": "Dechrau sgwrs newydd trwy nodi ID Cyfrif neu ONS eich ffrind.",
   "messageNewDescriptionMobile": "Dechrau sgwrs newydd trwy nodi ID eich ffrind, ONS neu sganio eu cod QR.",
   "messageNewYouveGot": "{count, plural, zero [Mae gennych # negeseuon newydd.] one [Mae gennych # negeseuon newydd.] two [Mae gennych # negeseuon newydd.] few [Mae gennych # negeseuon newydd.] many [Mae gennych # negeseuon newydd.] other [Mae gennych # negeseuon newydd.]}",
@@ -633,28 +640,28 @@
   "passwordSet": "Gosod Cyfrinair",
   "passwordSetDescription": "Mae eich cyfrinair wedi'i osod. Cadwch ef yn ddiogel.",
   "paste": "Gludo",
-  "permissionMusicAudioDenied": "{app_name} angen mynediad at gerddoriaeth ac sain er mwyn anfon ffeiliau, cerddoriaeth a sain, ond mae wedi'i wrthod yn barhaol. Tapiwch Gosodiadau -> Trwyddedau, a throi \"Cerddoriaeth a sain\" ymlaen.",
+  "permissionMusicAudioDenied": "{app_name} angen mynediad at gerddoriaeth ac sain er mwyn anfon ffeiliau, cerddoriaeth a sain, ond mae wedi'i wrthod yn barhaol. Tapiwch Gosodiadau → Trwyddedau, a throi \"Cerddoriaeth a sain\" ymlaen.",
   "permissionsAppleMusic": "Mae angen i {app_name} ddefnyddio Apple Music i chwarae atodiadau cyfryngau.",
   "permissionsAutoUpdate": "Diweddariad Auto",
   "permissionsAutoUpdateDescription": "Gwiriwch yn awtomatig am ddiweddariadau wrth gychwyn",
-  "permissionsCameraDenied": "Mae angen mynediad i'r camera ar {app_name} i dynnu lluniau a fideos, ond fe'i gwrthodwyd yn barhaol. Tapiwch Gosodiadau -> Caniatadau, a throi \"Camera\" ymlaen.",
+  "permissionsCameraDenied": "Mae angen mynediad i'r camera ar {app_name} i dynnu lluniau a fideos, ond fe'i gwrthodwyd yn barhaol. Tapiwch Gosodiadau → Caniatadau, a throi \"Camera\" ymlaen.",
   "permissionsFaceId": "Mae'r nodwedd cloi sgrin ar {app_name} yn defnyddio ID Wyneb.",
   "permissionsKeepInSystemTray": "Cadw yn y Derbynnydd System",
   "permissionsKeepInSystemTrayDescription": "{app_name} yn parhau i redeg yn y cefndir pan fyddwch yn cau'r ffenestr",
   "permissionsLibrary": "Mae {app_name} angen mynediad i'r llyfrgell lluniau i barhau. Gallwch alluogi mynediad yng ngosodiadau iOS.",
   "permissionsMicrophone": "Meicroffon",
-  "permissionsMicrophoneAccessRequired": "Mae {app_name} angen mynediad i'r meicroffon i wneud galwadau a danfon negeseuon sain, ond mae wedi'i wrthod yn barhaol. Tapiwch gosodiadau -> Caniatadau, a throi \"Meicroffon\" ymlaen.",
+  "permissionsMicrophoneAccessRequired": "Mae {app_name} angen mynediad i'r meicroffon i wneud galwadau a danfon negeseuon sain, ond mae wedi'i wrthod yn barhaol. Tapiwch gosodiadau → Caniatadau, a throi \"Meicroffon\" ymlaen.",
   "permissionsMicrophoneAccessRequiredDesktop": "Gallwch alluogi mynediad meicroffon yn osodiadau preifatrwydd {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "Mae {app_name} angen mynediad i'r meicroffon i wneud galwadau a recordio negeseuon sain.",
   "permissionsMicrophoneDescription": "Caniatáu mynediad at feicroffon.",
   "permissionsMusicAudio": "Mae ar {app_name} angen mynediad i gerddoriaeth ac sain er mwyn anfon ffeiliau, cerddoriaeth ac sain.",
   "permissionsRequired": "Angen caniatâd",
-  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
-  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Photos and videos\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "Mae {app_name} angen mynediad i storio i gadw atodiadau a chyfryngau.",
   "permissionsStorageSaveDenied": "Mae {app_name} angen caniatâd Storio i gadw lluniau a fideos, ond mae wedi'i wrthod yn barhaol. Ewch i ddewislen gosodiadau'r ap, dewis \"Caniatâd\", a galluogi \"Storio\".",
   "permissionsStorageSend": "Mae {app_name} angen mynediad i storio i anfon lluniau a fideos.",
-  "pin": "Pin ",
+  "pin": "Pin",
   "pinConversation": "Pin Sgwrs",
   "pinUnpin": "Datgloi Sgwrs",
   "pinUnpinConversation": "Datgloi Sgwrs",
