--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -633,34 +633,34 @@
   "passwordErrorMatch": "Adgangskoder matcher ikke",
   "passwordFailed": "Opdatering af adgangskode mislykkedes",
   "passwordIncorrect": "Forkert adgangskode",
-  "passwordRemove": " Fjern adgangskode",
+  "passwordRemove": "Fjern adgangskode",
   "passwordRemoveDescription": "Fjern adgangskoden, der kræves for at låse {app_name} op.",
   "passwordRemovedDescription": "Din adgangskode er blevet fjernet.",
   "passwordSet": "Indstil adgangskode",
   "passwordSetDescription": "Din adgangskode er blevet indstillet. Venligst hold den sikker.",
   "paste": "Indsæt",
-  "permissionMusicAudioDenied": "{app_name} kræver musik- og lydadgang for at sende filer, musik og lyd, men det er blevet permanent nægtet. Tryk på Indstillinger -> Tilladelser, og slå \"Musik og lyd\" til.",
+  "permissionMusicAudioDenied": "{app_name} kræver musik- og lydadgang for at sende filer, musik og lyd, men det er blevet permanent nægtet. Tryk på Indstillinger → Tilladelser, og slå \"Musik og lyd\" til.",
   "permissionsAppleMusic": "{app_name} skal bruge Apple Music for at afspille medievedhæftninger.",
   "permissionsAutoUpdate": "Auto Opdatér",
   "permissionsAutoUpdateDescription": "Automatisk søg efter opdateringer ved opstart",
-  "permissionsCameraDenied": "{app_name} kræver kameraadgang for at tage fotos og videoer, men det er blevet permanent nægtet. Tryk på Indstillinger -> Tilladelser, og slå \"Kamera\" til.",
+  "permissionsCameraDenied": "{app_name} kræver kameraadgang for at tage fotos og videoer, men det er blevet permanent nægtet. Tryk på Indstillinger → Tilladelser, og slå \"Kamera\" til.",
   "permissionsFaceId": "Skærmlåsfunktionen på {app_name} bruger Face ID.",
   "permissionsKeepInSystemTray": "Behold i statusfeltet",
   "permissionsKeepInSystemTrayDescription": "{app_name} kører fortsat i baggrunden, når du lukker vinduet",
   "permissionsLibrary": "{app_name} behøver adgang til fotobiblioteket for at fortsætte. Du kan aktivere adgang i iOS' indstillinger.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} kræver tilladelse til at tilgå mikrofonen for at kunne foretage opkald og sende lydmeddelelser, men det er blevet permanent nægtet. Tryk på indstillinger -> Tilladelser, og slå \"Mikrofon\" til.",
+  "permissionsMicrophoneAccessRequired": "{app_name} kræver tilladelse til at tilgå mikrofonen for at kunne foretage opkald og sende lydmeddelelser, men det er blevet permanent nægtet. Tryk på indstillinger → Tilladelser, og slå \"Mikrofon\" til.",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kan aktivere mikrofontilladelse i {app_name}'s privatlivsindstillinger.",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} kræver mikrofonadgang for at foretage opkald og optage lydmeddelelser.",
   "permissionsMicrophoneDescription": "Tillad adgang til mikrofon.",
   "permissionsMusicAudio": "{app_name} kræver musik- og lydadgang for at sende filer, musik og lyd.",
   "permissionsRequired": "Tilladelse krævet",
-  "permissionsStorageDenied": "{app_name} kræver tilladelse til at tilgå dit fotobibliotek, så du kan sende fotos og videoer, men det er blevet permanent nægtet. Tryk på Indstillinger -> Tilladelser, og slå \"Fotos og videoer\" til.",
-  "permissionsStorageDeniedLegacy": "{app_name} kræver adgang til lageret, så du kan sende og gemme vedhæftninger. Tryk på Indstillinger -> Tilladelser, og slå \"Lager\" til.",
+  "permissionsStorageDenied": "{app_name} kræver tilladelse til at tilgå dit fotobibliotek, så du kan sende fotos og videoer, men det er blevet permanent nægtet. Tryk på Indstillinger → Tilladelser, og slå \"Fotos og videoer\" til.",
+  "permissionsStorageDeniedLegacy": "{app_name} kræver adgang til lageret, så du kan sende og gemme vedhæftninger. Tryk på Indstillinger → Tilladelser, og slå \"Lager\" til.",
   "permissionsStorageSave": "{app_name} skal have lageradgang for at gemme vedhæftninger og mediefiler.",
   "permissionsStorageSaveDenied": "{app_name} kræver tilladelse til at tilgå din hukommelse, for at kunne gemme billeder og videoer, hvilket det er blevet nægtet. Gå venligst via appens menu til Indstillinger, vælg \"Tilladelser\" og tilvælg \"Lagring\".",
   "permissionsStorageSend": "{app_name} har brug for lageradgang for at sende billeder og videoer.",
-  "pin": "Fastgør ",
+  "pin": "Fastgør",
   "pinConversation": "Fastgør samtale",
   "pinUnpin": "Frigør",
   "pinUnpinConversation": "Frigør samtale",
@@ -773,7 +773,7 @@
   "updateError": "Kan ikke opdatere",
   "updateErrorDescription": "{app_name} opdateringen mislykkedes. Gå venligst til {session_download_url} og installer den nye version manuelt, og kontakt derefter vores Hjælpecenter for at informere os om dette problem.",
   "updateNewVersion": "En ny version af {app_name} er tilgængelig, tryk for at opdatere",
-  "updateNewVersionDescription": "En ny version af {app_name} er tilgængelig. ",
+  "updateNewVersionDescription": "En ny version af {app_name} er tilgængelig.",
   "updateReleaseNotes": "Gå til udgivelsesnoter",
   "updateSession": "{app_name} Opdatering",
   "updateVersion": "Version {version}",
