--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -420,7 +420,7 @@
   "groupNameEnter": "Εισαγάγετε ένα όνομα ομάδας",
   "groupNameEnterPlease": "Παρακαλώ εισαγάγετε ένα όνομα ομάδας.",
   "groupNameEnterShorter": "Παρακαλώ εισαγάγετε ένα μικρότερο όνομα ομάδας.",
-  "groupNameNew": "Το όνομα της ομάδας είναι πλέον «{group_name}». ",
+  "groupNameNew": "Το όνομα της ομάδας είναι πλέον «{group_name}».",
   "groupNameUpdated": "Το όνομα της ομάδας ενημερώθηκε.",
   "groupNoMessages": "Δεν έχετε μηνύματα από <b>{group_name}</b>. Στείλτε ένα μήνυμα για να ξεκινήσετε τη συζήτηση!",
   "groupOnlyAdmin": "Είστε ο μόνος διαχειριστής στην <b>{group_name}</b>.<br/><br/>Τα μέλη και οι ρυθμίσεις της ομάδας δεν μπορούν να αλλάξουν χωρίς διαχειριστή.",
@@ -532,7 +532,7 @@
   "messageRequestsDelete": "Σίγουρα θέλετε να διαγράψετε αυτό το αίτημα μηνύματος;",
   "messageRequestsNew": "Έχετε ένα νέο αίτημα μηνύματος",
   "messageRequestsNonePending": "Δεν υπάρχουν αιτήματα μηνυμάτων σε εκκρεμότητα",
-  "messageRequestsTurnedOff": "Ο <b>{name}</b> έχει τα αιτήματα μηνυμάτων από συνομιλίες <επίσημη Κοινότητα> απενεργοποιημένα, οπότε δε μπορείτε να του στείλετε μήνυμα.",
+  "messageRequestsTurnedOff": "<b>{name}</b> έχει απενεργοποιημένα τα αιτήματα μηνυμάτων από κοινοτικές συνομιλίες, οπότε δεν μπορείτε να τους στείλετε μήνυμα.",
   "messageSelect": "Επιλογή μηνύματος",
   "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Αποτυχία αποστολής",
@@ -640,28 +640,27 @@
   "passwordSet": "Ορισμός Κωδικού Πρόσβασης",
   "passwordSetDescription": "Ο κωδικός πρόσβασής σας έχει οριστεί. Παρακαλώ κρατήστε τον ασφαλή.",
   "paste": "Επικόλληση",
-  "permissionMusicAudioDenied": "{app_name} χρειάζεται πρόσβαση στη μουσική και τον ήχο για να στείλει αρχεία, μουσική και ήχο, αλλά η πρόσβαση έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις −> Δικαιώματα, και ενεργοποιήστε το \"Μουσική και ήχος\".",
   "permissionsAppleMusic": "Το {app_name} χρειάζεται πρόσβαση στο Apple Music για αναπαραγωγή συνημμένων πολυμέσων.",
   "permissionsAutoUpdate": "Αυτόματη Ενημέρωση",
   "permissionsAutoUpdateDescription": "Αυτόματος έλεγχος για ενημερώσεις κατά την εκκίνηση",
-  "permissionsCameraDenied": "Το {app_name} χρειάζεται πρόσβαση στην κάμερα για τη λήψη φωτογραφιών και βίντεο, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις -> Άδειες, και ενεργοποιήστε την \"Κάμερα\".",
+  "permissionsCameraDenied": "Το {app_name} χρειάζεται πρόσβαση στην κάμερα για τη λήψη φωτογραφιών και βίντεο, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις → Άδειες, και ενεργοποιήστε την \"Κάμερα\".",
   "permissionsFaceId": "Η λειτουργία κλειδώματος οθόνης στο {app_name} χρησιμοποιεί το Face ID.",
   "permissionsKeepInSystemTray": "Διατήρηση στην Περιοχή Ειδοποιήσεων",
   "permissionsKeepInSystemTrayDescription": "Το {app_name} συνεχίζει να εκτελείται στο παρασκήνιο όταν κλείνετε το παράθυρο",
   "permissionsLibrary": "Το {app_name} χρειάζεται πρόσβαση στη φωτογραφική βιβλιοθήκη για να συνεχίσει. Μπορείτε να ενεργοποιήσετε την πρόσβαση στις ρυθμίσεις του iOS.",
   "permissionsMicrophone": "Μικρόφωνο",
-  "permissionsMicrophoneAccessRequired": "{app_name} χρειάζεται πρόσβαση στο μικρόφωνο για να πραγματοποιήσει κλήσεις και να στείλει ηχητικά μηνύματα, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις -> Άδειες, και ενεργοποιήστε το \"Μικρόφωνο\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} χρειάζεται πρόσβαση στο μικρόφωνο για να πραγματοποιήσει κλήσεις και να στείλει ηχητικά μηνύματα, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις → Άδειες, και ενεργοποιήστε το \"Μικρόφωνο\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Μπορείτε να ενεργοποιήσετε την πρόσβαση στο μικρόφωνο στις ρυθμίσεις απορρήτου του {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "Το {app_name} χρειάζεται πρόσβαση στο μικρόφωνο για την αποστολή ηχητικών μηνυμάτων.",
   "permissionsMicrophoneDescription": "Επιτρέψτε την πρόσβαση στο μικρόφωνο.",
   "permissionsMusicAudio": "{app_name} χρειάζεται πρόσβαση στη μουσική και τον ήχο για να στείλει αρχεία, μουσική και ήχο.",
   "permissionsRequired": "Απαιτείται Άδεια",
-  "permissionsStorageDenied": "{app_name} χρειάζεται πρόσβαση στη βιβλιοθήκη φωτογραφιών ώστε να μπορείτε να στείλετε φωτογραφίες και βίντεο, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις -> Άδειες, και ενεργοποιήστε το \"Φωτογραφίες και βίντεο\".",
-  "permissionsStorageDeniedLegacy": "{app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο ώστε να μπορείτε να στείλετε και να αποθηκεύσετε συνημμένα. Πατήστε Ρυθμίσεις -> Άδειες, και ενεργοποιήστε το \"Αποθηκευτικός χώρος\".",
+  "permissionsStorageDenied": "{app_name} χρειάζεται πρόσβαση στη βιβλιοθήκη φωτογραφιών ώστε να μπορείτε να στείλετε φωτογραφίες και βίντεο, αλλά έχει απορριφθεί μόνιμα. Πατήστε Ρυθμίσεις → Άδειες, και ενεργοποιήστε το \"Φωτογραφίες και βίντεο\".",
+  "permissionsStorageDeniedLegacy": "{app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο ώστε να μπορείτε να στείλετε και να αποθηκεύσετε συνημμένα. Πατήστε Ρυθμίσεις → Άδειες, και ενεργοποιήστε το \"Αποθηκευτικός χώρος\".",
   "permissionsStorageSave": "Το {app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για να αποθηκεύσει συνημμένα και πολυμέσα.",
   "permissionsStorageSaveDenied": "Το {app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για την αποθήκευση φωτογραφιών και βίντεο, αλλά έχει απορριφθεί μόνιμα. Παρακαλώ μεταβείτε στις ρυθμίσεις της εφαρμογής, επιλέξτε «Άδειες», και ενεργοποιήστε το «Αποθηκευτικός χώρος».",
   "permissionsStorageSend": "Το {app_name} χρειάζεται πρόσβαση στον αποθηκευτικό χώρο για την αποστολή φωτογραφιών και βίντεο.",
-  "pin": "Καρφίτσωμα ",
+  "pin": "Καρφίτσωμα",
   "pinConversation": "Καρφίτσωμα Συνομιλίας",
   "pinUnpin": "Ξεκαρφίτσωμα",
   "pinUnpinConversation": "Ξεκαρφίτσωμα Συνομιλίας",
