--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Enigu grupnomon",
   "groupNameEnterPlease": "Bonvolu entajpi grupnomon.",
   "groupNameEnterShorter": "Bonvolu entajpi plej mallongan grupnomon.",
-  "groupNameNew": "La grupnomo estas de nun „{group_name}“. ",
+  "groupNameNew": "La grupnomo estas de nun „{group_name}“.",
   "groupNameUpdated": "Grupa nomo ĝisdatigite.",
   "groupNoMessages": "Vi ne havas mesaĝojn de <b>{group_name}</b>. Sendu mesaĝon por komenci la konversacion!",
   "groupOnlyAdmin": "Vi estas la sola admin en <b>{group_name}</b>.<br/><br/>Grupanoj kaj agordoj ne povas esti ŝanĝitaj sen admin.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Ĉu vi ŝatus forigi <b>{name}</b> kaj <b>{count} aliajn</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Ĉu vi ŝatus forigi <b>{name}</b> kaj <b>{other_name}</b> de <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Forigi uzanton kaj iliajn mesaĝojn] other [Forigi uzantojn kaj iliajn mesaĝojn]}",
-  "groupRemoveUserOnly": "{count, plural, one [Forigi uzanton ] other [Forigi uzantojn]}",
+  "groupRemoveUserOnly": "{count, plural, one [Forigi uzanton] other [Forigi uzantojn]}",
   "groupRemoved": "<b>{name}</b> estas forigita el la grupo.",
   "groupRemovedMultiple": "<b>{name}</b> kaj <b>{count} aliaj </b> estis forigitaj de la grupo.",
   "groupRemovedTwo": "<b>{name} </b> kaj <b>{other_name} </b> estis forigitaj de la grupo.",
@@ -639,11 +639,11 @@
   "passwordSet": "Agordi Pasvorton",
   "passwordSetDescription": "Via pasvorto estas agordita. Bonvolu konservi ĝin sekura.",
   "paste": "Alglui",
-  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "{app_name} bezonas uzi Apple Music por ludi aŭdvidaĵojn.",
   "permissionsAutoUpdate": "Aŭtomata Ĝisdatigo",
   "permissionsAutoUpdateDescription": "Aŭtomate serĉi ĝisdatigojn kiam komenciĝas",
-  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Camera\" on.",
+  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "La ŝlosila ekrano en {app_name} uzas Vizaĝo-ID.",
   "permissionsKeepInSystemTray": "Tenadi en Sistemo Plej",
   "permissionsKeepInSystemTrayDescription": "{app_name} daŭrigas funkcii en la fono kiam vi fermas la fenestron",
@@ -655,8 +655,8 @@
   "permissionsMicrophoneDescription": "Permesi uzi la mikrofonon.",
   "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
   "permissionsRequired": "Permeso bezonata",
-  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
-  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Photos and videos\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name} bezonas aliron al memoro por konservi aldonaĵojn kaj aŭdvidaĵojn.",
   "permissionsStorageSaveDenied": "{app_name} bezonas aliron al memoro por konservi bildojn kaj videojn, sed ĝi estis porĉiame malakceptita. Bonvolu iri al la aplikaĵaj agordoj, elekti \"Permesoj\", kaj ŝalti \"Memoro\".",
   "permissionsStorageSend": "{app_name} bezonas aliron al memoro por sendi bildojn kaj videojn.",
