--- a/_locales/es-419/messages.json
+++ b/_locales/es-419/messages.json
@@ -145,7 +145,7 @@
   "callsMicrophonePermissionsRequired": "Perdiste una llamada de <b>{name}</b> porque no has otorgado <b>acceso al micrófono</b>.",
   "callsMissed": "Llamada perdida",
   "callsMissedCallFrom": "Llamada perdida de {name}",
-  "callsNotificationsRequired": "Las llamadas de voz y video requieren que las notificaciones estén habilitadas en la configuración de su dispositivo. ",
+  "callsNotificationsRequired": "Las llamadas de voz y video requieren que las notificaciones estén habilitadas en la configuración de su dispositivo.",
   "callsPermissionsRequired": "Se requieren permisos de llamada",
   "callsPermissionsRequiredDescription": "Puedes activar el permiso de \"Llamadas de voz y video\" en los ajustes de Privacidad.",
   "callsReconnecting": "Reconectando...",
@@ -171,7 +171,7 @@
   "clearDataAll": "Borrar todos los datos",
   "clearDataAllDescription": "Esto eliminará permanentemente tus mensajes y contactos. ¿Quieres borrar solo este dispositivo o borrar también tus datos de la red?",
   "clearDataError": "Error al eliminar los datos",
-  "clearDataErrorDescription": "{count, plural, one [Datos no borrados por # Service Node. ID del Service Node: {service_node_id}.] other [Datos no borrados por # Service Nodes. ID del Service Node: {service_node_id}.]}",
+  "clearDataErrorDescription": "{count, plural, one [Datos no borrados por # Service Node. ID del Service Node: {service_node_id}.] other [Datos no borrados por # Service Nodes. IDs de los Service Nodes: {service_node_id}.]}",
   "clearDataErrorDescriptionGeneric": "Ocurrió un error desconocido y tus datos no fueron eliminados. ¿Quieres eliminar tus datos solo de este dispositivo?",
   "clearDevice": "Limpiar dispositivo",
   "clearDeviceAndNetwork": "Limpiar dispositivo y red",
@@ -276,7 +276,7 @@
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "No tienes permiso para borrar los mensajes de otros",
   "deleteMessage": "{count, plural, one [Eliminar el mensaje] other [Eliminar el mensaje]}",
   "deleteMessageConfirm": "¿Estás seguro de que deseas eliminar este mensaje?",
-  "deleteMessageDeleted": "{count, plural, one [Mensajes eliminados] other [Mensajes eliminados]}",
+  "deleteMessageDeleted": "{count, plural, one [Mensaje eliminado] other [Mensajes eliminados]}",
   "deleteMessageDeletedGlobally": "Este mensaje ha sido eliminado",
   "deleteMessageDeletedLocally": "Este mensaje ha sido eliminado en este dispositivo",
   "deleteMessageDescriptionDevice": "¿Estás seguro de que deseas eliminar este mensaje solo de este dispositivo?",
@@ -351,7 +351,7 @@
   "emojiCategoryTravel": "Viajar & Lugares",
   "emojiReactsClearAll": "¿Estás seguro de que quieres eliminar todos los {emoji}?",
   "emojiReactsCoolDown": "¡Despacio! Has enviado demasiadas reacciones de emoji. Prueba de nuevo pronto",
-  "emojiReactsCountOthers": "{count, plural, one [Y # ha reaccionado {emoji} a este mensaje.] other [Y # otros han reaccionado {emoji} a este mensaje.]}",
+  "emojiReactsCountOthers": "{count, plural, one [Y # más han reaccionado {emoji} a este mensaje.] other [Y # otros han reaccionado {emoji} a este mensaje.]}",
   "emojiReactsHoverNameDesktop": "{name} reaccionó con {emoji_name}",
   "emojiReactsHoverNameTwoDesktop": "{name} y {other_name} reaccionaron con {emoji_name}",
   "emojiReactsHoverTwoNameMultipleDesktop": "{name} y <span>{count} otras personas</span> reaccionaron con {emoji_name}",
@@ -420,7 +420,7 @@
   "groupNameEnter": "Ingresa un nombre de grupo",
   "groupNameEnterPlease": "Por favor, ingresa un nombre de grupo.",
   "groupNameEnterShorter": "Por favor, ingrese un nombre de grupo más corto.",
-  "groupNameNew": "El nombre del grupo ahora es: '{group_name}. ",
+  "groupNameNew": "El nombre del grupo ahora es: '{group_name}.",
   "groupNameUpdated": "Nombre del grupo actualizado.",
   "groupNoMessages": "No tienes mensajes de <b>{group_name}</b>. ¡Envía un mensaje para iniciar la conversación!",
   "groupOnlyAdmin": "Eres el único administrador en <b>{group_name}</b>.<br/><br/>Los miembros del grupo y la configuración no se pueden cambiar sin un administrador.",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "¿Te gustaría eliminar a <b>{name}</b> y a <b>{count} otros</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "¿Te gustaría eliminar a <b>{name}</b> y a <b>{other_name}</b> de <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Eliminar usuario y sus mensajes] other [Eliminar usuarios y sus mensajes]}",
-  "groupRemoveUserOnly": "{count, plural, one [Eliminar usuario ] other [Eliminar usuarios]}",
+  "groupRemoveUserOnly": "{count, plural, one [Eliminar usuario] other [Eliminar usuarios]}",
   "groupRemoved": "<b>{name}</b> ha sido expulsado del grupo.",
   "groupRemovedMultiple": "<b>{name}</b> y <b>{count} más</b> fueron expulsados del grupo.",
   "groupRemovedTwo": "<b>{name}</b> y <b>{other_name}</b> fueron expulsados del grupo.",
@@ -514,7 +514,7 @@
   "messageInfo": "Información del mensaje",
   "messageMarkRead": "Marcar como leído",
   "messageMarkUnread": "Marcar como no leído",
-  "messageNew": "{count, plural, one [Mensaje Nuevo] other [Mensaje Nuevo]}",
+  "messageNew": "{count, plural, one [Nuevo Mensaje] other [Nuevos Mensajes]}",
   "messageNewDescriptionDesktop": "Comenzar una nueva conversación ingresando el Account ID o ONS de tu amigo.",
   "messageNewDescriptionMobile": "Comenzar una nueva conversación ingresando el Account ID, ONS o escaneando el código QR de tu amigo.",
   "messageNewYouveGot": "{count, plural, one [Tienes un mensaje nuevo.] other [Tienes # mensajes nuevos.]}",
@@ -610,7 +610,7 @@
   "onboardingTos": "Términos de Servicio",
   "onboardingTosPrivacy": "Al utilizar este servicio, aceptas nuestros <b>Términos de Servicio</b> y <b>Política de Privacidad</b>",
   "onionRoutingPath": "Ruta",
-  "onionRoutingPathDescription": "{app_name} oculta tu IP haciendo rebotar tus mensajes a través de múltiples Service Nodes en {app_name}'s red descentralizada. Esta es tu trayectoria actual:",
+  "onionRoutingPathDescription": "{app_name} oculta tu dirección IP al enrutar tus mensajes a través de varios nodos de servicio en la red descentralizada de {app_name}. Esta es tu ruta actual:",
   "onionRoutingPathDestination": "Destino",
   "onionRoutingPathEntryNode": "Nodo de Entrada",
   "onionRoutingPathServiceNode": "Service Node",
@@ -640,28 +640,28 @@
   "passwordSet": "Establecer Contraseña",
   "passwordSetDescription": "Tu contraseña ha sido establecida. Por favor, mantenla segura.",
   "paste": "Pegar",
-  "permissionMusicAudioDenied": "{app_name} necesita acceso a música y audio para enviar archivos, música y audio, pero ha sido denegado permanentemente. Toca Configuración -> Permisos, y activa \"Música y audio\".",
+  "permissionMusicAudioDenied": "{app_name} necesita acceso a música y audio para enviar archivos, música y audio, pero ha sido denegado permanentemente. Toca Configuración → Permisos, y activa \"Música y audio\".",
   "permissionsAppleMusic": "{app_name} necesita usar Apple Music para reproducir archivos adjuntos multimedia.",
   "permissionsAutoUpdate": "Actualizar automáticamente",
   "permissionsAutoUpdateDescription": "Comprobar actualizaciones automáticamente al iniciar Session",
-  "permissionsCameraDenied": "{app_name} necesita acceso a la cámara para tomar fotos y videos, pero ha sido denegado permanentemente. Toca Configuración -> Permisos, y activa \"Cámara\".",
+  "permissionsCameraDenied": "{app_name} necesita acceso a la cámara para tomar fotos y videos, pero ha sido denegado permanentemente. Toca Configuración → Permisos, y activa \"Cámara\".",
   "permissionsFaceId": "La función de pantalla bloqueada en {app_name} usa Face ID.",
   "permissionsKeepInSystemTray": "Conservar en la bandeja del sistema",
   "permissionsKeepInSystemTrayDescription": "{app_name} continúa ejecutándose en segundo plano al cerrar la ventana",
   "permissionsLibrary": "{app_name} necesita acceso a la biblioteca de fotos para continuar. Puedes habilitar el acceso en los ajustes de iOS.",
   "permissionsMicrophone": "Micrófono",
-  "permissionsMicrophoneAccessRequired": "{app_name} necesita acceso al micrófono para hacer llamadas y enviar mensajes de audio, pero el permiso ha sido denegado permanentemente. Ve a Configuración -> Permisos y activa el \"Micrófono\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} necesita acceso al micrófono para hacer llamadas y enviar mensajes de audio, pero el permiso ha sido denegado permanentemente. Ve a Configuración → Permisos y activa el \"Micrófono\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Puedes habilitar el acceso al micrófono en la configuración de privacidad de {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} necesita acceso al micrófono para hacer llamadas y grabar mensajes de audio.",
   "permissionsMicrophoneDescription": "Permitir acceso al micrófono.",
   "permissionsMusicAudio": "{app_name} necesita acceso a música y audio para enviar archivos, música y audio.",
   "permissionsRequired": "Permiso necesario",
-  "permissionsStorageDenied": "{app_name} necesita acceso a la galería de fotos para que puedas enviar fotos y vídeos, pero el permiso ha sido denegado permanentemente. Ve a Configuración -> Permisos y activa \"Fotos y vídeos\".",
-  "permissionsStorageDeniedLegacy": "{app_name} necesita acceso al almacenamiento para que puedas enviar y guardar archivos adjuntos. Ve a Configuración -> Permisos y activa \"Almacenamiento\".",
+  "permissionsStorageDenied": "{app_name} necesita acceso a la galería de fotos para que puedas enviar fotos y vídeos, pero el permiso ha sido denegado permanentemente. Ve a Configuración → Permisos y activa \"Fotos y vídeos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} necesita acceso al almacenamiento para que puedas enviar y guardar archivos adjuntos. Ve a Configuración → Permisos y activa \"Almacenamiento\".",
   "permissionsStorageSave": "{app_name} necesita acceso al almacenamiento para guardar adjuntos y multimedia.",
   "permissionsStorageSaveDenied": "{app_name} necesita acceso al almacenamiento para guardar fotos y videos, pero el permiso ha sido denegado permanentemente. Por favor, vaya a los ajustes de la aplicación, seleccione \"Permisos\", y active el \"Almacenamiento\".",
   "permissionsStorageSend": "{app_name} necesita acceso al almacenamiento para enviar fotos y videos.",
-  "pin": "Fijar ",
+  "pin": "Fijar",
   "pinConversation": "Fijar conversación",
   "pinUnpin": "Desfijar",
   "pinUnpinConversation": "Desfijar conversación",
