--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -91,7 +91,7 @@
   "attachmentsLoadingOlder": "Cargando multimedia más antiguo...",
   "attachmentsLoadingOlderFiles": "Cargando archivos más antiguos...",
   "attachmentsMedia": "{name} el {date_time}",
-  "attachmentsMediaEmpty": "No tienes ningún media en esta conversación.",
+  "attachmentsMediaEmpty": "No tienes ningún archivo multimedia en esta conversación.",
   "attachmentsMediaSaved": "Medios guardados por {name}",
   "attachmentsMoveAndScale": "Editar foto",
   "attachmentsNa": "N/A",
@@ -145,7 +145,7 @@
   "callsMicrophonePermissionsRequired": "Perdiste una llamada de <b>{name}</b> porque no has otorgado <b>acceso al micrófono</b>.",
   "callsMissed": "Llamada perdida",
   "callsMissedCallFrom": "Llamada perdida de {name}",
-  "callsNotificationsRequired": "Las llamadas de voz y video requieren que las notificaciones estén habilitadas en la configuración del sistema de tu dispositivo. ",
+  "callsNotificationsRequired": "Las llamadas de voz y video requieren que las notificaciones estén habilitadas en la configuración del sistema de tu dispositivo.",
   "callsPermissionsRequired": "Se requieren permisos de llamada",
   "callsPermissionsRequiredDescription": "Puedes habilitar los permisos de \"Llamadas de Voz y Video\" en la Configuración de Privacidad.",
   "callsReconnecting": "Reconectando...",
@@ -341,7 +341,7 @@
   "edit": "Editar",
   "emojiAndSymbols": "Emojis y símbolos",
   "emojiCategoryActivities": "Actividades",
-  "emojiCategoryAnimals": "Animales y naturaleza",
+  "emojiCategoryAnimals": "Animales y Naturaleza",
   "emojiCategoryFlags": "Banderas",
   "emojiCategoryFood": "Comida & bebidas",
   "emojiCategoryObjects": "Objetos",
@@ -420,7 +420,7 @@
   "groupNameEnter": "Ingresa un nombre de grupo",
   "groupNameEnterPlease": "Por favor, ingresa un nombre para el grupo.",
   "groupNameEnterShorter": "Por favor, ingresa un nombre de grupo más corto.",
-  "groupNameNew": "Ahora el nombre del grupo es {group_name}. ",
+  "groupNameNew": "Ahora el nombre del grupo es {group_name}.",
   "groupNameUpdated": "Nombre del grupo actualizadó.",
   "groupNoMessages": "No tienes mensajes de <b>{group_name}</b>. ¡Envía un mensaje para iniciar la conversación!",
   "groupOnlyAdmin": "Eres el único admin en <b>{group_name}</b>.<br/><br/>Los miembros y la configuración del grupo no pueden ser modificados sin un admin.",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "¿Te gustaría eliminar a <b>{name}</b> y a <b>{count} otros</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "¿Te gustaría eliminar a <b>{name}</b> y a <b>{other_name}</b> de <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Borrar usuario y sus mensajes] other [Borrar usuario y sus mensajes]}",
-  "groupRemoveUserOnly": "{count, plural, one [Borrar usuario ] other [Borrar usuarios]}",
+  "groupRemoveUserOnly": "{count, plural, one [Borrar usuario] other [Borrar usuarios]}",
   "groupRemoved": "<b>{name}</b> fue expulsado del grupo.",
   "groupRemovedMultiple": "<b>{name}</b> y <b>{count} más</b> fueron expulsados del grupo.",
   "groupRemovedTwo": "<b>{name}</b> y <b>{other_name}</b> fueron expulsados del grupo.",
@@ -567,7 +567,7 @@
   "notificationsContentShowNoNameOrContent": "Ni remitente ni contenido",
   "notificationsFastMode": "Modo Rápido",
   "notificationsFastModeDescription": "Se te notificará de nuevos mensajes de forma fiable e inmediata usando los servidores de notificaciones de Google.",
-  "notificationsFastModeDescriptionIos": "Se le notificará de los nuevos mensajes de forma fiable e inmediata usando los servidores de notificaciones de Apple.",
+  "notificationsFastModeDescriptionIos": "Se te notificará de nuevos mensajes de forma fiable e inmediata usando los servidores de notificaciones de Apple.",
   "notificationsGoToDevice": "Ir a la configuración de notificaciones del dispositivo",
   "notificationsHeaderAllMessages": "Notificaciones - Todas",
   "notificationsHeaderMentionsOnly": "Notificaciones - Solo Menciones",
@@ -640,24 +640,24 @@
   "passwordSet": "Establecer Contraseña",
   "passwordSetDescription": "Tu contraseña ha sido establecida. Por favor, manténgala segura.",
   "paste": "Pegar",
-  "permissionMusicAudioDenied": "{app_name} necesita acceso a música y audio para enviar archivos, música y audio, pero ha sido denegado permanentemente. Toca Configuración -> Permisos, y activa \"Música y audio\".",
+  "permissionMusicAudioDenied": "{app_name} necesita acceso a música y audio para enviar archivos, música y audio, pero ha sido denegado permanentemente. Toca Configuración → Permisos, y activa \"Música y audio\".",
   "permissionsAppleMusic": "{app_name} necesita usar Apple Music para reproducir archivos adjuntos de medios.",
   "permissionsAutoUpdate": "Actualizar automáticamente",
   "permissionsAutoUpdateDescription": "Comprobar actualizaciones automáticamente al iniciar Session",
-  "permissionsCameraDenied": "{app_name} necesita acceso a la cámara para tomar fotos y videos, pero ha sido permanentemente denegado. Toque Configuración -> Permisos, y active \"Cámara\".",
+  "permissionsCameraDenied": "{app_name} necesita acceso a la cámara para tomar fotos y videos, pero ha sido permanentemente denegado. Toque Configuración → Permisos, y active \"Cámara\".",
   "permissionsFaceId": "La función de bloqueo de pantalla en {app_name} usa Face ID.",
   "permissionsKeepInSystemTray": "Ejecutar en Segundo Plano",
   "permissionsKeepInSystemTrayDescription": "{app_name} continúa ejecutándose en segundo plano cuando cierras la ventana",
   "permissionsLibrary": "{app_name} necesita acceso a la biblioteca de fotos para continuar. Puedes habilitar acceso en los ajustes de iOS.",
   "permissionsMicrophone": "Micrófono",
-  "permissionsMicrophoneAccessRequired": "{app_name} necesita acceso al micrófono para hacer llamadas y enviar mensajes de audio, pero ha sido permanentemente denegado. Toque Configuración -> Permisos, y active \"Micrófono\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} necesita acceso al micrófono para hacer llamadas y enviar mensajes de audio, pero ha sido permanentemente denegado. Toque Configuración → Permisos, y active \"Micrófono\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Puedes habilitar el acceso al micrófono en la configuración de privacidad de {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} necesita acceso al micrófono para hacer llamadas y grabar mensajes de audio.",
   "permissionsMicrophoneDescription": "Permitir acceso al micrófono.",
   "permissionsMusicAudio": "{app_name} necesita acceso a la música y el audio para enviar archivos, música y audio.",
   "permissionsRequired": "Permiso necesario",
-  "permissionsStorageDenied": "{app_name} necesita acceso a la biblioteca de fotos para que puedas enviar fotos y videos, pero ha sido permanentemente denegado. Toque Configuración -> Permisos, y active \"Fotos y videos\".",
-  "permissionsStorageDeniedLegacy": "{app_name} necesita acceso al almacenamiento para que puedas enviar y guardar adjuntos. Toque Configuración -> Permisos, y active \"Almacenamiento\".",
+  "permissionsStorageDenied": "{app_name} necesita acceso a la biblioteca de fotos para que puedas enviar fotos y videos, pero ha sido permanentemente denegado. Toque Configuración → Permisos, y active \"Fotos y videos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} necesita acceso al almacenamiento para que puedas enviar y guardar adjuntos. Toque Configuración → Permisos, y active \"Almacenamiento\".",
   "permissionsStorageSave": "{app_name} necesita acceso de almacenamiento para guardar archivos adjuntos y medios.",
   "permissionsStorageSaveDenied": "{app_name} necesita permiso de almacenamiento para poder guardar imágenes y videos, pero este ha sido denegado permanentemente. Por favor, vaya al menú de configuración de la aplicación, seleccione \"Permisos\", y active \"Almacenamiento\".",
   "permissionsStorageSend": "{app_name} necesita acceso de almacenamiento para enviar fotos y videos.",
