--- a/_locales/et/messages.json
+++ b/_locales/et/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Sisestage grupi nimi",
   "groupNameEnterPlease": "Palun sisestage grupi nimi.",
   "groupNameEnterShorter": "Palun sisestage grupile lühem nimi.",
-  "groupNameNew": "Grupi nimi on nüüd {group_name}. ",
+  "groupNameNew": "Grupi nimi on nüüd {group_name}.",
   "groupNameUpdated": "Grupi nimi uuendatud.",
   "groupNoMessages": "Teil pole <b>{group_name}</b>'ilt sõnumeid. Vestluse alustamiseks saatke sõnum!",
   "groupOnlyAdmin": "Olete ainus administraator grupis <b>{group_name}</b>.<br/><br/>Grupi liikmeid ja sätteid ei saa muuta ilma administraatorita.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Kas soovite eemaldada <b>{name}</b> ja <b>{count} teised</b> grupist <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Kas soovite eemaldada <b>{name}</b> ja <b>{other_name}</b> grupist <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Eemalda kasutaja ja nende sõnumid] other [Eemalda kasutajad ja nende sõnumid]}",
-  "groupRemoveUserOnly": "{count, plural, one [Eemalda kasutaja ] other [Eemalda kasutajad]}",
+  "groupRemoveUserOnly": "{count, plural, one [Eemalda kasutaja] other [Eemalda kasutajad]}",
   "groupRemoved": "<b>{name}</b> eemaldati grupist.",
   "groupRemovedMultiple": "<b>{name}</b> ja <b>{count} teist</b> eemaldati grupist.",
   "groupRemovedTwo": "<b>{name}</b> ja <b>{other_name}</b> eemaldati grupist.",
@@ -639,24 +639,24 @@
   "passwordSet": "Määra parool",
   "passwordSetDescription": "Teie parool on määratud. Hoidke seda turvaliselt.",
   "paste": "Aseta",
-  "permissionMusicAudioDenied": "{app_name} vajab muusika ja audio juurdepääsu failide, muusika ja audio saatmiseks, kuid see on jäädavalt keelatud. Puudutage Seaded -> Load, ja lülitage \"Muusika ja audio\" sisse.",
+  "permissionMusicAudioDenied": "{app_name} vajab muusika ja audio juurdepääsu failide, muusika ja audio saatmiseks, kuid see on jäädavalt keelatud. Puudutage Seaded → Load, ja lülitage \"Muusika ja audio\" sisse.",
   "permissionsAppleMusic": "{app_name} vajab Apple Musici kasutamist, et esitada meediamanuseid.",
   "permissionsAutoUpdate": "Automaatne uuendus",
   "permissionsAutoUpdateDescription": "Kontrolli automaatselt uuendusi käivitamisel",
-  "permissionsCameraDenied": "{app_name} vajab kaamera ligipääsu fotode ja videote tegemiseks, kuid sellele on püsivalt keeldutud. Puuduta sätteid -> Õigused ja lülita \"Kaamera\" sisse.",
+  "permissionsCameraDenied": "{app_name} vajab kaamera ligipääsu fotode ja videote tegemiseks, kuid sellele on püsivalt keeldutud. Puuduta sätteid → Õigused ja lülita \"Kaamera\" sisse.",
   "permissionsFaceId": "{app_name} ekraaniluku funktsioon kasutab Face ID-d.",
   "permissionsKeepInSystemTray": "Jäta süsteemisalve",
   "permissionsKeepInSystemTrayDescription": "{app_name} jätkab taustal töötamist, kui sulgete akna",
   "permissionsLibrary": "{app_name} vajab juurdepääsu fototeegile. Saate lubada juurdepääsu iOS-i seadetes.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} vajab mikrofoni ligipääsu, et teha kõnesid ja saata helisõnumeid, kuid sellele on püsivalt keeldutud. Puuduta sätteid -> Õigused ja lülita \"Mikrofon\" sisse.",
+  "permissionsMicrophoneAccessRequired": "{app_name} vajab mikrofoni ligipääsu, et teha kõnesid ja saata helisõnumeid, kuid sellele on püsivalt keeldutud. Puuduta sätteid → Õigused ja lülita \"Mikrofon\" sisse.",
   "permissionsMicrophoneAccessRequiredDesktop": "Mikrofoni juurdepääsu saate lubada {app_name}'i privaatsussätetes",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} vajab mikrofoni juurdepääsu, et teha kõnesid ja salvestada helisõnumeid.",
   "permissionsMicrophoneDescription": "Luba ligipääs mikrofonile.",
   "permissionsMusicAudio": "{app_name} vajab muusika ja audio juurdepääsu failide, muusika ja audio saatmiseks.",
   "permissionsRequired": "Luba on vajalik",
-  "permissionsStorageDenied": "{app_name} vajab fotoalbumi ligipääsu, et saata fotosid ja videosid, kuid sellele on püsivalt keeldutud. Puuduta sätteid -> Õigused ja lülita \"Fotod ja videod\" sisse.",
-  "permissionsStorageDeniedLegacy": "{app_name} vajab salvestusruumi ligipääsu, et saata ja salvestada manuseid. Puuduta sätteid -> Õigused ja lülita \"Salvestus\" sisse.",
+  "permissionsStorageDenied": "{app_name} vajab fotoalbumi ligipääsu, et saata fotosid ja videosid, kuid sellele on püsivalt keeldutud. Puuduta sätteid → Õigused ja lülita \"Fotod ja videod\" sisse.",
+  "permissionsStorageDeniedLegacy": "{app_name} vajab salvestusruumi ligipääsu, et saata ja salvestada manuseid. Puuduta sätteid → Õigused ja lülita \"Salvestus\" sisse.",
   "permissionsStorageSave": "{app_name} vajab salvestusruumi ligipääsu, et salvestada manuseid ja meediat.",
   "permissionsStorageSaveDenied": "{app_name} vajab fotode ja videote salvestamiseks juurdepääsu salvestusruumile, kuid see on jäädavalt keelatud. Jätkake rakenduse sätetes, valige \"Load\" ja lubage \"Salvestusruum\".",
   "permissionsStorageSend": "{app_name} vajab fotode ja videote saatmiseks juurdepääsu salvestusruumile.",
@@ -773,7 +773,7 @@
   "updateError": "Ei saa uuendada",
   "updateErrorDescription": "{app_name} uuendamine ebaõnnestus. Palune avage {session_download_url} ja installige uus versioon käsitsi, seejärel võtke ühendust meie Klienditoega, et sellest probleemist teatada.",
   "updateNewVersion": "Uus versioon {app_name} on saadaval, uuendamiseks puuduta",
-  "updateNewVersionDescription": "Uus versioon {app_name} on saadaval. ",
+  "updateNewVersionDescription": "Uus versioon {app_name} on saadaval.",
   "updateReleaseNotes": "Mine väljalaskemärkmete juurde",
   "updateSession": "{app_name} Uuendus",
   "updateVersion": "Versioon {version}",
