--- a/_locales/eu/messages.json
+++ b/_locales/eu/messages.json
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "<b>{name}</b> eta <b>{count} beste batzuk</b> <b>{group_name}</b>-tik kendu nahi dituzu?",
   "groupRemoveDescriptionTwo": "<b>{name}</b> eta <b>{other_name}</b> <b>{group_name}</b>-tik kendu nahi dituzu?",
   "groupRemoveMessages": "{count, plural, one [Erabiltzailea eta haien mezuak kendu] other [Erabiltzaileak eta haien mezuak kendu]}",
-  "groupRemoveUserOnly": "{count, plural, one [Erabiltzailea kendu ] other [Erabiltzaileak kendu]}",
+  "groupRemoveUserOnly": "{count, plural, one [Erabiltzailea kendu] other [Erabiltzaileak kendu]}",
   "groupRemoved": "<b>{name}</b> taldetik kendu da.",
   "groupRemovedMultiple": "<b>{name}</b> eta <b>{count} beste</b> taldetik kendu ziren.",
   "groupRemovedTwo": "<b>{name}</b> eta <b>{other_name}</b> taldetik kendu ziren.",
@@ -639,28 +639,28 @@
   "passwordSet": "Pasahitza ezarri",
   "passwordSetDescription": "Zure pasahitza ezarri da. Gorde seguru batean.",
   "paste": "Itsatsi",
-  "permissionMusicAudioDenied": "{app_name}(e)k musika eta audio sarbidea behar du fitxategiak, musika eta audioak bidaltzeko, baina behin betiko ukatu da. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Musika eta audioak\".",
+  "permissionMusicAudioDenied": "{app_name}(e)k musika eta audio sarbidea behar du fitxategiak, musika eta audioak bidaltzeko, baina behin betiko ukatu da. Ezarpenak ukitu → Baimenak, eta aktibatu \"Musika eta audioak\".",
   "permissionsAppleMusic": "{app_name}(e)k Apple Music erabiltzea behar du hedabide eranskinak erreproduzitzeko.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup",
-  "permissionsCameraDenied": "{app_name}(e)k kameraren sarbidea behar du argazkiak eta bideoak ateratzeko, baina behin betiko ukatu da. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Kamera\".",
+  "permissionsCameraDenied": "{app_name}(e)k kameraren sarbidea behar du argazkiak eta bideoak ateratzeko, baina behin betiko ukatu da. Ezarpenak ukitu → Baimenak, eta aktibatu \"Kamera\".",
   "permissionsFaceId": "{app_name}-ko pantaila blokeatzearen funtzioak Face ID erabiltzen du.",
   "permissionsKeepInSystemTray": "Aplikazioa Sistemako Erretiluan Gorde",
   "permissionsKeepInSystemTrayDescription": "{app_name}(e)k lanean jarraitzen du atzealdean leihoa ixten duzunean",
   "permissionsLibrary": "{app_name}(e)k argazki liburutegira sartzeko baimena behar du jarraitzeko. Sarbidea aktiba dezakezu iOS-eko ezarpenetan.",
   "permissionsMicrophone": "Mikrofonoa",
-  "permissionsMicrophoneAccessRequired": "{app_name}(e)k mikrofonoaren sarbidea behar du deiak egiteko eta audio mezuak bidaltzeko, baina behin betiko ukatu da. Sakatu ezarpenak -> Baimenak, eta piztu \"Mikrofonoa\".",
+  "permissionsMicrophoneAccessRequired": "{app_name}(e)k mikrofonoaren sarbidea behar du deiak egiteko eta audio mezuak bidaltzeko, baina behin betiko ukatu da. Sakatu ezarpenak → Baimenak, eta piztu \"Mikrofonoa\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Mikrofonoaren sarbidea gaitu dezakezu {app_name}-eko pribatutasun ezarpenetan",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}(e)k mikrofonoaren sarbidea behar du deiak egiteko eta audio mezuak grabatzeko.",
   "permissionsMicrophoneDescription": "Mikrofonoa erabiltzeko baimena.",
   "permissionsMusicAudio": "{app_name}(e)k musika eta audio sarbidea behar du fitxategiak, musika eta audioak bidaltzeko.",
   "permissionsRequired": "Baimena beharrezkoa",
-  "permissionsStorageDenied": "{app_name}(e)k argazki bilduma bisitatzeko sarbidea behar du argazkiak eta bideoak bidaltzeko, baina behin betiko ukatu da. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Argazkiak eta bideoak\".",
-  "permissionsStorageDeniedLegacy": "{app_name}(e)k biltegiratze sarbidea behar du erantsitako fitxategiak bidaltzeko eta gordetzeko. Ezarpenak ukitu -> Baimenak, eta aktibatu \"Biltegiratzea\".",
+  "permissionsStorageDenied": "{app_name}(e)k argazki bilduma bisitatzeko sarbidea behar du argazkiak eta bideoak bidaltzeko, baina behin betiko ukatu da. Ezarpenak ukitu → Baimenak, eta aktibatu \"Argazkiak eta bideoak\".",
+  "permissionsStorageDeniedLegacy": "{app_name}(e)k biltegiratze sarbidea behar du erantsitako fitxategiak bidaltzeko eta gordetzeko. Ezarpenak ukitu → Baimenak, eta aktibatu \"Biltegiratzea\".",
   "permissionsStorageSave": "{app_name}(e)k biltegirako sarbidea behar du eranskinak eta hedabideak gordetzeko.",
   "permissionsStorageSaveDenied": "{app_name}(e)k biltegirako sarbidea behar du argazkiak eta bideoak gordetzeko, baina behin betiko ukatu da. Mesedez jarraitu aplikazioa ezarpenetara, aukeratu \"Permissions\", eta aktibatu \"Storage\".",
   "permissionsStorageSend": "{app_name}(e)k biltegirako sarbidea behar du argazkiak eta bideoak bidaltzeko.",
-  "pin": "Ainguratu ",
+  "pin": "Ainguratu",
   "pinConversation": "Elkarrizketa ainguratu",
   "pinUnpin": "Despintatu",
   "pinUnpinConversation": "Despintatu Elkarrizketa",
