--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -224,7 +224,7 @@
   "conversationsAutoplayAudioMessage": "پخش خودکار پیام‌های صوتی",
   "conversationsAutoplayAudioMessageDescription": "پخش خودکار پیام‌های صوتی پشت‌سرهم",
   "conversationsBlockedContacts": "مخاطبین مسدودشده",
-  "conversationsCommunities": "انجمن‌ها ",
+  "conversationsCommunities": "انجمن‌ها",
   "conversationsDelete": "حذف مکالمه",
   "conversationsDeleteDescription": "آیا مطمئن هستید که می‌خواهید مکالمه خود را با <b>{name}‍</b> حذف کنید؟ پیام‌های جدید از <b>{name}</b> یک مکالمه جدید را شروع می‌کنند.",
   "conversationsDeleted": "مکالمه حذف شد",
@@ -427,7 +427,7 @@
   "groupRemoveDescriptionMultiple": "آیا می‌خواهید <b>{name}</b> و <b>{count} نفر دیگر</b> را از <b>{group_name}</b> حذف کنید؟",
   "groupRemoveDescriptionTwo": "آیا می‌خواهید <b>{name}</b> و <b>{other_name}</b> را از <b>{group_name}</b> حذف کنید؟",
   "groupRemoveMessages": "{count, plural, one [کاربر و پیام هایش را حذف کنید] other [کاربران و پیام هایشان را حذف کنید]}",
-  "groupRemoveUserOnly": "{count, plural, one [کاربر را حذف کنید ] other [کاربران را حذف کنید]}",
+  "groupRemoveUserOnly": "{count, plural, one [کاربر را حذف کنید] other [کاربران را حذف کنید]}",
   "groupRemoved": "<b>{name}</b> از گروه حذف شد.",
   "groupRemovedMultiple": "<b>{name}</b> و <b>{count} نفر دیگر</b> از گروه حذف شدند.",
   "groupRemovedTwo": "<b>{name}</b> و <b>{other_name}</b> از گروه حذف شدند.",
@@ -636,24 +636,24 @@
   "passwordSet": "تنظیم رمز عبور",
   "passwordSetDescription": "رمز عبور شما فعال شد. لطفا آن را در جای امنی ذخیره کنید.",
   "paste": "پیست",
-  "permissionMusicAudioDenied": "{app_name} برای فرستادن فایل، آهنگ و صوت نیاز به دسترسی به آهنگ و صدا دارد، اما این دسترسی به طور دائم رد شده است. به تنظیمات -> مجوز‌ها رفته و «صدا و آهنگ» را فعال کنید.",
+  "permissionMusicAudioDenied": "{app_name} برای فرستادن فایل، آهنگ و صوت نیاز به دسترسی به آهنگ و صدا دارد، اما این دسترسی به طور دائم رد شده است. به تنظیمات → مجوز‌ها رفته و «صدا و آهنگ» را فعال کنید.",
   "permissionsAppleMusic": "{app_name} باید از Apple Music برای پخش پیوست‌های رسانه‌ای استفاده کند.",
   "permissionsAutoUpdate": "آپدیت خودکار",
   "permissionsAutoUpdateDescription": "به طور خودکار وضعیت بروزرسانی را در هنگام اجرا شدن برنامه بررسی کن",
-  "permissionsCameraDenied": "{app_name} برای گرفتن عکس‌ و ویدئو‌ نیاز به دسترسی دوربین دارد، اما این دسترسی به طور دائم رد شده است. به تنظیمات -> مجوز‌ها رفته و «دوربین» را فعال کنید.",
+  "permissionsCameraDenied": "{app_name} برای گرفتن عکس‌ و ویدئو‌ نیاز به دسترسی دوربین دارد، اما این دسترسی به طور دائم رد شده است. به تنظیمات → مجوز‌ها رفته و «دوربین» را فعال کنید.",
   "permissionsFaceId": "ویژگی قفل صفحه در {app_name} از Face ID استفاده می‌کند.",
   "permissionsKeepInSystemTray": "در ناحيه سمت راستِ task bar نگه دارید",
   "permissionsKeepInSystemTrayDescription": "{app_name} با بستن پنجره، همچنان در پس‌زمینه اجرا می‌شود.",
   "permissionsLibrary": "{app_name} برای ادامه نیاز به دسترسی به گالری عکس دارد. می‌توانید دسترسی را در تنظیمات iOS فعال کنید.",
   "permissionsMicrophone": "میکروفون",
-  "permissionsMicrophoneAccessRequired": "{app_name} به دسترسی به میکروفون نیاز دارد تا بتواند مکالمه را اغاز کند و پیام های صوتی بفرستد اما دسترسی به صورت دایمی سلب شده است. روی تنظیمات > بزنید سپس روی اجازه ها بزنید و گزینه ی میکروفون را فعال کنید.",
+  "permissionsMicrophoneAccessRequired": "{app_name} به دسترسی به میکروفون نیاز دارد تا بتواند مکالمه را اغاز کند و پیام های صوتی بفرستد اما دسترسی به صورت دایمی سلب شده است. روی تنظیمات→بزنید سپس روی اجازه ها بزنید و گزینه ی میکروفون را فعال کنید.",
   "permissionsMicrophoneAccessRequiredDesktop": "شما می‌توانید دسترسی میکروفون را در تنظیمات حریم خصوصی {app_name} فعال کنید",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} برای برقراری تماس و ضبط پیام‌های صوتی نیاز به دسترسی میکروفن دارد.",
   "permissionsMicrophoneDescription": "اجازه دسترسی به میکروفون را بدهید.",
   "permissionsMusicAudio": "{app_name} برای فرستادن فایل، آهنگ و صوت نیازمند دسترسی به صوت و آهنگ است.",
   "permissionsRequired": "مجوز لازم است",
-  "permissionsStorageDenied": "{app_name} به اجازه دسترسی به کتابخانه عکس نیاز دارد تا شما بتوانید عکس ها و ویدیو ها را ارسال کنید. اما این دسترسی به طور دایم سلب شده است. روی تنظیمات> بزنید سپس مجوزها را انتخاب کنید و \"عکس ها و ویدیوها\" را روشن کنید.",
-  "permissionsStorageDeniedLegacy": "{app_name} به مجوز ذخیره کردن نیاز دارد تا شما بتوانید فایل های ضمیمه را ارسال و ذخیره کنید. روی تنظیمات > بزنید سپس مجوز ها را باز کنید و \"ذخیره کردن\" را فعال کنید.",
+  "permissionsStorageDenied": "{app_name} به اجازه دسترسی به کتابخانه عکس نیاز دارد تا شما بتوانید عکس ها و ویدیو ها را ارسال کنید. اما این دسترسی به طور دایم سلب شده است. روی تنظیمات← بزنید سپس مجوزها را انتخاب کنید و \"عکس ها و ویدیوها\" را روشن کنید.",
+  "permissionsStorageDeniedLegacy": "{app_name} به مجوز ذخیره کردن نیاز دارد تا شما بتوانید فایل های ضمیمه را ارسال و ذخیره کنید. روی تنظیمات→بزنید سپس مجوز ها را باز کنید و \"ذخیره کردن\" را فعال کنید.",
   "permissionsStorageSave": "{app_name} برای ذخیره پیوست‌ها و رسانه‌ها نیاز به دسترسی به حافظه دارد.",
   "permissionsStorageSaveDenied": "{app_name} برای ذخیره عکس‌ها و ویدئوها نیاز به دسترسی حافظه دارد، اما این دسترسی به طور دائم رد شده است. لطفاً به تنظیمات برنامه رفته، «مجوز‌ها» را انتخاب و «حافظه» را فعال کنید.",
   "permissionsStorageSend": "{app_name} برای ارسال عکس‌ها و ویدئو‌ها نیاز به دسترسی حافظه دارد.",
