--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -640,28 +640,28 @@
   "passwordSet": "Aseta salasana",
   "passwordSetDescription": "Salasanasi on asetettu. Pidä se turvassa.",
   "paste": "Liitä",
-  "permissionMusicAudioDenied": "{app_name} tarvitsee pääsyn musiikkiin ja ääniin, jotta se voi lähettää tiedostoja, musiikkia ja ääntä, mutta pääsy on pysyvästi estetty. Napauta Asetukset -> Luvat ja salli \"Musiikki ja äänet\".",
+  "permissionMusicAudioDenied": "{app_name} tarvitsee pääsyn musiikkiin ja ääniin, jotta se voi lähettää tiedostoja, musiikkia ja ääntä, mutta pääsy on pysyvästi estetty. Napauta Asetukset → Luvat ja salli \"Musiikki ja äänet\".",
   "permissionsAppleMusic": "{app_name} tarvitsee käyttää Apple Musiikkia mediasisältöjen toistamiseen.",
   "permissionsAutoUpdate": "Automaattinen päivitys",
   "permissionsAutoUpdateDescription": "Tarkista päivitykset automaattisesti käynnistäessä",
-  "permissionsCameraDenied": "{app_name} tarvitsee kameran käyttöoikeuden kuvien ja videoiden ottamiseksi, mutta oikeus on evätty pysyvästi. Napauta Asetukset -> Käyttöoikeudet ja kytke \"Kamera\" päälle.",
+  "permissionsCameraDenied": "{app_name} tarvitsee kameran käyttöoikeuden kuvien ja videoiden ottamiseksi, mutta oikeus on evätty pysyvästi. Napauta Asetukset → Käyttöoikeudet ja kytke \"Kamera\" päälle.",
   "permissionsFaceId": "Näytön lukitusominaisuus {app_name} käyttää Face ID:tä.",
   "permissionsKeepInSystemTray": "Säilytä tehtäväpalkin ilmoitusalueella",
   "permissionsKeepInSystemTrayDescription": "{app_name} pysyy käynnissä taustalla, kun suljet ikkunan",
   "permissionsLibrary": "{app_name} tarvitsee pääsyn valokuvakirjastoon jatkaakseen. Voit sallia käyttöoikeuden iOS:n asetuksista.",
   "permissionsMicrophone": "Mikrofoni",
-  "permissionsMicrophoneAccessRequired": "{app_name} tarvitsee mikrofonin käyttöoikeuden puheluiden soittamiseen ja ääniviestien lähettämiseen, mutta käyttöoikeus on evätty pysyvästi. Napauta Asetukset > Käyttöoikeudet ja ota käyttöön \"Mikrofoni\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} tarvitsee mikrofonin käyttöoikeuden puheluiden soittamiseen ja ääniviestien lähettämiseen, mutta käyttöoikeus on evätty pysyvästi. Napauta Asetukset → Käyttöoikeudet ja ota käyttöön \"Mikrofoni\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Voit antaa mikrofonin käyttöoikeuden {app_name}:n yksityisyysasetuksista",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} tarvitsee mikrofonin käyttöoikeuden puheluiden soittamiseen ja ääniviestien nauhoittamiseen.",
   "permissionsMicrophoneDescription": "Myönnä mikrofonin käyttöoikeus.",
   "permissionsMusicAudio": "{app_name} tarvitsee musiikki- ja äänioikeudet voidakseen lähettää tiedostoja, musiikkia ja ääntä.",
   "permissionsRequired": "Tarvitaan käyttöoikeus",
-  "permissionsStorageDenied": "{app_name} tarvitsee pääsyn valokuvakirjastoon, jotta voit lähettää valokuvia ja videoita, mutta lupa on evätty pysyvästi. Napauta Asetukset -> Luvat ja laita \"Valokuvat ja videot\" päälle.",
-  "permissionsStorageDeniedLegacy": "{app_name} tarvitsee tallennustilan käyttöoikeuden, jotta voit lähettää ja tallentaa liitteitä. Napauta Asetukset -> Luvat ja laita \"Tallennustila\" päälle.",
+  "permissionsStorageDenied": "{app_name} tarvitsee pääsyn valokuvakirjastoon, jotta voit lähettää valokuvia ja videoita, mutta lupa on evätty pysyvästi. Napauta Asetukset → Luvat ja laita \"Valokuvat ja videot\" päälle.",
+  "permissionsStorageDeniedLegacy": "{app_name} tarvitsee tallennustilan käyttöoikeuden, jotta voit lähettää ja tallentaa liitteitä. Napauta Asetukset → Luvat ja laita \"Tallennustila\" päälle.",
   "permissionsStorageSave": "{app_name} tarvitsee tallennustilan käyttöoikeuden liitteiden ja median tallentamiseksi.",
   "permissionsStorageSaveDenied": "{app_name} tarvitsee tallennustilan käyttöoikeuden kuvien ja videoiden tallentamiseksi, mutta käyttöoikeus on evätty pysyvästi. Jatka sovellusasetuksiin, valitse \"Käyttöoikeudet\" ja ota käyttöön \"Tallennustila\".",
   "permissionsStorageSend": "{app_name} tarvitsee tallennustilan käyttöoikeuden kuvien ja videoiden lähettämiseksi.",
-  "pin": "Kiinnitä ",
+  "pin": "Kiinnitä",
   "pinConversation": "Kiinnitä keskustelu",
   "pinUnpin": "Irrota",
   "pinUnpinConversation": "Irroita keskustelu",
