--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Ilagay ang pangalan ng grupo",
   "groupNameEnterPlease": "Pakisuyong ilagay ang pangalan ng grupo.",
   "groupNameEnterShorter": "Pakisuyong maglagay ng pinaikling pangalan ng grupo.",
-  "groupNameNew": "Ang pangalan ng grupo ngayon ay {group_name}. ",
+  "groupNameNew": "Ang pangalan ng grupo ngayon ay {group_name}.",
   "groupNameUpdated": "Na-update na ang pangalan ng grupo.",
   "groupNoMessages": "Wala kang mga mensahe mula sa <b>{group_name}.</b> Magpadala ng mensahe para simulan ang pag-uusap!",
   "groupOnlyAdmin": "Ikaw lang ang admin sa <b>{group_name}</b>.<br/><br/>Hindi maaaring baguhin ang mga miyembro ng grupo at mga settings kung walang admin.",
@@ -639,24 +639,24 @@
   "passwordSet": "Maglagay ng Password",
   "passwordSetDescription": "Nabago na ang iyong password. Pakisuyong itago ito.",
   "paste": "Idikit",
-  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "Kinakailangang magamit ng {app_name} ang Apple Music upang magpatugtog ng mga media attachment.",
   "permissionsAutoUpdate": "Awtomatikong mag-uupdate",
   "permissionsAutoUpdateDescription": "Awtomatikong tingnan ang mga update sa startup",
-  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Camera\" on.",
+  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "Ang screen lock feature ng {app_name} ay gumagamit ng Face ID.",
   "permissionsKeepInSystemTray": "Ilagay sa System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} ay patuloy na gumagana sa background kapag isinara mo ang window",
   "permissionsLibrary": "Ang {app_name} ay nangangailangan ng access sa photo library upang magpatuloy. Maari mong paganahin ang access sa mga setting ng iOS.",
   "permissionsMicrophone": "Mikropono",
-  "permissionsMicrophoneAccessRequired": "{app_name} ay nangangailangan ng access sa mikropono upang gumawa ng mga tawag at magpadala ng mga mensaheng audio, ngunit ito ay permanenteng tinanggihan. Tapikin ang mga setting -> Mga Pahintulot, at buksan ang \"Mikropono\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} ay nangangailangan ng access sa mikropono upang gumawa ng mga tawag at magpadala ng mga mensaheng audio, ngunit ito ay permanenteng tinanggihan. Tapikin ang mga setting → Mga Pahintulot, at buksan ang \"Mikropono\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Puwede mong i-enable ang access ng mikropono sa privacy settings ng {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "Ang {app_name} ay nangangailangan ng access sa mikropono upang tumawag at mag-record ng mga mensaheng audio.",
   "permissionsMicrophoneDescription": "Payagan ang access sa microphone.",
   "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
   "permissionsRequired": "Kinakailangang Pahintulot",
-  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
-  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Photos and videos\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "Ang {app_name} ay nangangailangan ng access sa storage upang mag-save ng mga attachment at media.",
   "permissionsStorageSaveDenied": "Ang {app_name} ay nangangailangan ng access sa storage upang mag-save ng mga litrato at video, ngunit ito ay permanenteng tinanggihan. Magpatuloy sa mga setting ng app, piliin ang \"Permissions\", at paganahin ang \"Storage\".",
   "permissionsStorageSend": "Ang {app_name} ay nangangailangan ng access sa storage upang magpadala ng mga litrato at video.",
@@ -773,7 +773,7 @@
   "updateError": "Hindi Magupdate",
   "updateErrorDescription": "Nabigo ang {app_name} na mag-update. Pumunta sa {session_download_url} at i-install ang bagong bersyon manu-mano, pagkatapos ay makipag-ugnay sa aming Help Center para ipaalam sa amin ang problemang ito.",
   "updateNewVersion": "May bagong bersyon ng {app_name} na magagamit, i-tap para i-update",
-  "updateNewVersionDescription": "May bagong bersyon ng {app_name} na magagamit. ",
+  "updateNewVersionDescription": "May bagong bersyon ng {app_name} na magagamit.",
   "updateReleaseNotes": "Pumunta sa Release Notes",
   "updateSession": "Update ng {app_name}",
   "updateVersion": "Version {version}",
