--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -380,7 +380,7 @@
   "groupNameEnter": "Introduce o nome do grupo",
   "groupNameEnterPlease": "Por favor, introduce un nome de grupo.",
   "groupNameEnterShorter": "Introduce un nome de grupo máis curto, por favor.",
-  "groupNameNew": "Agora o nome do grupo é {group_name}. ",
+  "groupNameNew": "Agora o nome do grupo é {group_name}.",
   "groupNameUpdated": "Nome do grupo actualizado.",
   "groupNoMessages": "Non tes mensaxes de <b>{group_name}</b>. ¡Envía unha mensaxe para comezar a conversación!",
   "groupOnlyAdmin": "Es o único admin en <b>{group_name}</b>.<br/><br/>Os membros do grupo e a configuración non se poden cambiar sen un administrador.",
@@ -388,6 +388,7 @@
   "groupRemoveDescription": "Querés eliminar a <b>{name}</b> de <b>{group_name}?</b>",
   "groupRemoveDescriptionMultiple": "Querés eliminar a <b>{name}</b> e a <b>{count} máis</b> de <b>{group_name}?</b>",
   "groupRemoveDescriptionTwo": "Querés eliminar a <b>{name}</b> e a <b>{other_name}</b> de <b>{group_name}?</b>",
+  "groupRemoveUserOnly": "{count, plural, one [Eliminar usuario] other [Eliminar usuarios]}",
   "groupRemoved": "<b>{name}</b> foi eliminado do grupo.",
   "groupRemovedMultiple": "<b>{name}</b> e <b>{count} máis</b> foron eliminados do grupo.",
   "groupRemovedTwo": "<b>{name}</b> e <b>{other_name}</b> foron eliminados do grupo.",
@@ -587,7 +588,7 @@
   "permissionsStorageSave": "{app_name} necesita permiso para acceder ao almacenamento para gardar anexos e medios.",
   "permissionsStorageSaveDenied": "{app_name} necesita permiso para acceder ao almacenamento para gardar fotos e vídeos, pero foi denegado de forma permanente. Vai aos axustes da aplicación, selecciona \"Permisos\" e activa \"Almacenamento\".",
   "permissionsStorageSend": "{app_name} necesita permiso para acceder ao almacenamento para enviar fotos e vídeos.",
-  "pin": "Fixar ",
+  "pin": "Fixar",
   "pinConversation": "Fixar Conversa",
   "pinUnpin": "Desfixar",
   "pinUnpinConversation": "Desfixar conversa",
