--- a/_locales/ha/messages.json
+++ b/_locales/ha/messages.json
@@ -14,7 +14,7 @@
   "actualSize": "Girman Gaskiya",
   "add": "Ƙara",
   "adminCannotBeRemoved": "Ba za a iya cire masu kula ba.",
-  "adminMorePromotedToAdmin": " <b>{name} </b> da <b>{count} wasu</b> an tayar musu zuwa Admin.",
+  "adminMorePromotedToAdmin": "<b>{name} </b> da <b>{count} wasu</b> an tayar musu zuwa Admin.",
   "adminPromote": "Haɓɓaka Admins",
   "adminPromoteDescription": "Ka tabbata kana so ka ƙara <b>{name}</b> a matsayin admin? Admin ba za a iya cirewa ba.",
   "adminPromoteMoreDescription": "Ka tabbata kana so ka ƙara <b>{name}</b> da <b>wasu {count} </b> a matsayin admin? Admin ba za a iya cirewa ba.",
@@ -147,7 +147,7 @@
   "callsNotificationsRequired": "Kiran Muryar da Bidiyo yana bukatar sanarwa su kasance a kunnane a cikin saitunan tsarin na'urarka.",
   "callsPermissionsRequired": "Ana bukatar Izinin Kira",
   "callsPermissionsRequiredDescription": "Za ku iya kunna damar \"Kiraye-Kirayen Murya da Bidiyo\" a cikin Saitunan Sirri.",
-  "callsReconnecting": "Ana haɗawa da... ",
+  "callsReconnecting": "Ana haɗawa da...",
   "callsRinging": "Ana kara kira...",
   "callsSessionCall": "{app_name} Kira",
   "callsSettings": "Kira (Beta)",
@@ -269,7 +269,7 @@
   "deleteAfterGroupPR3GroupErrorLeave": "Ba za a iya barin lokacin ƙara ko cire membobin ba.",
   "deleteAfterLegacyDisappearingMessagesLegacy": "Tarihi",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Nau'in sakonnin ɓacewa na asali.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": " <b>{name} </b> ya sa mai ƙidaya saƙon wucewa zuwa <b>{time}</b>.",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} </b> ya sa mai ƙidaya saƙon wucewa zuwa <b>{time}</b>.",
   "deleteAfterLegacyGroupsGroupCreation": "Da fatan za a jira yayin da ake ƙirƙirar ƙungiyar...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "An kasa Sabunta Ƙungiya",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Ba ku da izinin share saƙonnin wasu",
@@ -289,7 +289,7 @@
   "deleteMessagesDescriptionEveryone": "Kana tabbata kana so ka share waɗannan saƙonnin don kowa?",
   "deleting": "Ana gogewa",
   "developerToolsToggle": "Sauya Kayan Koya na Developer",
-  "dictationStart": "Fara Rubutun... ",
+  "dictationStart": "Fara Rubutun...",
   "disappearingMessages": "Saƙonnin Bacewa",
   "disappearingMessagesCountdownBig": "Saƙo zai gogewa a {time_large}",
   "disappearingMessagesCountdownBigMobile": "Za a goge kai tsaye a cikin {time_large}",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Za ku so a cire <b>{name}</b> da <b>{count} wasu</b> daga <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Za ku so a cire <b>{name}</b> da <b>{other_name}</b> daga <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Cire mai amfani da saƙonnin su] other [Cire masu amfani da saƙonninsu]}",
-  "groupRemoveUserOnly": "{count, plural, one [Cire mai amfani ] other [Cire masu amfani]}",
+  "groupRemoveUserOnly": "{count, plural, one [Cire mai amfani] other [Cire masu amfani]}",
   "groupRemoved": "<b>{name}</b> an cire shi daga ƙungiyar.",
   "groupRemovedMultiple": "<b>{name} </b> da<b>{count} wasu</b> an cire su daga ƙungiyar.",
   "groupRemovedTwo": "<b>{name}</b> da <b>{other_name}</b> an cire su daga ƙungiyar.",
@@ -639,24 +639,24 @@
   "passwordSet": "Saita Kalmar Sirri",
   "passwordSetDescription": "An saita kalmar sirrinku. Da fatan za a kiyaye shi lafiya.",
   "paste": "Manna",
-  "permissionMusicAudioDenied": "{app_name} yana buƙatar samun damar amfani da kiɗi da sauti don aika fayiloli, kiɗi da sauti, amma an haramta shi dindindin. Danna Saituna -> Izini, kuma kunna \"Kiɗi da sauti\".",
+  "permissionMusicAudioDenied": "{app_name} yana buƙatar samun damar amfani da kiɗi da sauti don aika fayiloli, kiɗi da sauti, amma an haramta shi dindindin. Danna Saituna → Izini, kuma kunna \"Kiɗi da sauti\".",
   "permissionsAppleMusic": "{app_name} yana buƙatar amfani da Apple Music don kunna abin haɗe-haɗen kafofin watsa labarai.",
   "permissionsAutoUpdate": "Sabanin Kai tsaye",
   "permissionsAutoUpdateDescription": "Duba sabuntawa kai tsaye lokacin farawa",
-  "permissionsCameraDenied": "{app_name} yana buƙatar samun damar kyamara don ɗaukar hotuna da bidiyo, amma an haramta shi dindindin. Danna Saituna -> Izini, kuma kunna \"Kyamara\".",
+  "permissionsCameraDenied": "{app_name} yana buƙatar samun damar kyamara don ɗaukar hotuna da bidiyo, amma an haramta shi dindindin. Danna Saituna → Izini, kuma kunna \"Kyamara\".",
   "permissionsFaceId": "Tsarin kulle allo akan {app_name} yana amfani da Face ID.",
   "permissionsKeepInSystemTray": "Ci gaba da aiki a System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} yana ci gaba da gudana a bango lokacin da ka rufe taga",
   "permissionsLibrary": "{app_name} yana buƙatar samun damar ɗakin hoto don ci gaba. Za ku iya kunna dama a cikin saitin iOS.",
   "permissionsMicrophone": "Makirufo",
-  "permissionsMicrophoneAccessRequired": "{app_name} yana buƙatar samun damar makirufo don yin kira da aika saƙonnin murya, amma an haramta shi dindindin. Danna saituna -> Izini, kuma kunna \"Makirufo\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} yana buƙatar samun damar makirufo don yin kira da aika saƙonnin murya, amma an haramta shi dindindin. Danna saituna → Izini, kuma kunna \"Makirufo\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Za ku iya kunna damar amfani da makirufo a saitin sirrin {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} yana buƙatar samun damar makirufo don yin kira da rikodin saƙonnin murya.",
   "permissionsMicrophoneDescription": "Bada damar amfani da makirufo.",
   "permissionsMusicAudio": "{app_name} yana buƙatar samun damar amfani da kiɗi da sauti don aika fayiloli, kiɗi da sauti.",
   "permissionsRequired": "Ana bukatar izini",
-  "permissionsStorageDenied": "{app_name} yana buƙatar samun damar ɗakin hotuna don samun damar aika hotuna da bidiyo, amma an haramta shi dindindin. Danna Saituna -> Izini, kuma kunna \"Hotuna da bidiyo\".",
-  "permissionsStorageDeniedLegacy": "{app_name} yana buƙatar samun damar ajiya don samun damar aika da ajiye haɗe-haɗe. Danna Saituna -> Izini, kuma kunna \"Ajiya\".",
+  "permissionsStorageDenied": "{app_name} yana buƙatar samun damar ɗakin hotuna don samun damar aika hotuna da bidiyo, amma an haramta shi dindindin. Danna Saituna → Izini, kuma kunna \"Hotuna da bidiyo\".",
+  "permissionsStorageDeniedLegacy": "{app_name} yana buƙatar samun damar ajiya don samun damar aika da ajiye haɗe-haɗe. Danna Saituna → Izini, kuma kunna \"Ajiya\".",
   "permissionsStorageSave": "{app_name} yana buƙatar samun damar ajiya don adana abubuwan haɗe-haɗe da kafofin watsa labarai.",
   "permissionsStorageSaveDenied": "{app_name} yana buƙatar samun damar ajiya don adana hotuna da bidiyo, amma an haramta shi dindindin. Da fatan za a ci gaba da saitin app, zaɓi \"Izini\", kuma kunna \"Ajiya\".",
   "permissionsStorageSend": "{app_name} yana buƙatar samun damar ajiya don aikawa da hotuna da bidiyo.",
@@ -773,7 +773,7 @@
   "updateError": "Ba za a iya sabunta ba",
   "updateErrorDescription": "{app_name} alhali tace wajen sabunta. Da fatan za a je zuwa {session_download_url} ku shigar da sabon sigar hannu, sannan a tuntuɓi Cibiyar Taimakonmu don sanar da wannan matsalar.",
   "updateNewVersion": "Sabon sigar {app_name} yana nan, danna don sabuntawa.",
-  "updateNewVersionDescription": "Sabuwar sigar {app_name} yana nan. ",
+  "updateNewVersionDescription": "Sabuwar sigar {app_name} yana nan.",
   "updateReleaseNotes": "Je zuwa Bayanan Saki",
   "updateSession": "Sabon {app_name}",
   "updateVersion": "Siga {version}",
