--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "הזן שם קבוצה",
   "groupNameEnterPlease": "אנא הזן את שם הקבוצה.",
   "groupNameEnterShorter": "אנא הזן שם קצר יותר לקבוצה.",
-  "groupNameNew": "שם הקבוצה עכשיו הוא {group_name}. ",
+  "groupNameNew": "שם הקבוצה עכשיו הוא {group_name}.",
   "groupNameUpdated": "שם הקבוצה עודכן",
   "groupNoMessages": "אין לך הודעות מ<b>{group_name}.</b> שלח הודעה כדי להתחיל את השיחה!",
   "groupOnlyAdmin": "את/ה המנהל/ת היחיד/ה ב-<b>{group_name}</b>.<br/><br/>חברי הקבוצה וההגדרות לא יכולים להשתנות ללא מנהל/ת.",
@@ -639,28 +639,28 @@
   "passwordSet": "הגדר סיסמה",
   "passwordSetDescription": "הסיסמה שלך הוגדרה. שמור עליה בבטחה.",
   "paste": "הדבק",
-  "permissionMusicAudioDenied": "{app_name} זקוק לגישה למוזיקה ואודיו על מנת לשלוח קבצים, מוזיקה ואודיו, אבל היא נדחתה לצמיתות. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} זקוק לגישה למוזיקה ואודיו על מנת לשלוח קבצים, מוזיקה ואודיו, אבל היא נדחתה לצמיתות. Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "{app_name} זקוק ל-Apple Music כדי להפעיל צרופות מדיה.",
   "permissionsAutoUpdate": "עדכון אוטומטי",
   "permissionsAutoUpdateDescription": "בדיקה אוטומטית לעדכונים בעת הפעלה",
-  "permissionsCameraDenied": "{app_name} צריך את הרשאת המצלמה כדי לצלם תצלומים או וידיאו, אבל היא נדחתה לצמיתות. Tap Settings -> Permissions, and turn \"Camera\" on.",
+  "permissionsCameraDenied": "{app_name} צריך את הרשאת המצלמה כדי לצלם תצלומים או וידיאו, אבל היא נדחתה לצמיתות. Tap Settings → Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "תכונת נעילת המסך ב-{app_name} משתמשת בזיהוי פנים.",
   "permissionsKeepInSystemTray": "שמור במגש המערכת",
   "permissionsKeepInSystemTrayDescription": "{app_name} ממשיך לפעול ברקע כאשר אתה סוגר את החלון",
   "permissionsLibrary": "{app_name} זקוק להרשאות לספריית תמונות כדי להמשיך. אתה יכול לאפשר גישה בהגדרות של iOS.",
   "permissionsMicrophone": "מיקרופון",
-  "permissionsMicrophoneAccessRequired": "{app_name} דורש גישה למיקרופון כדי לבצע שיחות ולשלוח הודעות שמע, אך הגישה נדחתה לצמיתות. הקש על הגדרות -> הרשאות, והפעל את \"מיקרופון\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} דורש גישה למיקרופון כדי לבצע שיחות ולשלוח הודעות שמע, אך הגישה נדחתה לצמיתות. הקש על הגדרות → הרשאות, והפעל את \"מיקרופון\".",
   "permissionsMicrophoneAccessRequiredDesktop": "תוכל/י לאפשר גישה למיקרופון בהגדרות הפרטיות של {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} צריך הרשאת מיקרופון לשיחות ולהודעות שמע.",
   "permissionsMicrophoneDescription": "אפשרו גישה למיקרופון.",
   "permissionsMusicAudio": "{app_name} זקוק לגישה למוזיקה ואודיו על מנת לשלוח קבצים, מוזיקה ואודיו.",
   "permissionsRequired": "דרושה הרשאה",
-  "permissionsStorageDenied": "{app_name} דורש גישה לספריית התמונות בכדי לשלוח תמונות וסרטונים, אך הגישה נדחתה לצמיתות. הקש על הגדרות -> הרשאות, והפעל \"תמונות וסרטונים\".",
-  "permissionsStorageDeniedLegacy": "{app_name} דורש גישה לאחסון בכדי לשלוח ולשמור קבצים. הקש על הגדרות -> הרשאות, והפעל \"אחסון\".",
+  "permissionsStorageDenied": "{app_name} דורש גישה לספריית התמונות בכדי לשלוח תמונות וסרטונים, אך הגישה נדחתה לצמיתות. הקש על הגדרות → הרשאות, והפעל \"תמונות וסרטונים\".",
+  "permissionsStorageDeniedLegacy": "{app_name} דורש גישה לאחסון בכדי לשלוח ולשמור קבצים. הקש על הגדרות → הרשאות, והפעל \"אחסון\".",
   "permissionsStorageSave": "{app_name} זקוק לגישה לאחסון כדי לשמור צרופות ומדיה.",
   "permissionsStorageSaveDenied": "{app_name} זקוק לגישה לאחסון כדי לשמור תמונות ווידיאו, אבל היא נדחתה לצמיתות. המשך להגדרות האפליקציה, בחר \"הרשאות\" והפעל את \"אחסון\".",
   "permissionsStorageSend": "{app_name} צריך הרשאות גישה לאחסון על מנת לשלוח תמונות ווידיאו.",
-  "pin": "נעץ ",
+  "pin": "נעץ",
   "pinConversation": "נעץ שיחה",
   "pinUnpin": "בטל נעיצה",
   "pinUnpinConversation": "בטל נעיצה של שיחה",
