--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -144,7 +144,7 @@
   "callsIncomingUnknown": "Dolazni poziv",
   "callsMissed": "Propušten poziv",
   "callsMissedCallFrom": "Propušten poziv od {name}",
-  "callsNotificationsRequired": "Audio i video pozivi zahtijevaju omogućene obavijesti u postavkama sustava uređaja. ",
+  "callsNotificationsRequired": "Audio i video pozivi zahtijevaju omogućene obavijesti u postavkama sustava uređaja.",
   "callsPermissionsRequired": "Potrebna dopuštenja poziva",
   "callsPermissionsRequiredDescription": "Možete omogućiti dopuštenje za „Audio i Video pozive” u Postavkama privatnosti.",
   "callsReconnecting": "Ponovno povezivanje...",
@@ -464,7 +464,7 @@
   "leave": "Napusti",
   "leaving": "Odlazak...",
   "legacyGroupMemberNew": "<b>{name}</b> se pridružio grupi.",
-  "legacyGroupMemberNewMultiple": "<b>{name} <b>i</b> <b>{count} drugi</b> pridružili su se grupi.",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> i <b>{count} drugi</b> pridružili su se grupi.",
   "legacyGroupMemberNewYouMultiple": "<b>Vi</b> i <b>{count} drugi</b> pridružili ste se grupi.",
   "legacyGroupMemberNewYouOther": "<b>Vi</b> i <b>{other_name}</b> ste se pridružili grupi.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> i <b>{other_name}</b> pridružili su se grupi.",
@@ -639,24 +639,24 @@
   "passwordSet": "Postavi lozinku",
   "passwordSetDescription": "Vaša lozinka je postavljena. Molimo, čuvajte je na sigurnom.",
   "paste": "Zalijepi",
-  "permissionMusicAudioDenied": "{app_name} treba pristup glazbi i zvuku kako bi mogao slati datoteke, glazbu i zvuk, no to je sada trajno onemogućeno. Tap Settings -> Permissions, i uključite \"Glazba i zvuk\".",
+  "permissionMusicAudioDenied": "{app_name} treba pristup glazbi i zvuku kako bi mogao slati datoteke, glazbu i zvuk, no to je sada trajno onemogućeno. Tap Settings → Permissions, i uključite \"Glazba i zvuk\".",
   "permissionsAppleMusic": "{app_name} treba koristiti Apple Music za reprodukciju medijskih privitaka.",
   "permissionsAutoUpdate": "Automatsko ažuriranje",
   "permissionsAutoUpdateDescription": "Automatski provjeri ažuriranja pri pokretanju",
-  "permissionsCameraDenied": "{app_name} treba pristup kameri za snimanje fotografija i videozapisa, no to je sada trajno onemogućeno. Tap Settings -> Permissions, i uključite \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} treba pristup kameri za snimanje fotografija i videozapisa, no to je sada trajno onemogućeno. Tap Settings → Permissions, i uključite \"Kamera\".",
   "permissionsFaceId": "Funkcija zaključavanja zaslona na {app_name} koristi Face ID.",
   "permissionsKeepInSystemTray": "Zadrži u System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} nastavlja raditi u pozadini kada zatvorite prozor",
   "permissionsLibrary": "{app_name} treba pristup vašoj fototeci da bi nastavio. Možete omogućiti pristup u postavkama iOS-a.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} treba pristup mikrofonu za obavljanje poziva i slanje audio poruka, no to je sada trajno onemogućeno. Idite na postavke -> Dopuštenja i uključite \"Mikrofon\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} treba pristup mikrofonu za obavljanje poziva i slanje audio poruka, no to je sada trajno onemogućeno. Idite na postavke → Dopuštenja i uključite \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Možete omogućiti pristup mikrofonu u postavkama privatnosti {app_name}.",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} treba pristup mikrofonu za obavljanje poziva i snimanje audio poruka.",
   "permissionsMicrophoneDescription": "Dozvoli pristup mikrofonu.",
   "permissionsMusicAudio": "{app_name} treba pristup glazbi i zvuku kako bi mogao slati datoteke, glazbu i zvuk.",
   "permissionsRequired": "Potrebno dopuštenje",
-  "permissionsStorageDenied": "{app_name} treba pristup vašoj fototeci kako bi mogli slati fotografije i video, ali je trajno onemogućen. Idite na Postavke -> Dozvole i uključite ''Fotografije i video''.",
-  "permissionsStorageDeniedLegacy": "{app_name} treba pristup spremištu kako biste mogli slati i pohranjivati privitke. Idite na Postavke -> Dozvole i uključite ''Spremište''.",
+  "permissionsStorageDenied": "{app_name} treba pristup vašoj fototeci kako bi mogli slati fotografije i video, ali je trajno onemogućen. Idite na Postavke → Dozvole i uključite ''Fotografije i video''.",
+  "permissionsStorageDeniedLegacy": "{app_name} treba pristup spremištu kako biste mogli slati i pohranjivati privitke. Idite na Postavke → Dozvole i uključite ''Spremište''.",
   "permissionsStorageSave": "{app_name} treba pristup memoriji za spremanje privitaka i medija.",
   "permissionsStorageSaveDenied": "{app_name} treba pristup memoriji za spremanje fotografija i videozapisa, no to je sada trajno onemogućeno. Molimo vas da u postavkama aplikacije odaberete \"Dopuštenja\" i omogućite \"Memorija\".",
   "permissionsStorageSend": "{app_name} treba pristup memoriji za slanje fotografija i videozapisa.",
