--- a/_locales/hy-AM/messages.json
+++ b/_locales/hy-AM/messages.json
@@ -83,7 +83,7 @@
   "attachmentsExpired": "Կցորդը ժամկետանց է",
   "attachmentsFileId": "Ֆայլ ID:",
   "attachmentsFileSize": "Ֆայլի չափսը՝",
-  "attachmentsFileType": "Ֆայլի տեսակ: ",
+  "attachmentsFileType": "Ֆայլի տեսակ:",
   "attachmentsFilesEmpty": "Դուք այս զրույցում ֆայլեր չունեք։",
   "attachmentsImageErrorMetadata": "Չհաջողվեց հեռացնել մետատվյալները ֆայլից։",
   "attachmentsLoadingNewer": "Բեռնվում են նոր մեդիա ֆայլերը...",
@@ -367,7 +367,7 @@
   "file": "Ֆայլ",
   "files": "Ֆայլեր",
   "followSystemSettings": "Հետևել համակարգի կարգավորումներին",
-  "from": "Ուղարկող: ",
+  "from": "Ուղարկող:",
   "fullScreenToggle": "Միացնել ամբողջ էկրանը",
   "gif": "Գիֆ",
   "giphyWarning": "Giphy",
@@ -419,8 +419,8 @@
   "groupNameEnter": "Մուտքագրեք խմբի անուն",
   "groupNameEnterPlease": "Խնդրում ենք մուտքագրել խմբի անունը:",
   "groupNameEnterShorter": "Խնդրում ենք մուտքագրել ավելի կարճ խմբի անուն:",
-  "groupNameNew": "Խմբի անունը այժմ {group_name} է: ",
-  "groupNameUpdated": "Խմբի անունը թարմացվել է: ",
+  "groupNameNew": "Խմբի անունը այժմ {group_name} է:",
+  "groupNameUpdated": "Խմբի անունը թարմացվել է:",
   "groupNoMessages": "Դուք չունեք հաղորդագրություններ <b>{group_name}</b>֊ից։ Ուղարկեք հաղորդագրություն խոսակցությունը սկսելու համար։",
   "groupOnlyAdmin": "Դուք այս խմբի միակ ադմինն եք <b>{group_name}</b>։<br/><br/>Խմբի անդամներն ու կարգավորումները չեն կարող փոխվել առանց ադմին։",
   "groupPromotedYou": "<b>Դուք</b> բարձրացվել եք որպես ադմին:",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Ցանկանո՞ւմ եք հեռացնել <b>{name}</b>-ին և <b>{count} այլ անձանց</b> <b>{group_name}</b>-ից։",
   "groupRemoveDescriptionTwo": "Ցանկանո՞ւմ եք հեռացնել <b>{name}</b>-ին և <b>{other_name}</b>-ին <b>{group_name}</b> խմբից։",
   "groupRemoveMessages": "{count, plural, one [Հեռացնել օգտատիրոջը և նրանց հաղորդագրությունները] other [Հեռացնել օգտատերերին և նրանց հաղորդագրությունները]}",
-  "groupRemoveUserOnly": "{count, plural, one [Հեռացնել օգտատիրոջը ] other [Հեռացնել օգտատերերին]}",
+  "groupRemoveUserOnly": "{count, plural, one [Հեռացնել օգտատիրոջը] other [Հեռացնել օգտատերերին]}",
   "groupRemoved": "<b>{name}</b> հեռացվել է խմբից:",
   "groupRemovedMultiple": "<b>{name}֊ը</b> և <b>{count} ուրիշներ</b> հեռացվել են խմբից:",
   "groupRemovedTwo": "<b>{name}֊ը</b> և <b>{other_name}֊ը</b> հեռացվել են խմբից:",
@@ -639,28 +639,28 @@
   "passwordSet": "Սահմանել գաղտնաբառը",
   "passwordSetDescription": "Ձեր գաղտնաբառը սահմանվել է։ Խնդրում ենք անվտանգ պահել։",
   "paste": "Տեղադրել",
-  "permissionMusicAudioDenied": "{app_name}-ը պահանջում է երաժշտության և աուդիո հասանելիությունը ֆայլեր, երաժշտություն և աուդիո ուղարկելու համար, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Երաժշտություն և աուդիո\" կարգավորումը:",
+  "permissionMusicAudioDenied": "{app_name}-ը պահանջում է երաժշտության և աուդիո հասանելիությունը ֆայլեր, երաժշտություն և աուդիո ուղարկելու համար, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ → Թույլտվություններ և միացրեք \"Երաժշտություն և աուդիո\" կարգավորումը:",
   "permissionsAppleMusic": "{app_name}-ը պետք է օգտագործի Apple Music՝ մեդիա կցորդները նվագարկելու համար։",
   "permissionsAutoUpdate": "Ավտոմատ թարմացում",
   "permissionsAutoUpdateDescription": "Ինքնաբերաբար ստուգել թարմացումները գործարկման ժամանակ",
-  "permissionsCameraDenied": "{app_name}-ը պահանջում է տեսախցիկի հասանելիությունը, որպեսզի կարողանաք լուսանկարներ և տեսանյութեր անել, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Տեսախցիկ\" կարգավորումը:",
+  "permissionsCameraDenied": "{app_name}-ը պահանջում է տեսախցիկի հասանելիությունը, որպեսզի կարողանաք լուսանկարներ և տեսանյութեր անել, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ → Թույլտվություններ և միացրեք \"Տեսախցիկ\" կարգավորումը:",
   "permissionsFaceId": "{app_name}-ի էկրանային կողպման հատկությունը օգտագործում է Face ID:",
   "permissionsKeepInSystemTray": "Պահել System Tray-ում",
   "permissionsKeepInSystemTrayDescription": "{app_name} շարունակում է աշխատել ֆոնային ռեժիմում, երբ դուք փակում եք պատուհանը",
   "permissionsLibrary": "{app_name}-ը պետք է հասանելիություն ունենա լուսանկարների գրադարանին՝ շարունակելու համար։ Դուք կարող եք միացնել հասանելիությունը iOS կարգավորումների մեջ։",
   "permissionsMicrophone": "Խոսափող",
-  "permissionsMicrophoneAccessRequired": "{app_name}-ը պահանջում է խոսափողի թույլտվություն զանգեր կատարելու և ձայնային հաղորդագրություններ ուղարկելու համար, բայց այն ընդմիշտ մերժվել է: Անջատեք կարգավորումները -> Թույլտվությունները, և միացրեք «Խոսափող»։",
+  "permissionsMicrophoneAccessRequired": "{app_name}-ը պահանջում է խոսափողի թույլտվություն զանգեր կատարելու և ձայնային հաղորդագրություններ ուղարկելու համար, բայց այն ընդմիշտ մերժվել է: Անջատեք կարգավորումները → Թույլտվությունները, և միացրեք «Խոսափող»։",
   "permissionsMicrophoneAccessRequiredDesktop": "Դուք կարող եք միացնել միկրոֆոնի հասանելիությունը {app_name} գաղտնիության կարգավորումներով",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}-ը պահանջում է խոսափողին հասանելիություն զանգեր կատարելու և ձայնային հաղորդագրություններ արձանագրելու համար։",
   "permissionsMicrophoneDescription": "Թույլատրել խոսափողի մուտքը:",
   "permissionsMusicAudio": "{app_name}-ը պահանջում է երաժշտության և աուդիո հասանելիությունը ֆայլեր, երաժշտություն և աուդիո ուղարկելու համար:",
   "permissionsRequired": "Անհրաժեշտ է թույլտվություն",
-  "permissionsStorageDenied": "{app_name}-ը պահանջում է ֆոտո գրադարանի հասանելիությունը, որպեսզի կարողանաք ուղարկել նկարներ և տեսանյութեր, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Նկարներ և տեսանյութեր\" կարգավորումը:",
-  "permissionsStorageDeniedLegacy": "{app_name}-ը պահանջում է պահեստավորման հասանելիությունը, որպեսզի կարողանաք ուղարկել և պահել կցորդները: Սեղմեք Կարգավորումներ -> Թույլտվություններ և միացրեք \"Պահեստավորում\" կարգավորումը:",
+  "permissionsStorageDenied": "{app_name}-ը պահանջում է ֆոտո գրադարանի հասանելիությունը, որպեսզի կարողանաք ուղարկել նկարներ և տեսանյութեր, սակայն թույլտվությունը մշտապես մերժված է: Սեղմեք Կարգավորումներ → Թույլտվություններ և միացրեք \"Նկարներ և տեսանյութեր\" կարգավորումը:",
+  "permissionsStorageDeniedLegacy": "{app_name}-ը պահանջում է պահեստավորման հասանելիությունը, որպեսզի կարողանաք ուղարկել և պահել կցորդները: Սեղմեք Կարգավորումներ → Թույլտվություններ և միացրեք \"Պահեստավորում\" կարգավորումը:",
   "permissionsStorageSave": "{app_name}-ը պահանջում է պահեստային հասանելիություն կցորդներն ու մեդիան պահպանելու համար։",
   "permissionsStorageSaveDenied": "{app_name}-ը պահանջում է պահպանման հասանելիություն՝ լուսանկարներ և տեսանյութեր պահելու համար, բայց այն ընդմիշտ մերժվել է: Խնդրում ենք շարունակել դեպի հավելվածի կարգավորումներ, ընտրել «Թույլտվություններ», և միացնել «Պահեստավորում»։",
   "permissionsStorageSend": "{app_name}-ը պահանջում է պահեստային հասանելիություն՝ լուսանկարներ և տեսանյութեր ուղարկելու համար։",
-  "pin": "Ամրացնել ",
+  "pin": "Ամրացնել",
   "pinConversation": "Ամրացնել զրույցը",
   "pinUnpin": "Արձակել",
   "pinUnpinConversation": "Ապամրացնել զրույցը",
@@ -773,7 +773,7 @@
   "updateError": "Հնարավոր չէ թարմացնել",
   "updateErrorDescription": "{app_name}-ը չի կարողացել թարմանալ: Խնդրում ենք անցեք {session_download_url} և ձեռքով տեղադրեք նոր տարբերակը, ապա դիմեք մեր Օգնության կենտրոնին՝ մեզ այս խնդրի մասին տեղեկացնելու համար։",
   "updateNewVersion": "Հասանելի է {app_name} նոր տարբերակը, սեղմեք թարմացնելու համար",
-  "updateNewVersionDescription": "Հասանելի է {app_name} նոր տարբերակը: ",
+  "updateNewVersionDescription": "Հասանելի է {app_name} նոր տարբերակը:",
   "updateReleaseNotes": "Կարդացեք թողարկման նշումները",
   "updateSession": "{app_name}-ի Թարմացում",
   "updateVersion": "Տարբերակ {version}",
