--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Masukkan nama grup",
   "groupNameEnterPlease": "Masukkan nama grup.",
   "groupNameEnterShorter": "Masukkan nama grup yang lebih pendek.",
-  "groupNameNew": "Nama grup sekarang '{group_name}'. ",
+  "groupNameNew": "Nama grup sekarang '{group_name}'.",
   "groupNameUpdated": "Nama grup diperbarui.",
   "groupNoMessages": "Tidak ada pesan dari <b>{group_name}</b>. Kirim pesan untuk memulai percakapan!",
   "groupOnlyAdmin": "Anda adalah satu-satunya admin di <b>{group_name}</b>.<br/><br/>Anggota grup dan pengaturan tidak dapat diubah tanpa admin.",
@@ -639,24 +639,24 @@
   "passwordSet": "Atur Kata Sandi",
   "passwordSetDescription": "Kata sandi anda telah disetel. Harap untuk menjaganya.",
   "paste": "Tempel",
-  "permissionMusicAudioDenied": "{app_name} memerlukan akses musik dan audio untuk mengirim file, musik, dan audio, tapi sudah ditolak secara permanen. Ketuk Setelan -> Perizinan, dan aktifkan \"Musik dan audio\".",
+  "permissionMusicAudioDenied": "{app_name} memerlukan akses musik dan audio untuk mengirim file, musik, dan audio, tapi sudah ditolak secara permanen. Ketuk Setelan → Perizinan, dan aktifkan \"Musik dan audio\".",
   "permissionsAppleMusic": "{app_name} membutuhkan Apple Music untuk memutar lampiran media.",
   "permissionsAutoUpdate": "Pembaruan Otomatis",
   "permissionsAutoUpdateDescription": "Secara otomatis cek pembaruan saat startup",
-  "permissionsCameraDenied": "{app_name} memerlukan akses kamera untuk mengambil foto dan video, tapi telah ditolak secara permanen. Ketuk Setelan -> Perizinan, dan aktifkan \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} memerlukan akses kamera untuk mengambil foto dan video, tapi telah ditolak secara permanen. Ketuk Setelan → Perizinan, dan aktifkan \"Kamera\".",
   "permissionsFaceId": "Fitur kunci layar pada {app_name} menggunakan Face ID.",
   "permissionsKeepInSystemTray": "Simpan di System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} bekerja di background ketika anda menutup jendela",
   "permissionsLibrary": "{app_name} membutuhkan akses perpustakaan foto untuk melanjutkan. Anda dapat mengaktifkan akses di pengaturan iOS.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} memerlukan akses mikrofon untuk melakukan panggilan dan mengirim pesan audio, tetapi izin ini telah ditolak secara permanen. Ketuk setelan -> Perizinan, dan aktifkan \"Mikrofon\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} memerlukan akses mikrofon untuk melakukan panggilan dan mengirim pesan audio, tetapi izin ini telah ditolak secara permanen. Ketuk setelan → Perizinan, dan aktifkan \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Anda dapat mengaktifkan akses mikrofon di pengaturan privasi {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} membutuhkan akses mikrofon untuk melakukan panggilan dan merekam pesan audio.",
   "permissionsMicrophoneDescription": "Izinkan akses ke mikrofon.",
   "permissionsMusicAudio": "{app_name} memerlukan akses musik dan audio untuk mengirim file, musik, dan audio.",
   "permissionsRequired": "Izin dibutuhkan",
-  "permissionsStorageDenied": "{app_name} memerlukan akses pustaka foto agar Anda dapat mengirim foto dan video, tapi telah ditolak secara permanen. Ketuk Setelan -> Perizinan, dan aktifkan \"Foto dan video\".",
-  "permissionsStorageDeniedLegacy": "{app_name} memerlukan akses penyimpanan agar Anda dapat mengirim dan menyimpan lampiran. Ketuk Setelan -> Izin, lalu aktifkan \"Penyimpanan\".",
+  "permissionsStorageDenied": "{app_name} memerlukan akses pustaka foto agar Anda dapat mengirim foto dan video, tapi telah ditolak secara permanen. Ketuk Setelan → Perizinan, dan aktifkan \"Foto dan video\".",
+  "permissionsStorageDeniedLegacy": "{app_name} memerlukan akses penyimpanan agar Anda dapat mengirim dan menyimpan lampiran. Ketuk Setelan → Izin, lalu aktifkan \"Penyimpanan\".",
   "permissionsStorageSave": "{app_name} membutuhkan akses penyimpanan untuk menyimpan lampiran dan media.",
   "permissionsStorageSaveDenied": "{app_name} membutuhkan akses penyimpanan untuk menyimpan foto dan video, tetapi telah ditolak secara permanen. Silakan lanjutkan ke pengaturan aplikasi, pilih \"Izin\", dan aktifkan \"Penyimpanan\".",
   "permissionsStorageSend": "{app_name} membutuhkan akses penyimpanan untuk mengirim foto dan video.",
