--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -144,7 +144,7 @@
   "callsIncomingUnknown": "შემომავალი ზარი",
   "callsMissed": "გამოტოვებული ზარი",
   "callsMissedCallFrom": "{name} -გან გამოტოვებული ზარი",
-  "callsNotificationsRequired": "ხმოვან და ვიდეო ზარებს სჭირდება ინფორმაცია ჩართვისთვის თქვენს სისტემის პარამეტრებში. ",
+  "callsNotificationsRequired": "ხმოვან და ვიდეო ზარებს სჭირდება ინფორმაცია ჩართვისთვის თქვენს სისტემის პარამეტრებში.",
   "callsPermissionsRequired": "ზარის უფლებების მოთხოვნა",
   "callsPermissionsRequiredDescription": "თქვენ შეგიძლიათ ჩართოთ \"ხმოვანი და ვიდეო ზარების\" უფლება კონფიდენციალობის პარამეტრებში.",
   "callsReconnecting": "კვლავ დაკავშირება…",
@@ -419,7 +419,7 @@
   "groupNameEnter": "შეიყვანეთ ჯგუფის სახელი",
   "groupNameEnterPlease": "გთხოვთ შეიყვანოთ ჯგუფის სახელი.",
   "groupNameEnterShorter": "გთხოვთ შეიყვანოთ მოკლე ჯგუფის სახელი.",
-  "groupNameNew": "ჯგუფის სახელი ახლა არის {group_name}. ",
+  "groupNameNew": "ჯგუფის სახელი ახლა არის {group_name}.",
   "groupNameUpdated": "ჯგუფის სახელი განახლდა.",
   "groupNoMessages": "თქვენ არ გექნებათ მესიჯები <b>{group_name}</b> ჯგუფიდან. მესიჯი გაგზავნეთ საუბრის დასაწყებად!",
   "groupOnlyAdmin": "თქვენ ხართ ერთადერთი ადმინისტრატორი <b>{group_name}</b>-ში.<br/><br/>ჯგუფის წევრების და პარამეტრების შეცვლა შეუძლებელია ადმინისტრატორის გარეშე.",
@@ -639,24 +639,24 @@
   "passwordSet": "პაროლის მითითება",
   "passwordSetDescription": "თქვენი პაროლი დაყენებულია. გთხოვთ, შეინახეთ იგი უსაფრთხოდ.",
   "paste": "ჩასმა",
-  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "{app_name}-ს სჭირდება Apple Music-ის გამოყენება მედიამიკრძურბების სათამაშოდ.",
   "permissionsAutoUpdate": "ავტომატური განახლება",
   "permissionsAutoUpdateDescription": "ავტომატურად შეამოწმეთ განახლებები პროგრამის ჩართვისას",
-  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Camera\" on.",
+  "permissionsCameraDenied": "{app_name} needs camera access to take photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "ეკრანის დაბლოკვის ფუნქცია {app_name}-ზე იყენებს Face ID-ს",
   "permissionsKeepInSystemTray": "შეინახეთ სისტემურ უჯრაში",
   "permissionsKeepInSystemTrayDescription": "{app_name} განაგრძობს მუშაობას ფონის რეჟიმში, როდესაც ფანჯარას დახურავთ",
   "permissionsLibrary": "{app_name}-ს სჭირდება ფოტო ბიბლიოთეკის წვდომა გასაგრძელებლად. შეგიძლიათ ჩართოთ წვდომა iOS პარამეტრებში.",
   "permissionsMicrophone": "მიკროფონი",
-  "permissionsMicrophoneAccessRequired": "{app_name}-ს სჭირდება მიკროფონის წვდომა ზარების განსახორციელებლად და აუდიო შეტყობინებების გასაგზავნად, მაგრამ იგი სამუდამოდ იქნა უარეზული. გადადით პარამეტრებში -> Permissions და ჩართეთ \"Microphone\".",
+  "permissionsMicrophoneAccessRequired": "{app_name}-ს სჭირდება მიკროფონის წვდომა ზარების განსახორციელებლად და აუდიო შეტყობინებების გასაგზავნად, მაგრამ იგი სამუდამოდ იქნა უარეზული. გადადით პარამეტრებში → Permissions და ჩართეთ \"Microphone\".",
   "permissionsMicrophoneAccessRequiredDesktop": "თქვენ შეგიძლიათ ჩართოთ მიკროფონის ხელმისაწვდომობა {app_name}-ის კონფიდენციალობის პარამეტრებში",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}-ს სჭირდება მიკროფონის წვდომა ზარების შესასრულებლად და აუდიო შეტყობინებების ჩასაწერად.",
   "permissionsMicrophoneDescription": "დაშვება მიკროფონის წვდომა.",
   "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
   "permissionsRequired": "საჭიროა უფლებები",
-  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
-  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Photos and videos\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name}-ს სჭირდება მეხსიერების წვდომა მიმაგრებული ფაილებისა და მედიების შესანახად.",
   "permissionsStorageSaveDenied": "{app_name}-ს სჭირდება მეხსიერების წვდომა ფოტოებისა და ვიდეოების შესანახად, მაგრამ იგი სამუდამოდ იქნა უარეზული. გთხოვთ გადადეთ აპლიკაციის პარამეტრებში, აირჩიეთ \"Permissions\" და ჩართეთ \"Storage\".",
   "permissionsStorageSend": "{app_name}-ს სჭირდება მეხსიერების წვდომა ფოტოებისა და ვიდეოების გასაგზავნად.",
