--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -14,7 +14,7 @@
   "actualSize": "ទំហំជាក់ស្តែង",
   "add": "បន្ថែម",
   "adminCannotBeRemoved": "អ្នកគ្រប់គ្រងមិនអាចត្រូវបានដកចេញ។",
-  "adminMorePromotedToAdmin": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> ត្រូវណានបិស្មីជា Admin។",
+  "adminMorePromotedToAdmin": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍ ត្រូវណានបិស្មីជា Admin។",
   "adminPromote": "ដំណើរការអ្នកគ្រប់គ្រង",
   "adminPromoteDescription": "តើអ្នកប្រាកដទេថាចង់ដាក់តំណែង <b>{name}</b> ឲ្យជាអ្នកគ្រប់គ្រង? អ្នកគ្រប់គ្រងមិនអាចដកចេញបានទេ។",
   "adminPromoteMoreDescription": "តើអ្នកប្រាកដទេថាចង់ដាក់តំណែង <b>{name}</b> និង <b>{count} នាក់ផ្សេងទៀត</b> ឲ្យជាអ្នកគ្រប់គ្រង? អ្នកគ្រប់គ្រងមិនអាចដកចេញបានទេ។",
@@ -402,7 +402,6 @@
   "groupLeaveErrorFailed": "បរាជ័យក្នុងការចាកចេញពី {group_name}",
   "groupLegacyBanner": "ក្រុមបានធ្វើឱ្យប្រសើរឡើង បង្កើតក្រុមថ្មីដើម្បីធ្វើឱ្យប្រសើរ។ មុខងារក្រុមចាស់នឹងត្រូវបានបន្ទោរបង់ចាប់ពី {date}។",
   "groupMemberLeft": "<b>{name}‍</b> បានចាកចេញពីក្រុមនេះ។",
-  "groupMemberLeftMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> បន ចាចកេញីក្រុមនេះ។",
   "groupMemberLeftTwo": "<b>{name}‍</b> និង <b>{other_name}‍</b> បានចាកចេញពីក្រុមនេះ។",
   "groupMemberNew": "<b>{name}‍</b>បន ចូលក្រុម។",
   "groupMemberNewHistory": "<b>{name}</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។បានចែករំលែកប្រវត្តិការជជែក។",
@@ -419,7 +418,7 @@
   "groupNameEnter": "បញ្ចូលឈ្មោះក្រុម",
   "groupNameEnterPlease": "សូមបញ្ចូលឈ្មោះក្រុម.",
   "groupNameEnterShorter": "សូមបញ្ចូលឈ្មោះក្រុមខ្លីជាងនេះ",
-  "groupNameNew": "ឈ្មោះក្រុមឥឡូវគឺ {group_name}. ",
+  "groupNameNew": "ឈ្មោះក្រុមឥឡូវគឺ {group_name}.",
   "groupNameUpdated": "ឈ្មោះក្រុមត្រូវបានធ្វើបច្ចុប្បន្នភាព។",
   "groupNoMessages": "អ្នកមិនមានសារទីពី <b>{group_name}</b>។ ផ្ញើសារមួយដើម្បីចាប់ផ្តើមការសន្ទនា!",
   "groupOnlyAdmin": "អ្នកគឺជាអ្នកគ្រប់គ្រងតែម្នាក់ប៉ុណ្ណោះនៅក្នុង <b>{group_name}</b>។<br/><br/>សមាជិកក្រុមនិងការកំណត់មិនអាចផ្លាស់ប្តូរបានទេផុតពីអ្នកគ្រប់គ្រង។",
@@ -432,7 +431,7 @@
   "groupRemoveMessages": "{count, plural, other [ដកអ្នកប្រើនិងសាររបស់ពួកគេ]}",
   "groupRemoveUserOnly": "{count, plural, other [ដកអ្នកប្រើ]}",
   "groupRemoved": "<b>{name}‍</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
-  "groupRemovedMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> ត្រូវណាដកចេញេញីក្រុមនេះ។",
+  "groupRemovedMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍ ត្រូវណាដកចេញេញីក្រុមនេះ។",
   "groupRemovedTwo": "<b>{name}‍</b> និង <b>{other_name}‍</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
   "groupRemovedYou": "អ្នកត្រូវបានយកចេញពី <b>{group_name}</b>។",
   "groupRemovedYouMultiple": "<b>អ្នក</b> និង <b>{count} គេផ្សេងទៀត</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
@@ -464,7 +463,7 @@
   "leave": "ចាកចេញ",
   "leaving": "កំពុងចាកចេញ...",
   "legacyGroupMemberNew": "<b>{name}</b> បានចូលក្រុម។",
-  "legacyGroupMemberNewMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> បន ចូលក្រុម។",
+  "legacyGroupMemberNewMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍ បន ចូលក្រុម។",
   "legacyGroupMemberNewYouMultiple": "<b>អ្នក</b> និង <b>{count} គេផ្សេងទៀត</b> បានចូលក្រុម។",
   "legacyGroupMemberNewYouOther": "<b>អ្នក</b> និង <b>{other_name}</b> បានចូលក្រុម។",
   "legacyGroupMemberTwoNew": "<b>{name}‍</b> និង <b>{other_name}‍</b> បន ចូលក្រុម។",
@@ -598,7 +597,7 @@
   "onboardingAccountExists": "ខ្ញុំមានគណនីមួយ",
   "onboardingBackAccountCreation": "អ្នកមិនអាចថយក្រោយបន្ថែមទៀតបានទេ។ ដើម្បីបោះបង់ការបង្កើតគណនី {app_name} ត្រូវទាំងបញ្ចប់ផ្នែកនេះ។",
   "onboardingBackLoadAccount": "អ្នកមិនអាចថយក្រោយបន្ថែមទៀតបានទេ។ ដើម្បីបញ្ឈប់ការរុករកគណនីរបស់អ្នក {app_name} ត្រូវបញ្ចប់។",
-  "onboardingBubbleCreatingAnAccountIsEasy": "ការបង្កើតគណនីគឺមានភ្លាមៗ, \roofសាន្ត និងមិនបង្ហាញអត្តសញ្ញាណ {emoji}",
+  "onboardingBubbleCreatingAnAccountIsEasy": "ការបង្កើតគណនីគឺមានភ្លាមៗ, \noofសាន្ត និងមិនបង្ហាញអត្តសញ្ញាណ {emoji}",
   "onboardingBubbleNoPhoneNumber": "អ្នកមិនចាំបាច់ចូលប្រព័ន្ធទៅតាមលេខលេខទូរស័ព្ទទេ.",
   "onboardingBubblePrivacyInYourPocket": "ឯកជនភាពនៅក្នុងហោប៉ៅរបស់អ្នក។",
   "onboardingBubbleSessionIsEngineered": "{app_name} ត្រូវបានបង្កើតឡើងដើម្បីការពារភាពឯកជនរបស់អ្នក។",
@@ -639,28 +638,28 @@
   "passwordSet": "កំណត់ពាក្យសម្ងាត់",
   "passwordSetDescription": "ពាក្យសម្ងាត់របស់អ្នកត្រូវបានកំណត់។ សូមរក្សាវាឲ្យមានសុវត្ថិភាព។",
   "paste": "បិទភ្ជាប់",
-  "permissionMusicAudioDenied": "{app_name} ត្រូវការការចូលប្រើតន្ត្រី និងសម្លេង ដើម្បីផ្ញើឯកសារ តន្ត្រី និងសម្លេង ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ ចុច ការកំណត់ -> សិទ្ធិ និងបើក \"តន្ត្រី និងសម្លេង\"។",
+  "permissionMusicAudioDenied": "{app_name} ត្រូវការការចូលប្រើតន្ត្រី និងសម្លេង ដើម្បីផ្ញើឯកសារ តន្ត្រី និងសម្លេង ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ ចុច ការកំណត់ → សិទ្ធិ និងបើក \"តន្ត្រី និងសម្លេង\"។",
   "permissionsAppleMusic": "{app_name} ត្រូវការប្រើប្រាស់ Apple Music ដើម្បីចាក់មេឌៀភ្ជាប់",
   "permissionsAutoUpdate": "ធ្វើបច្ចុប្បន្នភាពដោយស្វ័យប្រវត្តិ",
   "permissionsAutoUpdateDescription": "ពិនិត្យដោយស្វ័យប្រវត្តិសម្រាប់ការធ្វើបច្ចុប្បន្នភាពនៅពេលចាប់ផ្តើម។",
-  "permissionsCameraDenied": "{app_name} ត្រូវការសិទ្ធិកាមេរ៉ាដើម្បីថតរូប និងវិដេអូ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ ចុច ការកំណត់ -> សិទ្ធិ និងបើក \"កាមេរ៉ា\"។",
+  "permissionsCameraDenied": "{app_name} ត្រូវការសិទ្ធិកាមេរ៉ាដើម្បីថតរូប និងវិដេអូ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ ចុច ការកំណត់ → សិទ្ធិ និងបើក \"កាមេរ៉ា\"។",
   "permissionsFaceId": "The screen lock feature on {app_name} uses Face ID.",
   "permissionsKeepInSystemTray": "រក្សាទុកក្នុងថាសប្រព័ន្ធ",
   "permissionsKeepInSystemTrayDescription": "{app_name} នឹងបន្តដំណើរការនៅផ្ទៃខាងក្រោយនៅពេលអ្នកបិទផ្ទាំងបង្អួច",
   "permissionsLibrary": "{app_name} នឹងត្រូវការចូលប្រើវិញ្ញាបនបត្រឆ្លើយតបរូបភាពបញ្ចូល សូមអនុញ្ញាតសម្រាប់ iOS លើការប្រើប្រាស់។",
   "permissionsMicrophone": "មីក្រូហ្វូន",
-  "permissionsMicrophoneAccessRequired": "{app_name} ត្រូវការការចូលដំណើរការម៉ិចស្រួបសំឡេងដើម្បីធ្វើការហៅនិងផ្ញើសារភ្ញៀវសំឡេង ប៉ុន្តែបានត្រូវបដិសេធ។ ចុច ការកំណត់ -> សិទ្ធិ, ហើយបើក \"ម៉ិចស្រួបសំឡេង\" ។",
+  "permissionsMicrophoneAccessRequired": "{app_name} ត្រូវការការចូលដំណើរការម៉ិចស្រួបសំឡេងដើម្បីធ្វើការហៅនិងផ្ញើសារភ្ញៀវសំឡេង ប៉ុន្តែបានត្រូវបដិសេធ។ ចុច ការកំណត់ → សិទ្ធិ, ហើយបើក \"ម៉ិចស្រួបសំឡេង\" ។",
   "permissionsMicrophoneAccessRequiredDesktop": "អ្នកអាចបើកការអនុញ្ញាតម៉ាលិភិននុមាននៅក្នុងការកំណត់ឯកជនភាពរបស់ {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ត្រូវការវិស្សមន្តងសម្រាប់ដាក់ស្នើរ និងថតសារ​សំឡេង។",
   "permissionsMicrophoneDescription": "ការអនុញ្ញាតឱ្យចូលប្រើមីក្រូហ្វូន។",
   "permissionsMusicAudio": "{app_name} ត្រូវការការចូលប្រើតន្ត្រី និងសម្លេង ដើម្បីផ្ញើឯកសារ តន្ត្រី និងសម្លេង។",
   "permissionsRequired": "ទាមទារការអនុញ្ញាត",
-  "permissionsStorageDenied": "{app_name} ត្រូវការការចូលប្រើបណ្ណាល័យរូបភាព ដើម្បីដែលអ្នកអាចផ្ញើរូបភាព និងវីដេអូ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ ចុច ការកំណត់ -> សិទ្ធិ និងបើក \"រូបភាព និងវីដេអូ\"។",
-  "permissionsStorageDeniedLegacy": "{app_name} ត្រូវការសិទ្ធិចូលប្រើអង្គរក្សាទុក ដើម្បីផ្ញើ និងរក្សាទុកឯកសារ។ ចុច ការកំណត់ -> សិទ្ធិ និងបើក \"អង្គរក្សាទុក\"។",
+  "permissionsStorageDenied": "{app_name} ត្រូវការការចូលប្រើបណ្ណាល័យរូបភាព ដើម្បីដែលអ្នកអាចផ្ញើរូបភាព និងវីដេអូ ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ ចុច ការកំណត់ → សិទ្ធិ និងបើក \"រូបភាព និងវីដេអូ\"។",
+  "permissionsStorageDeniedLegacy": "{app_name} ត្រូវការសិទ្ធិចូលប្រើអង្គរក្សាទុក ដើម្បីផ្ញើ និងរក្សាទុកឯកសារ។ ចុច ការកំណត់ → សិទ្ធិ និងបើក \"អង្គរក្សាទុក\"។",
   "permissionsStorageSave": "{app_name} ត្រូវការចូលប្រើវើសកម្មដើម្បីរក្សាទុកឯកសារ និងមេឌៀ។",
   "permissionsStorageSaveDenied": "{app_name} ត្រូវការសិទ្ធិចូលប្រើអង្គរក្សាទុកដើម្បីរក្សាទុករូប, វីដេអូ, ប៉ុន្តែវាត្រូវបានបដិសេធរហូត។ សូមបន្តទៅការកំណត់ជ្រើសរើស \"ការអនុញ្ញាត\" និងបើក \"អង្គរក្សាទុក\"។",
   "permissionsStorageSend": "{app_name} ត្រូវការភ្ជាប់អង្គរក្សាទុកដើម្បីផ្ញើរូបទិញនិងវីដេអូ.",
-  "pin": "ខ្ទាស់ ",
+  "pin": "ខ្ទាស់",
   "pinConversation": "ខ្ទាស់ការសន្ទនា",
   "pinUnpin": "ដកខ្ទាស់",
   "pinUnpinConversation": "បិតខ្ទាស់ការសន្ទនា",
@@ -772,8 +771,8 @@
   "updateDownloading": "កំពុងទាញយកបច្ចុប្បន្នភាព៖ {percent_loader}%",
   "updateError": "មិនអាចធ្វើបច្ចុប្បន្នភាព",
   "updateErrorDescription": "{app_name} បានបរាជ័យក្នុងការធ្វើបច្ចុប្បន្នភាព។ សូមចូលទៅកាន់ {session_download_url} ហើយដំឡើងជំនាន់ថ្មីដោយដៃ បន្ទាប់មកទាក់ទងមជ្ឈមណ្ឌលជំនួយរបស់យើង ដើម្បីជំរាបព័ត៌មានអំពីបញ្ហានេះ។",
-  "updateNewVersion": "កំណែថ្មីរបស់ <b>{app_name}<br‍\\‍/><br‍/>អាចប្រើប្រាស់បានហើយ សូមចុចធ្វើបច្ចុប្បន្នភាព។",
-  "updateNewVersionDescription": "កំណែថ្មីរបស់ <b>{app_name}<br‍\\‍/><br‍/>ចេញហើយ។",
+  "updateNewVersion": "កំណែថ្មីរបស់{app_name}អាចប្រើប្រាស់បានហើយ សូមចុចធ្វើបច្ចុប្បន្នភាព។",
+  "updateNewVersionDescription": "កំណែថ្មីរបស់ {app_name} ចេញហើយ។",
   "updateReleaseNotes": "ចូលទៅកាន់កំណត់ចេញថ្មី",
   "updateSession": "{app_name} ភើពុទ្ធ",
   "updateVersion": "កំណែ {version}",
