--- a/_locales/kmr/messages.json
+++ b/_locales/kmr/messages.json
@@ -69,7 +69,7 @@
   "attachmentsCollapseOptions": "Vebijarkên ataşmanê bibigrîne",
   "attachmentsCollecting": "Ataşmanên têne berhevkirin...",
   "attachmentsDownload": "Ataşmanê daxîne",
-  "attachmentsDuration": "Drêjdarî: ",
+  "attachmentsDuration": "Drêjdarî:",
   "attachmentsErrorLoad": "Erroreyê dosyeyê gir",
   "attachmentsErrorMediaSelection": "Bi ser neket ku pêvekê hilbijêre",
   "attachmentsErrorNoApp": "Appekê nayê dîtin ji bo hilbijartina medyayê.",
@@ -462,7 +462,7 @@
   "later": "Paşe",
   "learnMore": "Zêdetir hîn bibe",
   "leave": "Bexçe",
-  "leaving": "Hesin... ",
+  "leaving": "Hesin...",
   "legacyGroupMemberNew": "<b>{name}</b> tevlî komê bû.",
   "legacyGroupMemberNewMultiple": "<b>{name}</b> û <b>{count} yên din</b> tevlî komê bûn.",
   "legacyGroupMemberNewYouMultiple": "<b>Te</b> û <b>{count} yên din</b> tevlî komê bûn.",
@@ -498,7 +498,7 @@
   "membersAddAccountIdOrOns": "Add Account ID or ONS",
   "membersInvite": "Kontaktan dawet bike",
   "membersInviteSend": "{count, plural, one [Şandina Davetnameyek] other [Şandina Davetan]}",
-  "membersInviteShareDescription": "Hûn dixwazin dîrokê peyamên şexsî ji <b>{name}</b> girî</b>?",
+  "membersInviteShareDescription": "Hûn dixwazin dîrokê peyamên şexsî ji <b>{name}</b> girî?",
   "membersInviteShareDescriptionMultiple": "Hûn dixwazin dîrokê peyamên şexsî ji <b>{name}</b> û <b>{count} yên din</b> girîftin?",
   "membersInviteShareDescriptionTwo": "Hûn dixwazin dîrokê peyamên şexsî ji <b>{name}</b> û <b> {other_name}</b> girîftin?",
   "membersInviteShareMessageHistory": "Dîrokê Peyamê Par Bike",
@@ -603,7 +603,7 @@
   "onboardingBubblePrivacyInYourPocket": "Nihênî di hindurê te de.",
   "onboardingBubbleSessionIsEngineered": "{app_name} bi meşxulekariyê weşanê te razî dike.",
   "onboardingBubbleWelcomeToSession": "Bi xêr hatî {app_name} {emoji}",
-  "onboardingHitThePlusButton": "<b><span class=\"emoji\" title=\"simple_wink\"></span></b> Plus bişûşe dibeşr? <br/> Hinna qeweydaran, endamek biaîne, yan jî civateke fermî tevlî bibe!",
+  "onboardingHitThePlusButton": "Bişkojka plus bikirtînin da ku danûstendinek dest pê bikin, komek biafirînin, an beşdarî civatek fermî bibin!",
   "onboardingMessageNotificationExplanation": "Tu navên kîjan {app_name} temen bi peyamên nû agahiş dike.",
   "onboardingPrivacy": "Naha:  Meta",
   "onboardingTos": "Têkiliyên Xizmetkarî",
@@ -639,28 +639,28 @@
   "passwordSet": "Şîfre çêkirin",
   "passwordSetDescription": "Zoom In",
   "paste": "Pêve bike",
-  "permissionMusicAudioDenied": "{app_name} hewl dibe da ku bikarhênina muzîk û dengwêje bike ji bo senden dosyayan, muzîk û dengwêje, lê permîsiya wî daîmen hewce ye. Bibînin Mîhengên -> Permîsyan, û \"Muzîk û dengwêje\" bike.",
+  "permissionMusicAudioDenied": "{app_name} hewl dibe da ku bikarhênina muzîk û dengwêje bike ji bo senden dosyayan, muzîk û dengwêje, lê permîsiya wî daîmen hewce ye. Bibînin Mîhengên → Permîsyan, û \"Muzîk û dengwêje\" bike.",
   "permissionsAppleMusic": "{app_name} permiya bikar anînina Apple Music hewce dike da ku tesawirên medyayê bixebitîne.",
   "permissionsAutoUpdate": "Rojanekirina otomatîk",
   "permissionsAutoUpdateDescription": "Di destpêkê de rojanekirina otomatîken kontrol dike",
-  "permissionsCameraDenied": "{app_name} hewl dibe da ku bikarhênina kamera bibe ji bo twistsen wêneyan û vedîdarê, lê permîsiya wî daîmen hewce ye. Bibînin Mîhengên -> Permîsyan, û \"Kamera\" bike.",
+  "permissionsCameraDenied": "{app_name} hewl dibe da ku bikarhênina kamera bibe ji bo twistsen wêneyan û vedîdarê, lê permîsiya wî daîmen hewce ye. Bibînin Mîhengên → Permîsyan, û \"Kamera\" bike.",
   "permissionsFaceId": "Taybetmendiya serrnderkî ya {app_name} bi Face ID bicîh dike.",
   "permissionsKeepInSystemTray": "Di Sênîka Sîstemê de Bihêle",
   "permissionsKeepInSystemTrayDescription": "{app_name} di dema ku em pencereyê digirin, berdewam dike maju di piştî deran de bixebitîne",
   "permissionsLibrary": "{app_name} permiya maktaba wêneyê hewce dike da ku berdewam bike. Tu dikarî permiya aktîv bike di mîhengên iOS de.",
   "permissionsMicrophone": "Mîkrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} permiya mîkrofonê hewce dike da ku bang û peyamekên dengî bişîne, lê bû daîmî refuze kirin. Kerem bike mîhengan -> destûran bikişîne, û 'Mîkrofon' yê aç bikî.",
+  "permissionsMicrophoneAccessRequired": "{app_name} permiya mîkrofonê hewce dike da ku bang û peyamekên dengî bişîne, lê bû daîmî refuze kirin. Kerem bike mîhengan → destûran bikişîne, û 'Mîkrofon' yê aç bikî.",
   "permissionsMicrophoneAccessRequiredDesktop": "Hûn dikarin akses mikrafona li rêza taybetmendiya {app_name} veke",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} permiya mîkrofon hewce dike da ku lêgerîn bike û peyman dengî record bike.",
   "permissionsMicrophoneDescription": "Îzn bide ji bo gihîna mîkrofonê.",
   "permissionsMusicAudio": "{app_name} hewl dibe da ku bikarhênina muzîk û dengwêje bike ji bo senden dosyayan, muzîk û dengwêje.",
   "permissionsRequired": "Destûr pêdivî ye",
-  "permissionsStorageDenied": "{app_name} pêwîstî heye da ku libraryê wêneyan bikarhênin ji bo senden wêneyan û vedîdar, lê permîsiya wî daîmen hewce ye. Bibînin Mîhengên -> Permîsyan, û \"Wêneyan\" bike.",
-  "permissionsStorageDeniedLegacy": "{app_name} çêdutina hilberî dibeekenî ji bo senden û hildegirtin ataşmankî bikar bîne. Bibînin Mîhengên -> Permîsyan, û hilka \"Hilberî\" bike.",
+  "permissionsStorageDenied": "{app_name} pêwîstî heye da ku libraryê wêneyan bikarhênin ji bo senden wêneyan û vedîdar, lê permîsiya wî daîmen hewce ye. Bibînin Mîhengên → Permîsyan, û \"Wêneyan\" bike.",
+  "permissionsStorageDeniedLegacy": "{app_name} çêdutina hilberî dibeekenî ji bo senden û hildegirtin ataşmankî bikar bîne. Bibînin Mîhengên → Permîsyan, û hilka \"Hilberî\" bike.",
   "permissionsStorageSave": "{app_name} permiya hilkişina xelasî û medyayê hewce dike.",
   "permissionsStorageSaveDenied": "{app_name} permiya hilkişina wêneyên û vedîdarên hewce dike, lê ew daîmen rehtirî ye. Ji kerema xwe berdewam bike mîhengan mîhengên aplikasiya veçînsawî da bixe û 'Hilkişin' aktîv bike.",
   "permissionsStorageSend": "{app_name} permiya hilkişina wêneyên û vedîdarên bişîne.",
-  "pin": "Bizeliqîne ",
+  "pin": "Bizeliqîne",
   "pinConversation": "Sohbetê Bizeliqîne",
   "pinUnpin": "Pulina bikarînî",
   "pinUnpinConversation": "Pulina Peyven",
