--- a/_locales/kn/messages.json
+++ b/_locales/kn/messages.json
@@ -173,7 +173,7 @@
   "clearDataErrorDescription": "{count, plural, one [# Service Node ಮೂಲಕ ಡೇಟಾ ಅಳಿಸಲಾಗಿಲ್ಲ. Service Node ID: {service_node_id}.] other [# Service Nodes ಮೂಲಕ ಡೇಟಾ ಅಳಿಸಲಾಗಿಲ್ಲ. Service Node IDs: {service_node_id}.]}",
   "clearDataErrorDescriptionGeneric": "ಅಜ್ಞಾತ ದೋಷ ತಮಗೆಂಟಿತ್ತು ಮತ್ತು ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಅಳಿಸಲಾಗಲಿಲ್ಲ. ಬದಲು ನಿಮ್ಮ ಲೇಸರ್‌ಗಳ ಡೇಟಾವನ್ನು ಅಳಿಸಲು ಬಯಸುವಿರಾ?",
   "clearDevice": "ಸದ್ದಿಮೂಡಿಸಿ",
-  "clearDeviceAndNetwork": " ಸಾಧನ ಮತ್ತು ನೆಟ್‌ವರ್ಕ್ ತೆರವುಮಾಡು",
+  "clearDeviceAndNetwork": "ಸಾಧನ ಮತ್ತು ನೆಟ್‌ವರ್ಕ್ ತೆರವುಮಾಡು",
   "clearDeviceAndNetworkConfirm": "ನೀವು ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಜಾಲದಿಂದ ಅಳಿಸಲು ಖಚಿತವಾಗಿದ್ದೀರಾ? ನೀವು ಮುಂದುವರಿಸಿದರೆ, ನಿಮ್ಮ ಸಂದೇಶಗಳನ್ನು ಅಥವಾ ಸಂಪರ್ಕಗಳನ್ನು ಪುನಃಸ್ಥಾಪಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ.",
   "clearDeviceDescription": "ನೀವು ನಿಮ್ಮ ಸಾಧನವನ್ನು ತೆರವುಗೊಳಿಸಲು ಖಚಿತವಾಗಿದೆಯೆ?",
   "clearDeviceOnly": "ಹೊರಷಙತೆ ಮಾಡದಿರಿ",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "ನೀವು <b>{name}</b> ಮತ್ತು <b>{count} ಇತರರನ್ನು</b> <b>{group_name}</b> ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
   "groupRemoveDescriptionTwo": "ನೀವು <b>{name}</b> ಮತ್ತು <b>{other_name}</b> <b>{group_name}</b> ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
   "groupRemoveMessages": "{count, plural, one [ಬಳಕೆದಾರರನ್ನು ಮತ್ತು ಅವರ ಸಂದೇಶಗಳನ್ನು ತೆಗೆದುಹಾಕಿ] other [ಬಳಕೆದಾರರನ್ನು ಮತ್ತು ಅವರ ಸಂದೇಶಗಳನ್ನು ತೆಗೆದುಹಾಕಿ]}",
-  "groupRemoveUserOnly": "{count, plural, one [ಬಳಕೆದಾರರನ್ನು ತೆಗೆದುಹಾಕಿ ] other [ಬಳಕೆದಾರರನ್ನು ತೆಗೆದುಹಾಕಿ]}",
+  "groupRemoveUserOnly": "{count, plural, one [ಬಳಕೆದಾರರನ್ನು ತೆಗೆದುಹಾಕಿ] other [ಬಳಕೆದಾರರನ್ನು ತೆಗೆದುಹಾಕಿ]}",
   "groupRemoved": "<b>{name}</b> ಅವರನ್ನು ಗುಂಪಿನಿಂದ ತೆಗೆದುಹಾಕಲಾಗಿದೆ.",
   "groupRemovedMultiple": "<b>{name} ಪ್ರ</b> ಮತ್ತು <b>{count} ಇತರೆರು</b> ಗುಂಪಿನಿಂದ ತೆಗೆದುಹಾಕಲ್ಪಟ್ಟರು.",
   "groupRemovedTwo": "<b>{name} ಪ್ರ</b> ಮತ್ತು <b>{other_name} ಪ್ರ</b> ಗುಂಪಿನಿಂದ ತೆಗೆದುಹಾಕಲ್ಪಟ್ಟರು.",
@@ -639,28 +639,28 @@
   "passwordSet": "ಗುಪ್ತಪದವನ್ನು ಸೆಟ್ ಮಾಡಿ",
   "passwordSetDescription": "ನಿಮ್ಮ ಗುಪ್ತಪದವನ್ನು ಹೊಂದಿಸಲಾಗಿದೆ. ಅದು ಸುರಕ್ಷಿತವಾಗಿರಿಸಿ.",
   "paste": "ಅಂಟಿಸಿ",
-  "permissionMusicAudioDenied": "{app_name} ಗೆ ಫೈಲುಗಳನ್ನು, ಸಂಗೀತ ಮತ್ತು ಶಬ್ದವನ್ನು ಕಳುಹಿಸಲು ಸಂಗೀತ ಮತ್ತು ಶಬ್ದ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ -> ಅನುಮತಿಗಳು, ಮತ್ತು \"ಸಂಗೀತ ಮತ್ತು ಶಬ್ದ\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
+  "permissionMusicAudioDenied": "{app_name} ಗೆ ಫೈಲುಗಳನ್ನು, ಸಂಗೀತ ಮತ್ತು ಶಬ್ದವನ್ನು ಕಳುಹಿಸಲು ಸಂಗೀತ ಮತ್ತು ಶಬ್ದ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ → ಅನುಮತಿಗಳು, ಮತ್ತು \"ಸಂಗೀತ ಮತ್ತು ಶಬ್ದ\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
   "permissionsAppleMusic": "{app_name} ಗೆ ಮಾಧ್ಯಮ ಅಟ್ಯಾಚ್ಮೆಂಟ್‌ಗಳನ್ನು ಪ್ಲೇ ಮಾಡಲು ಆಪಲ್ ಮ್ಯೂಸಿಕ್ ಬಳಸಬೇಕು.",
   "permissionsAutoUpdate": "ಸ್ವಯಂ ನವೀಕರಣ",
   "permissionsAutoUpdateDescription": "ಸ್ಥಾಪನೆಯ ಸಮಯದಲ್ಲಿ ಸ್ವಯಂ ತೋರಿಸಿ ನವೀಕರಿಸು",
-  "permissionsCameraDenied": "{app_name} ಗೆ ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳನ್ನು ತೆಗೆದುಕೊಳ್ಳಲು ಕ್ಯಾಮೆರಾ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ -> ಅನುಮತಿಗಳು, ಮತ್ತು \"ಕ್ಯಾಮೆರಾ\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
+  "permissionsCameraDenied": "{app_name} ಗೆ ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳನ್ನು ತೆಗೆದುಕೊಳ್ಳಲು ಕ್ಯಾಮೆರಾ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ → ಅನುಮತಿಗಳು, ಮತ್ತು \"ಕ್ಯಾಮೆರಾ\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
   "permissionsFaceId": "{app_name} ನ ತರ್ಣ್ ಲಾಕ್ ವೈಶಿಷ್ಟ್ಯವು ಫೇಸ್ ಐಡಿ ಅನ್ನು ಬಳಸುತ್ತದೆ.",
   "permissionsKeepInSystemTray": "ಸಿಸ್ಟಮ್ ಟ್ರೇಯಲ್ಲಿ ಇಡಿ",
   "permissionsKeepInSystemTrayDescription": "{app_name} ಕಿಟಕಿ ಮುಚ್ಚಿದಾಗ ಹಿನ್ನೆಲೆ ಕಾರ್ಯನಿರ್ವಹಣೆ ಮುಂದುವರಿಸುತ್ತದೆ.",
   "permissionsLibrary": "{app_name} ಮುಂದುವರಿಸಲು ಫೋಟೋ ಲೈಬ್ರರಿ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ. ನೀವು iOS ಸೆಟ್ಟಿಂಗ್‌ಗಳಲ್ಲಿ ಪ್ರವೇಶವನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಬಹುದು.",
   "permissionsMicrophone": "ಮೈಕ್ರೊಫೋನ್",
-  "permissionsMicrophoneAccessRequired": "{app_name} ಗೆ ಕರೆ ಮಾಡಲು ಮತ್ತು ಆಡಿಯೊ ಸಂದೇಶಗಳನ್ನು ಕಳುಹಿಸಲು ಮೈಕ್ರೊಫೋನ್ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್‌ಗಳು -> ಅನುಮತಿ ಟ್ಯಾಪ್ ಮಾಡಿ, ಮತ್ತು \"ಮೈಕ್ರೊಫೋನ್\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
+  "permissionsMicrophoneAccessRequired": "{app_name} ಗೆ ಕರೆ ಮಾಡಲು ಮತ್ತು ಆಡಿಯೊ ಸಂದೇಶಗಳನ್ನು ಕಳುಹಿಸಲು ಮೈಕ್ರೊಫೋನ್ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್‌ಗಳು → ಅನುಮತಿ ಟ್ಯಾಪ್ ಮಾಡಿ, ಮತ್ತು \"ಮೈಕ್ರೊಫೋನ್\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
   "permissionsMicrophoneAccessRequiredDesktop": "ನೀವು {app_name} ರ ಪ್ರೈವಸಿ ಸೆಟ್ಟಿಂಗ್‌ಗಳಲ್ಲಿ ಮೈಕ್ರೋಫೋನ್ ಪ್ರವೇಶವನ್ನು ಸಕ್ರಿಯ ಮಾಡಬಹುದು.",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ಗೆ ಕಾಲ್‌ಗಳು ಮಾಡಲು ಮತ್ತು ಆಡಿಯೊ ಸಂದೇಶಗಳನ್ನು ದಾಖಲು ಮಾಡಲು ಮೈಕ್ರೊಫೋನ್ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ.",
   "permissionsMicrophoneDescription": "ಮೈಕ್ರೋಫೋನ್ ಪ್ರವೇಶವನ್ನು ಅನುಮತಿಸಿ.",
   "permissionsMusicAudio": "{app_name} ಗೆ ಫೈಲುಗಳನ್ನು, ಸಂಗೀತ ಮತ್ತು ಶಬ್ದವನ್ನು ಕಳುಹಿಸಲು ಸಂಗೀತ ಮತ್ತು ಶಬ್ದ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ.",
-  "permissionsRequired": " ಅನುಮತಿ ಬೇಕಾಗಿದೆ",
-  "permissionsStorageDenied": "{app_name} ಗೆ ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳನ್ನು ಕಳುಹಿಸಲು ಫೋಟೋ ಗ್ರಂಥಾಲಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ -> ಅನುಮತಿಗಳು, ಮತ್ತು \"ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳು\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
-  "permissionsStorageDeniedLegacy": "{app_name} ಗೆ ಸಂಗ್ರಹಣೆಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರ ದೂರವನ್ನು ಕಳುಹಿಸಲು ಮತ್ತು ಉಳಿಸಲು. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ -> ಅನುಮತಿಗಳು, ಮತ್ತು \"ಸ್ಟೋರೇಜ್\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
+  "permissionsRequired": "ಅನುಮತಿ ಬೇಕಾಗಿದೆ",
+  "permissionsStorageDenied": "{app_name} ಗೆ ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳನ್ನು ಕಳುಹಿಸಲು ಫೋಟೋ ಗ್ರಂಥಾಲಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ → ಅನುಮತಿಗಳು, ಮತ್ತು \"ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳು\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
+  "permissionsStorageDeniedLegacy": "{app_name} ಗೆ ಸಂಗ್ರಹಣೆಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರ ದೂರವನ್ನು ಕಳುಹಿಸಲು ಮತ್ತು ಉಳಿಸಲು. ಸೆಟ್ಟಿಂಗ್ಗಳು ಟ್ಯಾಪ್ ಮಾಡಿ → ಅನುಮತಿಗಳು, ಮತ್ತು \"ಸ್ಟೋರೇಜ್\" ಅನ್ನು ಆನ್ ಮಾಡಿ.",
   "permissionsStorageSave": "{app_name} ಗೆ ಅಟ್ಯಾಚ್ಮೆಂಟ್‌ಗಳು ಮತ್ತು ಮಾಧ್ಯಮವನ್ನು ಉಳಿಸಲು ಸಂಗ್ರಹಣೆಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ.",
   "permissionsStorageSaveDenied": "{app_name} ಗೆ ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳನ್ನು ಉಳಿಸಲು ಸಂಗ್ರಹಣೆಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ, ಆದರೆ ಅದು ಶಾಶ್ವತವಾಗಿ ನಿರಾಕರಿಸಲಾಗಿದೆ. ದಯವಿಟ್ಟು ಆ್ಯಪ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳಿಗೆ ಮುಂದುವರಿಯಿರಿ, \"Permissions\" ಆಯ್ಕೆಮಾಡಿ, ಮತ್ತು \"Storage\" ಅನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿ.",
   "permissionsStorageSend": "{app_name} ಗೆ ಚಿತ್ರಗಳು ಮತ್ತು ವೀಡಿಯೊಗಳನ್ನು ಕಳುಹಿಸಲು ಸಂಗ್ರಹಣೆಯ ಪ್ರವೇಶದ ಅಗತ್ಯವಿದೆ.",
-  "pin": "ಪಿನ್ ",
+  "pin": "ಪಿನ್",
   "pinConversation": "ಸಂಭಾಷಣೆಯನ್ನು ಪಿನ್ ಮಾಡಿ",
   "pinUnpin": "ಅನ್‌ಪಿನ್ ಮಾಡಿ",
   "pinUnpinConversation": "ಸಂಭಾಷಣೆಯನ್ನು ಅನ್‌ಪಿನ್ ಮಾಡಿ",
