--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -640,7 +640,7 @@
   "passwordSet": "비밀번호 설정",
   "passwordSetDescription": "비밀번호 설정이 완료되었습니다. 안전히 관리하시기 바랍니다.",
   "paste": "붙여넣기",
-  "permissionMusicAudioDenied": "{app_name}은(는) 파일, 음악 및 오디오를 전송하기 위해 음악 및 오디오 접근이 필요하지만, 접근이 영구적으로 거부되었습니다. 설정 -> 권한으로 이동하여 \"음악 및 오디오\"를 켜십시오.",
+  "permissionMusicAudioDenied": "{app_name}은(는) 파일, 음악 및 오디오를 전송하기 위해 음악 및 오디오 접근이 필요하지만, 접근이 영구적으로 거부되었습니다. 설정 → 권한으로 이동하여 \"음악 및 오디오\"를 켜십시오.",
   "permissionsAppleMusic": "{app_name}은 미디어 첨부 파일을 재생하기 위해 Apple Music을 사용해야 합니다.",
   "permissionsAutoUpdate": "자동 업데이트",
   "permissionsAutoUpdateDescription": "시작 시 자동으로 업데이트를 확인",
@@ -656,12 +656,12 @@
   "permissionsMicrophoneDescription": "마이크 접근 권한을 허용해주세요.",
   "permissionsMusicAudio": "{app_name}는 파일, 음악 및 오디오를 전송하려면 음악 및 오디오 접근이 필요합니다.",
   "permissionsRequired": "권한 필요",
-  "permissionsStorageDenied": "{app_name}에서 사진과 동영상을 전송하려면 사진 보관함 접근 권한이 필요하지만 영구적으로 거부되었습니다. 설정 -> 권한으로 이동하여 \"사진 및 동영상\"을 켜십시오.",
-  "permissionsStorageDeniedLegacy": "{app_name}에서 첨부파일을 전송하고 저장하려면 저장소 접근 권한이 필요합니다. 설정 -> 권한으로 이동하여 \"저장소\"를 켜십시오.",
+  "permissionsStorageDenied": "{app_name}에서 사진과 동영상을 전송하려면 사진 보관함 접근 권한이 필요하지만 영구적으로 거부되었습니다. 설정 → 권한으로 이동하여 \"사진 및 동영상\"을 켜십시오.",
+  "permissionsStorageDeniedLegacy": "{app_name}에서 첨부파일을 전송하고 저장하려면 저장소 접근 권한이 필요합니다. 설정 → 권한으로 이동하여 \"저장소\"를 켜십시오.",
   "permissionsStorageSave": "{app_name}은 첨부 파일과 미디어를 저장하기 위해 저장 공간 접근이 필요합니다.",
   "permissionsStorageSaveDenied": "{app_name}은 사진과 동영상을 저장하기 위해 저장 공간 접근이 필요하지만 영구적으로 거부되었습니다. 앱 설정에서 \"권한\"을 선택하고, \"저장 공간\" 권한을 활성화하세요.",
   "permissionsStorageSend": "{app_name}은 사진과 동영상을 전송하기 위해 저장공간 접근이 필요합니다.",
-  "pin": "고정 ",
+  "pin": "고정",
   "pinConversation": "대화 고정하기",
   "pinUnpin": "고정 해제",
   "pinUnpinConversation": "대화 고정 취소",
