--- a/_locales/ku/messages.json
+++ b/_locales/ku/messages.json
@@ -69,11 +69,11 @@
   "attachmentsCollapseOptions": "قەبارەکردنی هەڵبژاردنەکان",
   "attachmentsCollecting": "کۆکردنەوەی هاوپێچ...",
   "attachmentsDownload": "داگرتنی هاوپەیوەندی",
-  "attachmentsDuration": "ماوە: ",
+  "attachmentsDuration": "ماوە:",
   "attachmentsErrorLoad": "هەڵە لە هاوپەیوەندیی فایلی",
   "attachmentsErrorMediaSelection": "شکستی هەڵبژاردنەوەی فایل",
   "attachmentsErrorNoApp": ".تۆتوانیت ئەپێك بنەوە بۆ هەڵبژاردنی میدیە",
-  "attachmentsErrorNotSupported": "جۆری ئەم فایلە پشتگیری ناکات. ",
+  "attachmentsErrorNotSupported": "جۆری ئەم فایلە پشتگیری ناکات.",
   "attachmentsErrorNumber": "نەیتوانرێت زۆرتر لە ٣٢ وێنە و ڤیدیۆکان سەردەکەوێ بنێردرێت.",
   "attachmentsErrorOpen": "نەیتوانرا په‌ڕگه‌که‌ بکرێته‌وه‌.",
   "attachmentsErrorSending": "هەڵە لە ناردنی فایل",
@@ -121,7 +121,7 @@
   "banUnbanUserUnbanned": "بەکارهێنەر نابەری",
   "banUser": "دەسەڵاتدانە کەسی",
   "banUserBanned": "بەکارهێنەر بەرچاوکرا",
-  "block": " دووری دەخەیتەوە‬",
+  "block": "دووری دەخەیتەوە‬",
   "blockBlockedDescription": "ئەم پەیوەندە لابردن بۆ بریتیە لە ناردنی پەیامێک.",
   "blockBlockedNone": "هیچ پەیوەندیکەرێکی بڵاوکراو نییە",
   "blockBlockedUser": "{name} دوورکرایەوە",
@@ -184,7 +184,7 @@
   "clearMessagesForMe": "سڕینەوە بۆ خودم",
   "clearMessagesGroupAdminDescription": "دڵنیای لە سڕینەوەی هەموو نامەکان <b>{group_name} </b>؟",
   "clearMessagesGroupDescription": "دڵنیای لە سڕینەوەی هەموو نامەکان <b>{group_name} </b> یەشاران؟",
-  "clearMessagesNoteToSelfDescription": "دڵنیایت لە پەیوەندی (پەیامەکان) کەلتۆ گەنجیەکان لە كۆرەکان <b>?",
+  "clearMessagesNoteToSelfDescription": "دڵنیایت لە پەیوەندی (پەیامەکان) کەلتۆ گەنجیەکان لە كۆرەکان?",
   "close": "داخستن",
   "closeWindow": "داخستنی پەنجەرە",
   "commitHashDesktop": "هەڵبژاردەیەک: {hash}",
@@ -345,7 +345,7 @@
   "emojiCategoryFood": "خوراک و خواردن",
   "emojiCategoryObjects": "ئامێرەکان",
   "emojiCategoryRecentlyUsed": "نوێ بکار بردووەکان",
-  "emojiCategorySmileys": " ژینەگوڕ مەڕێن.",
+  "emojiCategorySmileys": "ژینەگوڕ مەڕێن.",
   "emojiCategorySymbols": "سیمبوڵەکان",
   "emojiCategoryTravel": "گەشت و شوینەکان",
   "emojiReactsClearAll": "دڵنیایت لە پاککردنەوەی هەموو {emoji}?؟",
@@ -419,7 +419,7 @@
   "groupNameEnter": "ناوی گروپەکە بنووسە",
   "groupNameEnterPlease": "پەیامی دەبێ ناوەکی فرمێ بکە.",
   "groupNameEnterShorter": "پەیامی دەبێ ناوبەخشین پەیامیەکان بپەیامەکان.",
-  "groupNameNew": "ناوی گروپ ئێستا {group_name} ئەستێ.</br>",
+  "groupNameNew": "ناوی گروپ ئێستا {group_name} ئەستێ.",
   "groupNameUpdated": "ناوی گروپ نوێ کرایەوە.",
   "groupNoMessages": "تۆ هیچ پەیامێکت نییە لە <b>{group_name}</b>. پەیامێک بنێرە بۆ دەست پێکردنی گفتگو!",
   "groupOnlyAdmin": "تۆ تەنها بەڕێوەبەری <b>{group_name}</b> یت.<br/><br/>ئەم ئەندامانی گروپە و ڕێکخستنهکان نەکرێن بگۆڕدرێن بێ ئەگەری بەڕێوەبەرێک.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "ئایا دەتەوێت بڕبەیتەوە <b>{name}</b> و <b>{count} یەک و چەندێکی تر</b> لە <b>{group_name}</b>؟",
   "groupRemoveDescriptionTwo": "ئایا دەتەوێت بڕبەیتەوە <b>{name}</b> و <b>{other_name}</b> لە <b>{group_name}</b>؟",
   "groupRemoveMessages": "{count, plural, one [لابردنی بەکارهێنەر و پەیامەکانیان] other [کارەکان و پیامەکانیشان لاببردن]}",
-  "groupRemoveUserOnly": "{count, plural, one [لابردنی بەکارهێنەر ] other [کارەکان لاببردن]}",
+  "groupRemoveUserOnly": "{count, plural, one [لابردنی بەکارهێنەر] other [کارەکان لاببردن]}",
   "groupRemoved": "<b>{name}</b> لە گروپەکە لابرا.",
   "groupRemovedMultiple": "<b>{name}</b> و <b>{count} کەس دیکە</b> لە گروپەکە لابران.",
   "groupRemovedTwo": "<b>{name}</b> و <b>{other_name}</b> لە گروپەکە لابران.",
@@ -581,7 +581,7 @@
   "notificationsMuteFor": "کپکردن بۆ {time_large}",
   "notificationsMuteUnmute": "لادانی کپکردن",
   "notificationsMuted": "کپ کراوە",
-  "notificationsSlowMode": " پارەزگای هێزەوە دەپەڕەیەت.",
+  "notificationsSlowMode": "پارەزگای هێزەوە دەپەڕەیەت.",
   "notificationsSlowModeDescription": "{app_name} بەخێرنکاری دەتوانێت نوێپەیامەکان بپشکنێت.",
   "notificationsSound": "دەنگ",
   "notificationsSoundDescription": "دەنگ کاتێک بەرنامەکە کراوەیە",
@@ -639,7 +639,7 @@
   "passwordSet": "دانشتنی تێپەڕ ئەو ناو",
   "passwordSetDescription": "وشەی پەرەسەدت دابینکرا. تکایە ئەوە بەندەن پارێزەر بێت.",
   "paste": "پەیامەکان تەنها دەبێ قەبارە بنووسە",
-  "permissionMusicAudioDenied": "بەرنامەی {app_name} پێویستی بە ڕێزەنامەی موسیقا و ئاواز بەدەستەکان بۆ ناردن پەیوەندەکان، موسیقا و ئاواز، بەڵام ئەمەدا دیاری کراوە. تکایە ئیش بکە لە ڕێکەوتەکان -> ڕێگەدانەکان، و \"موسیقا و ئاواز\" بەرە چاودێر بکە.",
+  "permissionMusicAudioDenied": "بەرنامەی {app_name} پێویستی بە ڕێزەنامەی موسیقا و ئاواز بەدەستەکان بۆ ناردن پەیوەندەکان، موسیقا و ئاواز، بەڵام ئەمەدا دیاری کراوە. تکایە ئیش بکە لە ڕێکەوتەکان → ڕێگەدانەکان، و \"موسیقا و ئاواز\" بەرە چاودێر بکە.",
   "permissionsAppleMusic": "{app_name} پێویستە بە پارێزمەنیی ژمارەی تەلەفۆنەکان بۆ بەکردنەوەی هەموو پەیوەستەکان.",
   "permissionsAutoUpdate": "ئاپدیـتەكە خۆكار ئەكاتەوە",
   "permissionsAutoUpdateDescription": "بە شێوەی خۆکار بگەڕێتەوە بۆ نوێكردنەوە لە کاتی پەیوەندیدانەوە",
@@ -649,14 +649,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} هەموو دایما کار دەکات لە پاشچاوە ڕوونکردنی دەروازەکان",
   "permissionsLibrary": "{app_name} پێویستە بەکاربردنی کتێبی وێنەکان بۆ بەردەوام بوون. دەتوانیت بەکاربردنی کتێبەکان تێکڕە کەڵکەوە کرد.",
   "permissionsMicrophone": "میکروفۆن",
-  "permissionsMicrophoneAccessRequired": "{app_name} پێویستە دەستی هەبی بە وەرگیراوی میکڕۆفۆن بۆ گەیشتن بەتەلەفۆنەکان و ناردنی پەیامەکانی دەنگە، بەڵام ئەم ڕووت بە نارضایە. کرتە بکە بەسەر ڕێکخستنەکان -> ڕێگەدانەکان، و وەرگیراوی «میکڕۆفۆن» بکرێتەوە.",
+  "permissionsMicrophoneAccessRequired": "{app_name} پێویستە دەستی هەبی بە وەرگیراوی میکڕۆفۆن بۆ گەیشتن بەتەلەفۆنەکان و ناردنی پەیامەکانی دەنگە، بەڵام ئەم ڕووت بە نارضایە. کرتە بکە بەسەر ڕێکخستنەکان → ڕێگەدانەکان، و وەرگیراوی «میکڕۆفۆن» بکرێتەوە.",
   "permissionsMicrophoneAccessRequiredDesktop": "تۆ دەتوانی دەسەڵاتی میکرۆفۆن بکەیەوە لە ڕێکخستنی تایبەتی {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} دەتوانێت بەکارهێنانی داده‌یەکیی وەکو پەیوەستەکان بکات بۆ پەیوەندیش",
   "permissionsMicrophoneDescription": "ڕێگە بە بەرزی دەرەکی بخەرەوە.",
   "permissionsMusicAudio": "بەرنامەی {app_name} پێویستی بە ڕێزەنامەی موسیقا و ئاواز بکات بۆ ناردنە پەیوەندەکان، موسیقا و ئاواز.",
   "permissionsRequired": "پەیامی دەبێ بەرێوەبەران پەیامەکان",
-  "permissionsStorageDenied": "بەرنامەی {app_name} پێویستی بە دەسگای وێنەی ئافرەت پارێزییەکان بۆ ئەوەی بتوانیت وێنەکان و ڤیدیۆکان بناردەیت، بەڵام ئەمەدا بە هەرێزین ڕەپەڕینە. پەڕەکانی ڕێکدەست -> ڕێگەدانەکان، و \"وێنە و ڤیدیۆکان\" بڕۆپا.",
-  "permissionsStorageDeniedLegacy": "بەرنامەی {app_name} پێویستی بە خەزنەیەک دایەنەکراوە بۆ ناردن و پاشەکەوتکردنی پەیوەند پەیامەکان. پەڕەکانی ڕێکدەست -> ڕێگەدانەکان، و \"خەزنەیەک\" بڕۆپا.",
+  "permissionsStorageDenied": "بەرنامەی {app_name} پێویستی بە دەسگای وێنەی ئافرەت پارێزییەکان بۆ ئەوەی بتوانیت وێنەکان و ڤیدیۆکان بناردەیت، بەڵام ئەمەدا بە هەرێزین ڕەپەڕینە. پەڕەکانی ڕێکدەست → ڕێگەدانەکان، و \"وێنە و ڤیدیۆکان\" بڕۆپا.",
+  "permissionsStorageDeniedLegacy": "بەرنامەی {app_name} پێویستی بە خەزنەیەک دایەنەکراوە بۆ ناردن و پاشەکەوتکردنی پەیوەند پەیامەکان. پەڕەکانی ڕێکدەست → ڕێگەدانەکان، و \"خەزنەیەک\" بڕۆپا.",
   "permissionsStorageSave": "{app_name} پێویستە بەکارهێنانی خزینەی فایل بۆ هەڵگرتنی پەیوەستەکان و میدیا ناردن",
   "permissionsStorageSaveDenied": "{app_name} پێویستە بەکارهێنانی خزینە بۆ پاشەکەوت کردنەوەی وێنە و ڤیدیۆکان، بەڵام بەرپرسایەتی بەردەوام بوونی نوێنەکراوە تکایە بەرەو دامەزراندنی وەرە بڕۆو، چونکە زانیاری \"پەیوەندەکان\" دروستی کرد یان لە داخڵ کردنی خزینەیە.",
   "permissionsStorageSend": "{app_name} پێویستە بەکارهێنانی خزینە بۆ ناردنی وێنە و ڤیدیۆکان.",
@@ -691,7 +691,7 @@
   "recoveryPasswordEnter": "وشەی تێپەڕی Recovery بنووسە",
   "recoveryPasswordErrorLoad": "هەڵەیەک ڕوویدا کاتێک هەوڵ دەدرێت ووشەی نهێنیت پاکبکرێت.<br/><br/>تکایە تۆمارەکانت دەرخە، پاشان فایلەکە باربکەرە بە ئاژانسە هاوکاریەکانی Session بۆ یاریدانی چارەسەرکردنی ئەم کێشەیە.",
   "recoveryPasswordErrorMessageGeneric": "پەیامی دەبێ پەیامی زانیاری بکە و دووبارە بکەوە.",
-  "recoveryPasswordErrorMessageIncorrect": "ژینەگوڕ ",
+  "recoveryPasswordErrorMessageIncorrect": "ژینەگوڕ",
   "recoveryPasswordErrorMessageShort": "رمزە هێنانی وەرگرتنی تۆ بەرز نییە. تکایە ئاماژە بکە و دوبارە هەوڵبدەوە.",
   "recoveryPasswordErrorTitle": "وشەی نهێنیکردنەوەی نەگونجاو",
   "recoveryPasswordExplanation": "بۆ بارکردنی هەژمارەکەت، تێپەڕەوشەی گەڕاندنەکەت بنووسە.",
@@ -773,14 +773,14 @@
   "updateError": ".ناتوانرێت نوێکرایەوە",
   "updateErrorDescription": "{app_name} نوێنکردنەوە ناکەرێ. تکایە بڕۆ بۆ {session_download_url} و وەشانە نوێی ئاپڵیکەیشنەکا بەدەستی خۆت دامەزرێنەوە، دوای ئەوە پەیوەندی بکە بە ناووسەندەی یارمەتی بۆ ئەم کێشەیە زانیاری بدەن.",
   "updateNewVersion": "وەشانێکی نوێی {app_name} بەردەستە، کرتە بکە بۆ نوێکردنەوە",
-  "updateNewVersionDescription": "وەشانێکی نوێی {app_name} بەردەستە. ",
+  "updateNewVersionDescription": "وەشانێکی نوێی {app_name} بەردەستە.",
   "updateReleaseNotes": "بڕۆ بۆ نووسراوی نوێکردنەوە",
   "updateSession": "{app_name} نوێکردنەوە",
   "updateVersion": "وەشانی {version}",
   "uploading": "بارکردن",
   "urlCopy": "URL هەڵبگرە",
   "urlOpen": "کردنەوەی بەستەر",
-  "urlOpenBrowser": " ئەمە بە فەرمی لە کەناڵەکانی سەیر بەلێنە.",
+  "urlOpenBrowser": "ئەمە بە فەرمی لە کەناڵەکانی سەیر بەلێنە.",
   "urlOpenDescription": "دڵنیایت دەتەوێت ئەم URLـە بکەیتەوە لە بڕاوسەڕەکەت.<br/><br/><b>{url}</b>",
   "useFastMode": "بەکارھێنانی Fast Mode",
   "video": "ڤیدیۆ",
