--- a/_locales/lg/messages.json
+++ b/_locales/lg/messages.json
@@ -250,7 +250,7 @@
   "copied": "Koppa",
   "copy": "Koppa",
   "create": "Kilira",
-  "cut": " temula",
+  "cut": "temula",
   "databaseErrorGeneric": "Waliwo ensobi mu database.<br/><br/>Weereza ebizito by'ebifaananyi by'ekiranga okusobola okuetongereza. Bw'eba ekino ki sembral, ndamu {app_name} otandiseewo n'okubizuuliza ku akooti yo.<br/><br/>Obulabe: Kino kijja kuba kwesitukira mu kufuuka kwa messages zonna, ebifaananyi, n'amatabi ga accounts ey'emyaka ebiri p...",
   "databaseErrorTimeout": "Tukuboolabye {app_name} enetwala ebweru okuggwa.<br/><br/>Muliisa kulinda, kusitumidde ebirukanya ebyekusibiza okugabana oludde, oba kwemuddira Session.",
   "databaseErrorUpdate": "Database y’app yo si yagwanira ne verison ya {app_name}. Tegyamu app ne kuba okwongera ku Account yo okwongera okukozesa {app_name}.<br/><br/>Warning: Kino kyakuleeteka okufiirwa kwa bubaka bwona n’empapula ezisazeewo ezinyuuse emywaka ebiri ebalagala.",
@@ -419,7 +419,7 @@
   "groupNameEnter": "Yingiza erinnya ly’ekibinja",
   "groupNameEnterPlease": "Geba linnya lya Kikundi kyo.",
   "groupNameEnterShorter": "Geba linnya lya kikundi eritali lya wakati.",
-  "groupNameNew": "Erinya lya kibinja kaakafuna {group_name}. ",
+  "groupNameNew": "Erinya lya kibinja kaakafuna {group_name}.",
   "groupNameUpdated": "Erinya lya kibinja lunatukyusibwa.",
   "groupNoMessages": "Tolina bubaka wona okuva <b>{group_name}.</b> Tumira obubaka okutandika olulungi olubaganya bw'ogenda!",
   "groupOnlyAdmin": "Ggwe yekka admin mu <b>{group_name}.</b><br/><br/>Abweeta by'olukungguwa n'ebisela ebiteredde - nga alimu admin.",
@@ -639,7 +639,7 @@
   "passwordSet": "Tereka Akasumuluzo",
   "passwordSetDescription": "Password yo ekatebatibwawo. Kaakasa nti bagutemye mu kifo ekinyuuse eritassaneyebwa.",
   "paste": "Ddiba",
-  "permissionMusicAudioDenied": "{app_name} yeetaaga ssensa y'amakudiira ne ddoboozi okusobola okusindika abayimba n’eddobbozi, naye kyaganye dda. Nnyonnyola mu Settings -> Permissions, lalu \"Music and audio\" okubigya.",
+  "permissionMusicAudioDenied": "{app_name} yeetaaga ssensa y'amakudiira ne ddoboozi okusobola okusindika abayimba n’eddobbozi, naye kyaganye dda. Nnyonnyola mu Settings → Permissions, lalu \"Music and audio\" okubigya.",
   "permissionsAppleMusic": "{app_name} keetaaga kuzannyisa Apple Music okuzannyisa ekwatibwako okuva mu mikutu.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup",
@@ -649,14 +649,14 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} ekwata mu kutambuzibwa munda nga tosendewo olukindu",
   "permissionsLibrary": "{app_name} yeetaaga ssensa y’ekitabo ky’ebifaananyi okusigala mu kulondebwa. Oyinza okugiyitako mu nkola ya iOS.",
   "permissionsMicrophone": "Mirukaabula",
-  "permissionsMicrophoneAccessRequired": "{app_name} yeetaaga ssensa ya mmikirofono okukubira ku ssimu ne okutuma obubaka obuweereze, naye ssensa ezaweebwa zaulagiddwa ddala. Nnyika settings -> Permissions, ate ko 'Microphone' on.",
+  "permissionsMicrophoneAccessRequired": "{app_name} yeetaaga ssensa ya mmikirofono okukubira ku ssimu ne okutuma obubaka obuweereze, naye ssensa ezaweebwa zaulagiddwa ddala. Nnyika settings → Permissions, ate ko 'Microphone' on.",
   "permissionsMicrophoneAccessRequiredDesktop": "Osobola okukakasa mic ku by'obukwata e {app_name}'s amarobo omukulembeze",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} yeetaaga ssensa ya mmikirofono okukola eyitibwamu n’okuwandiika obubaka obuweereze.",
   "permissionsMicrophoneDescription": "Leka omanyi ku mikutu omukaago.",
   "permissionsMusicAudio": "{app_name} yeetaaga ssensa ne entegera y'ebyomuziki okwolekereza ofaayo emikutu ebikendeereza.",
   "permissionsRequired": "Obusobozi bukolwayo",
-  "permissionsStorageDenied": "{app_name} yeetaaga kujjanjabwa ku caapu y'ebifaananyi okusobola okusindika ebifaananyi n’amakamera, naye kyaganye dda. Nnyonnyola mu Settings -> Permissions, lalu \"Photos and videos\" okubigya.",
-  "permissionsStorageDeniedLegacy": "{app_name} yeetaaga ssensa y’obusobozi okusindika n’okutereka obuterekesa. Nnyonnyola mu Settings -> Permissions, lalu \"Storage\" okubigya.",
+  "permissionsStorageDenied": "{app_name} yeetaaga kujjanjabwa ku caapu y'ebifaananyi okusobola okusindika ebifaananyi n’amakamera, naye kyaganye dda. Nnyonnyola mu Settings → Permissions, lalu \"Photos and videos\" okubigya.",
+  "permissionsStorageDeniedLegacy": "{app_name} yeetaaga ssensa y’obusobozi okusindika n’okutereka obuterekesa. Nnyonnyola mu Settings → Permissions, lalu \"Storage\" okubigya.",
   "permissionsStorageSave": "{app_name} yeetaaga ssensa y’obusobozi okusigala ekwatibwako aammaamu n’emikutu.",
   "permissionsStorageSaveDenied": "{app_name} yeetaaga ssensa y’obusobozi okusigala okubikuumye ebifaananyi n’ebifaananyi ebya vidiyo, naye ssensa ezaweebwa zaulagiddwa ddala. Nnyika poly agayina mu nkola y’ekimu, olumanya 'Permissions' olwo ne Obusobozi.",
   "permissionsStorageSend": "{app_name} yeetaaga ssensa y’obusobozi okutuma ebifaananyi n’ebifaananyi ebya vidiyo.",
@@ -773,7 +773,7 @@
   "updateError": "Cannot Update",
   "updateErrorDescription": "{app_name} ekulemye okwekkulaakulanya. Nnyigamu {session_download_url} n'okuteekamu eddala eddala nga bwotekako, olwo olindako okuyita mu Help Center waffe okututegeeza ku buzibu buno.",
   "updateNewVersion": "Enkyukakyuka empya ya {app_name} eriwo, kakkirizza okkyusamu",
-  "updateNewVersionDescription": "Enkyukakyuka empya ya {app_name} eriwo. ",
+  "updateNewVersionDescription": "Enkyukakyuka empya ya {app_name} eriwo.",
   "updateReleaseNotes": "Genda ku Notiizi za Release",
   "updateSession": "{app_name} Update",
   "updateVersion": "Version {version}",
