--- a/_locales/lo/messages.json
+++ b/_locales/lo/messages.json
@@ -134,7 +134,7 @@
   "deleteAfterGroupPR1BlockThisUser": "ຫ້າມຜູ້ນັກນັບນີ້",
   "deleteAfterGroupPR1BlockUser": "ຫ້າມຜູ້ນັກ",
   "deleteAfterGroupPR3GroupErrorLeave": "ບໍ່ສາມາດອອກໄດ້ໃນຂະນະນີ້ທ່ານກໍາລັງເພີ່ມຫຼຶລົບສະມາຊິກ.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b>ໄດ້ກຳນົດລະຍະເວລາໃນການຂໍແກ້ຂອງຂໍ້ຄາບຊ່ວງທ່ານ<b>{time}</b> ",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b>ໄດ້ກຳນົດລະຍະເວລາໃນການຂໍແກ້ຂອງຂໍ້ຄາບຊ່ວງທ່ານ<b>{time}</b>",
   "deleteMessageConfirm": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບຂໍ້ຄວາມນີ້?",
   "deleteMessageDescriptionDevice": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບຂໍ້ຄວາມນີ້ຂອງຕ່າງອຸປະກອນນີ້ເທົ່ານັ້ນ?",
   "deleteMessageDescriptionEveryone": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບຂໍ້ຄວາມນີ້ກັບທຸກຄົນ?",
@@ -170,6 +170,7 @@
   "emojiCategoryActivities": "ກິລາເດີນທາງ.",
   "emojiCategoryAnimals": "ສັດແລະທຳມະຊາດ",
   "emojiReactsClearAll": "ເຈົ້າຕ້ອງທຳທີໃຫ້ໃຫ້ໄອອິໂມຈີທັງໝົດ {emoji}?",
+  "emojiReactsHoverTwoNameMultipleDesktop": "{name} and <span>{count} others</span> reacted with {emoji_name}",
   "enable": "ເປີດ",
   "errorCopyAndQuit": "ເສັກກີ້າບເອີເທິ່ນຫຍັງາ",
   "errorDatabase": "ຂໍ້ມູນຂອງຖານຂໍ້ມູນຜິດພາດ",
@@ -190,7 +191,7 @@
   "groupLeaveDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການອອກຈາກ <b>{group_name}</b>?",
   "groupLeaveErrorFailed": "ບໍ່ສາມາດອອກຈາກ {group_name}",
   "groupMemberLeft": "<b>{name}</b>ອອກຈາກກຸ່ມ.",
-  "groupMemberLeftMultiple": "<b>{name}</b> ແລະ <b>{count}</b> ",
+  "groupMemberLeftMultiple": "<b>{name}</b> ແລະ <b>{count}</b>",
   "groupMemberLeftTwo": "<b>{name}</b>และ<b>{other_name}</b>ออกจากກຸ່ມ.",
   "groupMemberNew": "<b>{name}</b>ເຂົ້າຮ່ວມກຸ່ມ.",
   "groupMemberYouLeft": "<b>ທ່ານ</b>ອອກຈາກກຸ່ມ.",
@@ -201,7 +202,7 @@
   "groupRemovedTwo": "<b>{name}</b>และ<b>{other_name}</b>ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
   "helpReportABugExportLogs": "ສົ່ງຂໍ້ຄວາມບັກ",
   "helpReportABugExportLogsDescription": "ສົ່ງຂໍ້ມູນຂອງທ່ານ, ແລ້ວດາວໂຫຼດໄຟລຜ່ານທາງโต๊ะຊ່ວຍເຫຼືອຂອງ {app_name}.",
-  "legacyGroupMemberNewMultiple": "<b>{name}</b> ແລະ <b>{count}</b> ",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> ແລະ <b>{count}</b>",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ແລະ <b>{other_name}</b> \",",
   "linkPreviewsEnable": "ເປີດການພິມລິ້ງເບິ່ງກ່ອນ",
   "linkPreviewsTurnedOffDescription": "{app_name} ຕ້ອງຕິດຕໍ່ກັບເວັບໄຊທ໌ທີ່ເຊື່ອມໂຍງເພື່ອສ້າງຮູບພາບພາບຢ່າງລະອຽດຂອງການລະດົມທີ່ເຈົ້າສົ່ງແລະຮັບ.<br/><br/>ປິດເຄື່ອງທີ່ຕັ້ງຂອງ {app_name} ໄດ້.",
