--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Ar norėtumėte pašalinti <b>{name}</b> ir <b>{count} kitus</b> iš <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Ar norėtumėte pašalinti <b>{name}</b> ir <b>{other_name}</b> iš <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Šalinti naudotoją ir jo žinutes] few [Šalinti naudotojus ir jų žinutes] many [Šalinti naudotojus ir jų žinutes] other [Šalinti naudotojus ir jų žinutes]}",
-  "groupRemoveUserOnly": "{count, plural, one [Šalinti naudotoją ] few [Šalinti naudotojus] many [Šalinti naudotojus] other [Šalinti naudotojus]}",
+  "groupRemoveUserOnly": "{count, plural, one [Šalinti naudotoją] few [Šalinti naudotojus] many [Šalinti naudotojus] other [Šalinti naudotojus]}",
   "groupRemoved": "<b>{name}</b> buvo pašalintas iš grupės.",
   "groupRemovedMultiple": "<b>{name}</b> ir <b>{count} kiti</b> buvo pašalinti iš grupės.",
   "groupRemovedTwo": "<b>{name}</b> ir <b>{other_name}</b> buvo pašalinti iš grupės.",
@@ -493,7 +493,7 @@
   "lockAppUnlocked": "{app_name} atrakinta",
   "max": "Maksimali",
   "media": "Medija",
-  "members": "{count, plural, one [# narys] few [# nariai] many [# nariai] other [# nariai]}",
+  "members": "{count, plural, one [# narys] few [# nariai] many [# narių] other [# nariai]}",
   "membersActive": "{count, plural, one [# aktyvus narys] few [# aktyvūs nariai] many [# aktyvūs nariai] other [# aktyvūs nariai]}",
   "membersAddAccountIdOrOns": "Pridėti paskyros ID arba ONS",
   "membersInvite": "Pakviesti draugus",
@@ -609,7 +609,7 @@
   "onboardingTos": "Paslaugų nuostatos",
   "onboardingTosPrivacy": "Naudodamiesi šia paslauga, Jūs sutinkate su mūsų <b>Paslaugų teikimo sąlygomis</b> ir <b>Privatumo politika</b>",
   "onionRoutingPath": "Path",
-  "onionRoutingPathDescription": "{app_name} slepia jūsų IP adresą, peradresuodamas jūsų žinutes per kelis aptarnavimo mazgus {app_name} decentralizuotame tinkle. Štai jūsų dabartinis kelias: ",
+  "onionRoutingPathDescription": "{app_name} slepia jūsų IP adresą, peradresuodamas jūsų žinutes per kelis aptarnavimo mazgus {app_name} decentralizuotame tinkle. Štai jūsų dabartinis kelias:",
   "onionRoutingPathDestination": "Paskirties vieta",
   "onionRoutingPathEntryNode": "Įėjimo mazgas",
   "onionRoutingPathServiceNode": "Service Node",
@@ -639,24 +639,24 @@
   "passwordSet": "Nustatyti slaptažodį",
   "passwordSetDescription": "Jūsų slaptažodis buvo nustatytas. Prašome saugoti jį saugiai.",
   "paste": "Įdėti",
-  "permissionMusicAudioDenied": "{app_name} reikia prieigos prie muzikos ir garso, kad galėtumėte siųsti failus, muziką ir garsą, bet ji buvo visam laikui uždrausta. Bakstelėkite Nustatymai -> Leidimai ir įjunkite \"Muziką ir garsą\".",
+  "permissionMusicAudioDenied": "{app_name} reikia prieigos prie muzikos ir garso, kad galėtumėte siųsti failus, muziką ir garsą, bet ji buvo visam laikui uždrausta. Bakstelėkite Nustatymai → Leidimai ir įjunkite \"Muziką ir garsą\".",
   "permissionsAppleMusic": "{app_name} reikia naudoti Apple Music, kad galėtų leisti medijos priedus.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatiškai tikrinti atnaujinimus paleidimo metu",
-  "permissionsCameraDenied": "{app_name} reikia prieigos prie kameros, kad galėtumėte fotografuoti ir filmuoti, bet ji buvo visam laikui uždrausta. Bakstelėkite Nustatymai -> Leidimai ir įjunkite \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} reikia prieigos prie kameros, kad galėtumėte fotografuoti ir filmuoti, bet ji buvo visam laikui uždrausta. Bakstelėkite Nustatymai → Leidimai ir įjunkite \"Kamera\".",
   "permissionsFaceId": "Ekrano užraktas {app_name} naudoja Face ID.",
   "permissionsKeepInSystemTray": "Palaikyti sistemos dėkle",
   "permissionsKeepInSystemTrayDescription": "{app_name} toliau veikia fone, kai užveriate langą",
   "permissionsLibrary": "{app_name} reikia prieigos prie nuotraukų bibliotekos norint tęsti. Galite įgalinti prieigą iOS nustatymuose.",
   "permissionsMicrophone": "Mikrofonas",
-  "permissionsMicrophoneAccessRequired": "{app_name} reikia mikrofono prieigos skambučiams ir garso žinutėms siųsti, tačiau ši prieiga buvo visam laikui atmesta. Bakstelėkite Nustatymai -> Leidimai ir įjunkite 'Mikrofonas'.",
+  "permissionsMicrophoneAccessRequired": "{app_name} reikia mikrofono prieigos skambučiams ir garso žinutėms siųsti, tačiau ši prieiga buvo visam laikui atmesta. Bakstelėkite Nustatymai → Leidimai ir įjunkite 'Mikrofonas'.",
   "permissionsMicrophoneAccessRequiredDesktop": "Jūs galite įjungti mikrofono prieigą {app_name} privatumo nustatymuose",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} reikia prieigos prie mikrofono, kad galėtumėte skambinti ir įrašinėti garso žinutes.",
   "permissionsMicrophoneDescription": "Leisti prieigą prie mikrofono.",
   "permissionsMusicAudio": "{app_name} reikia prieigos prie muzikos ir garso, kad galėtumėte siųsti failus, muziką ir garsą.",
   "permissionsRequired": "Reikalingas leidimas",
-  "permissionsStorageDenied": "{app_name} reikia prieigos prie nuotraukų bibliotekos, kad galėtumėte siųsti nuotraukas ir vaizdo įrašus, tačiau prieiga buvo visam laikui uždrausta. Bakstelėkite Nustatymai -> Leidimai ir įjunkite \"Nuotraukos ir vaizdo įrašai\".",
-  "permissionsStorageDeniedLegacy": "{app_name} reikia prieigos prie saugyklos, kad galėtumėte siųsti ir išsaugoti priedus. Bakstelėkite Nustatymai -> Leidimai ir įjunkite \"Saugykla\".",
+  "permissionsStorageDenied": "{app_name} reikia prieigos prie nuotraukų bibliotekos, kad galėtumėte siųsti nuotraukas ir vaizdo įrašus, tačiau prieiga buvo visam laikui uždrausta. Bakstelėkite Nustatymai → Leidimai ir įjunkite \"Nuotraukos ir vaizdo įrašai\".",
+  "permissionsStorageDeniedLegacy": "{app_name} reikia prieigos prie saugyklos, kad galėtumėte siųsti ir išsaugoti priedus. Bakstelėkite Nustatymai → Leidimai ir įjunkite \"Saugykla\".",
   "permissionsStorageSave": "{app_name} reikia prieigos prie saugyklos, kad galėtų įrašyti priedus ir mediją.",
   "permissionsStorageSaveDenied": "Norint įrašyti nuotraukas ir vaizdo įrašus, {app_name} reikia prieigos prie saugyklos, bet ji buvo visam laikui uždrausta. Prašome pereiti į programėlės nustatymus, pasirinkti \"Leidimai\" ir įjungti \"Saugyklą\".",
   "permissionsStorageSend": "{app_name} reikia prieigos prie saugyklos norint siųsti nuotraukas ir vaizdo įrašus.",
