--- a/_locales/mk/messages.json
+++ b/_locales/mk/messages.json
@@ -144,7 +144,7 @@
   "callsIncomingUnknown": "Доаѓачки повик",
   "callsMissed": "Пропуштен повик",
   "callsMissedCallFrom": "Пропуштен повик од {name}",
-  "callsNotificationsRequired": "Гласовните и видео повиците бараат активирање на известувањата во поставките на вашиот уред. ",
+  "callsNotificationsRequired": "Гласовните и видео повиците бараат активирање на известувањата во поставките на вашиот уред.",
   "callsPermissionsRequired": "Се потребни дозволи за повик",
   "callsPermissionsRequiredDescription": "Може да го овозможите дозволата за „Гласовни и видео повици“ во Поставките за приватност.",
   "callsReconnecting": "Повторно поврзување…",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Дали сакате да ги отстраните <b>{name}</b> и <b>{count} други</b> од <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Дали сакате да ги отстраните <b>{name}</b> и <b>{other_name}</b> од <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Отстрани корисник и неговите пораки] other [Отстрани корисници и нивните пораки]}",
-  "groupRemoveUserOnly": "{count, plural, one [Отстрани корисник ] other [Отстрани корисници]}",
+  "groupRemoveUserOnly": "{count, plural, one [Отстрани корисник] other [Отстрани корисници]}",
   "groupRemoved": "<b>{name}</b> беше отстранет од групата.",
   "groupRemovedMultiple": "<b>{name}</b> и <b>{count} други</b> беа отстранети од групата.",
   "groupRemovedTwo": "<b>{name}</b> и <b>{other_name}</b> беа отстранети од групата.",
@@ -639,28 +639,28 @@
   "passwordSet": "Постави Лозинка",
   "passwordSetDescription": "Вашата лозинка е поставена. Ве молиме чувајте ја безбедно.",
   "paste": "Залепи",
-  "permissionMusicAudioDenied": "{app_name} има потреба од пристап до музика и аудио за да може да испраќа датотеки, музика и аудио, но пристапот е трајно одбиен. Допрете Поставки -> Дозволи, и вклучете \"Музика и аудио\".",
+  "permissionMusicAudioDenied": "{app_name} има потреба од пристап до музика и аудио за да може да испраќа датотеки, музика и аудио, но пристапот е трајно одбиен. Допрете Поставки → Дозволи, и вклучете \"Музика и аудио\".",
   "permissionsAppleMusic": "{app_name} има потреба од Apple Music за да ги репродуцира медиумските прилози.",
   "permissionsAutoUpdate": "Автоматско ажурирање",
   "permissionsAutoUpdateDescription": "Автоматски проверува за ажурирања при стартување",
-  "permissionsCameraDenied": "{app_name} има потреба од пристап до камерата за да слика фотографии и видеа, но пристапот е трајно одбиен. Допрете Поставки -> Дозволи, и вклучете \"Камера\".",
+  "permissionsCameraDenied": "{app_name} има потреба од пристап до камерата за да слика фотографии и видеа, но пристапот е трајно одбиен. Допрете Поставки → Дозволи, и вклучете \"Камера\".",
   "permissionsFaceId": "Функцијата за заклучување екранот во {app_name} користи Face ID.",
   "permissionsKeepInSystemTray": "Чувај во системскиот плагин",
   "permissionsKeepInSystemTrayDescription": "{app_name} продолжува да работи во заднина кога ќе го затворите прозорецот",
   "permissionsLibrary": "{app_name} има потреба од пристап до фото библиотеката за да продолжи. Можете да го овозможите пристапот во поставките на iOS.",
   "permissionsMicrophone": "Микрофон",
-  "permissionsMicrophoneAccessRequired": "{app_name} има потреба од пристап до микрофонот за да прави повици и испраќа аудио пораки, но пристапот е трајно одбиен. Одете во поставки -> Дозволи, и овозможете \"Микрофон\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} има потреба од пристап до микрофонот за да прави повици и испраќа аудио пораки, но пристапот е трајно одбиен. Одете во поставки → Дозволи, и овозможете \"Микрофон\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Може да го овозможите пристапот до микрофонот во поставките за приватност на {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} има потреба од пристап до микрофонот за да врши повици и снима аудио пораки.",
   "permissionsMicrophoneDescription": "Овозможи пристап до микрофон.",
   "permissionsMusicAudio": "{app_name} има потреба од пристап до музика и аудио за да може да испраќа датотеки, музика и аудио.",
   "permissionsRequired": "Потребна е дозвола",
-  "permissionsStorageDenied": "{app_name} има потреба од пристап до фото библиотеката за да можете да испраќате фотографии и видеа, но пристапот е трајно одбиен. Допрете Поставки -> Дозволи, и вклучете \"Фотографии и видеа\".",
-  "permissionsStorageDeniedLegacy": "{app_name} има потреба од пристап до складиштето за да можете да испраќате и зачувате прилози. Допрете Поставки -> Дозволи, и вклучете \"Складиште\".",
+  "permissionsStorageDenied": "{app_name} има потреба од пристап до фото библиотеката за да можете да испраќате фотографии и видеа, но пристапот е трајно одбиен. Допрете Поставки → Дозволи, и вклучете \"Фотографии и видеа\".",
+  "permissionsStorageDeniedLegacy": "{app_name} има потреба од пристап до складиштето за да можете да испраќате и зачувате прилози. Допрете Поставки → Дозволи, и вклучете \"Складиште\".",
   "permissionsStorageSave": "{app_name} има потреба од пристап до складиштето за да зачува прилози и медиуми.",
   "permissionsStorageSaveDenied": "{app_name} има потреба од пристап до складиштето за да зачува фотографии и видеа, но пристапот е трајно одбиен. Ве молиме продолжете до поставките на апликацијата, одберете \"Permissions\" и овозможете \"Складиште\".",
   "permissionsStorageSend": "{app_name} има потреба од пристап до складиштето за да испраќа фотографии и видеа.",
-  "pin": "Прикачи ",
+  "pin": "Прикачи",
   "pinConversation": "Прикачи разговор",
   "pinUnpin": "Откачи",
   "pinUnpinConversation": "Откачи разговор",
@@ -773,7 +773,7 @@
   "updateError": "Не може да се ажурира",
   "updateErrorDescription": "{app_name} не успеа да се ажурира. Ве молиме одете на {session_download_url} и рачно инсталирајте ја новата верзија, потоа контактирајте го нашиот Центар за помош за да нè известите за овој проблем.",
   "updateNewVersion": "Достапна е нова верзија на {app_name}, допрете за ажурирање",
-  "updateNewVersionDescription": "Достапна е нова верзија на {app_name}. ",
+  "updateNewVersionDescription": "Достапна е нова верзија на {app_name}.",
   "updateReleaseNotes": "Оди до белешки за верзијата",
   "updateSession": "Ажурирање на {app_name}",
   "updateVersion": "Верзија {version}",
