--- a/_locales/mn/messages.json
+++ b/_locales/mn/messages.json
@@ -145,7 +145,7 @@
   "callsMicrophonePermissionsRequired": "Та <b>{name}</b>-аас дуудлага авч чадсангүй, учир нь та <b>микрофон ашиглах зөвшөөрөлгүй</b> байна.",
   "callsMissed": "Тасалдсан дуудлага",
   "callsMissedCallFrom": "{name} тасалдсан дуудлага",
-  "callsNotificationsRequired": "Дуу болон видео дуудлагууд таны төхөөрөмжийн систем тохиргоонд мэдээллийг идэвхжүүлэх шаардлагатай байна. ",
+  "callsNotificationsRequired": "Дуу болон видео дуудлагууд таны төхөөрөмжийн систем тохиргоонд мэдээллийг идэвхжүүлэх шаардлагатай байна.",
   "callsPermissionsRequired": "Дуудлагын зөвшөөрөл шаардлагатай",
   "callsPermissionsRequiredDescription": "Таныг зөвшөөрөх бол \"Дуу ба Видео Дуудлага\" зөвшөөрлийг Нууцлалын Тохиргоонд тохируулах боломжтой.",
   "callsReconnecting": "Сэргээж байна...",
@@ -640,7 +640,7 @@
   "passwordSet": "Нууц үгээ тохируулах",
   "passwordSetDescription": "Таны нууц үг томилогдсон байна. Нууц үгээ хамгаалж байгаарай.",
   "paste": "Буулгах",
-  "permissionMusicAudioDenied": "{app_name}-д файлууд, хөгжим, аудиог илгээхийн тулд хөгжмийн болон аудионы хандалт шаардлагатай байгаа боловч энэ нь байнга зөвшөөрөхөөс татгалзсан байна. Тохиргоо -> Зөвшөөрөл хэсэгрүү ороод, \"Хөгжим болон аудио\"-г асаана уу.",
+  "permissionMusicAudioDenied": "{app_name}-д файлууд, хөгжим, аудиог илгээхийн тулд хөгжмийн болон аудионы хандалт шаардлагатай байгаа боловч энэ нь байнга зөвшөөрөхөөс татгалзсан байна. Тохиргоо → Зөвшөөрөл хэсэгрүү ороод, \"Хөгжим болон аудио\"-г асаана уу.",
   "permissionsAppleMusic": "{app_name} медиа хавсралтуудыг тоглуулахын тулд Apple Music-ийг ашиглах хэрэгтэй.",
   "permissionsAutoUpdate": "Автоматаар шинэчлэх",
   "permissionsAutoUpdateDescription": "Эхлүүлэх үед шинэчлэлтийг автоматаар шалгах",
@@ -650,18 +650,18 @@
   "permissionsKeepInSystemTrayDescription": "{app_name} нь та цонхыг хаахад арын горимд ажилласаар байна",
   "permissionsLibrary": "{app_name} үргэлжлүүлэхийн тулд зураг сангийн хандалт хэрэгтэй. Та iOS тохиргоонд хандах боломжтой.",
   "permissionsMicrophone": "Микрофон",
-  "permissionsMicrophoneAccessRequired": "{app_name} нь дуудлага хийх, аудио мессеж илгээхийн тулд микрофонд хандах эрх хэрэгтэй байна, гэхдээ энэ нь байнга хориотой байна. Тохиргоо -> Зөвшөөрөл хэсэгрүү ороод, \"Микрофон\"-г асаана уу.",
+  "permissionsMicrophoneAccessRequired": "{app_name} нь дуудлага хийх, аудио мессеж илгээхийн тулд микрофонд хандах эрх хэрэгтэй байна, гэхдээ энэ нь байнга хориотой байна. Тохиргоо → Зөвшөөрөл хэсэгрүү ороод, \"Микрофон\"-г асаана уу.",
   "permissionsMicrophoneAccessRequiredDesktop": "Та {app_name}-ийн нууцлалын тохиргоонд микрофоны хандалтыг идэвхжүүлж болно",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} дуудлага хийх болон аудио мессеж бичихийн тулд микрофоны хандалт хэрэгтэй.",
   "permissionsMicrophoneDescription": "Микрофоноо ашиглах зөвшөөрөл өгөх.",
   "permissionsMusicAudio": "{app_name} нь файлууд, дуу хөгжим болон аудио илгээхийн тулд дуу хөгжим болон аудио хандах эрхийг шаарддаг.",
   "permissionsRequired": "Зөвшөөрөл шаардлагатай",
-  "permissionsStorageDenied": "{app_name} нь зураг болон видео илгээхийн тулд зураг номын сангийн хандалт хэрэгтэй байна, гэхдээ энэ нь байнга хориотой. Тохиргоо -> Зөвшөөрөл хэсэгрүү орж, \"Зураг болон видео\" асаана уу.",
-  "permissionsStorageDeniedLegacy": "{app_name} нь хавсралтуудыг илгээж болон хадгалахын тулд хадгалахын хандалт хэрэгтэй байна. Тохиргоо -> Зөвшөөрөл хэсэгрүү орж, \"Хадгалах\" асаана уу.",
+  "permissionsStorageDenied": "{app_name} нь зураг болон видео илгээхийн тулд зураг номын сангийн хандалт хэрэгтэй байна, гэхдээ энэ нь байнга хориотой. Тохиргоо → Зөвшөөрөл хэсэгрүү орж, \"Зураг болон видео\" асаана уу.",
+  "permissionsStorageDeniedLegacy": "{app_name} нь хавсралтуудыг илгээж болон хадгалахын тулд хадгалахын хандалт хэрэгтэй байна. Тохиргоо → Зөвшөөрөл хэсэгрүү орж, \"Хадгалах\" асаана уу.",
   "permissionsStorageSave": "{app_name} нь хавсралт болон медиа хадгалахын тулд сангийн хандалт хэрэгтэй.",
   "permissionsStorageSaveDenied": "{app_name} нь гэрэл зураг болон видеонуудыг хадгалахын тулд сангийн хандалт хэрэгтэй гэвч энэ нь байнгын хоригдсон. Тохиргоо руу орж, \"Permissions\"-г сонгоод, \"Storage\"-г идэвхжүүлнэ үү.",
   "permissionsStorageSend": "{app_name} зураг болон видеонуудыг илгээхийн тулд сангийн хандалт хэрэгтэй.",
-  "pin": "Зүү ",
+  "pin": "Зүү",
   "pinConversation": "Яриаг зүүх",
   "pinUnpin": "Түгжээс салгах",
   "pinUnpinConversation": "Яриа түгжээс салгах",
