--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -640,24 +640,24 @@
   "passwordSet": "Tetapkan Kata Laluan",
   "passwordSetDescription": "Kata laluan anda telah ditetapkan. Sila simpan dengan selamat.",
   "paste": "Tampal",
-  "permissionMusicAudioDenied": "{app_name} memerlukan akses muzik dan audio untuk menghantar fail, muzik dan audio, tetapi ia telah ditolak secara kekal. Ketik Tetapan -> Kebenaran, dan hidupkan \"Muzik dan audio\".",
+  "permissionMusicAudioDenied": "{app_name} memerlukan akses muzik dan audio untuk menghantar fail, muzik dan audio, tetapi ia telah ditolak secara kekal. Ketik Tetapan → Kebenaran, dan hidupkan \"Muzik dan audio\".",
   "permissionsAppleMusic": "{app_name} perlu menggunakan Apple Music untuk memainkan lampiran media.",
   "permissionsAutoUpdate": "Kemas Kini Auto",
   "permissionsAutoUpdateDescription": "Periksa kemas kini secara automatik semasa permulaan",
-  "permissionsCameraDenied": "{app_name} memerlukan akses kamera untuk mengambil gambar dan video, tetapi akses telah ditolak secara kekal. Ketik Tetapan -> Kebenaran, dan hidupkan \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} memerlukan akses kamera untuk mengambil gambar dan video, tetapi akses telah ditolak secara kekal. Ketik Tetapan → Kebenaran, dan hidupkan \"Kamera\".",
   "permissionsFaceId": "Ciri kunci skrin pada {app_name} menggunakan Face ID.",
   "permissionsKeepInSystemTray": "Simpan dalam Sistem Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} terus berjalan di latar belakang apabila anda menutup tetingkap",
   "permissionsLibrary": "{app_name} memerlukan akses perpustakaan foto untuk meneruskan. Anda boleh menghidupkan akses dalam tetapan iOS.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} memerlukan akses mikrofon untuk membuat panggilan dan menghantar mesej audio, tetapi akses telah ditolak secara kekal. Ketik Tetapan -> Kebenaran, dan hidupkan \"Mikrofon\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} memerlukan akses mikrofon untuk membuat panggilan dan menghantar mesej audio, tetapi akses telah ditolak secara kekal. Ketik Tetapan → Kebenaran, dan hidupkan \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Anda boleh mengaktifkan akses mikrofon dalam tetapan privasi {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} memerlukan akses mikrofon untuk membuat panggilan dan merakam mesej audio.",
   "permissionsMicrophoneDescription": "Benarkan akses ke mikrofon.",
   "permissionsMusicAudio": "{app_name} memerlukan akses kepada muzik dan audio untuk menghantar fail, muzik dan audio.",
   "permissionsRequired": "Kebenaran diperlukan",
-  "permissionsStorageDenied": "{app_name} memerlukan akses perpustakaan foto supaya anda boleh menghantar foto dan video, tetapi ia telah ditolak secara kekal. Ketik Tetapan -> Kebenaran, dan hidupkan \"Foto dan video\".",
-  "permissionsStorageDeniedLegacy": "{app_name} memerlukan akses storan supaya anda boleh menghantar dan menyimpan lampiran. Ketik Tetapan -> Kebenaran, dan hidupkan \"Storan\".",
+  "permissionsStorageDenied": "{app_name} memerlukan akses perpustakaan foto supaya anda boleh menghantar foto dan video, tetapi ia telah ditolak secara kekal. Ketik Tetapan → Kebenaran, dan hidupkan \"Foto dan video\".",
+  "permissionsStorageDeniedLegacy": "{app_name} memerlukan akses storan supaya anda boleh menghantar dan menyimpan lampiran. Ketik Tetapan → Kebenaran, dan hidupkan \"Storan\".",
   "permissionsStorageSave": "{app_name} memerlukan akses storan untuk menyimpan lampiran dan media.",
   "permissionsStorageSaveDenied": "{app_name} memerlukan akses storan untuk menyimpan foto dan video, tetapi akses telah ditolak secara kekal. Sila terus ke tetapan aplikasi, pilih \"Permissions\", dan membolehkan \"Storan\".",
   "permissionsStorageSend": "{app_name} memerlukan akses storan untuk menghantar foto dan video.",
