--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -5,7 +5,7 @@
   "accountIdCopied": "အကောင့်အိုင်ဒီ ကူးယူပြီးပါပြီ",
   "accountIdCopyDescription": "အကောင့် ID ကို ကူးယူပြီးနောက် သင်၏သူငယ်ချင်းများကို မက်ဆေ့ချ်ပို့နိုင်အောင် မျှဝေပါ။",
   "accountIdEnter": "Account ID ထည့်ပါ",
-  "accountIdErrorInvalid": "ဤ<Account ID> မသန်ချင်း။ ကျေးဇူးပြု၍ စစ်စစ်နှင့် ပြန်တှေ့ပါ။",
+  "accountIdErrorInvalid": "ဤAccount IDမသန်ချင်း။ ကျေးဇူးပြု၍ စစ်စစ်နှင့် ပြန်တှေ့ပါ။",
   "accountIdOrOnsEnter": "Account ID သို့မဟုတ် ONS ထည့်ပါ",
   "accountIdOrOnsInvite": "Account ID သို့မဟုတ် ONS ကို ဖိတ်ကြားပါ",
   "accountIdShare": "ဟေ့၊ ကျွန်ုပ်တယ် {app_name} အားလုံး ပုရိသတို့၊ လုံခြုံရေးနဲ့တကွ ချက်ချင်းမက်ဆေ့ချ်တွေလာလို့မဟုတ်ပါ၊ ကျွန်ုပ်တို့ထံ လာပါ！ ကျွန်ုပ်တို့၏ အကောင့် ID က<br/><br/>{account_id}<br/><br/>ဒါတွဲပါ။ {session_download_url} တွေ့ပါ",
@@ -419,7 +419,7 @@
   "groupNameEnter": "အဖွဲ့အမည်ထည့်ပါ",
   "groupNameEnterPlease": "အဖွဲ့နာမည်ထည့်ပေးပါ",
   "groupNameEnterShorter": "ကျေးဇူးပြု၍ ပိုတိုသော အဖွဲ့အမည် ထည့်ပါ",
-  "groupNameNew": "အုပ်စုအမည်ဟာ {group_name} ဖြစ်ပါတယ်။ ",
+  "groupNameNew": "အုပ်စုအမည်ဟာ {group_name} ဖြစ်ပါတယ်။",
   "groupNameUpdated": "အဖွဲ့အမည်အားအပ်ဒိတ်လုပ်ထားသည်",
   "groupNoMessages": "သင့်တွင် <b>{group_name}</b> မှ မက်ဆေ့ချ် မရှိပါ။ မက်ဆေ့ချ်ပို့၍ ဆွေးနွေးပွဲကို စတင်ပါ!",
   "groupOnlyAdmin": "You are the only admin in <b>{group_name}.</b><br/><br/>Group members and settings cannot be changed without an admin.",
@@ -609,7 +609,7 @@
   "onboardingTos": "ဝန်ဆောင်မှု သတ်မှတ်ချက်များ",
   "onboardingTosPrivacy": "ဤဝန်ဆောင်မှု ကို အသုံးပြုခြင်းဖြင့် သင်သည် ကျွန်ုပ်များ၏ <b>ဝန်ဆောင်မှု စည်းမျဉ်းများ</b>နှင့် <b>ကိုယ်ရေးလုံခြုံမှု မူဝါဒ</b> ကို သဘောတူကြောင်း ဖြစ်သည်",
   "onionRoutingPath": "လမ်းကြောင်း",
-  "onionRoutingPathDescription": "{app_name} သည် မှာတေ့တာကိုကာကွယ်ရန် IP ကိုပိတ်သည် သင်၏မက်ဆေ့ဂျ်များကို {app_name} ၏ ထိုက်တာလိုအင်တို့တွင်ဆစ်စ်ပါသည်။ ",
+  "onionRoutingPathDescription": "{app_name} သည် မှာတေ့တာကိုကာကွယ်ရန် IP ကိုပိတ်သည် သင်၏မက်ဆေ့ဂျ်များကို {app_name} ၏ ထိုက်တာလိုအင်တို့တွင်ဆစ်စ်ပါသည်။",
   "onionRoutingPathDestination": "ဦးတည်ရာနေရာ",
   "onionRoutingPathEntryNode": "အဝင် Node",
   "onionRoutingPathServiceNode": "Service Node",
@@ -643,7 +643,7 @@
   "permissionsAppleMusic": "{app_name} သည် Apple Music ကို အသုံးပြု၍ မီဒီယာလုံခြုံမှုကို ဖွင့်ရန် လိုအပ်သည်။",
   "permissionsAutoUpdate": "အလိုအလျောက် အပ်ဒိတ်လုပ်မည်",
   "permissionsAutoUpdateDescription": "စက်ဖွင့်တဲ့ အချိန်မှာ အပ်ဒိတ်တွေကို အလိုအလျောက် စစ်ဆေးပါ",
-  "permissionsCameraDenied": "{app_name} သည် ဓာတ်ပုံများနှင့် ဗီဒီယိုများ ရိုက်ရန် ကင်မရာခွင့်ပြုချက်လိုအပ်ပါသည်၊ သို့သော် အမြဲတမ်းငြင်းပယ်ခြင်းခံခဲ့ရသည်။ ကျေးဇူးပြု၍ 'ဆက်တင်များ' -> 'ခွင့်ပြုချက်များ' ကိုရွေးချယ်ပြီး 'ကင်မရာ' ကိုဖွင့်ပါ။",
+  "permissionsCameraDenied": "{app_name} သည် ဓာတ်ပုံများနှင့် ဗီဒီယိုများ ရိုက်ရန် ကင်မရာခွင့်ပြုချက်လိုအပ်ပါသည်၊ သို့သော် အမြဲတမ်းငြင်းပယ်ခြင်းခံခဲ့ရသည်။ ကျေးဇူးပြု၍ 'ဆက်တင်များ' → 'ခွင့်ပြုချက်များ' ကိုရွေးချယ်ပြီး 'ကင်မရာ' ကိုဖွင့်ပါ။",
   "permissionsFaceId": "{app_name} တွင် အမ်ကာ မျက်နှာ မြင်စနစ် लॉग इन ၏ လုံခြုံစေသည်။",
   "permissionsKeepInSystemTray": "စနစ်ထဲတွင်ထားမည်",
   "permissionsKeepInSystemTrayDescription": "{app_name} ကိုပိတ်လိုက်ချိန် ဝင်းဒိုးကိုပိတ်လိုက်ရင် မီးနောက်ဆုံးဝင်ရောက်ထဲမှာ ဆက်လက် လုပ်ဆောင်နေပါသည်",
@@ -655,12 +655,12 @@
   "permissionsMicrophoneDescription": "မိုက်ခရိုဖုန်းသို့ ခွင့်ပြုမည်။",
   "permissionsMusicAudio": "{app_name} သည် ဖိုင်များ၊ ဂီတနှင့် အသံများ ပို့ရန်သော ရောက်ရောက် ရှာဖွေရန် မျက်ကွယ်ခွင့်ပြုချက်များလိုအပ်သည်။",
   "permissionsRequired": "ခွင့်ပြုချက် လိုအပ်သည်",
-  "permissionsStorageDenied": "{app_name} သည် ဓာတ်ပုံနှင့် ဗီဒီယိုများ ပို့ရန် အမှတ်တားမှတ်တား ထည့်ရန်လိုအပ်ပါသည်၊ သို့သော် ၎င်းကို အမြဲတမ်းငြင်းပယ်ခြင်းခံလိုက်ရပါသည်။ အဆက်ဆက်ဆက်ဆက်ဆက်ဆက်ပို့ရန် 'ဆက်တင်များ' ကိုနှိပ်ပါ။ -> ကွာတာတွင် 'ဓာတ်ပုံနှင့်ဗီဒီယိုများ' ကိုဖွင့်ပါ။",
-  "permissionsStorageDeniedLegacy": "{app_name} သည် ပစ္စည်းများအား ပို့ရန်နှင့် သိမ်းရန်အတွက် သိုလှောင်ခွင့်ပြုချက်လိုအပ်ပါသည်။ 'ဆက်တင်များ' တွင် ဗားရှင်း -> ကွာတာတွင် 'သိုလှောင်ခွင့်ပြုချက်' ကိုဖွင့်ပါ။",
+  "permissionsStorageDenied": "{app_name} သည် ဓာတ်ပုံနှင့် ဗီဒီယိုများ ပို့ရန် အမှတ်တားမှတ်တား ထည့်ရန်လိုအပ်ပါသည်၊ သို့သော် ၎င်းကို အမြဲတမ်းငြင်းပယ်ခြင်းခံလိုက်ရပါသည်။ အဆက်ဆက်ဆက်ဆက်ဆက်ဆက်ပို့ရန် 'ဆက်တင်များ' ကိုနှိပ်ပါ။ → ကွာတာတွင် 'ဓာတ်ပုံနှင့်ဗီဒီယိုများ' ကိုဖွင့်ပါ။",
+  "permissionsStorageDeniedLegacy": "{app_name} သည် ပစ္စည်းများအား ပို့ရန်နှင့် သိမ်းရန်အတွက် သိုလှောင်ခွင့်ပြုချက်လိုအပ်ပါသည်။ 'ဆက်တင်များ' တွင် ဗားရှင်း → ကွာတာတွင် 'သိုလှောင်ခွင့်ပြုချက်' ကိုဖွင့်ပါ။",
   "permissionsStorageSave": "{app_name} သည် ပူးတွဲချက်များနှင့် မီဒီယာကို သိမ်းဆည်းရန် သိုလှောင်မှုခွင့်ပြုချက်လိုအပ်ပါသည်။",
   "permissionsStorageSaveDenied": "{app_name} သည် ဓာတ်ပုံများနှင့် ဗီဒီယိုများ သိမ်းဆည်းရန် သိုလှောင်ခွင့်ပြုချက်လိုအပ်ပါသည်၊ သို့သော် ၎င်းသည် အမြဲတမ်းငြင်းပယ်ခံခဲ့ရသည်။ ကျေးဇူးပြု၍ အက်ပ်ဆက်တင်များသို့ ဆက်၍ \"ခွင့်ပြုချက်များ\" ကိုရွေးချယ်ကာ \"သိုလှောင်\" ကို ဖွင့်ပါ။",
   "permissionsStorageSend": "{app_name} သည် ဓာတ်ပုံများနှင့် ဗွီဒီယိုများ ပို့ရန် သိမ်းဆည်းမှုပုံစံခွင့်လိုအပ်သည်။",
-  "pin": "Pin ",
+  "pin": "Pin",
   "pinConversation": "စကားပြောဆိုမှု ဖိုင်ပိတ်",
   "pinUnpin": "ပင်ဖြစ်သည့် စကားပြောပါမည်",
   "pinUnpinConversation": "စကားပြောရန် စကားပြောပါမည်",
