--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Skriv inn et gruppenavn",
   "groupNameEnterPlease": "Vennligst skriv inn et gruppenavn.",
   "groupNameEnterShorter": "Vennligst skriv inn et kortere gruppenavn.",
-  "groupNameNew": "Gruppens navn er nå {group_name}. ",
+  "groupNameNew": "Gruppens navn er nå {group_name}.",
   "groupNameUpdated": "Gruppenavnet oppdatert.",
   "groupNoMessages": "Du har ingen meldinger fra <b>{group_name}</b>. Send en melding for å starte samtalen!",
   "groupOnlyAdmin": "Du er den eneste administratoren i <b>{group_name}</b>.<br/><br/>Gruppemedlemmer og innstillinger kan ikke endres uten en administrator.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Vil du fjerne <b>{name}</b> og <b>{count} andre</b> fra <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Vil du fjerne <b>{name}</b> og <b>{other_name}</b> fra <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Fjern brukeren og meldinga deres] other [Fjern brukere og beskjedene deres]}",
-  "groupRemoveUserOnly": "{count, plural, one [Fjern bruker ] other [Fjern brukere]}",
+  "groupRemoveUserOnly": "{count, plural, one [Fjern bruker] other [Fjern brukere]}",
   "groupRemoved": "<b>{name}</b> ble fjernet fra gruppen.",
   "groupRemovedMultiple": "<b>{name}</b> og <b>{count} andre</b> ble fjernet fra gruppen.",
   "groupRemovedTwo": "<b>{name}</b> og <b>{other_name}</b> ble fjernet fra gruppen.",
@@ -639,28 +639,28 @@
   "passwordSet": "Still passord",
   "passwordSetDescription": "Passordet ditt er stilt. Vennligst oppbevar det trygt.",
   "paste": "Lim inn",
-  "permissionMusicAudioDenied": "{app_name} trenger tilgang til musikk og lyd for å sende filer, musikk og lyd, men det har blitt permanent nektet. Trykk på Innstillinger -> Tillatelser, og slå på 'Musikk og lyd'.",
+  "permissionMusicAudioDenied": "{app_name} trenger tilgang til musikk og lyd for å sende filer, musikk og lyd, men det har blitt permanent nektet. Trykk på Innstillinger → Tillatelser, og slå på 'Musikk og lyd'.",
   "permissionsAppleMusic": "{app_name} trenger å bruke Apple Music for å spille av mediavedlegg.",
   "permissionsAutoUpdate": "Automatisk oppdatering",
   "permissionsAutoUpdateDescription": "Automatisk sjekk for oppdateringer ved oppstart",
-  "permissionsCameraDenied": "{app_name} trenger kameratilgang for å ta bilder og videoer, men det har blitt permanent nektet. Trykk på Innstillinger -> Tillatelser, og slå på 'Kamera'.",
+  "permissionsCameraDenied": "{app_name} trenger kameratilgang for å ta bilder og videoer, men det har blitt permanent nektet. Trykk på Innstillinger → Tillatelser, og slå på 'Kamera'.",
   "permissionsFaceId": "Skjermlåsfunksjonen på {app_name} bruker Face ID.",
   "permissionsKeepInSystemTray": "Behold i systemstatusfeltet",
   "permissionsKeepInSystemTrayDescription": "{app_name} fortsetter å kjøre i bakgrunnen når du lukker vinduet",
   "permissionsLibrary": "{app_name} trenger tilgang til bildebiblioteket for å fortsette. Du kan aktivere tilgang i iOS-innstillingene.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} trenger mikrofontilgang for å ringe og sende lydmeldinger, men det har blitt permanent nektet. Trykk innstillinger -> Tillatelser, og slå på \"Mikrofon\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} trenger mikrofontilgang for å ringe og sende lydmeldinger, men det har blitt permanent nektet. Trykk innstillinger → Tillatelser, og slå på \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kan aktivere mikrofontilgang i {app_name}s personverninnstillinger",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} trenger mikrofontilgang for å ringe og spille inn lydmeldinger.",
   "permissionsMicrophoneDescription": "Gi tilgang til mikrofonen.",
   "permissionsMusicAudio": "{app_name} trenger tilgang til musikk og lyd for å sende filer, musikk og lyd.",
   "permissionsRequired": "Tillatelse kreves",
-  "permissionsStorageDenied": "{app_name} trenger tilgang til bildebiblioteket for at du skal kunne sende bilder og videoer, men tilgangen har blitt permanent avslått. Trykk Innstillinger -> Tillatelser, og slå på \"Bilder og videoer\".",
-  "permissionsStorageDeniedLegacy": "{app_name} trenger tilgang til lagring for at du skal kunne sende og lagre vedlegg. Trykk Innstillinger -> Tillatelser, og slå på \"Lagring\".",
+  "permissionsStorageDenied": "{app_name} trenger tilgang til bildebiblioteket for at du skal kunne sende bilder og videoer, men tilgangen har blitt permanent avslått. Trykk Innstillinger → Tillatelser, og slå på \"Bilder og videoer\".",
+  "permissionsStorageDeniedLegacy": "{app_name} trenger tilgang til lagring for at du skal kunne sende og lagre vedlegg. Trykk Innstillinger → Tillatelser, og slå på \"Lagring\".",
   "permissionsStorageSave": "{app_name} trenger lagringstilgang for å lagre vedlegg og media.",
   "permissionsStorageSaveDenied": "{app_name} trenger lagringstilgang for å lagre bilder og videoer, men den har blitt permanent nektet. Fortsett til appinnstillingene, velg \"Tillatelser\" og aktiver \"Lagring\".",
   "permissionsStorageSend": "{app_name} trenger lagringstilgang for å sende bilder og videoer.",
-  "pin": "Fest ",
+  "pin": "Fest",
   "pinConversation": "Fest samtale",
   "pinUnpin": "Løsne",
   "pinUnpinConversation": "Løsne samtale",
