--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -32,7 +32,7 @@
   "adminRemoveFailed": "{name} लाई Admin मा हटाउन असफल भयो।",
   "adminRemoveFailedMultiple": "<b>{name}</b> र <b>{count} अन्य</b>लाई प्रशासकबाट हटाउन असफल।",
   "adminRemoveFailedOther": "<b>{name}</b> र <b>{other_name}</b>लाईप्रशासकबाट हटाउन असफल।",
-  "adminRemovedUser": "<b>{name}</b>लाई Admin> बाट हटाइएको थियो।",
+  "adminRemovedUser": "<b>{name}</b>लाई Admin बाट हटाइएको थियो।.",
   "adminRemovedUserMultiple": "<b>{name}</b> र <b>{count} अन्य</b>लाई प्रशासकबाट हटाइयो।",
   "adminRemovedUserOther": "<b>{name}</b> र <b>{other_name}</b>लाईप्रशासकबाट हटाइयो।",
   "adminSendingPromotion": "प्रशासन प्रमोशन पठाउने",
@@ -125,7 +125,7 @@
   "blockBlockedDescription": "सन्देश पठाउन यो सम्पर्क अनब्लक गर्नुहोस्।",
   "blockBlockedNone": "कुनै ब्लक गरिएका सम्पर्कहरू छैनन्",
   "blockBlockedUser": "{name} ब्लक गरिएको छ",
-  "blockDescription": "के तपाईंलाई <b>{name} </b> بادुकाउनुभो>? Block गरिएका प्रयोगकर्ताहरूले तपाईलाई सन्देश अनुरोधहरू, समूह आमन्त्रण वा कल दिन सक्दैनन्।",
+  "blockDescription": "के तपाईंलाई <b>{name}</b> بادुकाउनुभो? Block गरिएका प्रयोगकर्ताहरूले तपाईलाई सन्देश अनुरोधहरू, समूह आमन्त्रण वा कल दिन सक्दैनन्।.",
   "blockUnblock": "अनब्लक गर्नुहोस्",
   "blockUnblockName": "तपाईं <b>{name}</b>लाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
   "blockUnblockNameMultiple": "तपाईं <b>{name}</b> र <b>{count}</b> अन्यलाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
@@ -273,6 +273,7 @@
   "deleteAfterLegacyGroupsGroupCreation": "कृपया समूह बनाउँदै गर्दा प्रतीक्षा गर्नुहोस्...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "समूह अद्यावधिक गर्न असफल भयो",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "तपाईंलाई अरूसँग सन्देश मेट्नको अनुमति छैन।",
+  "deleteMessage": "{count, plural, one [सन्देशहरू मेट्नुहोस्] other [सन्देशहरू मेट्नुहोस्]}",
   "deleteMessageConfirm": "तपाईं यो सन्देश मेटाउन निश्चित हुनुहुन्छ?",
   "deleteMessageDeletedGlobally": "यो सन्देश मेटिएको थियो।",
   "deleteMessageDeletedLocally": "यो सन्देश यस उपकरणमा मेटिएको थियो।",
@@ -281,6 +282,7 @@
   "deleteMessageDeviceOnly": "यो उपकरणमा मात्र मेटाउनुहोस्",
   "deleteMessageDevicesAll": "मेरो सबै उपकरणमा मेटाउनुहोस्",
   "deleteMessageEveryone": "सर्वजनका लागि मेटाउनुहोस्",
+  "deleteMessageFailed": "{count, plural, one [सन्देश मेट्न असफल भयो।] other [सन्देशहरू मेट्न असफल भयो।]}",
   "deleteMessagesConfirm": "तपाईं यी सन्देशहरू मेटाउन निश्चित हुनुहुन्छ?",
   "deleteMessagesDescriptionDevice": "के तपाई पक्का हुनुहुन्छ कि तपाई यी सन्देशहरू यो उपकरणबाट मात्र मेटाउन चाहनुहुन्छ?",
   "deleteMessagesDescriptionEveryone": "के तपाई पक्का हुनुहुन्छ कि तपाई यी सन्देशहरू सबैको लागि मेटाउन चाहनुहुन्छ?",
@@ -416,7 +418,7 @@
   "groupNameEnter": "समूहको नाम प्रविष्ट गर्नुहोस्",
   "groupNameEnterPlease": "कृपया समूहको नाम प्रविष्ट गर्नुहोस्।",
   "groupNameEnterShorter": "कृपया छोटो समूह नाम प्रविष्ट गर्नुहोस्।",
-  "groupNameNew": "समूह नाम अब {group_name} छ। ",
+  "groupNameNew": "समूह नाम अब {group_name} छ।",
   "groupNameUpdated": "समूह नाम अद्यावधिक गरियो।",
   "groupNoMessages": "तपाईंसँग <b>{group_name}</b>बाट कुनै सन्देश छैन। कुराकानी सुरु गर्न सन्देश पठाउनुहोस्!",
   "groupOnlyAdmin": "तपाईं <b>{group_name}</b> मा मात्र प्रशासक हुनुहुन्छ।<br/><br/>समूह सदस्यहरू र सेटिङहरू प्रशासक बिना परिवर्तन गर्न सकिदैन।",
@@ -426,6 +428,8 @@
   "groupRemoveDescription": "तपाईं हटाउन चाहनुहुन्छ <b>{name}</b> देखि <b>{group_name}</b>?",
   "groupRemoveDescriptionMultiple": "तपाईं हटाउन चाहनुहुन्छ <b>{name}</b> र <b>{count} अन्यहरू</b> देखि <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "तपाईं हटाउन चाहनुहुन्छ <b>{name}</b> र <b>{other_name}</b> देखि <b>{group_name}</b>?",
+  "groupRemoveMessages": "{count, plural, one [प्रयोगकर्ता र उनीहरूको सन्देशहरू हटाउनुहोस्] other [प्रयोगकर्ताहरू र उनीहरूको सन्देशहरू हटाउनुहोस्]}",
+  "groupRemoveUserOnly": "{count, plural, one [प्रयोगकर्ता हटाउनुहोस्] other [प्रयोगकर्ताहरूलाई हटाउनुहोस्]}",
   "groupRemoved": "<b>{name}</b>लाई समूहबाट हटाइएको थियो।",
   "groupRemovedMultiple": "<b>{name}</b> र <b>{count} अन्य</b> समूहबाट हटाइएको थियो।",
   "groupRemovedTwo": "<b>{name}</b> र <b>{other_name}</b> समूहबाट हटाइएको थियो।",
@@ -492,6 +496,7 @@
   "membersActive": "{count, plural, one [# सक्रिय सदस्य] other [# सक्रिय सदस्यहरू]}",
   "membersAddAccountIdOrOns": "Account ID वा ONS थप्नुहोस्",
   "membersInvite": "सम्पर्कहरूलाई निमन्त्रणा गर्नुहोस्",
+  "membersInviteSend": "{count, plural, one [निमन्त्रणा पठाउनुहोस्] other [निमन्त्रणाहरू पठाउनुहोस्]}",
   "membersInviteShareDescription": "तपाईं साझेदारी गर्न चाहनुहुन्छ समूह सन्देश इतिहासको साथ <b>{name}</b>?",
   "membersInviteShareDescriptionMultiple": "तपाईं साझेदारी गर्न चाहनुहुन्छ समूह सन्देश इतिहासको साथ <b>{name}</b> र <b>{count} अन्यहरू</b>?",
   "membersInviteShareDescriptionTwo": "तपाईं साझेदारी गर्न चाहनुहुन्छ समूह सन्देश इतिहासको साथ <b>{name}</b> र <b>{other_name}</b>?",
@@ -632,35 +637,35 @@
   "passwordSet": "पासवर्ड सेट गर्नुहोस्",
   "passwordSetDescription": "तपाईँको पासवर्ड सेट गरिएको छ। कृपया यसलाई सुरक्षित राख्नुहोस्।",
   "paste": "टाँस्नुहोस्",
-  "permissionMusicAudioDenied": "{app_name} लाई संगीत र अडियो पहुँच आवश्यक छ फाइलहरू, संगीत र अडियो पठाउनका लागि, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। सेटिङहरू -> अनुमतिहरूमा थिच्नुहोस्, र \"संगीत र अडियो\" अन गर्नुहोस्।",
+  "permissionMusicAudioDenied": "{app_name} लाई संगीत र अडियो पहुँच आवश्यक छ फाइलहरू, संगीत र अडियो पठाउनका लागि, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। सेटिङहरू → अनुमतिहरूमा थिच्नुहोस्, र \"संगीत र अडियो\" अन गर्नुहोस्।",
   "permissionsAppleMusic": "{app_name} लाई मिडिया अट्याचमेन्टहरू प्ले गर्न एप्पल म्यूजिक प्रयोग गर्नु पर्छ।",
   "permissionsAutoUpdate": "स्वतः अद्यावधिक",
   "permissionsAutoUpdateDescription": "स्टार्टअपमा अद्यावधिकहरूको लागि स्वतः जाँच गर्नुहोस्",
-  "permissionsCameraDenied": "{app_name} लाई फोटो र भिडियो लिन क्यामेराको पहुँच आवश्यक छ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। सेटिङहरू -> अनुमतिहरूमा थिच्नुहोस्, र \"क्यामेरा\" सक्षम गर्नुहोस्।",
+  "permissionsCameraDenied": "{app_name} लाई फोटो र भिडियो लिन क्यामेराको पहुँच आवश्यक छ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। सेटिङहरू → अनुमतिहरूमा थिच्नुहोस्, र \"क्यामेरा\" सक्षम गर्नुहोस्।",
   "permissionsFaceId": "{app_name}को स्क्रिन लक विशेषताले Face ID प्रयोग गर्छ।",
   "permissionsKeepInSystemTray": "प्रणाली ट्रेमा राख्नुहोस्",
   "permissionsKeepInSystemTrayDescription": "{app_name} विन्डो बन्द गर्दा पृष्ठभूमिमा चलिरहन्छ",
   "permissionsLibrary": "{app_name} लाई जारी राख्नका लागि फोटो लाइब्रेरी पहुँच आवश्यक छ। तपाई यसलाई iOS सेटिङहरूमा सक्षम गर्न सक्नुहुन्छ।",
   "permissionsMicrophone": "माइक्रोफोन",
-  "permissionsMicrophoneAccessRequired": "{app_name} लाई कल गर्न र अडियो सन्देशहरू पठाउन माइक्रोफोनको पहुँच आवश्यक छ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। कृपया सेटिङ्गहरूमा जानुहोस् -> Permissions चयन गर्नुहोस्, र \"Microphone\" सक्षम गर्नुहोस्।",
+  "permissionsMicrophoneAccessRequired": "{app_name} लाई कल गर्न र अडियो सन्देशहरू पठाउन माइक्रोफोनको पहुँच आवश्यक छ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। कृपया सेटिङ्गहरूमा जानुहोस् → Permissions चयन गर्नुहोस्, र \"Microphone\" सक्षम गर्नुहोस्।",
   "permissionsMicrophoneAccessRequiredDesktop": "तपाईंले सक्षम गर्न सक्नुहुन्छ माइक्रोफोन पहुँच {app_name} को गोपनीयता सेटिङहरूमा",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} लाई कल गर्न र अडियो सन्देशहरू रेकर्ड गर्न माइक्रोफोनको पहुँच आवश्यक छ।",
   "permissionsMicrophoneDescription": "माइक्रोफोन पहुँच दिनुहोस्।",
   "permissionsMusicAudio": "{app_name} लाई फाइलहरू, संगीत र अडियो पठाउन संगीत र अडियो पहुँच आवश्यक छ।",
   "permissionsRequired": "अनुमति आवश्यक",
-  "permissionsStorageDenied": "{app_name} लाई फोटो पुस्तकालय पहुँच आवश्यक छ ताकि तपाईं फोटो र भिडियोहरू पठाउन सक्नुहुनेछ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। सेटिङहरू -> अनुमतिहरूमा थिच्नुहोस्, र \"फोटो र भिडियोहरू\" अन गर्नुहोस्।",
-  "permissionsStorageDeniedLegacy": "{app_name} लाई स्टोरेज पहुँच आवश्यक छ ताकि तपाईं अट्याचमेन्टहरू पठाउन र सेभ गर्न सक्नुहुनेछ। सेटिङहरू -> अनुमतिहरूमा थिच्नुहोस्, र \"स्टोरेज\" अन गर्नुहोस्।",
+  "permissionsStorageDenied": "{app_name} लाई फोटो पुस्तकालय पहुँच आवश्यक छ ताकि तपाईं फोटो र भिडियोहरू पठाउन सक्नुहुनेछ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। सेटिङहरू → अनुमतिहरूमा थिच्नुहोस्, र \"फोटो र भिडियोहरू\" अन गर्नुहोस्।",
+  "permissionsStorageDeniedLegacy": "{app_name} लाई स्टोरेज पहुँच आवश्यक छ ताकि तपाईं अट्याचमेन्टहरू पठाउन र सेभ गर्न सक्नुहुनेछ। सेटिङहरू → अनुमतिहरूमा थिच्नुहोस्, र \"स्टोरेज\" अन गर्नुहोस्।",
   "permissionsStorageSave": "{app_name} लाई अट्याचमेन्ट र मिडिया सेभ गर्न स्टोरज पहुँच आवश्यक छ।",
   "permissionsStorageSaveDenied": "{app_name} लाई फोटो र भिडियोहरू सेभ गर्न स्टोरज पहुँच आवश्यक छ, तर यो स्थायी रूपमा अस्वीकृत गरिएको छ। कृपया एप सेटिङहरूमा जानुहोस्, \"Permissions\" चयन गर्नुहोस्, र \"Storage\" सक्षम गर्नुहोस्।",
   "permissionsStorageSend": "{app_name} लाई फोटो र भिडियोहरू पठाउन स्टोरज पहुँच आवश्यक छ।",
-  "pin": "पिन गर्नुहोस् ",
+  "pin": "पिन गर्नुहोस्",
   "pinConversation": "कुराकानी पिन गर्नुहोस्",
   "pinUnpin": "अनपिन",
   "pinUnpinConversation": "वार्तालाप अनपिन गर्नुहोस्",
   "preview": "पूर्वावलोकन",
   "profile": "प्रोफाइल",
   "profileDisplayPicture": "प्रदर्शन तस्वीर",
-  "profileDisplayPictureRemoveError": "प्रदर्शन तस्वीर हटाउन असफल ",
+  "profileDisplayPictureRemoveError": "प्रदर्शन तस्वीर हटाउन असफल",
   "profileDisplayPictureSet": "प्रदर्शन तस्वीर सेट गर्नुहोस्",
   "profileDisplayPictureSizeError": "कृपया सानो फाइल चयन गर्नुहोस्।",
   "profileErrorUpdate": "झण्डाहरू",
@@ -741,7 +746,7 @@
   "sessionSettings": "सेटिङहरू",
   "set": "सेट",
   "settingsRestartDescription": "आफ्नो नयाँ सेटिङहरू लागू गर्न {app_name} पुनः सुरु गर्नुहोस्।",
-  "share": "साझा गर्नुहोस् ",
+  "share": "साझा गर्नुहोस्",
   "shareAccountIdDescription": "तपाईंको मित्रलाई तपाईंसँग च्याट गर्न {app_name} मा सम्मिलित गराउन आफ्नो खाता आईडी साझा गर्नुहोस्।",
   "shareAccountIdDescriptionCopied": "जहाँ तपाईंले प्राय: तिनीहरूसँग कुरा गर्नुहुन्छ, त्यहाँ आफ्ना साथीहरूसँग साझा गर्नुहोस् — अनि कुराकानीलाई यहाँ सार्नुहोस्।",
   "shareExtensionDatabaseError": "डाटाबेस खोल्नमा समस्या छ। कृपया एप पुनः सुरु गर्नुहोस् अनि फेरि प्रयास गर्नुहोस्।",
