--- a/_locales/nn/messages.json
+++ b/_locales/nn/messages.json
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "Vil du fjerne <b>{name}</b> og <b>{count} andre</b> frå <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Vil du fjerne <b>{name}</b> og <b>{other_name}</b> frå <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Fjern brukaren og meldingane deira] other [Fjern brukarar og meldingane deira]}",
-  "groupRemoveUserOnly": "{count, plural, one [Fjern brukaren ] other [Fjern brukarar]}",
+  "groupRemoveUserOnly": "{count, plural, one [Fjern brukaren] other [Fjern brukarar]}",
   "groupRemoved": "<b>{name}</b> vart fjerna frå gruppa.",
   "groupRemovedMultiple": "<b>{name}</b> og <b>{count} andre</b> vart fjerna frå gruppa.",
   "groupRemovedTwo": "<b>{name}</b> og <b>{other_name}</b> vart fjerna frå gruppa.",
@@ -639,28 +639,28 @@
   "passwordSet": "Set Password",
   "passwordSetDescription": "Passordet ditt er blitt satt. Vennligst oppbevar det trygt.",
   "paste": "Lim inn",
-  "permissionMusicAudioDenied": "{app_name} trenger musikk- og lydtilgang for å sende filer, musikk og lyd, men tilgangen er permanent avslått. Trykk Innstillinger -> Tillatelser, og slå på \"Musikk og lyd\".",
+  "permissionMusicAudioDenied": "{app_name} trenger musikk- og lydtilgang for å sende filer, musikk og lyd, men tilgangen er permanent avslått. Trykk Innstillinger → Tillatelser, og slå på \"Musikk og lyd\".",
   "permissionsAppleMusic": "{app_name} trenger Apple Music for å spille av media-vedlegg.",
   "permissionsAutoUpdate": "Automatisk oppdatering",
   "permissionsAutoUpdateDescription": "Søk etter oppdateringar automatisk ved oppstart",
-  "permissionsCameraDenied": "{app_name} treng tilgang til kameraet for å ta bilete og videoar, men tilgangen er permanent avslått. Trykk Innstillinger -> Tillatelser, og slå på \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} treng tilgang til kameraet for å ta bilete og videoar, men tilgangen er permanent avslått. Trykk Innstillinger → Tillatelser, og slå på \"Kamera\".",
   "permissionsFaceId": "Skjermlåsfunksjonen på {app_name} bruker Face ID.",
   "permissionsKeepInSystemTray": "Behald i systemstatusfeltet",
   "permissionsKeepInSystemTrayDescription": "{app_name} fortsetter å kjøre i bakgrunnen når du lukker vinduet",
   "permissionsLibrary": "{app_name} trenger tilgang til fotobibliotek for å fortsette. Du kan skru på tilgangen i iOS-innstillingene.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} treng tilgang til mikrofonen for å ringe samtalar og senda lydklipp, men tilgangen er permanent avslått. Trykk på innstillingar -> Tilgangar og slå på «Mikrofon».",
+  "permissionsMicrophoneAccessRequired": "{app_name} treng tilgang til mikrofonen for å ringe samtalar og senda lydklipp, men tilgangen er permanent avslått. Trykk på innstillingar → Tilgangar og slå på «Mikrofon».",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kan aktivere mikrofontilgang i {app_name}'s personverninnstillinger",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} trenger mikrofontilgang for å ringe og ta opp lydmeldinger.",
   "permissionsMicrophoneDescription": "Gi tilgang til mikrofonen.",
   "permissionsMusicAudio": "{app_name} treng tilgang til musikk og lyd for å sende filer, musikk og lyd.",
   "permissionsRequired": "Tilgang krevst",
-  "permissionsStorageDenied": "{app_name} trenger tilgang til fotobiblioteket slik at du kan sende bilder og videoer, men det har blitt permanent avslått. Trykk Innstillinger -> Tillatelser, og slå på \"Bilder og videoer\".",
-  "permissionsStorageDeniedLegacy": "{app_name} trenger lagringstilgang slik at du kan sende og lagre vedlegg. Trykk Innstillinger -> Tillatelser, og slå på \"Lagring\".",
+  "permissionsStorageDenied": "{app_name} trenger tilgang til fotobiblioteket slik at du kan sende bilder og videoer, men det har blitt permanent avslått. Trykk Innstillinger → Tillatelser, og slå på \"Bilder og videoer\".",
+  "permissionsStorageDeniedLegacy": "{app_name} trenger lagringstilgang slik at du kan sende og lagre vedlegg. Trykk Innstillinger → Tillatelser, og slå på \"Lagring\".",
   "permissionsStorageSave": "{app_name} trenger lagringstilgang for å lagre vedlegg og media.",
   "permissionsStorageSaveDenied": "{app_name} trenger lagringstilgang for å lagre bilete og videoar, men tilgangen er permanent avslått. Fortsett til appinnstillingene, vel \"Tillatelser\" og aktiver \"Lagring\".",
   "permissionsStorageSend": "{app_name} trenger lagringstilgang for å sende bilete og videoar.",
-  "pin": "Fest ",
+  "pin": "Fest",
   "pinConversation": "Fest samtale",
   "pinUnpin": "Løsne",
   "pinUnpinConversation": "Løsne samtale",
