--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Skriv inn et gruppenavn",
   "groupNameEnterPlease": "Vennligst skriv inn et gruppenavn.",
   "groupNameEnterShorter": "Vennligst velg et kortere gruppenavn.",
-  "groupNameNew": "Gruppens navn er nå {group_name}. ",
+  "groupNameNew": "Gruppens navn er nå {group_name}.",
   "groupNameUpdated": "Gruppenavnet ble oppdatert.",
   "groupNoMessages": "Du har ingen meldinger fra <b>{group_name}</b>. Send en melding for å starte samtalen!",
   "groupOnlyAdmin": "Du er den eneste admin i <b>{group_name}</b>.<br/><br/>Gruppemedlemmer og innstillinger kan ikke endres uten en admin.",
@@ -639,28 +639,28 @@
   "passwordSet": "Still passord",
   "passwordSetDescription": "Passordet er blitt stilt. Vennligst oppbevar det trygt.",
   "paste": "Lim inn",
-  "permissionMusicAudioDenied": "{app_name} trenger tilgang til musikk og lyd for å sende filer, musikk og lyd, men det har blitt permanent nektet. Trykk på Innstillinger -> Tillatelser, og slå på «Musikk og lyd».",
+  "permissionMusicAudioDenied": "{app_name} trenger tilgang til musikk og lyd for å sende filer, musikk og lyd, men det har blitt permanent nektet. Trykk på Innstillinger → Tillatelser, og slå på «Musikk og lyd».",
   "permissionsAppleMusic": "{app_name} må bruke Apple Music for å spille medievedlegg.",
   "permissionsAutoUpdate": "Automatisk oppdatering",
   "permissionsAutoUpdateDescription": "Se etter oppdateringer automatisk ved oppstart",
-  "permissionsCameraDenied": "{app_name} trenger kameratilgang for å ta bilder og videoer, men det har blitt permanent nektet. Trykk på Innstillinger -> Tillatelser, og slå på «Kamera».",
+  "permissionsCameraDenied": "{app_name} trenger kameratilgang for å ta bilder og videoer, men det har blitt permanent nektet. Trykk på Innstillinger → Tillatelser, og slå på «Kamera».",
   "permissionsFaceId": "Skjermlåsfunksjonen på {app_name} bruker Face ID.",
   "permissionsKeepInSystemTray": "Behold i systemstatusfeltet",
   "permissionsKeepInSystemTrayDescription": "{app_name} fortsetter å kjøre i bakgrunnen når du lukker vinduet",
   "permissionsLibrary": "{app_name} trenger tilgang til fotobiblioteket for å fortsette. Du kan aktivere tilgang i iOS-innstillingene.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} krever tillatelse fra systemet for å kunne bruke mikrofonen for å ringe og sende talemeldinger, men det har blitt permanent nektet. Trykk på innstillinger -> Tillatelser, og slå på «Mikrofon».",
+  "permissionsMicrophoneAccessRequired": "{app_name} krever tillatelse fra systemet for å kunne bruke mikrofonen for å ringe og sende talemeldinger, men det har blitt permanent nektet. Trykk på innstillinger → Tillatelser, og slå på «Mikrofon».",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kan aktivere mikrofontilgang i {app_name}'s personverninnstillinger",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} trenger mikrofontilgang for å foreta samtaler og ta opp lydmeldinger.",
   "permissionsMicrophoneDescription": "Gi tilgang til mikrofonen.",
   "permissionsMusicAudio": "{app_name} trenger tilgang til musikk og lyd for å sende filer, musikk og lyd.",
   "permissionsRequired": "Tillatelse kreves",
-  "permissionsStorageDenied": "{app_name} trenger tilgang til fotobiblioteket for å kunne sende bilder og videoer, men det har blitt permanent nektet. Trykk på Innstillinger -> Tillatelser, og slå på \"Bilder og videoer\".",
-  "permissionsStorageDeniedLegacy": "{app_name} trenger lagringstilgang for å kunne sende og lagre vedlegg. Trykk på Innstillinger -> Tillatelser, og slå på «Lagring».",
+  "permissionsStorageDenied": "{app_name} trenger tilgang til fotobiblioteket for å kunne sende bilder og videoer, men det har blitt permanent nektet. Trykk på Innstillinger → Tillatelser, og slå på \"Bilder og videoer\".",
+  "permissionsStorageDeniedLegacy": "{app_name} trenger lagringstilgang for å kunne sende og lagre vedlegg. Trykk på Innstillinger → Tillatelser, og slå på «Lagring».",
   "permissionsStorageSave": "{app_name} trenger lagringstilgang for å lagre vedlegg og media.",
   "permissionsStorageSaveDenied": "{app_name} trenger lagringstilgang for å lagre bilder og videoer, men det har blitt permanent nektet. Fortsett til app-innstillingene, velg «Tillatelser», og aktiver «Lagring».",
   "permissionsStorageSend": "{app_name} trenger lagringstilgang for å sende bilder og videoer.",
-  "pin": "Fest ",
+  "pin": "Fest",
   "pinConversation": "Fest samtale",
   "pinUnpin": "Løsne",
   "pinUnpinConversation": "Løsne samtale",
