--- a/_locales/ny/messages.json
+++ b/_locales/ny/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Lemberani dzina la gulu",
   "groupNameEnterPlease": "Chonde lowetsani dzina la gulu.",
   "groupNameEnterShorter": "Chonde lowetsani dzina lachigulu lomwe lili lalifupi.",
-  "groupNameNew": "Tsopano dzina la gulu ndi {group_name}. ",
+  "groupNameNew": "Tsopano dzina la gulu ndi {group_name}.",
   "groupNameUpdated": "Dzina la gulu latsitsidwa.",
   "groupNoMessages": "Simulayambe kupeza mauthenga ochokera kwa <b>{group_name}.</b> Tumizani uthenga kuti muyambe kuyankhulana!",
   "groupOnlyAdmin": "Inu ndinu oyang'anira payekha mu <b>{group_name}</b>.<br/><br/>Mabwenzi ndi zoikamo sizingasinthidwe popanda woyang'anira.",
@@ -583,7 +583,7 @@
   "notificationsMuted": "Upallayachina",
   "notificationsSlowMode": "Slow Mode",
   "notificationsSlowModeDescription": "{app_name} idzagamula kutumiza mauthenga atsopano m'kumbuyo nthawi ndi nthawi.",
-  "notificationsSound": " Wakay uyari",
+  "notificationsSound": "Wakay uyari",
   "notificationsSoundDescription": "Sound when App is open",
   "notificationsSoundDesktop": "Zidziwitso Zamawu",
   "notificationsStrategy": "Njira Yotumiza Mauthenga",
@@ -639,28 +639,28 @@
   "passwordSet": "Set Password",
   "passwordSetDescription": "Password yanu yakhalapo. Chonde sungani mosamala.",
   "paste": "Matulani",
-  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} needs music and audio access in order to send files, music and audio, but it has been permanently denied. Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "{app_name} iyenera kugwiritsa ntchito Apple Music kuti izisintha ma attachment a media.",
   "permissionsAutoUpdate": "Auto Update",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup",
-  "permissionsCameraDenied": "{app_name} iyenera kulowa ndi kamera kuti kutenga zithunzi ndi makanema, koma yakanidwa kosatha. Dinani Zokonda -> Chilolezo, ndikuyatsa \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} iyenera kulowa ndi kamera kuti kutenga zithunzi ndi makanema, koma yakanidwa kosatha. Dinani Zokonda → Chilolezo, ndikuyatsa \"Kamera\".",
   "permissionsFaceId": "Ntchito yotseka chinsalu pa {app_name} imagwiritsa ntchito Face ID.",
   "permissionsKeepInSystemTray": "Khalani mu System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} imachitlikira ntchifukwa chakuti cikhale m'kumbuyo mukatseka zenera",
   "permissionsLibrary": "{app_name} imafuna mwayi wozungulira chiwonetsero cha zithunzi kuti apitirize. Mutha kuyatsa mu zosintha za iOS.",
   "permissionsMicrophone": "Maikrophone",
-  "permissionsMicrophoneAccessRequired": "{app_name} iyenera microphone kuti ikupangitseni kuyimbira ndi kutumiza mauthenga am'mawu, koma linathetsedwa kwanthawi yayitali. Dinani zikhazikitso -> Chilolezo, ndikuyatsa \"Microphone\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} iyenera microphone kuti ikupangitseni kuyimbira ndi kutumiza mauthenga am'mawu, koma linathetsedwa kwanthawi yayitali. Dinani zikhazikitso → Chilolezo, ndikuyatsa \"Microphone\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Mutha kuyambitsa kupeza maikolofoni mu zoikamo za zinsinsi za {app_name}.",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} iyenera kuitanira microphone kuti ipangane mafoni ndi kujambula mauthenga am'mawu.",
   "permissionsMicrophoneDescription": "Lolani kupeza maikifoni.",
   "permissionsMusicAudio": "{app_name} needs music and audio access in order to send files, music and audio.",
   "permissionsRequired": "Chilolezo chofunikira",
-  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
-  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDenied": "{app_name} needs photo library access so you can send photos and videos, but it has been permanently denied. Tap Settings → Permissions, and turn \"Photos and videos\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} needs storage access so you can send and save attachments. Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "{app_name} imafuna mwayi wosungira kuti asunge attachments ndi media.",
   "permissionsStorageSaveDenied": "{app_name} imafuna mwayi wosungira kuti asunge zithunzi ndi makanema, koma linathetsedwa kwanthawi yayitali. Chonde pitani ku zokonda za pulogalamu, sankhani \"Permissions\", ndikuyatsa \"Storage\".",
   "permissionsStorageSend": "{app_name} imafuna mwayi wosungira kuti atumize zithunzi ndi makanema.",
-  "pin": "Lembani ",
+  "pin": "Lembani",
   "pinConversation": "Lembani Kukambirana",
   "pinUnpin": "Chotsani",
   "pinUnpinConversation": "Chotsani Kukambirana",
@@ -745,10 +745,10 @@
   "sessionPermissions": "Zilolezo",
   "sessionPrivacy": "Zinsinsi",
   "sessionRecoveryPassword": "Achinsinsi Ochira",
-  "sessionSettings": "Munashka ",
+  "sessionSettings": "Munashka",
   "set": "Set",
   "settingsRestartDescription": "Muyenera kuyambiranso {app_name} kuti mutseke zosintha zanu zatsopano.",
-  "share": " Yallichirina",
+  "share": "Yallichirina",
   "shareAccountIdDescription": "Kayachina mnzanu woti azilankhula nanu pa {app_name} powatumizirani Account ID yanu.",
   "shareAccountIdDescriptionCopied": "Share with your friends wherever you usually speak with them — then move the conversation here.",
   "shareExtensionDatabaseError": "Pali vuto pantchito yokonza deta. Chonde yambitsaninso pulogalamu ndikuyesanso.",
@@ -756,7 +756,7 @@
   "show": "Rikuchina",
   "showAll": "Show All",
   "showLess": "Show Less",
-  "stickers": " Llutanakukuna",
+  "stickers": "Llutanakukuna",
   "supportGoTo": "Pitani ku tsamba la Thandizo",
   "systemInformationDesktop": "Zambiri za System: {information}",
   "theContinue": "Pitilizani",
