--- a/_locales/pa/messages.json
+++ b/_locales/pa/messages.json
@@ -293,7 +293,7 @@
   "disappearingMessages": "ਗੁਬਾਰ ਸੰਦੇਸ਼",
   "disappearingMessagesCountdownBig": "ਸੁਨੇਹਾ ਵਿਖੇ {time_large} ਵਿੱਚ ਹਟਾਏ ਗਈ ਆ",
   "disappearingMessagesCountdownBigMobile": "{time_large} ਵਿੱਚ ਆਪ੍ਰਾਪਤ ਹੋ ਰਹੀ ਹੈ",
-  "disappearingMessagesCountdownBigSmall": "ਸੁਨੇਹਾ ਵਿਖੇ {time_large} {time_small} ਵਿੱਚ ਹਟਾਏ ਗਈ ਆ ",
+  "disappearingMessagesCountdownBigSmall": "ਸੁਨੇਹਾ ਵਿਖੇ {time_large} {time_small} ਵਿੱਚ ਹਟਾਏ ਗਈ ਆ",
   "disappearingMessagesCountdownBigSmallMobile": "{time_large} {time_small} ਵਿੱਚ ਆਪ੍ਰਾਪਤ ਹੋ ਰਹੀ ਹੈ",
   "disappearingMessagesDeleteType": "ਹਟਾਉਣ ਦਾ ਕਿਸਮ",
   "disappearingMessagesDescription": "ਇਹ ਸੈਟਿੰਗ ਇਸ ਗੱਲਬਾਤ ਵਿੱਚ ਹਰੇਕ ਲਈ ਲਾਗੂ ਹੁੰਦੀ ਹੈ।",
@@ -315,7 +315,7 @@
   "disappearingMessagesSet": "<b>{name}</b>ਨੇ ਸੁਨੇਹੇ ਰੱਖਣ ਲਈ ਸੁਨੇਹਾ ਸਮਾਂਸੂਚੀ {time}ਬਾਅਦ ਨਾ ਗੰਦੇ ਹੋਣ ਲਈ {disappearing_messages_type}ਰੱਖੀ ਹੈ।",
   "disappearingMessagesSetYou": "<b>ਤੁਸੀਂ</b> ਸੁਨੇਹਿਆਂ ਦੇ ਗੁਆਬਣ ਵਾਲੇ ਪੈਰਾਮੀਟਰਸ {time} ਦੇ ਬਾਅਦ ਰੱਖੇ ਹਨ <b>{disappearing_messages_type}</b>।",
   "disappearingMessagesTimer": "ਟਾਈਮਰ",
-  "disappearingMessagesTurnedOff": "<b>{name}</b>ਨੇ ਸੁਨੇਹੇ ਰੱਖਣ ਬੰਦ ਕਰ ਦਿੱਤੇ ਹਨ। ਇਨ੍ਹਾਂ ਦੇ ਭੇਜੇ ਸੁਨੇਹੇ ਹੁਣ ਡਿੱਗਣਗੇ ਨਹੀਂ। ",
+  "disappearingMessagesTurnedOff": "<b>{name}</b>ਨੇ ਸੁਨੇਹੇ ਰੱਖਣ ਬੰਦ ਕਰ ਦਿੱਤੇ ਹਨ। ਇਨ੍ਹਾਂ ਦੇ ਭੇਜੇ ਸੁਨੇਹੇ ਹੁਣ ਡਿੱਗਣਗੇ ਨਹੀਂ।",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b>ਨੇ ਗੁਮ ਹੋ ਰਹੇ ਸੁਨੇਹੇ <b>ਬੰਦ</b> ਕਰ ਦਿੱਤੇ ਹਨ।",
   "disappearingMessagesTurnedOffYou": "<b>ਤੁਸੀਂ</b><b>ਬੰਦ</b>ਕਰ ਦਿੱਤੀ ਨਾ ਗੈਰ ਰਹਿਣ ਵਾਲੀਆਂ ਸੁਨੇਹੇ। ਤੁਸੀਂ ਭੇਜੇ ਗਏ ਸੁਨੇਹੇ ਹੁਣ ਡਿੱਗਣ ਵਾਲੇ ਨਹੀਂ।",
   "disappearingMessagesTurnedOffYouGroup": "<b>ਤੁਸੀਂ</b> ਗੁਮ ਹੋ ਰਹੇ ਸੁਨੇਹੇ <b>ਬੰਦ</b> ਕਰ ਦਿੱਤੇ।",
@@ -530,7 +530,7 @@
   "messageRequestsDelete": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਇਸ ਸੁਨੇਹਾ ਅਨੁਰੋਧ(mesage request) ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
   "messageRequestsNew": "ਤੁਹਾਨੂੰ ਇੱਕ ਨਵਾਂ ਮੈਸਜ ਰਿਕਵੇਸਟ ਮਿਲਿਆ ਹੈ",
   "messageRequestsNonePending": "ਕੋਈ ਬਕਾਇਆ ਸੁਨੇਹਾ ਅਰਜ਼ੀਆਂ ਨਹੀਂ",
-  "messageRequestsTurnedOff": "<b>{name}</b>ਨੇ Community ਗੱਲਬਾਤਾਂ ਲਈ ਸੁਨੇਹਾ ਅਰਜ਼ੀਆਂ ਬੰਦ ਕਰ ਦਿੱਤੀ ਹੈ, ਇਸ ਲਈ ਤੁਸੀਂ ਉਨ੍ਹਾਂ ਨੂੰ ਸੁਨੇਹਾ ਨਹੀਂ ਭੇਜ ਸਕਦੇ। ",
+  "messageRequestsTurnedOff": "<b>{name}</b>ਨੇ Community ਗੱਲਬਾਤਾਂ ਲਈ ਸੁਨੇਹਾ ਅਰਜ਼ੀਆਂ ਬੰਦ ਕਰ ਦਿੱਤੀ ਹੈ, ਇਸ ਲਈ ਤੁਸੀਂ ਉਨ੍ਹਾਂ ਨੂੰ ਸੁਨੇਹਾ ਨਹੀਂ ਭੇਜ ਸਕਦੇ।",
   "messageSelect": "ਸੰਦੇਸ਼ ਚੁਣੋ",
   "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "ਭੇਜਣ ਵਿੱਚ ਅਸਫਲ",
@@ -638,24 +638,24 @@
   "passwordSet": "ਪਾਸਵਰਡ ਸੈੱਟ ਕਰੋ",
   "passwordSetDescription": "ਤੁਹਾਡਾ ਪਾਸਵਰਡ ਸੈਟ ਕੀਤਾ ਗਿਆ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਇਸਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖੋ।",
   "paste": "ਚਿਪਕਾਓ",
-  "permissionMusicAudioDenied": "{app_name} ਨੂੰ ਫਾਈਲਾਂ, ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ ਭੇਜਣ ਲਈ ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਸੈਟਿੰਗਾਂ 'ਤੇ ਟੈਪ ਕਰੋ -> ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ\" ਚਾਲੂ ਕਰੋ।",
+  "permissionMusicAudioDenied": "{app_name} ਨੂੰ ਫਾਈਲਾਂ, ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ ਭੇਜਣ ਲਈ ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਸੈਟਿੰਗਾਂ 'ਤੇ ਟੈਪ ਕਰੋ → ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ\" ਚਾਲੂ ਕਰੋ।",
   "permissionsAppleMusic": "{app_name} ਨੂੰ ਮੀਡੀਆ ਅਟੈਚਮੈਂਟਸ ਖੇਡਣ ਲਈ ਐਪਲ ਮਿਊਜ਼ਿਕ ਵਰਤਣ ਦੀ ਲੋੜ ਹੈ।",
   "permissionsAutoUpdate": "ਆਟੋ ਅਪਡੇਟ",
   "permissionsAutoUpdateDescription": "ਸਟਾਰਟਅਪ 'ਤੇ ਆਪਣੇ ਆਪ ਅਪਡੇਟਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
-  "permissionsCameraDenied": "{app_name} ਨੂੰ ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓਜ਼ ਲੈਣ ਲਈ ਕੈਮਰਾ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਸੈਟਿੰਗਾਂ 'ਤੇ ਟੈਪ ਕਰਕੇ ਜਾਓ -> ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਕੈਮਰਾ\" ਚਾਲੂ ਕਰੋ।",
+  "permissionsCameraDenied": "{app_name} ਨੂੰ ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓਜ਼ ਲੈਣ ਲਈ ਕੈਮਰਾ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਸੈਟਿੰਗਾਂ 'ਤੇ ਟੈਪ ਕਰਕੇ ਜਾਓ → ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਕੈਮਰਾ\" ਚਾਲੂ ਕਰੋ।",
   "permissionsFaceId": "{app_name} ਉੱਤੇ ਸਕرين ਲਾਕ ਫੀਚਰ Face ID ਵਰਤਦਾ ਹੈ।",
   "permissionsKeepInSystemTray": "ਸਿਸਟਮ ਟਰੇ ਵਿੱਚ ਰੱਖੋ",
   "permissionsKeepInSystemTrayDescription": "{app_name} ਬੈਕਗ੍ਰਾਊਂਡ ਵਿੱਚ ਚੱਲਦਾ ਰਹਿੰਦਾ ਹੈ ਜਦੋਂ ਤੁਸੀਂ ਖਿੜਕੀ ਬੰਦ ਕਰਦੇ ਹੋ",
   "permissionsLibrary": "{app_name} ਨੂੰ ਫੋਟੋ ਲਾਇਬ੍ਰੇਰੀ ਪਹੁੰਚ ਜਾਰੀ ਰੱਖਣ ਲਈ ਲੋੜ ਹੈ। ਤੁਸੀਂ ਆਈਓਐਸ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਪਹੁੰਚ ਚਾਲੂ ਕਰ ਸਕਦੇ ਹੋ।",
   "permissionsMicrophone": "ਮਾਈਕ ਰਸਾਈ",
-  "permissionsMicrophoneAccessRequired": "{app_name} ਨੂੰ ਕਾਲ ਕਰਨ ਅਤੇ ਆਡੀਓ ਸੁਨੇਹੇ ਭੇਜਣ ਲਈ ਮਾਈਕਰੋਫੋਨ ਦੀ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਹ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖ਼ਾਰਿਜ ਕੀਤਾ ਗਿਆ ਹੈ। Settings -> Permissions ਤੇ ਜਾਓ, ਅਤੇ \"Microphone\" ਚਾਲੂ ਕਰੋ।",
+  "permissionsMicrophoneAccessRequired": "{app_name} ਨੂੰ ਕਾਲ ਕਰਨ ਅਤੇ ਆਡੀਓ ਸੁਨੇਹੇ ਭੇਜਣ ਲਈ ਮਾਈਕਰੋਫੋਨ ਦੀ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਹ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖ਼ਾਰਿਜ ਕੀਤਾ ਗਿਆ ਹੈ। Settings → Permissions ਤੇ ਜਾਓ, ਅਤੇ \"Microphone\" ਚਾਲੂ ਕਰੋ।",
   "permissionsMicrophoneAccessRequiredDesktop": "ਤੁਸੀਂ {app_name} ਦੇ ਪਰਾਈਵੇਸੀ ਸੈਟਿੰਗਜ਼ ਵਿੱਚ ਮਾਈਕ੍ਰੋਫ਼ੋਨ ਅਕਸੀਸ ਫੋਲਕ ਸਕਦੇ ਹੋ",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ਨੂੰ ਕਾਲਾ ਕਰਣ ਅਤੇ ਆਡੀਓ ਸੁਨੇਹੇ ਰਿਕਾਰਡ ਕਰਨ ਲਈ ਮਾਈਕਰੋਫੋਨ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ।",
   "permissionsMicrophoneDescription": "ਮਾਈਕਰੋਫੋਨ ਤੱਕ ਪਹੁੰਚ ਦੀ ਇਜਾਜ਼ਤ ਦਿਓ.",
   "permissionsMusicAudio": "{app_name} ਨੂੰ ਫਾਈਲਾਂ, ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ ਭੇਜਣ ਲਈ ਸੰਗੀਤ ਅਤੇ ਆਡੀਓ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ।",
   "permissionsRequired": "ਅਨੁਮਤੀ ਲੋੜੀਂਦੀ ਹੈ",
-  "permissionsStorageDenied": "{app_name} ਨੂੰ ਫੋਟੋ ਲਾਇਬ੍ਰੇਰੀ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ ਤਾਂ ਜੋ ਤੁਸੀਂ ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓ ਭੇਜ ਸਕੋ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਸੈਟਿੰਗਜ਼ 'ਤੇ ਟੈਪ ਕਰੋ -> ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓ\" ਚਾਲੂ ਕਰੋ।",
-  "permissionsStorageDeniedLegacy": "{app_name} ਨੂੰ ਸਟੋਰੇਜ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ ਤਾਂ ਜੋ ਤੁਸੀਂ ਸੰਜੋਣ ਅਤੇ ਐਟੈਚਮੇਂਟ ਭੇਜ ਸਕੋ। ਸੈਟਿੰਗਜ਼ 'ਤੇ ਟੈਪ ਕਰੋ -> ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਸਟੋਰੇਜ\" ਚਾਲੂ ਕਰੋ।",
+  "permissionsStorageDenied": "{app_name} ਨੂੰ ਫੋਟੋ ਲਾਇਬ੍ਰੇਰੀ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ ਤਾਂ ਜੋ ਤੁਸੀਂ ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓ ਭੇਜ ਸਕੋ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਸੈਟਿੰਗਜ਼ 'ਤੇ ਟੈਪ ਕਰੋ → ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓ\" ਚਾਲੂ ਕਰੋ।",
+  "permissionsStorageDeniedLegacy": "{app_name} ਨੂੰ ਸਟੋਰੇਜ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ ਤਾਂ ਜੋ ਤੁਸੀਂ ਸੰਜੋਣ ਅਤੇ ਐਟੈਚਮੇਂਟ ਭੇਜ ਸਕੋ। ਸੈਟਿੰਗਜ਼ 'ਤੇ ਟੈਪ ਕਰੋ → ਅਨੁਮਤੀਆਂ, ਅਤੇ \"ਸਟੋਰੇਜ\" ਚਾਲੂ ਕਰੋ।",
   "permissionsStorageSave": "{app_name} ਨੂੰ ਅਟੈਚਮੈਂਟਸ ਅਤੇ ਮੀਡੀਆ ਸੰਭਾਲਣ ਲਈ ਸਟੋਰੇਜ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ।",
   "permissionsStorageSaveDenied": "{app_name} ਨੂੰ ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓਜ਼ ਸੰਭਾਲਣ ਲਈ ਸਟੋਰੇਜ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ, ਪਰ ਇਸਨੂੰ ਪੱਕੇ ਤੌਰ 'ਤੇ ਖਾਰਜ਼ ਕੀਤਾ ਗਿਆ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਐਪ ਸੈਟਿੰਗਾਂ 'ਤੇ ਜਾਰੀ ਰਹੋ, \"Permissions\" ਚੁਣੋ, ਅਤੇ \"Storage\" ਚਾਲੂ ਕਰੋ।",
   "permissionsStorageSend": "{app_name} ਨੂੰ ਫੋਟੋਆਂ ਅਤੇ ਵੀਡੀਓਜ਼ ਭੇਜਣ ਲਈ ਸਟੋਰੇਜ ਪਹੁੰਚ ਦੀ ਲੋੜ ਹੈ।",
@@ -705,7 +705,7 @@
   "redo": "ਰੀ-ਕਰੋ",
   "remove": "ਹਟਾਓ",
   "removePasswordFail": "ਪਾਸਵਰਡ ਹਟਾਉਣ ਵਿੱਚ ਅਸਫਲ ਹੋਇਆ",
-  "reply": "sooner ",
+  "reply": "sooner",
   "resend": "ਦੁਬਾਰਾ ਭੇਜੋ",
   "resolving": "ਦੇਸ਼ ਦੀ ਜਾਣਕਾਰੀ ਲੋਡ ਕੀਤੀਆ ਜਾ ਰਹੀ ਹੈ...",
   "restart": "ਮੁੜ ਚਾਲੂ ਕਰੋ",
