--- a/_locales/ps/messages.json
+++ b/_locales/ps/messages.json
@@ -639,24 +639,24 @@
   "passwordSet": "پټنوم تنظیمول",
   "passwordSetDescription": "ستاسو پاسورډ ټاکل شوی دی. مهرباني وکړۍ، دا خوندي وساتئ.",
   "paste": "پیست",
-  "permissionMusicAudioDenied": "{app_name} ته د موسیقۍ او غږ لاسرسي اړتیا لري ترڅو فایلونه، موسیقۍ او غږ واستوئ، مګر دا په دائمي ډول رد شوی. تنظیماتو باندې ټپ وکړئ -> اجازې، او \"موسیقي او غږ\" روښانه کړئ.",
+  "permissionMusicAudioDenied": "{app_name} ته د موسیقۍ او غږ لاسرسي اړتیا لري ترڅو فایلونه، موسیقۍ او غږ واستوئ، مګر دا په دائمي ډول رد شوی. تنظیماتو باندې ټپ وکړئ → اجازې، او \"موسیقي او غږ\" روښانه کړئ.",
   "permissionsAppleMusic": "{app_name} میوزیک مولا زموږ توانیدونکی د Apple Music نه په لوبولوکې کارول کیږي.",
   "permissionsAutoUpdate": "اتوماتیک تازه کول",
   "permissionsAutoUpdateDescription": "په پیل کې د تازه کولو لپاره اتوماتیک چک کړئ",
-  "permissionsCameraDenied": "{app_name} ته اړتیا ده چې عکسونه او ویډیوګانې واخلي، مګر دا په دائمي ډول رد شوی. تنظیماتو باندې ټپ وکړئ -> اجازې، او \"کمره\" فعاله کړئ.",
+  "permissionsCameraDenied": "{app_name} ته اړتیا ده چې عکسونه او ویډیوګانې واخلي، مګر دا په دائمي ډول رد شوی. تنظیماتو باندې ټپ وکړئ → اجازې، او \"کمره\" فعاله کړئ.",
   "permissionsFaceId": "د {app_name} سکرین لاک فیچر د مخ پيژندنه (Face ID) کاروي.",
   "permissionsKeepInSystemTray": "په سیسټم ټری کې وساتئ",
   "permissionsKeepInSystemTrayDescription": "{app_name} په شالید کې چلیږي کله چې تاسو کړکۍ وتړئ",
   "permissionsLibrary": "{app_name} ته اړتیا ده چې د عکس البوم ته لاسرسی ولري. تاسو کولی شئ د لاسرسی فعالولو لپاره په iOS تنظیماتو کې تنظیمات ترسره کړئ.",
   "permissionsMicrophone": "مایکروفون",
-  "permissionsMicrophoneAccessRequired": "{app_name} لپاره د غوښتنې جوړولو او صوتي پیغامونو لیږلو لپاره مایکروفون ته اړتیا لري، مګر دا په دايمي ډول رد شوی دی. تنظیمات ټپ کړئ -> اجازې، او \"مایکروفون\" روښانه کړئ.",
+  "permissionsMicrophoneAccessRequired": "{app_name} لپاره د غوښتنې جوړولو او صوتي پیغامونو لیږلو لپاره مایکروفون ته اړتیا لري، مګر دا په دايمي ډول رد شوی دی. تنظیمات ټپ کړئ → اجازې، او \"مایکروفون\" روښانه کړئ.",
   "permissionsMicrophoneAccessRequiredDesktop": "تاسو کولی شئ د {app_name} د محرمیت ترتیباتو کې د مایکروفون لاسرسی فعال کړئ.",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} د غږیزو پیغامونو لیږلو کولو لپاره مایکروفون ته اړتیا لري.",
   "permissionsMicrophoneDescription": "مایکروفون ته د لاسرسي اجازه ورکړئ.",
   "permissionsMusicAudio": "{app_name} ته د میوزیک او آډیو لاسرسي ته اړتیا لري ترڅو فایلونه، میوزیک او آډیو ولیږي.",
   "permissionsRequired": "اجازه اړینه ده",
-  "permissionsStorageDenied": "{app_name} ته د انځور کتابتون ته لاسرسي ته اړتیا لري ترڅو تاسې عکسونه او ویډیوګانې واستوئ، مګر دا په دائمي ډول رد شوی. تنظیماتو باندې ټپ وکړئ -> اجازې، او \"عکسونه او ویډیوګانې\" روښانه کړئ.",
-  "permissionsStorageDeniedLegacy": "{app_name} ته د ذخیره کولو لاسرسي ته اړتیا لري ترڅو تاسې ملحقات واستوئ او ساتئ. تنظیماتو باندې ټپ وکړئ -> اجازې، او \"ذخیره\" روښانه کړئ.",
+  "permissionsStorageDenied": "{app_name} ته د انځور کتابتون ته لاسرسي ته اړتیا لري ترڅو تاسې عکسونه او ویډیوګانې واستوئ، مګر دا په دائمي ډول رد شوی. تنظیماتو باندې ټپ وکړئ → اجازې، او \"عکسونه او ویډیوګانې\" روښانه کړئ.",
+  "permissionsStorageDeniedLegacy": "{app_name} ته د ذخیره کولو لاسرسي ته اړتیا لري ترڅو تاسې ملحقات واستوئ او ساتئ. تنظیماتو باندې ټپ وکړئ → اجازې، او \"ذخیره\" روښانه کړئ.",
   "permissionsStorageSave": "{app_name} پیوستونونو او میډیا خوندي کولو لپاره ذخیره کولو ته اړتیا لري.",
   "permissionsStorageSaveDenied": "{app_name} له بشپړیدو څخه مخکې میډیا خوندي کولو لپاره ذخیره کولو ته اړتیا لري، مګر تایید شوی ده. مهرباني وکړئ غوښتنلیک تنظیماتو ته دوام وکړئ، \"Permissions\" وټاکئ، او \"ذخیره\" فعال کړئ.",
   "permissionsStorageSend": "{app_name} عکسونه او ویډیوګانې لیږلو لپاره ذخیره کولو ته اړتیا لري.",
