--- a/_locales/pt-BR/messages.json
+++ b/_locales/pt-BR/messages.json
@@ -161,7 +161,7 @@
   "cameraErrorNotFound": "Nenhuma câmera encontrada",
   "cameraErrorUnavailable": "Câmera indisponível.",
   "cameraGrantAccess": "Conceder acesso à câmera",
-  "cameraGrantAccessDenied": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, mas ele foi permanentemente negado. Por favor continue para configurações do app, selecione \"Permissões\", e habilite \"Câmera\".",
+  "cameraGrantAccessDenied": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, mas ele foi permanentemente negado. Por favor, continue para configurações do app, selecione \"Permissões\", e habilite \"Câmera\".",
   "cameraGrantAccessDescription": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, ou escanear códigos QR.",
   "cameraGrantAccessQr": "{app_name} precisa de acesso à câmera para escanear códigos QR",
   "cancel": "Cancelar",
@@ -269,8 +269,8 @@
   "deleteAfterGroupPR3DeleteMessagesConfirmation": "Você deseja apagar esta conversa definitivamente?",
   "deleteAfterGroupPR3GroupErrorLeave": "Não é possível sair enquanto adiciona ou remove outros membros.",
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legado",
-  "deleteAfterLegacyDisappearingMessagesOriginal": "Versão original das mensagens desaparecendo.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> definiu o tempo de duração das mensagens efêmeras como <b>{time}</b>.",
+  "deleteAfterLegacyDisappearingMessagesOriginal": "Versão original das mensagens temporárias.",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> definiu o tempo de duração das mensagens temporárias como <b>{time}</b>",
   "deleteAfterLegacyGroupsGroupCreation": "Por favor, aguarde enquanto o grupo é criado...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Falha ao atualizar o grupo",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Você não tem permissão para excluir as mensagens de outros",
@@ -300,7 +300,7 @@
   "disappearingMessagesDescription": "Essa configuração se aplica a todos nesta conversa.",
   "disappearingMessagesDescription1": "Essa configuração se aplica às mensagens que você envia nesta conversa.",
   "disappearingMessagesDescriptionGroup": "Esta configuração aplica-se a todos nesta conversa.<br/>Apenas os administradores de grupos podem alterar essa configuração.",
-  "disappearingMessagesDisappear": "Desaparecer Após {disappearing_messages_type} - {time}",
+  "disappearingMessagesDisappear": "Desaparecer após {disappearing_messages_type} - {time}",
   "disappearingMessagesDisappearAfterRead": "Desaparecer após ler",
   "disappearingMessagesDisappearAfterReadDescription": "Mensagens são excluídas depois que elas são lidas.",
   "disappearingMessagesDisappearAfterReadState": "Desaparecer após ler - {time}",
@@ -308,22 +308,22 @@
   "disappearingMessagesDisappearAfterSendDescription": "As mensagens são excluídas após serem enviadas.",
   "disappearingMessagesDisappearAfterSendState": "Desaparecer após enviar - {time}",
   "disappearingMessagesFollowSetting": "Acompanhar configuração",
-  "disappearingMessagesFollowSettingOff": "As mensagens que você enviar não irão mais desaparecer. Tem certeza de que deseja <b>desativar</b> desaparecer mensagens?",
-  "disappearingMessagesFollowSettingOn": "Defina suas mensagens para desaparecer <b>{time}</b> depois que forem <b>{disappearing_messages_type}</b>?",
-  "disappearingMessagesLegacy": "{name} está usando um cliente desatualizado. As mensagens desaparecendo podem não funcionar como esperado.",
+  "disappearingMessagesFollowSettingOff": "As mensagens que você enviar não irão mais desaparecer. Tem certeza de que deseja <b>desativar</b> mensagens temporárias?",
+  "disappearingMessagesFollowSettingOn": "Definir suas mensagens para desaparecer <b>{time}</b> depois que forem <b>{disappearing_messages_type}</b>?",
+  "disappearingMessagesLegacy": "{name} está usando um cliente desatualizado. As mensagens temporárias podem não funcionar como esperado.",
   "disappearingMessagesOnlyAdmins": "Apenas administradores do grupo podem alterar esta configuração.",
   "disappearingMessagesSent": "Enviada",
   "disappearingMessagesSet": "<b>{name}</b> definiu mensagens para desaparecer {time} depois de terem sido {disappearing_messages_type}.",
   "disappearingMessagesSetYou": "<b>Você</b> definiu para as mensagens desaparecerem {time} depois de terem sido {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Timer",
-  "disappearingMessagesTurnedOff": "<b>{name}</b> desativou as mensagens efêmeras. As mensagens que eles enviarem não desaparecerão mais.",
+  "disappearingMessagesTurnedOff": "<b>{name}</b> desativou as mensagens temporárias. As mensagens que eles enviarem não desaparecerão mais.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> desativou as mensagens que desaparecem <b>off</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Você</b> desativou as <b>mensagens efêmeras</b>. Mensagens que você enviar não desaparecerão mais.",
+  "disappearingMessagesTurnedOffYou": "<b>Você</b> desativou as <b>mensagens temporárias</b>. Mensagens que você enviar não desaparecerão mais.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Você</b> desativou o <b>desaparecimento de mensagens</b>.",
   "disappearingMessagesTypeRead": "lido",
   "disappearingMessagesTypeSent": "enviada",
-  "disappearingMessagesUpdated": "<b>{admin_name}</b> atualizou as configurações das mensagens desaparecendo.",
-  "disappearingMessagesUpdatedYou": "<b>Você</b> atualizou as configurações de mensagens efêmeras.",
+  "disappearingMessagesUpdated": "<b>{admin_name}</b> atualizou as configurações das mensagens temporárias.",
+  "disappearingMessagesUpdatedYou": "<b>Você</b> atualizou as configurações de mensagens temporárias.",
   "dismiss": "Ignorar",
   "displayNameDescription": "Pode ser seu nome real, um apelido ou qualquer outra coisa que você goste — e você pode mudá-lo a qualquer momento.",
   "displayNameEnter": "Digite seu nome de exibição",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "Gostaria de remover <b>{name}</b> e <b>{count} outros</b> de <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Gostaria de remover <b>{name}</b> e <b>{other_name}</b> de <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Remover usuário e suas mensagens] other [Remover usuários e suas mensagens]}",
-  "groupRemoveUserOnly": "{count, plural, one [Remover usuário ] other [Remover usuários]}",
+  "groupRemoveUserOnly": "{count, plural, one [Remover usuário] other [Remover usuários]}",
   "groupRemoved": "<b>{name}</b> foi removido do grupo.",
   "groupRemovedMultiple": "<b>{name}</b> e <b>{count} outros</b> foram removidos do grupo.",
   "groupRemovedTwo": "<b>{name}</b> e <b>{other_name}</b> foram removidos do grupo.",
@@ -610,7 +610,7 @@
   "onboardingTos": "Termos de Serviço",
   "onboardingTosPrivacy": "Ao usar este serviço, você concorda com nossos <b>Termos de Serviço</b> e <b>Política de Privacidade</b>",
   "onionRoutingPath": "Caminho",
-  "onionRoutingPathDescription": "{app_name} oculta seu IP ao enviar suas mensagens através de vários nós de serviço na rede descentralizada do {app_name}. Esse é o caminho atual:",
+  "onionRoutingPathDescription": "{app_name} oculta seu IP ao enviar suas mensagens através de vários nós de serviço na rede descentralizada do {app_name}. Este é o caminho atual:",
   "onionRoutingPathDestination": "Destino",
   "onionRoutingPathEntryNode": "Nó de Entrada",
   "onionRoutingPathServiceNode": "Service Node",
@@ -640,27 +640,27 @@
   "passwordSet": "Definir Senha",
   "passwordSetDescription": "Sua senha foi definida. Por favor, mantenha-a segura.",
   "paste": "Colar",
-  "permissionMusicAudioDenied": "{app_name} precisa de acesso a música e áudio para enviar arquivos, músicas e áudio, mas o acesso foi permanentemente negado. Toque em Configurações -> Permissões e ative \"Música e áudio\".",
+  "permissionMusicAudioDenied": "{app_name} precisa de acesso a música e áudio para enviar arquivos, músicas e áudio, mas o acesso foi permanentemente negado. Toque em Configurações → Permissões e ative \"Música e áudio\".",
   "permissionsAppleMusic": "{app_name} precisa usar a Apple Music para reproduzir anexos de mídia.",
   "permissionsAutoUpdate": "Atualização Automática",
   "permissionsAutoUpdateDescription": "Verificar atualizações automaticamente ao iniciar",
-  "permissionsCameraDenied": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, mas ele foi permanentemente negado. Toque em Configurações -> Permissões, e ligue \"Câmera\".",
+  "permissionsCameraDenied": "{app_name} precisa de acesso à câmera para tirar fotos e vídeos, mas ele foi permanentemente negado. Toque em Configurações → Permissões, e ligue \"Câmera\".",
   "permissionsFaceId": "A funcionalidade de bloqueio de tela no {app_name} usa reconhecimento facial.",
   "permissionsKeepInSystemTray": "Manter na Bandeja do Sistema",
   "permissionsKeepInSystemTrayDescription": "{app_name} continua sendo executado em segundo plano quando você fecha a janela",
   "permissionsLibrary": "O {app_name} precisa de acesso à biblioteca de fotos para continuar. Você pode habilitar o acesso nas configurações do iOS.",
   "permissionsMicrophone": "Microfone",
-  "permissionsMicrophoneAccessRequired": "{app_name} precisa de acesso ao microfone para fazer chamadas e enviar mensagens de áudio, mas foi permanentemente negado. Toque em Configurações -> Permissões, e ligue \"Microfone\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} precisa de acesso ao microfone para fazer chamadas e enviar mensagens de áudio, mas foi permanentemente negado. Toque em Configurações → Permissões, e ligue \"Microfone\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Você pode habilitar o acesso ao microfone nas configurações de privacidade do {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} precisa de acesso ao microfone para fazer chamadas e gravar mensagens de áudio.",
   "permissionsMicrophoneDescription": "Permita acesso ao microfone.",
   "permissionsMusicAudio": "{app_name} precisa de acesso a música e áudio para enviar arquivos, músicas e áudios.",
   "permissionsRequired": "Permissão requerida",
-  "permissionsStorageDenied": "{app_name} precisa de acesso à biblioteca de fotos para que você possa enviar fotos e vídeos, mas o acesso foi permanentemente negado. Toque em Configurações -> Permissões e ative \"Fotos e vídeos\".",
-  "permissionsStorageDeniedLegacy": "{app_name} precisa de acesso ao armazenamento para que você possa enviar e salvar anexos. Toque em Configurações -> Permissões e ative \"Armazenamento\".",
+  "permissionsStorageDenied": "{app_name} precisa de acesso à biblioteca de fotos para que você possa enviar fotos e vídeos, mas o acesso foi permanentemente negado. Toque em Configurações → Permissões e ative \"Fotos e vídeos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} precisa de acesso ao armazenamento para que você possa enviar e salvar anexos. Toque em Configurações → Permissões e ative \"Armazenamento\".",
   "permissionsStorageSave": "{app_name} precisa de acesso ao armazenamento para salvar anexos e mídias.",
-  "permissionsStorageSaveDenied": "{app_name} precisa de acesso ao armazenamento para salvar fotos e vídeos, mas foi permanentemente negado. Por favor continue para configurações do app, selecione \"Permissões\", e habilite \"Armazenamento\".",
-  "permissionsStorageSend": "{app_name} precisa de acesso ao armazenamento para enviar fotos e vídeos.",
+  "permissionsStorageSaveDenied": "{app_name} precisa de acesso ao seu armazenamento para salvar fotos e vídeos, mas foi permanentemente negado. Por favor, continue para configurações do app, selecione \"Permissões\", e habilite \"Armazenamento\".",
+  "permissionsStorageSend": "{app_name} precisa de acesso ao seu armazenamento para enviar fotos e vídeos.",
   "pin": "Fixar",
   "pinConversation": "Fixar conversa",
   "pinUnpin": "Desafixar",
