--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "Doriți să eliminați pe <b>{name}</b> și <b>alți {count}</b> din <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Doriți să eliminați pe <b>{name}</b> și <b>{other_name}</b> din <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Elimină utilizatorul și mesajele acestuia] few [Elimină utilizatorii și mesajele acestora] other [Elimină utilizatorii și mesajele acestora]}",
-  "groupRemoveUserOnly": "{count, plural, one [Elimină utilizatorul ] few [Elimină utilizatorii] other [Elimină utilizatorii]}",
+  "groupRemoveUserOnly": "{count, plural, one [Elimină utilizatorul] few [Elimină utilizatorii] other [Elimină utilizatorii]}",
   "groupRemoved": "<b>{name}</b> a fost eliminat din grup.",
   "groupRemovedMultiple": "<b>{name}</b> și <b>alți {count}</b> au fost eliminați din grup.",
   "groupRemovedTwo": "<b>{name}</b> și <b>{other_name}</b> au fost eliminați din grup.",
@@ -640,24 +640,24 @@
   "passwordSet": "Setează parola",
   "passwordSetDescription": "Parola ta a fost setată. Te rugăm să o păstrezi în siguranță.",
   "paste": "Lipire",
-  "permissionMusicAudioDenied": "{app_name} are nevoie de acces la funcția de muzică și bibliotecă audio pentru a trimite fișiere, muzică și înregistrări audio, dar accesul a fost refuzat definitiv. Mergi la Setări -> Permisiuni și activează funcția „Muzică și audio”.",
+  "permissionMusicAudioDenied": "{app_name} are nevoie de acces la funcția de muzică și bibliotecă audio pentru a trimite fișiere, muzică și înregistrări audio, dar accesul a fost refuzat definitiv. Mergi la Setări → Permisiuni și activează funcția „Muzică și audio”.",
   "permissionsAppleMusic": "{app_name} are nevoie de acces la Apple Music pentru a reda atașamente media.",
   "permissionsAutoUpdate": "Actualizare automată",
   "permissionsAutoUpdateDescription": "Verifică automat actualizările la pornire",
-  "permissionsCameraDenied": "{app_name} are nevoie de acces la cameră pentru a realiza poze și clipuri video, dar accesul a fost refuzat definitiv. Mergi la Setări -> Permisiuni și activează „Cameră”.",
+  "permissionsCameraDenied": "{app_name} are nevoie de acces la cameră pentru a realiza poze și clipuri video, dar accesul a fost refuzat definitiv. Mergi la Setări → Permisiuni și activează „Cameră”.",
   "permissionsFaceId": "Funcția de blocare a ecranului din {app_name} folosește Face ID.",
   "permissionsKeepInSystemTray": "Păstrează activ in bară",
   "permissionsKeepInSystemTrayDescription": "{app_name} va continua să ruleze în fundal după închiderea ferestrei",
   "permissionsLibrary": "{app_name} are nevoie de acces la galeria foto pentru a continua. Puteți activa accesul în setările iOS.",
   "permissionsMicrophone": "Microfon",
-  "permissionsMicrophoneAccessRequired": "{app_name} are nevoie de acces la microfon pentru a efectua apeluri și a trimite mesaje audio, dar accesul a fost refuzat permanent. Mergeți la setările -> Permisiuni, apoi activați opțiunea „Microfon”.",
+  "permissionsMicrophoneAccessRequired": "{app_name} are nevoie de acces la microfon pentru a efectua apeluri și a trimite mesaje audio, dar accesul a fost refuzat permanent. Mergeți la setările → Permisiuni, apoi activați opțiunea „Microfon”.",
   "permissionsMicrophoneAccessRequiredDesktop": "Puteți activa accesul la microfon din setările de confidențialitate ale {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} are nevoie de acces la microfon pentru a efectua apeluri și a înregistra mesaje audio.",
   "permissionsMicrophoneDescription": "Permite accesul la microfon.",
   "permissionsMusicAudio": "{app_name} are nevoie de acces la funcția de muzică și bibliotecă audio pentru a trimite fișiere, muzică și înregistrări audio.",
   "permissionsRequired": "E nevoie de permisiune",
-  "permissionsStorageDenied": "{app_name} are nevoie de acces la galeria foto pentru a trimite poze și clipuri video, dar accesul a fost refuzat definitiv. Mergi la Setări -> Permisiuni și activează funcția \"Poze și clipuri video\".",
-  "permissionsStorageDeniedLegacy": "{app_name} are nevoie de acces la stocare pentru a trimite și salva atașamente. Mergi la Setări -> Permisiuni și activează funcția \"Stocare\".",
+  "permissionsStorageDenied": "{app_name} are nevoie de acces la galeria foto pentru a trimite poze și clipuri video, dar accesul a fost refuzat definitiv. Mergi la Setări → Permisiuni și activează funcția \"Poze și clipuri video\".",
+  "permissionsStorageDeniedLegacy": "{app_name} are nevoie de acces la stocare pentru a trimite și salva atașamente. Mergi la Setări → Permisiuni și activează funcția \"Stocare\".",
   "permissionsStorageSave": "{app_name} are nevoie de acces la spațiul de stocare pentru a salva atașamente și media.",
   "permissionsStorageSaveDenied": "{app_name} are nevoie de acces la spațiul de stocare pentru a salva poze și clipuri video, dar accesul a fost refuzat permanent. Vă rugăm să navigați în meniul de setări al aplicației, selectați \"Permisiuni\" și activați \"Spațiu de stocare\".",
   "permissionsStorageSend": "{app_name} are nevoie de acces la spațiul de stocare pentru a trimite poze și clipuri video.",
