--- a/_locales/sh/messages.json
+++ b/_locales/sh/messages.json
@@ -349,7 +349,7 @@
   "emojiCategorySymbols": "Simboli",
   "emojiCategoryTravel": "Putovanja i Mjesta",
   "emojiReactsClearAll": "Jesi li siguran da želiš izbrisati sve {emoji}?",
-  "emojiReactsCoolDown": " uspori! Poslali ste previše emodžija. Pokušajte ponovo uskoro",
+  "emojiReactsCoolDown": "uspori! Poslali ste previše emodžija. Pokušajte ponovo uskoro",
   "emojiReactsCountOthers": "{count, plural, one [I # drugi je reagovao {emoji} na ovu poruku.] few [I # druga su reagovala {emoji} na ovu poruku.] many [I # drugih je reagovalo {emoji} na ovu poruku.] other [I # drugih je reagovalo {emoji} na ovu poruku.]}",
   "emojiReactsHoverNameDesktop": "{name} je reagirao sa {emoji_name}",
   "emojiReactsHoverNameTwoDesktop": "{name} i {other_name} reagirali su sa {emoji_name}",
@@ -583,7 +583,7 @@
   "notificationsMuted": "Utišano",
   "notificationsSlowMode": "Spori režim",
   "notificationsSlowModeDescription": "{app_name} će povremeno provjeravati ima li novih poruka u pozadini.",
-  "notificationsSound": " Zvuk",
+  "notificationsSound": "Zvuk",
   "notificationsSoundDescription": "Zvuk kada je aplikacija otvorena",
   "notificationsSoundDesktop": "Audio Notifikacije",
   "notificationsStrategy": "Strategija Notifikacija",
@@ -639,24 +639,24 @@
   "passwordSet": "Postavi lozinku",
   "passwordSetDescription": "Tvoja šifra je postavljena. Molimo, čuvaj je na sigurnom.",
   "paste": "Zalijepi",
-  "permissionMusicAudioDenied": "{app_name} treba pristup muzici i zvuku kako bi poslao datoteke, muziku i zvuk, ali je trajno odbijen. Dodirnite Postavke -> Dozvole i uključite \"Muzika i zvuk\".",
+  "permissionMusicAudioDenied": "{app_name} treba pristup muzici i zvuku kako bi poslao datoteke, muziku i zvuk, ali je trajno odbijen. Dodirnite Postavke → Dozvole i uključite \"Muzika i zvuk\".",
   "permissionsAppleMusic": "{app_name} treba koristiti Apple Music za reprodukciju medijskih privitaka.",
   "permissionsAutoUpdate": "Automatska ažuriranja",
   "permissionsAutoUpdateDescription": "Automatski provjeri ažuriranja pri pokretanju",
-  "permissionsCameraDenied": "{app_name} treba pristup kameri kako bi snimio fotografije i video zapise, ali je trajno odbijen. Dodirnite Postavke -> Dozvole i uključite \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} treba pristup kameri kako bi snimio fotografije i video zapise, ali je trajno odbijen. Dodirnite Postavke → Dozvole i uključite \"Kamera\".",
   "permissionsFaceId": "Značajka zaključavanja ekrana na {app_name} koristi Face ID.",
   "permissionsKeepInSystemTray": "Drži u sistemskoj traci",
   "permissionsKeepInSystemTrayDescription": "{app_name} nastavlja raditi u pozadini kada zatvorite prozor",
   "permissionsLibrary": "{app_name} treba pristup foto galeriji za nastavak. Možete omogućiti pristup u postavkama iOS-a.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} zahtijeva dozvolu pristupa mikrofonu za obavljanje poziva i slanje audio poruka, ali je pristup trajno odbijen. Dodirnite postavke -> Dozvole i uključite 'Mikrofon'.",
+  "permissionsMicrophoneAccessRequired": "{app_name} zahtijeva dozvolu pristupa mikrofonu za obavljanje poziva i slanje audio poruka, ali je pristup trajno odbijen. Dodirnite postavke → Dozvole i uključite 'Mikrofon'.",
   "permissionsMicrophoneAccessRequiredDesktop": "Možete omogućiti pristup mikrofonu u podešavanjima privatnosti za {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} treba pristup mikrofonu za obavljanje poziva i snimanje audio poruka.",
   "permissionsMicrophoneDescription": "Dozvoli pristup mikrofonu.",
   "permissionsMusicAudio": "{app_name} treba pristup muzici i zvuku kako bi poslao fajlove, muziku i audio.",
   "permissionsRequired": "Potrebna dozvola",
-  "permissionsStorageDenied": "{app_name} treba pristup biblioteci fotografija kako biste mogli slati fotografije i videozapise, ali je pristup trajno odbijen. Dodirnite Postavke -> Dozvole, i uključite \"Fotografije i videozapisi\".",
-  "permissionsStorageDeniedLegacy": "{app_name} treba pristup pohrani kako biste mogli slati i spremati privitke. Dodirnite Postavke -> Dozvole, i uključite \"Pohrana\".",
+  "permissionsStorageDenied": "{app_name} treba pristup biblioteci fotografija kako biste mogli slati fotografije i videozapise, ali je pristup trajno odbijen. Dodirnite Postavke → Dozvole, i uključite \"Fotografije i videozapisi\".",
+  "permissionsStorageDeniedLegacy": "{app_name} treba pristup pohrani kako biste mogli slati i spremati privitke. Dodirnite Postavke → Dozvole, i uključite \"Pohrana\".",
   "permissionsStorageSave": "{app_name} treba pristup pohrani za spremanje privitaka i medija.",
   "permissionsStorageSaveDenied": "{app_name} treba pristup pohrani za spremanje slika i videa, ali je trajno odbijeno. Molimo nastavite do opcija aplikacije, odaberite 'Dozvole', i uključite 'Pohrana'.",
   "permissionsStorageSend": "{app_name} treba pristup pohrani za slanje slika i videa.",
