--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "ඔබට <b>{group_name}</b> වෙතින් <b>{name}</b> සහ <b>{count} මිලේනියමු</b> ඉවත් කිරීමට අවශ්‍යද?",
   "groupRemoveDescriptionTwo": "ඔබට <b>{name}</b> සහ <b>{other_name}</b> සහ <b>{group_name}</b> ඉවත් කිරීමට අවශ්‍යද?",
   "groupRemoveMessages": "{count, plural, one [පරිශීලක සහ ඔවුන්ගේ පණිවිඩ ඉවත් කරන්න] other [පරිශීලකයින් සහ ඔවුන්ගේ පණිවිඩ ඉවත් කරන්න]}",
-  "groupRemoveUserOnly": "{count, plural, one [පරිශීලකයෙකු ඉවත් කරන්න ] other [පරිශීලකයින් ඉවත් කරන්න]}",
+  "groupRemoveUserOnly": "{count, plural, one [පරිශීලකයෙකු ඉවත් කරන්න] other [පරිශීලකයින් ඉවත් කරන්න]}",
   "groupRemoved": "<b>{name} </b>කණ්ඩායමෙන් ඉවත් කරන ලදී.",
   "groupRemovedMultiple": "<b>{name} </b>සහ <b>{count} වෙනත් අය </b>කණ්ඩායමෙන් ඉවත් කරන ලදී.",
   "groupRemovedTwo": "<b>{name} </b>සහ <b>{other_name} </b>කණ්ඩායමෙන් ඉවත් කරන ලදී.",
@@ -639,28 +639,28 @@
   "passwordSet": "මුරපදය සකසන්න",
   "passwordSetDescription": "ඔබගේ මුරපදය සකසා ඇත. කරුණාකර එය ආරක්ෂිතව තබා ගන්න.",
   "paste": "අලවන්න",
-  "permissionMusicAudioDenied": "{app_name} කේතය මගින් ගොනු, සංගීත සහ ශබ්ද යවන ව්‍යාපෘතිය සඳහා සංගීත සහ ශබ්ද ප්‍රවේශ අවශ්‍ය වේ, නමුදු එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසුම් -> අවසරයන්, සහ \"සංගීත සහ ශබ්ද\" වට කරන්න.",
+  "permissionMusicAudioDenied": "{app_name} කේතය මගින් ගොනු, සංගීත සහ ශබ්ද යවන ව්‍යාපෘතිය සඳහා සංගීත සහ ශබ්ද ප්‍රවේශ අවශ්‍ය වේ, නමුදු එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසුම් → අවසරයන්, සහ \"සංගීත සහ ශබ්ද\" වට කරන්න.",
   "permissionsAppleMusic": "මාධ්‍ය ඇමුණුම් වාදනය කිරීමට {app_name} ට Apple Music භාවිත කිරීම අවශ්‍යයි.",
   "permissionsAutoUpdate": "ස්වයං යාවත්කාලය",
   "permissionsAutoUpdateDescription": "ආරම්භයේ යාවත්කාලීන සඳහා ස්වයංක්‍රීයව පරීක්ෂා කරන්න",
-  "permissionsCameraDenied": "{app_name}ට කැමරා ප්‍රවේශය ඡායාරූප සහ වීඩියෝ ගැනීමට අවශ්‍යයි, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසීම් -> අවසර, සහ \"කැමරාව\" සක්‍රීය කරන්න.",
+  "permissionsCameraDenied": "{app_name}ට කැමරා ප්‍රවේශය ඡායාරූප සහ වීඩියෝ ගැනීමට අවශ්‍යයි, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසීම් → අවසර, සහ \"කැමරාව\" සක්‍රීය කරන්න.",
   "permissionsFaceId": "{app_name} මත තිර අගුළු විශේෂාංගය Face ID භාවිතා කරයි.",
   "permissionsKeepInSystemTray": "පද්ධති තැටියේ තබා ගන්න",
   "permissionsKeepInSystemTrayDescription": "ඔබ කවුළුව වැසූ විට {app_name} පසුබිමේ දිගටම ක්‍රියාත්මක වේ",
   "permissionsLibrary": "{app_name} ක්‍රියාත්මක වීමට ඡායාරූප පුස්තකාල ප්‍රවේශය අවශ්‍යවේ. ඔබට iOS සැකසීම් තුළ ප්‍රවේශය සබල කළ හැක.",
   "permissionsMicrophone": "මයික්රෆෝනය",
-  "permissionsMicrophoneAccessRequired": "{app_name} ට ඇමතුම් කිරීමට සහ ශ්‍රව්‍ය පණිවිඩ යැවීමට මයික්‍රෆෝන ප්‍රවේශය අවශ්‍ය වේ, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසුම් වලට යන්න -> අවසර, සහ \"මයික්‍රොෆෝනය\" සබල කරන්න.",
+  "permissionsMicrophoneAccessRequired": "{app_name} ට ඇමතුම් කිරීමට සහ ශ්‍රව්‍ය පණිවිඩ යැවීමට මයික්‍රෆෝන ප්‍රවේශය අවශ්‍ය වේ, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසුම් වලට යන්න → අවසර, සහ \"මයික්‍රොෆෝනය\" සබල කරන්න.",
   "permissionsMicrophoneAccessRequiredDesktop": "ඔබට {app_name} ගේ රහස්‍යතා සැකසුම්වල ලැපෙක්ස් ප්‍රවේශය සබල කළ හැක",
   "permissionsMicrophoneAccessRequiredIos": "ඇමතුම් ලබා දීම සහ ශ්‍රව්‍ය පණිවිඩ පටිගත කිරීම සඳහා {app_name}ට මයික්‍රෆෝන ප්‍රවේශය අවශ්‍යයි.",
   "permissionsMicrophoneDescription": "මයික්‍රෆෝනයට ප්‍රවේශ වීමට ඉඩ දෙන්න.",
   "permissionsMusicAudio": "{app_name} ට ගොනු, සංගීත සහ ශ්‍රව්‍ය යැවීම සඳහා ශබ්ද ප්‍රවේශ අවශ්‍යවේ.",
   "permissionsRequired": "අවසරය අවශ්යයි",
-  "permissionsStorageDenied": "{app_name} ඡායාරූප සහ වීඩියෝ යැවීමට සහ ලබාදීමට ඡායාරූප පුස්තකාල ප්‍රවේශය අවශ්‍යයි, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසීම් -> අවසර, සහ \"ඡායාරූප සහ වීඩියෝ\" මත ක්ලික් කරන්න.",
-  "permissionsStorageDeniedLegacy": "{app_name}ට සම්බන්ධීකරණ සහ උපුටා ගැනීම් සදහා ගබඩා ප්‍රවේශය අවශ්‍යයි. සැකසීම් -> අවසර, සහ \"ගබඩාව\" සක්‍රීය කරන්න.",
+  "permissionsStorageDenied": "{app_name} ඡායාරූප සහ වීඩියෝ යැවීමට සහ ලබාදීමට ඡායාරූප පුස්තකාල ප්‍රවේශය අවශ්‍යයි, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. සැකසීම් → අවසර, සහ \"ඡායාරූප සහ වීඩියෝ\" මත ක්ලික් කරන්න.",
+  "permissionsStorageDeniedLegacy": "{app_name}ට සම්බන්ධීකරණ සහ උපුටා ගැනීම් සදහා ගබඩා ප්‍රවේශය අවශ්‍යයි. සැකසීම් → අවසර, සහ \"ගබඩාව\" සක්‍රීය කරන්න.",
   "permissionsStorageSave": "ඇමුණුම් සහ මාධ්‍ය සුරැකීම සඳහා {app_name}ට ගබඩා ප්‍රවේශය අවශ්‍යවේ.",
   "permissionsStorageSaveDenied": "ඡායාරූප සහ වීඩියෝ සුරැකීමට {app_name}ට ගබඩා ප්‍රවේශය අවශ්‍ය වේ, නමුත් එය ස්ථිරවම ප්‍රතික්ෂේප කර ඇත. කරුණාකර යෙදුම් සැකසීම් වෙත යන්න, \"අවසර\" තෝරන්න, සහ \"ගබඩාව\" සබල කරන්න.",
   "permissionsStorageSend": "ඡායාරූප සහ වීඩියෝ යැවීමට {app_name}ට ගබඩා ප්‍රවේශය අවශ්‍යයි.",
-  "pin": "මුදුනට අමුණන්න ",
+  "pin": "මුදුනට අමුණන්න",
   "pinConversation": "පින් සංවාදය",
   "pinUnpin": "ගළවන්න",
   "pinUnpinConversation": "සංවාදය ඉවත් කරන්න",
@@ -773,7 +773,7 @@
   "updateError": "යාවත්කාල කළ නොහැකිය",
   "updateErrorDescription": "{app_name} යාවත්කාලීන කිරීමට අසාර්ථක විය. කරුණාකර {session_download_url} වෙත ගොස් අනුමාන නව අනුවාදය මැනුවල්ව ස්ථාපනය කර, පසුව මෙම ගැටලුව සම්බන්ධයෙන් අපගේ උදව් මධ්‍යස්ථානය අමතන්න.",
   "updateNewVersion": "{app_name} නව අනුවාදය දැනට ලබා ගත හැක, යාවත්කාලීන කිරීමට තෝරන්න",
-  "updateNewVersionDescription": "නව අනුවාදයක් {app_name} ලාබා ගත හැක. ",
+  "updateNewVersionDescription": "නව අනුවාදයක් {app_name} ලාබා ගත හැක.",
   "updateReleaseNotes": "නිකුතු සටහන් වෙත යන්න",
   "updateSession": "{app_name} උත්සවය",
   "updateVersion": "අනුවාදය {version}",
