--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Zadajte názov skupiny",
   "groupNameEnterPlease": "Zadajte prosím názov skupiny.",
   "groupNameEnterShorter": "Zadajte prosím kratší názov skupiny.",
-  "groupNameNew": "Názov skupiny je teraz {group_name}. ",
+  "groupNameNew": "Názov skupiny je teraz {group_name}.",
   "groupNameUpdated": "Názov skupiny bol aktualizovaný.",
   "groupNoMessages": "Nemáte žiadne správy od <b>{group_name}</b>. Pošlite správu a začnite konverzáciu!",
   "groupOnlyAdmin": "Ste jediným správcom v <b>{group_name}</b>.<br/><br/>Členovia skupiny a nastavenia sa bez správcu nedajú meniť.",
@@ -639,24 +639,24 @@
   "passwordSet": "Nastaviť heslo",
   "passwordSetDescription": "Vaše heslo bolo nastavené. Uchovajte ho prosím v bezpečí.",
   "paste": "Vložiť",
-  "permissionMusicAudioDenied": "{app_name} potrebuje prístup k hudbe a zvukom na odosielanie súborov, hudby a zvukov, ale bol natrvalo odmietnutý. Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} potrebuje prístup k hudbe a zvukom na odosielanie súborov, hudby a zvukov, ale bol natrvalo odmietnutý. Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "{app_name} potrebuje používať Apple Music na prehrávanie mediálnych príloh.",
   "permissionsAutoUpdate": "Automatická aktualizácia",
   "permissionsAutoUpdateDescription": "Automatická kontrola aktualizácií pri spustení",
-  "permissionsCameraDenied": "{app_name} potrebuje prístup ku kamere na vytvárať fotografie a videá, ale bol natrvalo odmietnutý. Tap Settings -> Permissions, and turn \"Camera\" on.",
+  "permissionsCameraDenied": "{app_name} potrebuje prístup ku kamere na vytvárať fotografie a videá, ale bol natrvalo odmietnutý. Tap Settings → Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "Funkcia zámku obrazovky na {app_name} používa Face ID.",
   "permissionsKeepInSystemTray": "Ponechať v systémovej lište",
   "permissionsKeepInSystemTrayDescription": "{app_name} bude pokračovať v behu na pozadí, keď zavrieš okno",
   "permissionsLibrary": "{app_name} potrebuje prístup k foto knižnici na pokračovanie. Môžete povoliť prístup v nastaveniach iOS.",
   "permissionsMicrophone": "Mikrofón",
-  "permissionsMicrophoneAccessRequired": "{app_name} potrebuje prístup k mikrofónu na uskutočňovanie hovorov a posielanie zvukových správ, ale prístup bol natrvalo zamietnutý. Kliknite na nastavenia -> Oprávnenia a zapnite mikrofón.",
+  "permissionsMicrophoneAccessRequired": "{app_name} potrebuje prístup k mikrofónu na uskutočňovanie hovorov a posielanie zvukových správ, ale prístup bol natrvalo zamietnutý. Kliknite na nastavenia → Oprávnenia a zapnite mikrofón.",
   "permissionsMicrophoneAccessRequiredDesktop": "Prístup k mikrofónu môžete povoliť v nastaveniach súkromia aplikácie {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} potrebuje prístup k mikrofónu na uskutočnenie hovorov a nahranie zvukových správ.",
   "permissionsMicrophoneDescription": "Povoliť prístup k mikrofónu.",
   "permissionsMusicAudio": "{app_name} potrebuje prístup k hudbe a zvukom na odosielanie súborov, hudby a zvukov.",
   "permissionsRequired": "Potrebné povolenie",
-  "permissionsStorageDenied": "{app_name} potrebuje prístup k foto knižnici, aby ste mohli posielať fotografie a videá, no prístup bol trvalo zamietnutý. Klepnite na Nastavenia -> Povolenia a zapnite \"Fotografie a videá\".",
-  "permissionsStorageDeniedLegacy": "{app_name} potrebuje prístup k úložisku, aby ste mohli posielať a ukladať prílohy. Klepnite na Nastavenia -> Povolenia a zapnite \"Úložisko\".",
+  "permissionsStorageDenied": "{app_name} potrebuje prístup k foto knižnici, aby ste mohli posielať fotografie a videá, no prístup bol trvalo zamietnutý. Klepnite na Nastavenia → Povolenia a zapnite \"Fotografie a videá\".",
+  "permissionsStorageDeniedLegacy": "{app_name} potrebuje prístup k úložisku, aby ste mohli posielať a ukladať prílohy. Klepnite na Nastavenia → Povolenia a zapnite \"Úložisko\".",
   "permissionsStorageSave": "{app_name} potrebuje prístup k úložisku na uloženie príloh a médií.",
   "permissionsStorageSaveDenied": "{app_name} potrebuje prístup k úložisku na uloženie fotografií a videí, ale bol natrvalo odmietnutý. Prosím pokračujte do nastavení aplikácie, vyberte \"Oprávnenia\" a povoľte \"Úložisko\".",
   "permissionsStorageSend": "{app_name} potrebuje prístup na disk na posielanie fotiek a videí.",
