--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Vnesite ime skupine",
   "groupNameEnterPlease": "Prosimo, vnesite ime skupine.",
   "groupNameEnterShorter": "Prosimo, vnesite krajše ime skupine.",
-  "groupNameNew": "Novo ime skupine je {group_name}. ",
+  "groupNameNew": "Novo ime skupine je {group_name}.",
   "groupNameUpdated": "Ime skupine je bilo posodobljeno.",
   "groupNoMessages": "Nimate sporočil iz <b>{group_name}.</b> Pošljite sporočilo, da začnete pogovor!",
   "groupOnlyAdmin": "Vi ste edini skrbnik v skupini <b>{group_name}</b>.<br/><br/>Člani skupine in nastavitve ne morejo biti spremenjeni brez skrbnika.",
@@ -639,28 +639,28 @@
   "passwordSet": "Nastavi geslo",
   "passwordSetDescription": "Vaše geslo je bilo nastavljeno. Prosim, hranite ga na varnem mestu.",
   "paste": "Prilepi",
-  "permissionMusicAudioDenied": "{app_name} potrebuje dostop do glasbe in zvoka za pošiljanje datotek, glasbe in zvoka, vendar je bil ta trajno zavrnjen. Tapnite Nastavitve -> Dovoljenja in vklopite \"Glasba in zvok\".",
+  "permissionMusicAudioDenied": "{app_name} potrebuje dostop do glasbe in zvoka za pošiljanje datotek, glasbe in zvoka, vendar je bil ta trajno zavrnjen. Tapnite Nastavitve → Dovoljenja in vklopite \"Glasba in zvok\".",
   "permissionsAppleMusic": "{app_name} potrebuje uporabo Apple Music za predvajanje medijskih prilog.",
   "permissionsAutoUpdate": "Samodejno posodobi",
   "permissionsAutoUpdateDescription": "Ob zagonu samodejno preveri za posodobitve",
-  "permissionsCameraDenied": "{app_name} potrebuje dostop do kamere za fotografiranje in snemanje, vendar je bil ta trajno zavrnjen. Tapnite Nastavitve -> Dovoljenja in vklopite \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} potrebuje dostop do kamere za fotografiranje in snemanje, vendar je bil ta trajno zavrnjen. Tapnite Nastavitve → Dovoljenja in vklopite \"Kamera\".",
   "permissionsFaceId": "Funkcija zaklepanja zaslona na {app_name} uporablja Face ID.",
   "permissionsKeepInSystemTray": "Ohrani v sistemski vrstici",
   "permissionsKeepInSystemTrayDescription": "{app_name} se nadaljuje v ozadju, ko zaprete okno",
   "permissionsLibrary": "{app_name} potrebuje dostop do knjižnice fotografij za nadaljevanje. Dostop lahko omogočite v nastavitvah iOS.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} potrebuje dostop do mikrofona za klice in pošiljanje zvočnih sporočil, vendar je bil ta trajno zavrnjen. Tapnite nastavitve -> Dovoljenja, in vklopite \"Mikrofon\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} potrebuje dostop do mikrofona za klice in pošiljanje zvočnih sporočil, vendar je bil ta trajno zavrnjen. Tapnite nastavitve → Dovoljenja, in vklopite \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Dostop do mikrofona lahko omogočite v nastavitvah zasebnosti aplikacije {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} potrebuje dostop do mikrofona za klice in snemanje zvočnih sporočil.",
   "permissionsMicrophoneDescription": "Dovoli dostop do mikrofona.",
   "permissionsMusicAudio": "{app_name} potrebuje dostop do glasbe in zvoka za pošiljanje datotek, glasbe in zvoka.",
   "permissionsRequired": "Potrebno dovoljenje",
-  "permissionsStorageDenied": "{app_name} potrebuje dostop do knjižnice fotografij, da lahko pošiljate fotografije in videoposnetke, vendar je bil ta dostop trajno zavrnjen. Tapnite Nastavitve -> Dovoljenja in vklopite \"Fotografije in videoposnetki\".",
-  "permissionsStorageDeniedLegacy": "{app_name} potrebuje dostop do shrambe, da lahko pošiljate in shranjujete priloge. Tapnite Nastavitve -> Dovoljenja in vklopite \"Shramba\".",
+  "permissionsStorageDenied": "{app_name} potrebuje dostop do knjižnice fotografij, da lahko pošiljate fotografije in videoposnetke, vendar je bil ta dostop trajno zavrnjen. Tapnite Nastavitve → Dovoljenja in vklopite \"Fotografije in videoposnetki\".",
+  "permissionsStorageDeniedLegacy": "{app_name} potrebuje dostop do shrambe, da lahko pošiljate in shranjujete priloge. Tapnite Nastavitve → Dovoljenja in vklopite \"Shramba\".",
   "permissionsStorageSave": "{app_name} potrebuje dostop do shrambe za shranjevanje prilog in medijev.",
   "permissionsStorageSaveDenied": "{app_name} potrebuje dostop do shrambe za shranjevanje fotografij in videoposnetkov, vendar je bil ta trajno zavrnjen. Nadaljujte na nastavitve aplikacije, izberite \"Dovoljenja\" in omogočite \"Shramba\".",
   "permissionsStorageSend": "{app_name} potrebuje dostop do shrambe za pošiljanje fotografij in videoposnetkov.",
-  "pin": "Pripni ",
+  "pin": "Pripni",
   "pinConversation": "Pripni pogovor",
   "pinUnpin": "Odpni",
   "pinUnpinConversation": "Odpni pogovor",
