--- a/_locales/sq/messages.json
+++ b/_locales/sq/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "Vendosni një emër grupi",
   "groupNameEnterPlease": "Ju lutem vendosni një emër grupi.",
   "groupNameEnterShorter": "Ju lutemi shkruani një emër grupi më të shkurtër.",
-  "groupNameNew": "Emri i grupit tani është {group_name}. ",
+  "groupNameNew": "Emri i grupit tani është {group_name}.",
   "groupNameUpdated": "Emri i grupit u përditësua.",
   "groupNoMessages": "Ju nuk keni asnjë mesazh nga <b>{group_name}.</b> Dërgoni një mesazh për të filluar bisedën!",
   "groupOnlyAdmin": "Ju jeni administratori i vetëm në <b>{group_name}</b>.<br/><br/>Anëtarët e grupit dhe cilësimet nuk mund të ndryshohen pa një administrator.",
@@ -430,7 +430,7 @@
   "groupRemoveDescriptionMultiple": "A dëshironi të hiqni <b>{name}</b> dhe <b>{count} të tjerë</b> nga <b>{group_name}?</b>",
   "groupRemoveDescriptionTwo": "A dëshironi të hiqni <b>{name}</b> dhe <b>{other_name}</b> nga <b>{group_name}?</b>",
   "groupRemoveMessages": "{count, plural, one [Hiqi përdoruesin dhe mesazhet e tyre] other [Hiqi përdoruesit dhe mesazhet e tyre]}",
-  "groupRemoveUserOnly": "{count, plural, one [Hiqe përdoruesin ] other [Hiqi përdoruesit]}",
+  "groupRemoveUserOnly": "{count, plural, one [Hiqe përdoruesin] other [Hiqi përdoruesit]}",
   "groupRemoved": "<b>{name}</b> u largua nga grupi.",
   "groupRemovedMultiple": "<b>{name}</b> dhe <b>{count} të tjerë</b> u larguan nga grupi.",
   "groupRemovedTwo": "<b>{name}</b> dhe <b>{other_name}</b> u larguan nga grupi.",
@@ -639,28 +639,28 @@
   "passwordSet": "Vendos Fjalëkalimin",
   "passwordSetDescription": "Fjalëkalimi juaj është vendosur. Ju lutemi ta mbani të sigurt.",
   "paste": "Ngjite",
-  "permissionMusicAudioDenied": "{app_name} ka nevojë për qasje në muzikë dhe audio për të dërguar skedarë, muzikë dhe audio, por kjo i është mohuar. Shtypni Settings -> Permissions dhe aktivizoni \"Music and audio\".",
+  "permissionMusicAudioDenied": "{app_name} ka nevojë për qasje në muzikë dhe audio për të dërguar skedarë, muzikë dhe audio, por kjo i është mohuar. Shtypni Settings → Permissions dhe aktivizoni \"Music and audio\".",
   "permissionsAppleMusic": "{app_name} ka nevojë të përdorë Apple Music për të luajtur attachment-e mediaje.",
   "permissionsAutoUpdate": "Përditëso Automatikisht",
   "permissionsAutoUpdateDescription": "Kontrolloni automatikisht për përditësime gjatë nisjes së programit",
-  "permissionsCameraDenied": "{app_name} ka nevojë për leje përdorimi të kamerës për të bërë foto dhe video, por kjo i është mohuar. Shtypni Settings -> Permissions dhe aktivizoni \"Camera\".",
+  "permissionsCameraDenied": "{app_name} ka nevojë për leje përdorimi të kamerës për të bërë foto dhe video, por kjo i është mohuar. Shtypni Settings → Permissions dhe aktivizoni \"Camera\".",
   "permissionsFaceId": "Veçoria e mbylljes së ekranit në {app_name} përdor Face ID.",
   "permissionsKeepInSystemTray": "Mbaje në System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} vazhdon të funksionojë në sfond kur mbyllni dritaren",
   "permissionsLibrary": "{app_name} ka nevojë për leje të bibliotekës së fotove për të vazhduar. Ju mund ta aktivizoni qasjen në rregullimet e iOS.",
   "permissionsMicrophone": "Mikrofoni",
-  "permissionsMicrophoneAccessRequired": "{app_name} ka nevojë për mikrofon për të bërë telefonata dhe për të dërguar mesazhe audio, por i është mohuar përgjithmonë. Shtypni rregullimet -> Lejet, dhe ndizni \"Mikrofonin\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} ka nevojë për mikrofon për të bërë telefonata dhe për të dërguar mesazhe audio, por i është mohuar përgjithmonë. Shtypni rregullimet → Lejet, dhe ndizni \"Mikrofonin\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Ju mund të aktivizoni aksesin e mikrofonit në cilësimet e privatësisë së {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ka nevojë për leje përdorimi të mikrofonit për të bërë thirrje dhe për të regjistruar mesazhe audio.",
   "permissionsMicrophoneDescription": "Lejo qasje te mikrofoni.",
   "permissionsMusicAudio": "{app_name} ka nevojë për akses në muzikë dhe audio për të dërguar skedarë, muzikë dhe audio.",
   "permissionsRequired": "Lyp leje",
-  "permissionsStorageDenied": "{app_name} ka nevojë për qasje në bibliotekën e fotove që të mund të dërgoni foto dhe video, por kjo është bllokuar përherë. Shtypni Settings -> Permissions dhe aktivizoni \"Photos and videos\".",
-  "permissionsStorageDeniedLegacy": "{app_name} ka nevojë për qasje të hapësirës ruajtëse që të mund të dërgoni dhe ruani bashkëngjitjet. Shtypni Settings -> Permissions dhe aktivizoni \"Storage\".",
+  "permissionsStorageDenied": "{app_name} ka nevojë për qasje në bibliotekën e fotove që të mund të dërgoni foto dhe video, por kjo është bllokuar përherë. Shtypni Settings → Permissions dhe aktivizoni \"Photos and videos\".",
+  "permissionsStorageDeniedLegacy": "{app_name} ka nevojë për qasje të hapësirës ruajtëse që të mund të dërgoni dhe ruani bashkëngjitjet. Shtypni Settings → Permissions dhe aktivizoni \"Storage\".",
   "permissionsStorageSave": "{app_name} ka nevojë për leje të hapësirës ruajtëse për të ruajtur attachment-et dhe median.",
   "permissionsStorageSaveDenied": "{app_name} ka nevojë për leje të hapësirës ruajtëse për të ruajtur fotot dhe videot, por kjo i është mohuar. Ju lutemi, kaloni te rregullimet e aplikacionit, përzgjidhni \"Leje\", dhe aktivizoni \"Depozitim\".",
   "permissionsStorageSend": "{app_name} ka nevojë për leje të hapësirës ruajtëse për të dërguar foto dhe video.",
-  "pin": "Pin ",
+  "pin": "Pin",
   "pinConversation": "Bisedë e fiksuar",
   "pinUnpin": "Çngulit",
   "pinUnpinConversation": "Çngulit Bisedën",
