--- a/_locales/sr-SP/messages.json
+++ b/_locales/sr-SP/messages.json
@@ -639,24 +639,24 @@
   "passwordSet": "Постави лозинку",
   "passwordSetDescription": "Ваша лозинка је подешена. Молимо вас да је сачувате.",
   "paste": "Налепи",
-  "permissionMusicAudioDenied": "{app_name} треба приступ музици и звуку ради слања датотека, музике и звука, али је приступ трајно одбијен. Додирните Поставке -> Дозволе и укључите \"Музика и звук\".",
+  "permissionMusicAudioDenied": "{app_name} треба приступ музици и звуку ради слања датотека, музике и звука, али је приступ трајно одбијен. Додирните Поставке → Дозволе и укључите \"Музика и звук\".",
   "permissionsAppleMusic": "{app_name} треба да користи Apple Music да би репродуковао медијске прилоге.",
   "permissionsAutoUpdate": "Аутоматско ажурирање",
   "permissionsAutoUpdateDescription": "Аутоматски проверавај ажурирања при покретању",
-  "permissionsCameraDenied": "{app_name} треба дозволу за камеру да прави слике и видео клипове, али је трајно забрањено. Идите на Подешавања -> Дозволе и укључите \"Камеру\".",
+  "permissionsCameraDenied": "{app_name} треба дозволу за камеру да прави слике и видео клипове, али је трајно забрањено. Идите на Подешавања → Дозволе и укључите \"Камеру\".",
   "permissionsFaceId": "Функција закључавања екрана на {app_name} користи Face ID.",
   "permissionsKeepInSystemTray": "Задржи у системском треју",
   "permissionsKeepInSystemTrayDescription": "{app_name} наставља да ради у позадини када затворите прозор",
   "permissionsLibrary": "{app_name} треба приступ фото галерији да настави. Можете омогућити приступ у iOS подешавањима.",
   "permissionsMicrophone": "Микрофон",
-  "permissionsMicrophoneAccessRequired": "{app_name} треба дозволу за микрофон да оствари позиве и шаље аудио поруке, али је трајно забрањено. Додирните подешавања -> Дозволе, и укључите \"Микрофон\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} треба дозволу за микрофон да оствари позиве и шаље аудио поруке, али је трајно забрањено. Додирните подешавања → Дозволе, и укључите \"Микрофон\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Можете омогућити приступ микрофону у подешавањима приватности {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} треба дозволу за микрофон да би обављао позиве и снимао аудио поруке.",
   "permissionsMicrophoneDescription": "Дозволи приступ микрофону.",
   "permissionsMusicAudio": "{app_name} треба дозволу за музика и аудио приступ да би могли да шаљете фајлове, музику и аудио.",
   "permissionsRequired": "Потребна је дозвола",
-  "permissionsStorageDenied": "{app_name} треба дозволу за библиотеку фотографија да би могли да шаљете фотографије и видео записе, али је трајно забрањено. Идите на Подешавања -> Дозволе и укључите \"Фотографије и видео записи\".",
-  "permissionsStorageDeniedLegacy": "{app_name} треба дозволу за складиштење да можете да шаљете и чувате прилоге. Идите на Подешавања -> Дозволе и укључите \"Складиште\".",
+  "permissionsStorageDenied": "{app_name} треба дозволу за библиотеку фотографија да би могли да шаљете фотографије и видео записе, али је трајно забрањено. Идите на Подешавања → Дозволе и укључите \"Фотографије и видео записи\".",
+  "permissionsStorageDeniedLegacy": "{app_name} треба дозволу за складиштење да можете да шаљете и чувате прилоге. Идите на Подешавања → Дозволе и укључите \"Складиште\".",
   "permissionsStorageSave": "{app_name} треба приступ складишту да сачува прилоге и медије.",
   "permissionsStorageSaveDenied": "{app_name} треба дозволу за складиште да сачува слике и видео клипове, али је трајно забрањено. Настави у подешавања апликације, селектуј \"Дозволе\", и укључи \"Складиште\".",
   "permissionsStorageSend": "{app_name} треба дозволу за складиште да шаље слике и видео клипове.",
@@ -773,7 +773,7 @@
   "updateError": "Не могу ажурирати",
   "updateErrorDescription": "{app_name} није успео да се ажурира. Молимо идите на {session_download_url} и ручно инсталирајте нову верзију, затим контактирајте наш Центар за помоћ да нас обавестите о овом проблему.",
   "updateNewVersion": "Нова верзија {app_name} је доступна, тапните за ажурирање",
-  "updateNewVersionDescription": "Нова верзија {app_name} је доступна. ",
+  "updateNewVersionDescription": "Нова верзија {app_name} је доступна.",
   "updateReleaseNotes": "Идите на Напомене о издању",
   "updateSession": "Ажурирање {app_name}",
   "updateVersion": "Верзија {version}",
