--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -420,7 +420,7 @@
   "groupNameEnter": "Ange ett gruppnamn",
   "groupNameEnterPlease": "Vänligen ange ett gruppnamn.",
   "groupNameEnterShorter": "Vänligen ange ett kortare gruppnamn.",
-  "groupNameNew": "Gruppnamnet är nu {group_name}. ",
+  "groupNameNew": "Gruppnamnet är nu {group_name}.",
   "groupNameUpdated": "Gruppnamn uppdaterat.",
   "groupNoMessages": "Du har inga meddelanden från <b>{group_name}</b>. Skicka ett meddelande för att starta konversationen!",
   "groupOnlyAdmin": "Du är den enda administratören i <b>{group_name}</b>.<br/><br/>Gruppmedlemmar och inställningar kan inte ändras utan en administratör.",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "Vill du ta bort <b>{name}</b> och <b>{count} andra</b> från <b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Vill du ta bort <b>{name}</b> och <b>{other_name}</b> från <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Ta bort användare och deras meddelanden] other [Ta bort användare och deras meddelanden]}",
-  "groupRemoveUserOnly": "{count, plural, one [Ta bort användare ] other [Ta bort användare]}",
+  "groupRemoveUserOnly": "{count, plural, one [Ta bort användare] other [Ta bort användare]}",
   "groupRemoved": "<b>{name}</b> togs bort från gruppen.",
   "groupRemovedMultiple": "<b>{name}</b> och <b>{count} andra</b> togs bort från gruppen.",
   "groupRemovedTwo": "<b>{name}</b> och <b>{other_name}</b> togs bort från gruppen.",
@@ -495,7 +495,7 @@
   "max": "Max",
   "media": "Media",
   "members": "{count, plural, one [# medlem] other [# medlemmar]}",
-  "membersActive": "{count, plural, one [# aktiv medlem] other [# aktiva användare]}",
+  "membersActive": "{count, plural, one [# aktiv medlem] other [# aktiva medlemmar]}",
   "membersAddAccountIdOrOns": "Lägg till Account ID eller ONS",
   "membersInvite": "Bjud in kontakter",
   "membersInviteSend": "{count, plural, one [Skicka inbjudan] other [Skicka inbjudningar]}",
@@ -606,7 +606,7 @@
   "onboardingBubbleWelcomeToSession": "Välkommen till {app_name} {emoji}",
   "onboardingHitThePlusButton": "Tryck på plusknappen för att starta en chatt, skapa en grupp eller gå med i en officiell community!",
   "onboardingMessageNotificationExplanation": "Det finns två sätt som {app_name} kan meddela dig om nya meddelanden på.",
-  "onboardingPrivacy": "Sekretesspolicy",
+  "onboardingPrivacy": "Integritetspolicy",
   "onboardingTos": "Användarvillkor",
   "onboardingTosPrivacy": "Genom att använda denna tjänst accepterar du våra <b>Användarvillkor</b> och <b>Sekretesspolicy</b>",
   "onionRoutingPath": "Sökväg",
@@ -640,28 +640,28 @@
   "passwordSet": "Ange lösenord",
   "passwordSetDescription": "Ditt lösenord har angetts. Håll det säkert.",
   "paste": "Klistra in",
-  "permissionMusicAudioDenied": "{app_name} behöver åtkomst till musik och ljud för att skicka filer, musik och ljud, men åtkomsten har nekats permanent. Tryck på Inställningar -> Behörigheter, och slå på 'Musik och ljud'.",
+  "permissionMusicAudioDenied": "{app_name} behöver åtkomst till musik och ljud för att skicka filer, musik och ljud, men åtkomsten har nekats permanent. Tryck på Inställningar → Behörigheter, och slå på 'Musik och ljud'.",
   "permissionsAppleMusic": "{app_name} behöver åtkomst till Apple Music för att spela upp bifogade mediafiler.",
   "permissionsAutoUpdate": "Uppdatera automatiskt",
   "permissionsAutoUpdateDescription": "Sök efter uppdateringar automatiskt vid uppstart",
-  "permissionsCameraDenied": "{app_name} behöver åtkomst till kameran för att kunna fotografera och filma, men har nekats permanent. Tryck på Inställningar -> Behörigheter, och slå på \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} behöver åtkomst till kameran för att kunna fotografera och filma, men har nekats permanent. Tryck på Inställningar → Behörigheter, och slå på \"Kamera\".",
   "permissionsFaceId": "Skärmlåsfunktionen på {app_name} använder Face ID.",
   "permissionsKeepInSystemTray": "Behåll i systemfältet",
   "permissionsKeepInSystemTrayDescription": "{app_name} fortsätter att köras i bakgrunden när du stänger fönstret",
   "permissionsLibrary": "{app_name} behöver åtkomst till fotobiblioteket för att fortsätta. Du kan aktivera åtkomsten i iOS-inställningarna.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} behöver åtkomst till mikrofonen för att ringa samtal och skicka ljudmeddelanden, men det har nekats permanent. Tryck på inställningar -> Behörigheter, och slå på \"Mikrofon\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} behöver åtkomst till mikrofonen för att ringa samtal och skicka ljudmeddelanden, men det har nekats permanent. Tryck på inställningar → Behörigheter, och slå på \"Mikrofon\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Du kan aktivera mikrofontillgång i {app_name}s sekretessinställningar",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} behöver mikrofonåtkomst för att ringa och spela in ljudmeddelanden.",
   "permissionsMicrophoneDescription": "Tillåt åtkomst till mikrofon.",
   "permissionsMusicAudio": "{app_name} behöver åtkomst till musik och ljud för att kunna skicka filer, musik och ljud.",
   "permissionsRequired": "Behörighet saknas",
-  "permissionsStorageDenied": "{app_name} behöver åtkomst till fotobiblioteket för att du ska kunna skicka foton och videor, men det har permanent nekats. Tryck på Inställningar -> Behörigheter och slå på \"Foton och videor\".",
-  "permissionsStorageDeniedLegacy": "{app_name} behöver åtkomst till lagring för att du ska kunna skicka och spara bilagor. Tryck på Inställningar -> Behörigheter och slå på \"Lagring\".",
+  "permissionsStorageDenied": "{app_name} behöver åtkomst till fotobiblioteket för att du ska kunna skicka foton och videor, men det har permanent nekats. Tryck på Inställningar → Behörigheter och slå på \"Foton och videor\".",
+  "permissionsStorageDeniedLegacy": "{app_name} behöver åtkomst till lagring för att du ska kunna skicka och spara bilagor. Tryck på Inställningar → Behörigheter och slå på \"Lagring\".",
   "permissionsStorageSave": "{app_name} behöver åtkomst till lagringsutrymmet för att kunna spara bifogade filer och media.",
   "permissionsStorageSaveDenied": "{app_name} behöver åtkomst till lagringsutrymmet för att kunna spara foton och filmer, men har nekats permanent. Fortsätt till inställningsmenyn, välj \"Behörigheter\" och aktivera \"Lagring\".",
   "permissionsStorageSend": "{app_name} behöver åtkomst till lagringsutrymmet för att kunna skicka foton och filmer.",
-  "pin": "Fäst ",
+  "pin": "Fäst",
   "pinConversation": "Fäst konversation",
   "pinUnpin": "Lossa",
   "pinUnpinConversation": "Lossa konversation",
@@ -774,7 +774,7 @@
   "updateError": "Kan inte uppdatera",
   "updateErrorDescription": "{app_name} misslyckades med att uppdatera. Gå till {session_download_url} och installera den nya versionen manuellt, och kontakta vårt Hjälpcenter för att informera oss om detta problem.",
   "updateNewVersion": "En ny version av {app_name} är tillgänglig, tryck för att uppdatera",
-  "updateNewVersionDescription": "En ny version av {app_name} är tillgänglig. ",
+  "updateNewVersionDescription": "En ny version av {app_name} är tillgänglig.",
   "updateReleaseNotes": "Gå till versionsanteckningar",
   "updateSession": "{app_name}-uppdatering",
   "updateVersion": "Version {version}",
