--- a/_locales/sw/messages.json
+++ b/_locales/sw/messages.json
@@ -640,24 +640,24 @@
   "passwordSet": "Weka Nywila",
   "passwordSetDescription": "Nenosiri lako limewekwa. Tafadhali lihifadhi salama.",
   "paste": "Bandika",
-  "permissionMusicAudioDenied": "{app_name} inahitaji ruhusa ya muziki na sauti ili kutuma faili, muziki na sauti, lakini imekataliwa kabisa. Gusa Mipangilio -> Ruhusa, na washa \"Muziki na sauti\".",
+  "permissionMusicAudioDenied": "{app_name} inahitaji ruhusa ya muziki na sauti ili kutuma faili, muziki na sauti, lakini imekataliwa kabisa. Gusa Mipangilio → Ruhusa, na washa \"Muziki na sauti\".",
   "permissionsAppleMusic": "{app_name} inahitaji kutumia Apple Music kucheza viambatanisho vya vyombo vya habari.",
   "permissionsAutoUpdate": "Sasisho la Moja kwa Moja",
   "permissionsAutoUpdateDescription": "Angalia sasisho moja kwa moja unapoanzisha",
-  "permissionsCameraDenied": "{app_name} inahitaji ruhusa ya kamera kuchukua picha na video, lakini imekataliwa kabisa. Gusa Mipangilio -> Ruhusa, na washa \"Kamera\".",
+  "permissionsCameraDenied": "{app_name} inahitaji ruhusa ya kamera kuchukua picha na video, lakini imekataliwa kabisa. Gusa Mipangilio → Ruhusa, na washa \"Kamera\".",
   "permissionsFaceId": "Kipengele cha kufuli skrini kwenye {app_name} kinatumia Face ID.",
   "permissionsKeepInSystemTray": "Weka kwenye Tray ya Mfumo",
   "permissionsKeepInSystemTrayDescription": "{app_name} inaendelea kukimbia chinichini ukiwa umefunga dirisha",
   "permissionsLibrary": "{app_name} inahitaji ruhusa ya maktaba ya picha ili kuendelea. Unaweza kuwasha ruhusa kwenye mipangilio ya iOS.",
   "permissionsMicrophone": "Maikrofoni",
-  "permissionsMicrophoneAccessRequired": "{app_name} inahitaji kuoanishwa na kipaza sauti ili kupiga simu na kutuma ujumbe wa sauti, lakini imekataliwa kabisa. Gonga mipangilio -> Ruhusa, na washa \"Kipaza sauti\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} inahitaji kuoanishwa na kipaza sauti ili kupiga simu na kutuma ujumbe wa sauti, lakini imekataliwa kabisa. Gonga mipangilio → Ruhusa, na washa \"Kipaza sauti\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Unaweza kuwezesha upatikanaji wa kipaza sauti katika mipangilio ya faragha ya {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} inahitaji ruhusa ya kipaza sauti kupiga simu na kurekodi ujumbe wa sauti.",
   "permissionsMicrophoneDescription": "Ruhusu ufikiaji wa kipaza sauti.",
   "permissionsMusicAudio": "{app_name} inahitaji ruhusa ya muziki na sauti ili kutuma faili, muziki na sauti.",
   "permissionsRequired": "Ruhusa inahitajika",
-  "permissionsStorageDenied": "{app_name} inahitaji ruhusa ya maktaba ya picha ili uweze kutuma picha na video, lakini imekataliwa kabisa. Gusa Mipangilio -> Ruhusa, na washa \"Picha na video\".",
-  "permissionsStorageDeniedLegacy": "{app_name} inahitaji ruhusa ya hifadhi ili uweze kutuma na kuhifadhi viambatisho. Gusa Mipangilio -> Ruhusa, na washa \"Hifadhi\".",
+  "permissionsStorageDenied": "{app_name} inahitaji ruhusa ya maktaba ya picha ili uweze kutuma picha na video, lakini imekataliwa kabisa. Gusa Mipangilio → Ruhusa, na washa \"Picha na video\".",
+  "permissionsStorageDeniedLegacy": "{app_name} inahitaji ruhusa ya hifadhi ili uweze kutuma na kuhifadhi viambatisho. Gusa Mipangilio → Ruhusa, na washa \"Hifadhi\".",
   "permissionsStorageSave": "{app_name} inahitaji ruhusa ya hifadhi ili kuhifadhi viambatanisho na vyombo vya habari.",
   "permissionsStorageSaveDenied": "{app_name} inahitaji ruhusa ya hifadhi kuhifadhi picha na video, lakini imekataliwa kabisa. Tafadhali endelea kwenye mipangilio ya programu, chagua \"Ruhusa\", na wezesha \"Ruhusa ya Hifadhi\".",
   "permissionsStorageSend": "{app_name} inahitaji ruhusa ya kuhifadhi ili kutuma picha na video.",
