--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -144,7 +144,7 @@
   "callsIncomingUnknown": "உடன் வரும் அழைப்பு",
   "callsMicrophonePermissionsRequired": "நீங்கள் <b>{name}</b> -ன் அழைப்பை தவறவிட்டீர்கள் ஏனெனில் நீங்கள் <b>மைக்ரோஃபோன் அணுகலை</b> வழங்கவில்லை.",
   "callsMissed": "தவறவிட்ட அழைப்பு",
-  "callsMissedCallFrom": "{name} க்குள்ளது தவறவிட்ட அழைப்பு ",
+  "callsMissedCallFrom": "{name} க்குள்ளது தவறவிட்ட அழைப்பு",
   "callsNotificationsRequired": "குரல் மற்றும் காணொளி அழைப்புகளை உங்களுடைய சாதனம் அமைப்புகளில் அறிவிப்புகளை இயக்குவது அவசியம.",
   "callsPermissionsRequired": "அழைப்புக் கனிக்க வேண்டிய அனுமதி தேவை",
   "callsPermissionsRequiredDescription": "நீங்கள் 'குரல் மற்றும் காணொளி அழைப்புகள்' அனுமதியை தனியுரிமை அமைப்புகளில் இயக்கலாம்.",
@@ -640,24 +640,24 @@
   "passwordSet": "கடவுச்சொல்லை அமை",
   "passwordSetDescription": "உங்களின் கடவுச்சொல் அமைக்கப்பட்டுள்ளது. தயவுசெய்து அதை பாதுகாப்பாக வைத்திருங்கள்.",
   "paste": "ஒட்டவும்",
-  "permissionMusicAudioDenied": "{app_name} கோப்புகளை, இசையை மற்றும் ஆடியோவின் அனுமதி கிடைக்க வேண்டியது அவசியம், ஆனால் இது நிரந்தரமாக நரம்பாகியிருக்கின்றது. அமைப்புகள்-க்கு தட்டவும் -> அனுமதிகள், மற்றும் \"இசை மற்றும் ஆடியோ\" இயலுமைப்படுத்தவும்.",
+  "permissionMusicAudioDenied": "{app_name} கோப்புகளை, இசையை மற்றும் ஆடியோவின் அனுமதி கிடைக்க வேண்டியது அவசியம், ஆனால் இது நிரந்தரமாக நரம்பாகியிருக்கின்றது. அமைப்புகள்-க்கு தட்டவும் → அனுமதிகள், மற்றும் \"இசை மற்றும் ஆடியோ\" இயலுமைப்படுத்தவும்.",
   "permissionsAppleMusic": "{app_name} மெடியா இணைப்புகளை விளையாட Apple Music ஐ பயன்படுத்த வேண்டும்.",
   "permissionsAutoUpdate": "தானாக புதுப்பிக்க",
   "permissionsAutoUpdateDescription": "தொடக்கத்தில் தானாக புதுப்பிக்கச் சோதிக்கவும்",
-  "permissionsCameraDenied": "{app_name} புகைப்படங்கள் மற்றும் வீடியோக்களை எடுக்க கேமரா அணுகல் தேவை, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டுள்ளது. அமைப்புகள் -> அனுமதிகள் இல் சொல்கிறது, மற்றும் \"காமரா\" இல் இருக்கவும்.",
+  "permissionsCameraDenied": "{app_name} புகைப்படங்கள் மற்றும் வீடியோக்களை எடுக்க கேமரா அணுகல் தேவை, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டுள்ளது. அமைப்புகள் → அனுமதிகள் இல் சொல்கிறது, மற்றும் \"காமரா\" இல் இருக்கவும்.",
   "permissionsFaceId": "{app_name} இல் திரை பூட்டு அம்சம் முக அடையாளத்தை பயன்படுத்துகிறது.",
   "permissionsKeepInSystemTray": "சிஸ்டம் டிரேயில் இருக்கவும்",
   "permissionsKeepInSystemTrayDescription": "{app_name} சாளரத்தை மூடிக்கொண்ட பின்னரும் பின்னணி செயல்பாடுகளில் தொடர்ச்சியாக இயங்கிவரும்",
   "permissionsLibrary": "{app_name} தொடர்ச்சியாக செயல்பட புகைப்பட நூலகம் அணுகல் தேவை. நீங்கள் iOS அமைப்புகளிலேயே அணுகலை செயலாக்கலாம்.",
   "permissionsMicrophone": "மைக்ரோஃபோன்",
-  "permissionsMicrophoneAccessRequired": "{app_name} அழைப்புகளுக்காகவும், ஆடியோ தகவல்களை அனுப்புவதற்காகவும் மைக்ரோஃபோன் அணுகல் தேவைப்படுகிறது, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டது. அமைப்புகள் -> அனுமதிகள் என்பதைத் தேர்ந்தெடுத்து, \"மைக்ரோஃபோன்\" ஐயை இயக்கவும்.",
+  "permissionsMicrophoneAccessRequired": "{app_name} அழைப்புகளுக்காகவும், ஆடியோ தகவல்களை அனுப்புவதற்காகவும் மைக்ரோஃபோன் அணுகல் தேவைப்படுகிறது, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டது. அமைப்புகள் → அனுமதிகள் என்பதைத் தேர்ந்தெடுத்து, \"மைக்ரோஃபோன்\" ஐயை இயக்கவும்.",
   "permissionsMicrophoneAccessRequiredDesktop": "நீங்கள் {app_name} மின் தனியுரிமை அமைப்புகளில் மைக்ரோபோன் அணுகலை இயக்கலாம்",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} அழைப்புகளை செய்ய மற்றும் ஆடியோ தகவல்களை பதிவு செய்ய மைக்ரோஃபோன் அணுகல் தேவை.",
   "permissionsMicrophoneDescription": "மைக்ரோபோனை அணிய அனுமதி.",
   "permissionsMusicAudio": "{app_name} அனுப்ப மியூசிக் மற்றும் ஆடியோ அணுகல் தேவை, மற்றும் அது நிரந்தரமாக மறுக்கப்பட்டுள்ளது.",
   "permissionsRequired": "அனுமதி தேவை",
-  "permissionsStorageDenied": "{app_name} புகைப்படங்கள் மற்றும் வீடியோக்களை அனுப்ப புகைப்பட நூலக அணுகல் தேவை, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டுள்ளது. அமைப்புகள் -> அனுமதிகள் இல் சென்று, \"புகைப்படங்கள் மற்றும் வீடியோக்கள்\" இல் இருக்கவும்.",
-  "permissionsStorageDeniedLegacy": "{app_name} அனுப்பவும் சேமிக்க இணைப்புகளை சேமிப்பக அணுகல் தேவை. அமைப்புகள் -> அனுமதிகள் இல் சென்று, \"சேமிப்பகம்\" இல் இருக்கவும்.",
+  "permissionsStorageDenied": "{app_name} புகைப்படங்கள் மற்றும் வீடியோக்களை அனுப்ப புகைப்பட நூலக அணுகல் தேவை, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டுள்ளது. அமைப்புகள் → அனுமதிகள் இல் சென்று, \"புகைப்படங்கள் மற்றும் வீடியோக்கள்\" இல் இருக்கவும்.",
+  "permissionsStorageDeniedLegacy": "{app_name} அனுப்பவும் சேமிக்க இணைப்புகளை சேமிப்பக அணுகல் தேவை. அமைப்புகள் → அனுமதிகள் இல் சென்று, \"சேமிப்பகம்\" இல் இருக்கவும்.",
   "permissionsStorageSave": "{app_name} இணைப்புகள் மற்றும் மெடியாவை சேமிக்க சேமிப்பக அணுகல் தேவை.",
   "permissionsStorageSaveDenied": "{app_name} புகைப்படங்கள் மற்றும் வீடியோக்களை சேமிக்க சேமிப்பக அணுகல் தேவை, ஆனால் அது நிரந்தரமாக மறுக்கப்பட்டுள்ளது. தயவு செய்து செயலியின் அமைப்புகளுக்கு சென்று, \"Permissions\" தேர்வு செய்து, \"Storage\" ஐ செயலாக்கவும்.",
   "permissionsStorageSend": "{app_name} புகைப்படங்கள் மற்றும் வீடியோக்களை அனுப்ப சேமிப்பக அணுகல் தேவை.",
@@ -736,7 +736,7 @@
   "send": "அனுப்பு",
   "sending": "அனுப்புகிறது",
   "sent": "அனுப்பப்பட்டது:",
-  "sessionAppearance": " Session பதிப்பு",
+  "sessionAppearance": "Session பதிப்பு",
   "sessionClearData": "தகவலை அழி",
   "sessionConversations": "உரையாடல்கள்",
   "sessionHelp": "உதவி",
