--- a/_locales/te/messages.json
+++ b/_locales/te/messages.json
@@ -142,7 +142,7 @@
   "callsInProgress": "కాల్ జరుగుతోంది",
   "callsIncoming": "{name} నుండి కొత్తగా వచ్చిన కాల్",
   "callsIncomingUnknown": "కొత్తగా వచ్చిన కాల్",
-  "callsMicrophonePermissionsRequired": "మీరు <b>{name}</b> నుండి కాల్ మిస్ చేశారు కారణం మీరు <b>మైక్రోఫోన్ యాక్సెస్</b>ను ఇవ్వలేదు. ",
+  "callsMicrophonePermissionsRequired": "మీరు <b>{name}</b> నుండి కాల్ మిస్ చేశారు కారణం మీరు <b>మైక్రోఫోన్ యాక్సెస్</b>ను ఇవ్వలేదు.",
   "callsMissed": "తప్పిన కాల్",
   "callsMissedCallFrom": "{name} నుండి తప్పిన కాల్",
   "callsNotificationsRequired": "వాయిస్ మరియు వీడియో కాల్స్‌లో నోటిఫికేషన్‌లు అవసరం",
@@ -420,7 +420,7 @@
   "groupNameEnter": "సమూహం పేరును ఎంటర్ చేయండి",
   "groupNameEnterPlease": "దయచేసి సమూహం పేరు ఎంటర్ చేయండి.",
   "groupNameEnterShorter": "దయచేసి చిన్న సమూహం పేరు ఎంటర్ చేయండి.",
-  "groupNameNew": "ఇప్పుడు సమూహం పేరు {group_name} ఉంది. ",
+  "groupNameNew": "ఇప్పుడు సమూహం పేరు {group_name} ఉంది.",
   "groupNameUpdated": "సమూహం పేరు నవీకరించబడింది.",
   "groupNoMessages": "మీకు <b>{group_name}</b> నుండి సందేశాలు లేవు. సంభాషణ ప్రారంభించడానికి ఒక సందేశం పంపండి!",
   "groupOnlyAdmin": "మీరు <b>{group_name}</b>లో ఏకైక అడ్మిన్ .<br/><br/>గుంపు సభ్యులు మరియు అమరికలు అడ్మిన్ లేకుండా మార్చబడవు.",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "మీరు <b>{name}</b> మరియు <b>{count} ఇతరులను</b> <b>{group_name}</b> నుండి తొలగించాలనుకుంటున్నారా?",
   "groupRemoveDescriptionTwo": "మీరు <b>{name}</b> మరియు <b>{other_name}</b>ను <b>{group_name}</b> నుండి తొలగించాలనుకుంటున్నారా?",
   "groupRemoveMessages": "{count, plural, one [వినియోగదారిని మరియు వారి సందేశాలను తొలగించు] other [వినియోగదారులను మరియు వారి సందేశాలను తొలగించు]}",
-  "groupRemoveUserOnly": "{count, plural, one [వినియోగదారీని తొలగించు ] other [వినియోగదారులను తొలగించు]}",
+  "groupRemoveUserOnly": "{count, plural, one [వినియోగదారీని తొలగించు] other [వినియోగదారులను తొలగించు]}",
   "groupRemoved": "<b>{name}</b> సమూహం నుండి తొలగించబడ్డారు.",
   "groupRemovedMultiple": "<b>{name}</b> మరియు <b>{count} ఇతరులు</b> సమూహం నుండి తొలగించబడ్డారు.",
   "groupRemovedTwo": "<b>{name}</b> మరియు <b>{other_name}</b> సమూహం నుండి తొలగించబడ్డారు.",
@@ -585,7 +585,7 @@
   "notificationsSlowMode": "స్లో మోడ్",
   "notificationsSlowModeDescription": "{app_name} నేపథ్యంలో కొత్త సందేశాల కోసం అప్పుడప్పుడు తనిఖీ చేస్తుంది.",
   "notificationsSound": "శబ్దము",
-  "notificationsSoundDescription": "అమెరికా తెరిచినప్పుడు శబ్దం ",
+  "notificationsSoundDescription": "అమెరికా తెరిచినప్పుడు శబ్దం",
   "notificationsSoundDesktop": "ఆడియో ప్రకటనలు",
   "notificationsStrategy": "ప్రకటనల వ్యూహం",
   "notificationsStyle": "ప్రకటనల శైలి",
@@ -640,11 +640,11 @@
   "passwordSet": "పాస్‌వర్డ్ సెట్ చేయి",
   "passwordSetDescription": "మీ పాస్‌వర్డ్ సెట్ చేయబడింది. దయచేసి దాన్ని సురక్షితంగా ఉంచండి.",
   "paste": "పేస్ట్",
-  "permissionMusicAudioDenied": "{app_name} ఫైళ్లు, సంగీతం మరియు ఆడియోను పంపించడానికి మరియు ఆడియో యాక్సెస్ కావాలి, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. సెట్టింగులు -> అనుమతులు ని తట్టి, \"మ్యూజిక్ మరియు ఆడియో\"ని ఆన్ చేయండి.",
+  "permissionMusicAudioDenied": "{app_name} ఫైళ్లు, సంగీతం మరియు ఆడియోను పంపించడానికి మరియు ఆడియో యాక్సెస్ కావాలి, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. సెట్టింగులు → అనుమతులు ని తట్టి, \"మ్యూజిక్ మరియు ఆడియో\"ని ఆన్ చేయండి.",
   "permissionsAppleMusic": "మీడియా అటాచ్మెంట్‌లను ప్లే చేయడానికి {app_name} Apple Musicను ఉపయోగించాలి.",
   "permissionsAutoUpdate": "ఆటో అప్‌డేట్",
   "permissionsAutoUpdateDescription": "స్టార్ట్‌అప్‌పై ఆటో అప్‌డేట్‌లు తనిఖీ చేయండి",
-  "permissionsCameraDenied": "{app_name} ఫోటోలు మరియు వీడియోలు తీసుకోవడానికి కెమెరా యాక్సెస్ అవసరం, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. సెట్టింగులు -> అనుమతులు ని తట్టి, \"కెమెరా\"ని ఆన్ చేయండి.",
+  "permissionsCameraDenied": "{app_name} ఫోటోలు మరియు వీడియోలు తీసుకోవడానికి కెమెరా యాక్సెస్ అవసరం, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. సెట్టింగులు → అనుమతులు ని తట్టి, \"కెమెరా\"ని ఆన్ చేయండి.",
   "permissionsFaceId": "{app_name}లో స్క్రీన్ లాక్ ఫీచర్ ఫేస్ ఐడి నీ ఉపయోగిస్తుంది.",
   "permissionsKeepInSystemTray": "సిస్టమ్ ట్రేలో ఉంచండి",
   "permissionsKeepInSystemTrayDescription": "{app_name} విండోను మూసినప్పుడు నేపథ్యంలో కొనసాగుతుంది",
@@ -656,12 +656,12 @@
   "permissionsMicrophoneDescription": "మైక్రోఫోన్ కు యాక్సెస్ ఇవ్వండి.",
   "permissionsMusicAudio": "{app_name} ఫైళ్లు, సంగీతం మరియు ఆడియోను పంపించడానికి మరియు ఆడియో యాక్సెస్ అవసరం.",
   "permissionsRequired": "అనుమతి అవసరం",
-  "permissionsStorageDenied": "{app_name} ఫోటోలు మరియు వీడియోలను పంపడానికి ఫోటో లైబ్రరీ యాక్సెస్ కావాలి, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. సెట్టింగులు -> అనుమతులు ని తట్టి, \"ఫోటోలు మరియు వీడియోలు\"ని ఆన్ చేయండి.",
-  "permissionsStorageDeniedLegacy": "{app_name} ఆటాచ్మెంట్లను పంపించడానికి మరియు సేవ్ చేసేందుకు నిల్వ యాక్సెస్ కావాలి. సెట్టింగులు -> అనుమతులు ని తట్టి, \"స్టోరేజ్\"ని ఆన్ చేయండి.",
+  "permissionsStorageDenied": "{app_name} ఫోటోలు మరియు వీడియోలను పంపడానికి ఫోటో లైబ్రరీ యాక్సెస్ కావాలి, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. సెట్టింగులు → అనుమతులు ని తట్టి, \"ఫోటోలు మరియు వీడియోలు\"ని ఆన్ చేయండి.",
+  "permissionsStorageDeniedLegacy": "{app_name} ఆటాచ్మెంట్లను పంపించడానికి మరియు సేవ్ చేసేందుకు నిల్వ యాక్సెస్ కావాలి. సెట్టింగులు → అనుమతులు ని తట్టి, \"స్టోరేజ్\"ని ఆన్ చేయండి.",
   "permissionsStorageSave": "అటాచ్మెంట్‌లు మరియు మీడియాను సేవ్ చేయడానికి {app_name} కు నిల్వ యాక్సెస్ అవసరం.",
   "permissionsStorageSaveDenied": "ఫోటోలు మరియు వీడియోలను సేవ్ చేయడానికి {app_name} కు నిల్వ యాక్సెస్ అవసరం, కానీ ఇది శాశ్వతంగా తిరస్కరించబడింది. దయచేసి యాప్ సెట్టింగ్‌లకు వెళ్ళి, \"Permissions\" ఎంచుకోండి మరియు \"Storage\"ని సుముఖం చేయండి.",
   "permissionsStorageSend": "ఫోటోలు మరియు వీడియోలను పంపడానికి {app_name} కు నిల్వ యాక్సెస్ అవసరం.",
-  "pin": "పిన్ ",
+  "pin": "పిన్",
   "pinConversation": "సంభాషణను పిన్ చేయండి",
   "pinUnpin": "అన్స్టిక్ చేయి",
   "pinUnpinConversation": "సంభాషణను అన్స్టిక్ చేయి",
@@ -711,7 +711,7 @@
   "resend": "తిరిగి పంపండి",
   "resolving": "దేశ సమాచారాన్ని లోడ్ చేస్తోంది...",
   "restart": "రీస్టార్ట్",
-  "resync": " రీసింక్",
+  "resync": "రీసింక్",
   "retry": "రీట్రై",
   "save": "భద్రపరుచు",
   "saved": "సేవ్ చేయబడింది",
