--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -640,28 +640,28 @@
   "passwordSet": "ตั้งรหัสผ่าน",
   "passwordSetDescription": "รหัสผ่านของคุณถูกตั้งแล้ว กรุณารักษาเอาไว้ให้ปลอดภัย",
   "paste": "วาง",
-  "permissionMusicAudioDenied": "{app_name} ต้องการเข้าถึงเพลงและเสียงเพื่อส่งไฟล์, เพลง และเสียง แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่า -> การอนุญาต และเปิดใช้งาน \"เพลงและเสียง\"",
+  "permissionMusicAudioDenied": "{app_name} ต้องการเข้าถึงเพลงและเสียงเพื่อส่งไฟล์, เพลง และเสียง แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่า → การอนุญาต และเปิดใช้งาน \"เพลงและเสียง\"",
   "permissionsAppleMusic": "{app_name} ต้องใช้ Apple Music เพื่อเล่นไฟล์สื่อที่แนบมา",
   "permissionsAutoUpdate": "อัปเดตอัตโนมัติ",
   "permissionsAutoUpdateDescription": "ตรวจสอบการอัปเดตอัตโนมัติเมื่อเริ่มต้น",
-  "permissionsCameraDenied": "{app_name} ต้องการเข้าถึงกล้องเพื่อถ่ายรูปและวิดีโอ แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่า -> การอนุญาต และเปิดใช้งาน \"กล้อง\"",
+  "permissionsCameraDenied": "{app_name} ต้องการเข้าถึงกล้องเพื่อถ่ายรูปและวิดีโอ แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่า → การอนุญาต และเปิดใช้งาน \"กล้อง\"",
   "permissionsFaceId": "ฟีเจอร์ล็อกหน้าจอใน {app_name} ใช้ Face ID",
   "permissionsKeepInSystemTray": "เก็บใน System Tray",
   "permissionsKeepInSystemTrayDescription": "{app_name} ยังคงทำงานต่อไปในพื้นหลังเมื่อคุณปิดหน้าต่าง",
   "permissionsLibrary": "{app_name} ต้องได้รับอนุญาตให้เข้าถึงคลังรูปภาพเพื่อดำเนินการต่อ คุณสามารถเปิดใช้งานได้ในการตั้งค่า iOS",
   "permissionsMicrophone": "ไมโครโฟน",
-  "permissionsMicrophoneAccessRequired": "{app_name} ต้องการเข้าถึงไมโครโฟนเพื่อขอรับสายและส่งข้อความเสียง แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กดที่การตั้งค่า -> การอนุญาต และเปิดใช้งาน 'ไมโครโฟน'",
+  "permissionsMicrophoneAccessRequired": "{app_name} ต้องการเข้าถึงไมโครโฟนเพื่อขอรับสายและส่งข้อความเสียง แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กดที่การตั้งค่า → การอนุญาต และเปิดใช้งาน 'ไมโครโฟน'",
   "permissionsMicrophoneAccessRequiredDesktop": "คุณสามารถเปิดการเข้าถึงไมโครโฟนได้ในการตั้งค่าความเป็นส่วนตัวของ {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ต้องได้รับอนุญาตให้เข้าถึงไมโครโฟนเพื่อโทรและบันทึกข้อความเสียง",
   "permissionsMicrophoneDescription": "อนุญาตให้เข้าถึงไมโครโฟน",
   "permissionsMusicAudio": "{app_name} ต้องการเข้าถึงเพลงและเสียงเพื่อส่งไฟล์, เพลง และเสียง",
   "permissionsRequired": "ต้องได้รับอนุญาตก่อน",
-  "permissionsStorageDenied": "แอป {app_name} ต้องการการเข้าถึงคลังภาพเพื่อให้คุณสามารถส่งภาพและวิดีโอได้ แต่การอนุญาตถูกปฏิเสธอย่างถาวร แตะที่ การตั้งค่า -> การอนุญาต แล้วเปิด \"ภาพและวิดีโอ\".",
-  "permissionsStorageDeniedLegacy": "แอป {app_name} ต้องการการเข้าถึงที่จัดเก็บเพื่อให้คุณสามารถส่งและบันทึกไฟล์แนบได้ แตะที่ การตั้งค่า -> การอนุญาต แล้วเปิด \"ที่จัดเก็บ\".",
+  "permissionsStorageDenied": "แอป {app_name} ต้องการการเข้าถึงคลังภาพเพื่อให้คุณสามารถส่งภาพและวิดีโอได้ แต่การอนุญาตถูกปฏิเสธอย่างถาวร แตะที่ การตั้งค่า → การอนุญาต แล้วเปิด \"ภาพและวิดีโอ\".",
+  "permissionsStorageDeniedLegacy": "แอป {app_name} ต้องการการเข้าถึงที่จัดเก็บเพื่อให้คุณสามารถส่งและบันทึกไฟล์แนบได้ แตะที่ การตั้งค่า → การอนุญาต แล้วเปิด \"ที่จัดเก็บ\".",
   "permissionsStorageSave": "{app_name} ต้องได้รับอนุญาตให้เข้าถึงที่เก็บข้อมูลเพื่อบันทึกไฟล์แนบและสื่อ",
   "permissionsStorageSaveDenied": "เพื่อที่จะบันทึกข้อมูลลงที่เก็บข้อมูลภายนอกได้ {app_name} ต้องได้รับอนุญาตให้เข้าถึงที่เก็บข้อมูล แต่คำขอนั้นถูกปฏิเสธอย่างถาวร กรุณาไปที่เมนูตั้งค่าแอป เลือก \"การอนุญาต\" และเปิดใช้งาน \"ที่เก็บข้อมูล\"",
   "permissionsStorageSend": "{app_name} ต้องได้รับอนุญาตให้เข้าถึงที่เก็บข้อมูลเพื่อส่งรูปภาพและวิดีโอ",
-  "pin": "ปักหมุด ",
+  "pin": "ปักหมุด",
   "pinConversation": "ปักหมุดการสนทนา",
   "pinUnpin": "ยกเลิกปักหมุด.",
   "pinUnpinConversation": "ยกเลิกปักหมุดการสนทนา.",
