--- a/_locales/tl/messages.json
+++ b/_locales/tl/messages.json
@@ -420,7 +420,7 @@
   "groupNameEnter": "Maglagay ng pangalan ng grupo",
   "groupNameEnterPlease": "Pakilagay ang pangalan ng grupo.",
   "groupNameEnterShorter": "Pakilagay ng mas maikling pangalan ng grupo.",
-  "groupNameNew": "Ang pangalan ng grupo ay ngayon ay {group_name}. ",
+  "groupNameNew": "Ang pangalan ng grupo ay ngayon ay {group_name}.",
   "groupNameUpdated": "Na-update ang pangalan ng grupo.",
   "groupNoMessages": "Wala kang mga mensahe mula sa <b>{group_name}</b>. Magpadala ng mensahe upang simulan ang pag-uusap!",
   "groupOnlyAdmin": "Ikaw ang tanging admin sa <b>{group_name}</b>.<br/><br/>Ang mga miyembro ng grupo at mga setting ay hindi maaaring baguhin nang walang admin.",
@@ -640,28 +640,28 @@
   "passwordSet": "Itakda ang Password",
   "passwordSetDescription": "Naitakda ang iyong password. Mangyaring itago ito ng ligtas.",
   "paste": "Idikit",
-  "permissionMusicAudioDenied": "Kailangan ng {app_name} ng access sa musika at audio upang makapagpadala ng mga file, musika at audio, ngunit ito ay permanenteng tinanggihan. Pindutin ang Settings -> Permissions, at i-on ang \"Musika at audio\".",
+  "permissionMusicAudioDenied": "Kailangan ng {app_name} ng access sa musika at audio upang makapagpadala ng mga file, musika at audio, ngunit ito ay permanenteng tinanggihan. Pindutin ang Settings → Permissions, at i-on ang \"Musika at audio\".",
   "permissionsAppleMusic": "Kailangan ng {app_name} na gumamit ng Apple Music para mag-play ng mga media attachment.",
   "permissionsAutoUpdate": "Awtomatikong Pag-update",
   "permissionsAutoUpdateDescription": "Awtomatikong tsetsekin ang mga update sa pag-startup",
-  "permissionsCameraDenied": "Kailangan ng {app_name} ng access sa camera upang kumuha ng mga larawan at video, ngunit ito ay permanenteng tinanggihan. Pindutin ang Settings -> Permissions, at i-on ang \"Kamera\".",
+  "permissionsCameraDenied": "Kailangan ng {app_name} ng access sa camera upang kumuha ng mga larawan at video, ngunit ito ay permanenteng tinanggihan. Pindutin ang Settings → Permissions, at i-on ang \"Kamera\".",
   "permissionsFaceId": "Ang feature ng screen lock sa {app_name} ay gumagamit ng Face ID.",
   "permissionsKeepInSystemTray": "Itago sa System Tray",
   "permissionsKeepInSystemTrayDescription": "Ang {app_name} ay patuloy na tumatakbo sa background kapag isinara mo ang window",
   "permissionsLibrary": "Kailangan ng {app_name} ng access sa photo library upang magpatuloy. Maaari mong i-enable ang access sa settings ng iOS.",
   "permissionsMicrophone": "Mikropono",
-  "permissionsMicrophoneAccessRequired": "Ang {app_name} ay nangangailangan ng access sa mikropono para gumawa ng mga tawag at magpadala ng mga mensaheng audio, ngunit ito ay permanenteng tinanggihan. I-tap ang settings -> Permissions, at i-on ang \"Mikropono\".",
+  "permissionsMicrophoneAccessRequired": "Ang {app_name} ay nangangailangan ng access sa mikropono para gumawa ng mga tawag at magpadala ng mga mensaheng audio, ngunit ito ay permanenteng tinanggihan. I-tap ang settings → Permissions, at i-on ang \"Mikropono\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Maaari mong i-enable ang access ng mikropono sa privacy settings ng {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "Kailangan ng {app_name} ng access sa mikropono upang makagawa ng mga tawag at mag-record ng mga mensaheng audio.",
   "permissionsMicrophoneDescription": "Pahintulutan ang mikropono.",
   "permissionsMusicAudio": "Kailangan ng {app_name} ng access sa music at audio upang makapag-send ng mga file, music at audio.",
   "permissionsRequired": "Kinakailangan ang pahintulot",
-  "permissionsStorageDenied": "Kailangan ng {app_name} ng access sa photo library upang makapagpadala ka ng mga larawan at video, ngunit ito ay permanenteng tinanggihan. Pindutin ang Settings -> Permissions, at i-on ang \"Mga Larawan at video\".",
-  "permissionsStorageDeniedLegacy": "Kailangan ng {app_name} ng access sa storage upang makapagsend at mag-save ng mga attachment. Pindutin ang Settings -> Permissions, at i-on ang \"Storage\".",
+  "permissionsStorageDenied": "Kailangan ng {app_name} ng access sa photo library upang makapagpadala ka ng mga larawan at video, ngunit ito ay permanenteng tinanggihan. Pindutin ang Settings → Permissions, at i-on ang \"Mga Larawan at video\".",
+  "permissionsStorageDeniedLegacy": "Kailangan ng {app_name} ng access sa storage upang makapagsend at mag-save ng mga attachment. Pindutin ang Settings → Permissions, at i-on ang \"Storage\".",
   "permissionsStorageSave": "Kailangan ng {app_name} ng access sa storage upang i-save ang mga attachment at media.",
   "permissionsStorageSaveDenied": "Kailangan ng {app_name} ng access sa storage upang mag-save ng mga larawan at video, ngunit ito ay permanenteng tinanggihan. Mangyaring magpatuloy sa settings ng app, piliin ang \"Mga Pahintulot\", at i-enable ang \"Storage\".",
   "permissionsStorageSend": "Kailangan ng {app_name} ng access sa storage upang mag-send ng mga larawan at video.",
-  "pin": "I-pin ",
+  "pin": "I-pin",
   "pinConversation": "I-pin ang Usapan",
   "pinUnpin": "I-unpin",
   "pinUnpinConversation": "I-unpin ang Usapan",
@@ -774,7 +774,7 @@
   "updateError": "Hindi Ma-update",
   "updateErrorDescription": "Nabigo ang {app_name} na mag-update. Pumunta sa {session_download_url} at i-install ang bagong bersyon nang manu-manong, pagkatapos ay makipag-ugnayan sa aming Help Center upang ipaalam sa amin ang tungkol sa problemang ito.",
   "updateNewVersion": "May bagong bersyon ng {app_name} na available, tapikin para i-update",
-  "updateNewVersionDescription": "May bagong bersyon ng {app_name} na available. ",
+  "updateNewVersionDescription": "May bagong bersyon ng {app_name} na available.",
   "updateReleaseNotes": "Pumunta sa Mga Tala sa Paglabas",
   "updateSession": "Pag-update ng {app_name}",
   "updateVersion": "Bersyon {version}",
