--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -145,7 +145,7 @@
   "callsMicrophonePermissionsRequired": "<b>{name}</b> kişisinden gelen bir çağrıyı, <b>mikrofon erişimini</b> vermediğiniz için kaçırdınız.",
   "callsMissed": "Cevapsız Çağrı",
   "callsMissedCallFrom": "{name} tarafından cevapsız çağrı",
-  "callsNotificationsRequired": "Sesli ve Görüntülü Aramaların çalışabilmesi için cihazınızın sistem ayarlarında Session bildirimlerinin etkinleştirilmiş olması gerekmektedir. ",
+  "callsNotificationsRequired": "Sesli ve Görüntülü Aramaların çalışabilmesi için cihazınızın sistem ayarlarında Session bildirimlerinin etkinleştirilmiş olması gerekmektedir.",
   "callsPermissionsRequired": "Arama İzni Gerekli",
   "callsPermissionsRequiredDescription": "'Sesli ve Görüntülü Arama' iznini Gizlilik Ayarlarından etkinleştirebilirsiniz.",
   "callsReconnecting": "Yeniden bağlanıyor…",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "<b>{group_name}</b> grubundan <b>{name}</b> ve <b>{count} diğerlerini</b> kaldırmak ister misiniz?",
   "groupRemoveDescriptionTwo": "<b>{group_name}</b> grubundan <b>{name}</b> ve <b>{other_name}</b> kişilerini kaldırmak ister misiniz?",
   "groupRemoveMessages": "{count, plural, one [Kullanıcıyı ve mesajlarını sil] other [Kullanıcıları ve mesajlarını sil]}",
-  "groupRemoveUserOnly": "{count, plural, one [Kullanıcıyı sil ] other [Kullanıcıları sil]}",
+  "groupRemoveUserOnly": "{count, plural, one [Kullanıcıyı sil] other [Kullanıcıları sil]}",
   "groupRemoved": "<b>{name}</b> gruptan çıkarıldı.",
   "groupRemovedMultiple": "<b>{name}</b> ve <b>{count} diğer</b> gruptan çıkarıldı.",
   "groupRemovedTwo": "<b>{name}</b> ve <b>{other_name}</b> gruptan çıkarıldı.",
@@ -640,28 +640,28 @@
   "passwordSet": "Şifre Belirle",
   "passwordSetDescription": "Şifreniz ayarlandı. Lütfen güvende tutunuz.",
   "paste": "Yapıştır",
-  "permissionMusicAudioDenied": "{app_name} dosya, müzik ve ses gönderimi için müzik ve ses erişimine ihtiyaç duyuyor, ancak bu erişim kalıcı olarak reddedildi. Ayarlar -> İzinler üzerine dokunun ve \"Müzik ve ses\" seçeneğini açın.",
+  "permissionMusicAudioDenied": "{app_name} dosya, müzik ve ses gönderimi için müzik ve ses erişimine ihtiyaç duyuyor, ancak bu erişim kalıcı olarak reddedildi. Ayarlar → İzinler üzerine dokunun ve \"Müzik ve ses\" seçeneğini açın.",
   "permissionsAppleMusic": "{app_name}, medya eklerini çalmak için Apple Music'i kullanmak zorunda.",
   "permissionsAutoUpdate": "Otomatik Güncelleme",
   "permissionsAutoUpdateDescription": "Başlangıçta güncellemeleri otomatik olarak denetle",
-  "permissionsCameraDenied": "{app_name}, fotoğraf ve video çekmek için kamera erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar -> İzinler üzerine dokunun ve \"Kamera\" seçeneğini açın.",
+  "permissionsCameraDenied": "{app_name}, fotoğraf ve video çekmek için kamera erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar → İzinler üzerine dokunun ve \"Kamera\" seçeneğini açın.",
   "permissionsFaceId": "{app_name} ekran kilidi özelliği Face ID kullanır.",
   "permissionsKeepInSystemTray": "Sistem Tepsisinde Sakla",
   "permissionsKeepInSystemTrayDescription": "{app_name} pencereyi kapattığınızda arka planda çalışmaya devam eder",
   "permissionsLibrary": "{app_name} devam etmek için fotoğraf kitaplığı erişimine ihtiyaç duyuyor. Erişimi iOS ayarlarından etkinleştirebilirsiniz.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name}, arama yapmak ve sesli mesajlar göndermek için mikrofon erişimine ihtiyaç duyuyor, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar -> İzinler üzerine dokunun ve \"Mikrofon\" seçeneğini açın.",
+  "permissionsMicrophoneAccessRequired": "{app_name}, arama yapmak ve sesli mesajlar göndermek için mikrofon erişimine ihtiyaç duyuyor, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar → İzinler üzerine dokunun ve \"Mikrofon\" seçeneğini açın.",
   "permissionsMicrophoneAccessRequiredDesktop": "{app_name} gizlilik ayarlarından mikrofon erişimini etkinleştirebilirsiniz",
   "permissionsMicrophoneAccessRequiredIos": "{app_name}, arama yapmak ve sesli mesaj kaydetmek için mikrofon erişimine ihtiyaç duyar.",
   "permissionsMicrophoneDescription": "Mikrofona erişim izni verin.",
   "permissionsMusicAudio": "{app_name} dosya, müzik ve ses gönderebilmek için müzik ve ses erişimine ihtiyaç duyar.",
   "permissionsRequired": "İzin gerekli",
-  "permissionsStorageDenied": "{app_name}, fotoğraf ve video göndermeniz için fotoğraf kitaplığı erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar -> İzinler üzerine dokunun ve \"Fotoğraflar ve videolar\" seçeneğini açın.",
-  "permissionsStorageDeniedLegacy": "{app_name}, ek gönderme ve kaydetme işlemi için depolama erişimine ihtiyaç duyar. Ayarlar -> İzinler üzerine dokunun ve \"Depolama\" seçeneğini açın.",
+  "permissionsStorageDenied": "{app_name}, fotoğraf ve video göndermeniz için fotoğraf kitaplığı erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Ayarlar → İzinler üzerine dokunun ve \"Fotoğraflar ve videolar\" seçeneğini açın.",
+  "permissionsStorageDeniedLegacy": "{app_name}, ek gönderme ve kaydetme işlemi için depolama erişimine ihtiyaç duyar. Ayarlar → İzinler üzerine dokunun ve \"Depolama\" seçeneğini açın.",
   "permissionsStorageSave": "{app_name}, ekleri ve medyayı kaydetmek için depolama erişimine ihtiyaç duyar.",
   "permissionsStorageSaveDenied": "{app_name}, fotoğraf ve video kaydedebilmek için depolama erişimine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarlarına girin, \"İzinler\"i seçin ve \"Depolama\"yı etkinleştirin.",
   "permissionsStorageSend": "{app_name}, fotoğraf ve video göndermek için depolama erişimine ihtiyaç duyar.",
-  "pin": "Sabitle ",
+  "pin": "Sabitle",
   "pinConversation": "Konuşmayı sabitle",
   "pinUnpin": "Sabitlemeyi Kaldır",
   "pinUnpinConversation": "Sohbetin Sabitlemesini Kaldır",
