--- a/_locales/ur/messages.json
+++ b/_locales/ur/messages.json
@@ -142,7 +142,7 @@
   "callsMicrophonePermissionsRequired": "آپ نے <b>{name}</b> کی کال مس کر دی کیونکہ آپ نے <b>مائیکروفون تک رسائی</b> اجازت نہیں دی ہے۔",
   "callsMissed": "چھوٹی ہوئی کال",
   "callsMissedCallFrom": "{name} سے چھوٹی ہوئی کال",
-  "callsNotificationsRequired": "وائس اور ویڈیو کالز کے لیے آپ کے ڈیوائس کے سسٹم سیٹنگز میں نوٹیفیکیشنز کو فعال کرنا ضروری ہے۔ ",
+  "callsNotificationsRequired": "وائس اور ویڈیو کالز کے لیے آپ کے ڈیوائس کے سسٹم سیٹنگز میں نوٹیفیکیشنز کو فعال کرنا ضروری ہے۔",
   "callsPermissionsRequired": "کال کی اجازتیں درکار ہیں",
   "callsPermissionsRequiredDescription": "آپ رازداری کی ترتیبات میں \"وائس اور ویڈیو کالز\" کی اجازت کو فعال کر سکتے ہیں۔",
   "callsReconnecting": "دوبارہ جڑ رہا ہے...",
@@ -416,7 +416,7 @@
   "groupNameEnter": "گروپ کا نام درج کریں",
   "groupNameEnterPlease": "براہ کرم ایک گروپ نام درج کریں۔",
   "groupNameEnterShorter": "براہ کرم ایک چھوٹا گروپ نام درج کریں۔",
-  "groupNameNew": "گروپ کا نام اب {group_name} ہے۔ ",
+  "groupNameNew": "گروپ کا نام اب {group_name} ہے۔",
   "groupNameUpdated": "گروپ کا نام اپ ڈیٹ ہوگیا۔",
   "groupNoMessages": "آپ کے پاس <b>{group_name}</b> سے کوئی پیغام نہیں ہے۔ گفتگو شروع کرنے کے لئے پیغام بھیجیں!",
   "groupOnlyAdmin": "آپ <b>{group_name}</b> میں واحد منتظم ہیں۔<br/><br/>گروپ اراکین اور سیٹنگز ایک منتظم کے بغیر تبدیل نہیں کی جا سکتیں۔",
@@ -427,7 +427,7 @@
   "groupRemoveDescriptionMultiple": "کیا آپ<b>{group_name}</b>سے <b>{name}</b> اور <b>{count} دیگر</b> کو ہٹانا چاہتے ہیں؟",
   "groupRemoveDescriptionTwo": "کیا آپ <b>{group_name}</b> سے <b>{name}</b> اور <b>{other_name}</b> کو ہٹانا چاہتے ہیں؟",
   "groupRemoveMessages": "{count, plural, one [صارف کو اور ان کے پیغامات کو حذف کریں] other [صارفین کو اور ان کے پیغامات کو حذف کریں]}",
-  "groupRemoveUserOnly": "{count, plural, one [صرف صارف کو حذف کریں ] other [صرف صارفین کو حذف کریں]}",
+  "groupRemoveUserOnly": "{count, plural, one [صرف صارف کو حذف کریں] other [صرف صارفین کو حذف کریں]}",
   "groupRemoved": "<b>{name}</b> کو گروپ سے ہٹا دیا گیا۔",
   "groupRemovedMultiple": "<b>{name}</b> اور <b>{count} دیگر</b> گروپ سے ہٹا دیے گئے۔",
   "groupRemovedTwo": "<b>{name}</b> اور <b>{other_name}</b> کو گروپ سے ہٹا دیا گیا۔",
@@ -636,24 +636,24 @@
   "passwordSet": "پاس ورڈ سیٹ کریں",
   "passwordSetDescription": "آپ کا پاس ورڈ مقرر ہو گیا ہے۔ براہ کرم اسے محفوظ رکھیں۔",
   "paste": "چسپاں کریں",
-  "permissionMusicAudioDenied": "{app_name} کو فائلز، میوزک، اور آڈیو بھیجنے کے لیے میوزک اور آڈیو کی رسائی کی ضرورت ہے، مگر اسے مستقل طور پر انکار کر دیا گیا ہے۔ سیٹنگز پر ٹیپ کریں -> اجازتیں، اور \"موسیقی اور آڈیو\" کو آن کریں۔",
+  "permissionMusicAudioDenied": "{app_name} کو فائلز، میوزک، اور آڈیو بھیجنے کے لیے میوزک اور آڈیو کی رسائی کی ضرورت ہے، مگر اسے مستقل طور پر انکار کر دیا گیا ہے۔ سیٹنگز پر ٹیپ کریں → اجازتیں، اور \"موسیقی اور آڈیو\" کو آن کریں۔",
   "permissionsAppleMusic": "{app_name} کو میڈیا اٹیچمنٹ چلانے کے لیے ایپل میوزک کا استعمال کرنا ہوگا۔",
   "permissionsAutoUpdate": "آٹو اپڈیٹ",
   "permissionsAutoUpdateDescription": "شروع میں آٹو اپڈیٹس کے لیے خودکار چیک کریں",
-  "permissionsCameraDenied": "{app_name} کو تصاویر اور ویڈیوز لینے کے لیے کیمرے تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم ترتیبات -> اجازتیں ٹیپ کریں، اور \"کیمرہ\" کو آن کریں۔",
+  "permissionsCameraDenied": "{app_name} کو تصاویر اور ویڈیوز لینے کے لیے کیمرے تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم ترتیبات → اجازتیں ٹیپ کریں، اور \"کیمرہ\" کو آن کریں۔",
   "permissionsFaceId": "{app_name} پر سکرین لاک خصوصیت Face ID کا استعمال کرتی ہے۔",
   "permissionsKeepInSystemTray": "سسٹم ٹرے میں رکھیں",
   "permissionsKeepInSystemTrayDescription": "{app_name} پس منظر میں چلتا رہتا ہے جب آپ ونڈو بند کرتے ہیں",
   "permissionsLibrary": "{app_name} کو جاری رکھنے کے لیے فوٹو لائبریری کی اجازت درکار ہے۔ آپ iOS کی سیٹنگ میں رسائی کو فعال کر سکتے ہیں۔",
   "permissionsMicrophone": "مائکروفون",
-  "permissionsMicrophoneAccessRequired": "{app_name} کو کال کرنے اور آڈیو پیغامات بھیجنے کے لیے مائکروفون تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم سیٹنگز پر ٹیپ کریں -> Permissions، اور \"Microphone\" کو آن کریں۔",
+  "permissionsMicrophoneAccessRequired": "{app_name} کو کال کرنے اور آڈیو پیغامات بھیجنے کے لیے مائکروفون تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم سیٹنگز پر ٹیپ کریں → Permissions، اور \"Microphone\" کو آن کریں۔",
   "permissionsMicrophoneAccessRequiredDesktop": "آپ {app_name} کی رازداری کی ترتیبات میں مائیکروفون تک رسائی فعال کر سکتے ہیں۔",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} کو کال کرنے اور آڈیو پیغامات ریکارڈ کرنے کے لیے مائیکروفون تک رسائی درکار ہے۔",
   "permissionsMicrophoneDescription": "مائیکروفون تک رسائی کی اجازت دیں.",
   "permissionsMusicAudio": "{app_name} کو فائلز، موسیقی اور آڈیو بھیجنے کے لیے موسیقی اور آڈیو کی اجازت درکار ہے۔",
   "permissionsRequired": "اجازت درکار ہے",
-  "permissionsStorageDenied": "{app_name} کو فوٹو لائبریری تک رسائی کی ضرورت ہے تاکہ آپ فوٹو اور ویڈیوز بھیج سکیں، لیکن اسے مستقل طور پر انکار کر دیا گیا ہے۔ براہ کرم سیٹنگز ٹیپ کریں -> اجازتیں، اور \"فوٹوز اور ویڈیوز\" کو آن کریں۔",
-  "permissionsStorageDeniedLegacy": "{app_name} کو منسلکات بھیجنے اور محفوظ کرنے کے لئے اسٹورج تک رسائی کی ضرورت ہے۔ ترتیبات پر ٹیپ کریں -> اجازتیں، اور \"اسٹورج\" کو بند کریں۔",
+  "permissionsStorageDenied": "{app_name} کو فوٹو لائبریری تک رسائی کی ضرورت ہے تاکہ آپ فوٹو اور ویڈیوز بھیج سکیں، لیکن اسے مستقل طور پر انکار کر دیا گیا ہے۔ براہ کرم سیٹنگز ٹیپ کریں → اجازتیں، اور \"فوٹوز اور ویڈیوز\" کو آن کریں۔",
+  "permissionsStorageDeniedLegacy": "{app_name} کو منسلکات بھیجنے اور محفوظ کرنے کے لئے اسٹورج تک رسائی کی ضرورت ہے۔ ترتیبات پر ٹیپ کریں → اجازتیں، اور \"اسٹورج\" کو بند کریں۔",
   "permissionsStorageSave": "{app_name} کو منسلکات اور میڈیا محفوظ کرنے کے لیے اسٹوریج کی اجازت درکار ہے۔",
   "permissionsStorageSaveDenied": "تصاویر اور ویڈیوز کو محفوظ کرنے کے لیے {app_name} کو اسٹوریج تک رسائی درکار ہے، لیکن اسے مستقل طور پر مسترد کر دیا گیا ہے۔ براہ کرم ایپ کی ترتیبات کو جاری رکھیں، \"اجازتیں\" کو منتخب کریں، اور \"اسٹوریج\" کو فعال کریں۔",
   "permissionsStorageSend": "{app_name} کو تصاویر اور ویڈیوز بھیجنے کے لیے اسٹوریج کی اجازت درکار ہے۔",
@@ -770,7 +770,7 @@
   "updateError": "اپ ڈیٹ نہیں ہوسکتی",
   "updateErrorDescription": "{app_name} اپ ڈیٹ کرنے میں ناکام ہو گیا۔ براہ کرم {session_download_url} پر جائیں اور نئی ورژن کو دستی طور پر نصب کریں، پھر اس مسئلے کے بارے میں ہمیں مطلع کرنے کے لیے ہماری ہیلپ سینٹر سے رابطہ کریں۔",
   "updateNewVersion": "{app_name} کا ایک نیا ورژن دستیاب ہے، اپ ڈیٹ کے لیے ٹیپ کریں",
-  "updateNewVersionDescription": "{app_name} کا ایک نیا ورژن دستیاب ہے۔ ",
+  "updateNewVersionDescription": "{app_name} کا ایک نیا ورژن دستیاب ہے۔",
   "updateReleaseNotes": "ریلیز نوٹس پر جائیں",
   "updateSession": "{app_name} اپ ڈیٹ",
   "updateVersion": "ورژن {version}",
