--- a/_locales/uz/messages.json
+++ b/_locales/uz/messages.json
@@ -556,7 +556,7 @@
   "none": "Yo'q",
   "notNow": "Hozir emas",
   "noteToSelf": "O'zizga eslatma",
-  "noteToSelfEmpty": "Sizda ",
+  "noteToSelfEmpty": "Sizda",
   "noteToSelfHide": "O'zizga eslatma ni yashirish",
   "noteToSelfHideDescription": "Haqiqatan ham O'zizga eslatma yashirmoqchimisiz?",
   "notificationsAllMessages": "Barcha Xabarlar",
@@ -640,28 +640,28 @@
   "passwordSet": "Parol oʻrnatish",
   "passwordSetDescription": "Parolingiz olib tashlandi.",
   "paste": "Qo'yish",
-  "permissionMusicAudioDenied": "{app_name} fayllar, musiqa va audioni jo'natish uchun musiqa va audio kirishiga ehtiyoj bor, ammo bu abadiy rad etilgan. Sozlamalar -> Ruxsatlar, va \"Musiqa va audio\"ni yoqing.",
+  "permissionMusicAudioDenied": "{app_name} fayllar, musiqa va audioni jo'natish uchun musiqa va audio kirishiga ehtiyoj bor, ammo bu abadiy rad etilgan. Sozlamalar → Ruxsatlar, va \"Musiqa va audio\"ni yoqing.",
   "permissionsAppleMusic": "{app_name} media tarkiblarini ijro etish uchun Apple Music'dan foydalanishi kerak.",
   "permissionsAutoUpdate": "Avtomatik yangilanish",
   "permissionsAutoUpdateDescription": "Ishga tushganda yangilanishlarni avtomatik tekshirish",
-  "permissionsCameraDenied": "{app_name} fotosuratlar va videolarni olish uchun kamera kirishini talab qiladi, ammo bu abadiy rad etilgan. Sozlamalar -> Ruxsatlar, va \"Kamera\"ni yoqing.",
+  "permissionsCameraDenied": "{app_name} fotosuratlar va videolarni olish uchun kamera kirishini talab qiladi, ammo bu abadiy rad etilgan. Sozlamalar → Ruxsatlar, va \"Kamera\"ni yoqing.",
   "permissionsFaceId": "{app_name} dagi ekran blokirovkasi funksiyasi Face ID dan foydalanadi.",
   "permissionsKeepInSystemTray": "Tizim trayidka saqlash",
   "permissionsKeepInSystemTrayDescription": "{app_name} oynani yopinganda fon rejimida ishlashda davom etadi",
   "permissionsLibrary": "{app_name} davom etish uchun foto kutubxonaga kirishni talab qiladi. Siz kirishni iOS sozlamalarida yoqishingiz mumkin.",
   "permissionsMicrophone": "Mikrofon",
-  "permissionsMicrophoneAccessRequired": "{app_name} qo'ng'iroq qilish va ovozli xabarlar yuborish uchun mikrofon kirishini talab qiladi, ammo bu abadiy rad etilgan. Sozlamalar -> Ruxsatlar ni bosing va \"Mikrofon\" ni yoqing.",
+  "permissionsMicrophoneAccessRequired": "{app_name} qo'ng'iroq qilish va ovozli xabarlar yuborish uchun mikrofon kirishini talab qiladi, ammo bu abadiy rad etilgan. Sozlamalar → Ruxsatlar ni bosing va \"Mikrofon\" ni yoqing.",
   "permissionsMicrophoneAccessRequiredDesktop": "{app_name}ning maxfiylik sozlamalarida mikrofon kirish huquqini yoqishingiz mumkin",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} qo'ng'iroq qilish va audio xabarlarni yozish uchun mikrofon kirishini talab qiladi.",
   "permissionsMicrophoneDescription": "Mikrofonga kirishga ruxsat bering.",
   "permissionsMusicAudio": "{app_name} fayllar, musiqa va audioni jo'natish uchun musiqa va audio kirishiga ehtiyoj bor.",
   "permissionsRequired": "Ruxsat kerak",
-  "permissionsStorageDenied": "{app_name} fotosuratlar va videolarni yuborish uchun foto kutubxonasiga kirishni talab qiladi, lekin bu abadiy rad etilgan. Sozlamalar -> Ruxsatlar ni bosing va \"Fotosuratlar va videolar\"ni yoqing.",
-  "permissionsStorageDeniedLegacy": "{app_name} fayllarni yuborish va saqlash uchun saqlashga kirishni talab qiladi. Sozlamalar -> Ruxsatlar ni bosing va \"Saqlash\"ni yoqing.",
+  "permissionsStorageDenied": "{app_name} fotosuratlar va videolarni yuborish uchun foto kutubxonasiga kirishni talab qiladi, lekin bu abadiy rad etilgan. Sozlamalar → Ruxsatlar ni bosing va \"Fotosuratlar va videolar\"ni yoqing.",
+  "permissionsStorageDeniedLegacy": "{app_name} fayllarni yuborish va saqlash uchun saqlashga kirishni talab qiladi. Sozlamalar → Ruxsatlar ni bosing va \"Saqlash\"ni yoqing.",
   "permissionsStorageSave": "{app_name} fayl va media tarkiblarini saqlash uchun saqlashga kirishni talab qiladi.",
   "permissionsStorageSaveDenied": "{app_name} fotosuratlar va videolarni saqlash uchun saqlashga kirishni talab qiladi, ammo bu abadiy rad etilgan. Iltimos, ilova sozlamalariga o'ting, \"Ruxsatlar\" ni tanlang va \"Saqlash\" ni yoqing.",
   "permissionsStorageSend": "{app_name} fotosuratlar va videolarni yuborish uchun saqlashga kirishni talab qiladi.",
-  "pin": "Mahkamlash ",
+  "pin": "Mahkamlash",
   "pinConversation": "Suhbatni mahkamlash",
   "pinUnpin": "Mahkamlanmagan",
   "pinUnpinConversation": "Suhbatni mahkamlamaslik",
