--- a/_locales/xh/messages.json
+++ b/_locales/xh/messages.json
@@ -145,7 +145,7 @@
   "callsMicrophonePermissionsRequired": "You missed a call from <b>{name}</b> because you haven't granted <b>microphone access</b>.",
   "callsMissed": "Ifowuni ephosiwe",
   "callsMissedCallFrom": "Ifowuni ephosiwe ngo {name}",
-  "callsNotificationsRequired": "Iifowuni zeSandi neeVidiyo zifuna izaziso ukuba zivulwe kwizicwangciso zenkqubo yezixhobo zakho. ",
+  "callsNotificationsRequired": "Iifowuni zeSandi neeVidiyo zifuna izaziso ukuba zivulwe kwizicwangciso zenkqubo yezixhobo zakho.",
   "callsPermissionsRequired": "Ufunwa Iimvume Zetsalelo",
   "callsPermissionsRequiredDescription": "Ungavula imvume ethi \"Voice and Video Calls\" kwi-Privacy Settings.",
   "callsReconnecting": "Ukuqhagamshelanisa kwakhona",
@@ -420,7 +420,7 @@
   "groupNameEnter": "Ngenisa igama leqela",
   "groupNameEnterPlease": "Nceda ngenisa igama leqela.",
   "groupNameEnterShorter": "Nceda ngenisa igama leqela elifutshane.",
-  "groupNameNew": "Igama leqela ngoku ngu {group_name}. ",
+  "groupNameNew": "Igama leqela ngoku ngu {group_name}.",
   "groupNameUpdated": "Igama leqela lihlaziyiwe.",
   "groupNoMessages": "Akunamiyalezo ivela kwi <b>{group_name}</b>. Thumela umyalezo ukuyiqala incoko!",
   "groupOnlyAdmin": "Unguye kuphela admin kwi <b>{group_name}</b>.<br/><br/>Amalungu eqela kunye neesetingi azinakutshintshwa ngaphandle kwe-admin.",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionMultiple": "Ungathanda ukususa <b>{name}</b> kunye nabanye <b>{count}</b> kwi-<b>{group_name}</b>?",
   "groupRemoveDescriptionTwo": "Ungathanda ukususa <b>{name}</b> kunye no<b>{other_name}</b> kwi-<b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Susa umsebenzisi kunye nemiyalezo yabo] other [Susa abasebenzisi kunye nemiyalezo yabo]}",
-  "groupRemoveUserOnly": "{count, plural, one [Susa umsebenzisi ] other [Susa abasebenzisi]}",
+  "groupRemoveUserOnly": "{count, plural, one [Susa umsebenzisi] other [Susa abasebenzisi]}",
   "groupRemoved": "<b>{name}</b> ikhutshelwe ngaphandle kweqela.",
   "groupRemovedMultiple": "<b>{name}</b> kunye <b>{count} abanye abantu</b> bakhutshelwe ngaphandle kweqela.",
   "groupRemovedTwo": "<b>{name}</b> kunye <b>{other_name} </b> bakhutshelwe ngaphandle kweqela.",
@@ -640,28 +640,28 @@
   "passwordSet": "Set Password",
   "passwordSetDescription": "Iphasiwedi yakho isetiwe. Nceda uyigcine ikhuselekile.",
   "paste": "Ncamathisela",
-  "permissionMusicAudioDenied": "{app_name} ifuna ukufikelela kumculo kunye noaudio ukuze ukwazi ukuthumela iifayili, umculo kunye noaudio, kodwa oku kuthintelwe ngokusisigxina. Thepha ku-Settings -> Permissions, kwaye uvule 'Umculo kunye noaudio'.",
+  "permissionMusicAudioDenied": "{app_name} ifuna ukufikelela kumculo kunye noaudio ukuze ukwazi ukuthumela iifayili, umculo kunye noaudio, kodwa oku kuthintelwe ngokusisigxina. Thepha ku-Settings → Permissions, kwaye uvule 'Umculo kunye noaudio'.",
   "permissionsAppleMusic": "{app_name} kufuneka isebenzise uMculo weApple ukudlala iziphumo zemidiya.",
   "permissionsAutoUpdate": "Uhlaziyo oluzenzekelayo",
   "permissionsAutoUpdateDescription": "Ukujonga uhlaziyo ngokuzenzekelayo xa uqala inkqubo",
-  "permissionsCameraDenied": "{app_name} ifuna ukufikelela kwikhamera ukuthatha iifoto nevidiyo, kodwa oku kuthintelwe ngokusisigxina. Thepha ku-Settings -> Permissions, kwaye uvule 'Ikhamera'.",
+  "permissionsCameraDenied": "{app_name} ifuna ukufikelela kwikhamera ukuthatha iifoto nevidiyo, kodwa oku kuthintelwe ngokusisigxina. Thepha ku-Settings → Permissions, kwaye uvule 'Ikhamera'.",
   "permissionsFaceId": "Umsebenzi wokutshixa isikrini kwi-{app_name} usebenzisa i-Face ID.",
   "permissionsKeepInSystemTray": "Gcina kwiTray yesistim",
   "permissionsKeepInSystemTrayDescription": "{app_name} iqhubeka isebenza ngasemva xa uvala ifestile",
   "permissionsLibrary": "{app_name} ifuna ukufikelela kumtapo weefoto ukuze iqhubeke. Unokukhubaza ukufikelela kuseto lwakwi-iOS.",
   "permissionsMicrophone": "IMikrofoni",
-  "permissionsMicrophoneAccessRequired": "{app_name} ifuna ukufikelela kwisixhobo somculo ukwenza iifowuni kunye nokuthumela imiyalezo yesandi, kodwa ivaliwe ngokusisigxina. Cofa useto -> Iimvume, uze uvule \"Isixhobo somculo\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} ifuna ukufikelela kwisixhobo somculo ukwenza iifowuni kunye nokuthumela imiyalezo yesandi, kodwa ivaliwe ngokusisigxina. Cofa useto → Iimvume, uze uvule \"Isixhobo somculo\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Ungavula ukufikelela kwitsho ye-microphone kwii-setingi zabucala ze-{app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} ifuna ukufikelela kwisixhobo somculo wokwenza iminxeba kunye nokurekhoda imiyalezo yesandi.",
   "permissionsMicrophoneDescription": "Vumela ukufikelela kwimikrofono.",
   "permissionsMusicAudio": "{app_name} ifuna ukufikelela kwizandi neminonophelo yokuthumela iifayile, umculo kunye neaudiyo.",
   "permissionsRequired": "Imvume iyafuneka",
-  "permissionsStorageDenied": "{app_name} ifuna ukufikelela kwindawo yokugcina iifoto kunye nevidiyo ukuze ukwazi ukuthumela iifoto nevidiyo, kodwa oku kuthintelwe ngokusisigxina. Thepha ku-Settings -> Permissions, kwaye uvule 'Iifoto nevidiyo'.",
-  "permissionsStorageDeniedLegacy": "{app_name} ifuna ukufikelela kwisithuba ukuze ukwazi ukuthumela nokugcina izithunywa. Thepha ku-Settings -> Permissions, kwaye uvule 'Indawo yokugcina'.",
+  "permissionsStorageDenied": "{app_name} ifuna ukufikelela kwindawo yokugcina iifoto kunye nevidiyo ukuze ukwazi ukuthumela iifoto nevidiyo, kodwa oku kuthintelwe ngokusisigxina. Thepha ku-Settings → Permissions, kwaye uvule 'Iifoto nevidiyo'.",
+  "permissionsStorageDeniedLegacy": "{app_name} ifuna ukufikelela kwisithuba ukuze ukwazi ukuthumela nokugcina izithunywa. Thepha ku-Settings → Permissions, kwaye uvule 'Indawo yokugcina'.",
   "permissionsStorageSave": "{app_name} ifuna ukufikelela kwindawo yokugcina ukuthumela iziphumo kunye nemidiya.",
   "permissionsStorageSaveDenied": "{app_name} ifuna ukufikelela kwindawo yokugcina ukuthumela iifoto nevidiyo, kodwa ivaliwe ngokusisigxina. Nceda uqhubeke useto lwe-app, ukhethe \"Imvume\", kwaye uvule \"Indawo yokugcina\".",
   "permissionsStorageSend": "{app_name} ifuna ukufikelela kwindawo yokugcina ukuthumela iifoto nevidiyo.",
-  "pin": "Pin ",
+  "pin": "Pin",
   "pinConversation": "Gcina Incoko",
   "pinUnpin": "Susa Ukukhonkxa",
   "pinUnpinConversation": "Susa ukukhonkxa incoko",
@@ -774,7 +774,7 @@
   "updateError": "Ayinakho Uhlaziyo",
   "updateErrorDescription": "{app_name} ayiphumelelanga ukuhlaziya. Nceda uye ku {session_download_url} ufake inguqulelo entsha ngesandla, emva koko unxibelelane neZiko lethu loNcedo ukuze usixelele ngale ngxaki.",
   "updateNewVersion": "Uhlobo olutsha lwe-{app_name} luyafumaneka, cofa ukuze uhlaziye",
-  "updateNewVersionDescription": "Uhlobo olutsha lwe-{app_name} luyafumaneka. ",
+  "updateNewVersionDescription": "Uhlobo olutsha lwe-{app_name} luyafumaneka.",
   "updateReleaseNotes": "Yiya kuNgcaciso olupapashiweyo",
   "updateSession": "Ukuhlaziya i-{app_name}",
   "updateVersion": "Inguqulelo {version}",
