--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -419,7 +419,7 @@
   "groupNameEnter": "গ্রুপের নাম লিখুন",
   "groupNameEnterPlease": "একটি গ্রুপের নাম লিখুন।",
   "groupNameEnterShorter": "একটি ছোট নাম লিখুন।",
-  "groupNameNew": "গ্রুপের নাম এখন {group_name}. ",
+  "groupNameNew": "গ্রুপের নাম এখন {group_name}.",
   "groupNameUpdated": "গ্রুপের নাম আপডেট হয়েছে।",
   "groupNoMessages": "আপনার <b>{group_name}</b> থেকে কোনো মেসেজ নেই। কথোপকথন শুরু করতে একটি মেসেজ পাঠান!",
   "groupOnlyAdmin": "You are the only admin in <b>{group_name}</b>.<br/><br/>Group members and settings cannot be changed without an admin.",
@@ -639,28 +639,28 @@
   "passwordSet": "পাসওয়ার্ড সেট করুন",
   "passwordSetDescription": "আপনার পাসওয়ার্ড সেট করা হয়েছে। দয়া করে এটি নিরাপদ রাখুন।",
   "paste": "পেস্ট",
-  "permissionMusicAudioDenied": "{app_name} এর ফাইল, সঙ্গীত এবং অডিও পাঠানোর জন্য সঙ্গীত ও অডিও অ্যাক্সেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। Tap Settings -> Permissions, and turn \"Music and audio\" on.",
+  "permissionMusicAudioDenied": "{app_name} এর ফাইল, সঙ্গীত এবং অডিও পাঠানোর জন্য সঙ্গীত ও অডিও অ্যাক্সেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। Tap Settings → Permissions, and turn \"Music and audio\" on.",
   "permissionsAppleMusic": "মিডিয়া সংযুক্তি প্লে করার জন্য {app_name} কে Apple Music ব্যবহার করতে হবে।",
   "permissionsAutoUpdate": "স্বয়ংক্রিয় আপডেট",
   "permissionsAutoUpdateDescription": "স্টার্টআপ এ স্বয়ংক্রিয়ভাবে আপডেটগুলি চেক করা হবে",
-  "permissionsCameraDenied": "{app_name} এর ছবি ও ভিডিও তোলার জন্য ক্যামেরা অ্যাকসেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। Tap Settings -> Permissions, and turn \"Camera\" on.",
+  "permissionsCameraDenied": "{app_name} এর ছবি ও ভিডিও তোলার জন্য ক্যামেরা অ্যাকসেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। Tap Settings → Permissions, and turn \"Camera\" on.",
   "permissionsFaceId": "{app_name} এর স্ক্রিন লক ফিচারটি ফেস আইডি ব্যবহৃত হয়।",
   "permissionsKeepInSystemTray": "সিস্টেম ট্রেতে রাখুন",
   "permissionsKeepInSystemTrayDescription": "{app_name} উইন্ডো বন্ধ করলেও后台 চালু থাকে",
   "permissionsLibrary": "{app_name} এর ছবি গ্যালারির অ্যাকসেস প্রয়োজন চালিয়ে যাওয়ার জন্য। আপনি iOS এর সেটিংস এ অ্যাকসেস সক্রিয় করতে পারেন।",
   "permissionsMicrophone": "মাইক্রোফোন",
-  "permissionsMicrophoneAccessRequired": "কল এবং অডিও মেসেজ পাঠানোর জন্য {app_name} এর মাইক্রোফোন অ্যাকসেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে বাতিল করা হয়েছে। সেটিংস -> পারমিশনস এ যান, এবং \"মাইক্রোফোন\" চালু করুন।",
+  "permissionsMicrophoneAccessRequired": "কল এবং অডিও মেসেজ পাঠানোর জন্য {app_name} এর মাইক্রোফোন অ্যাকসেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে বাতিল করা হয়েছে। সেটিংস → পারমিশনস এ যান, এবং \"মাইক্রোফোন\" চালু করুন।",
   "permissionsMicrophoneAccessRequiredDesktop": "You can enable microphone access in {app_name}'s privacy settings",
   "permissionsMicrophoneAccessRequiredIos": "কল করার জন্য এবং অডিও মেসেজ রেকর্ড করার জন্য {app_name} এর মাইক্রোফোন অ্যাকসেস প্রয়োজন।",
   "permissionsMicrophoneDescription": "মাইক্রোফোনে অ্যাক্সেসের অনুমতি দিন।",
   "permissionsMusicAudio": "{app_name} এর ফাইল, সঙ্গীত এবং অডিও পাঠানোর জন্য সঙ্গীত ও অডিও অ্যাক্সেস প্রয়োজন।",
   "permissionsRequired": "অনুমতি প্রয়োজন",
-  "permissionsStorageDenied": "{app_name} এর ছবি ও ভিডিও পাঠানোর জন্য ছবি লাইব্রেরি অ্যাকসেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। Tap Settings -> Permissions, and turn \"Photos and videos\" on.",
-  "permissionsStorageDeniedLegacy": "{app_name} এর সংরক্ষণ অ্যাকসেস প্রয়োজন যাতে আপনি সংযুক্তি পাঠাতে এবং সংরক্ষণ করতে পারেন। Tap Settings -> Permissions, and turn \"Storage\" on.",
+  "permissionsStorageDenied": "{app_name} এর ছবি ও ভিডিও পাঠানোর জন্য ছবি লাইব্রেরি অ্যাকসেস প্রয়োজন, কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। Tap Settings → Permissions, and turn \"Photos and videos\" on.",
+  "permissionsStorageDeniedLegacy": "{app_name} এর সংরক্ষণ অ্যাকসেস প্রয়োজন যাতে আপনি সংযুক্তি পাঠাতে এবং সংরক্ষণ করতে পারেন। Tap Settings → Permissions, and turn \"Storage\" on.",
   "permissionsStorageSave": "সংযুক্তি এবং মিডিয়া সংরক্ষণ করতে {app_name} এর স্টোরেজ অ্যাকসেস প্রয়োজন।",
   "permissionsStorageSaveDenied": "{app_name} এর ছবি ও ভিডিও সেভ করার জন্য স্টোরেজ অ্যাকসেস প্রয়োজন কিন্তু এটি স্থায়ীভাবে প্রত্যাখ্যান করা হয়েছে। অনুগ্রহ করে অ্যাপ সেটিংস মেনুতে যান, \"পারমিশনস\" নির্বাচন করুন, এবং \"স্টোরেজ\" সক্রিয় করুন।",
   "permissionsStorageSend": "ছবি এবং ভিডিও প্রেরণ করতে {app_name} এর স্টোরেজ অ্যাকসেস প্রয়োজন।",
-  "pin": "পিন ",
+  "pin": "পিন",
   "pinConversation": "কথোপকথন পিন করুন",
   "pinUnpin": "আনপিন",
   "pinUnpinConversation": "কনভারসেশন আনপিন করুন",
