--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -420,7 +420,7 @@
   "groupNameEnter": "Nhập tên nhóm",
   "groupNameEnterPlease": "Vui lòng nhập tên nhóm.",
   "groupNameEnterShorter": "Vui lòng nhập một tên nhóm ngắn hơn.",
-  "groupNameNew": "Tên nhóm hiện giờ là {group_name}. ",
+  "groupNameNew": "Tên nhóm hiện giờ là {group_name}.",
   "groupNameUpdated": "Đã cập nhật tên nhóm.",
   "groupNoMessages": "Bạn không có tin nhắn nào từ <b>{group_name}.</b> Gửi một tin nhắn để bắt đầu cuộc trò chuyện!",
   "groupOnlyAdmin": "Bạn là quản trị viên duy nhất trong <b>{group_name}</b>.<br/><br/>Các thành viên và cài đặt nhóm không thể được thay đổi nếu không có quản trị viên.",
@@ -640,28 +640,28 @@
   "passwordSet": "Đặt Mật khẩu",
   "passwordSetDescription": "Mật khẩu của bạn đã được đặt. Hãy giữ nó cẩn thận.",
   "paste": "Dán",
-  "permissionMusicAudioDenied": "{app_name} cần quyền truy cập âm nhạc và âm thanh để gửi tệp, nhạc và âm thanh, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn Cài đặt -> Quyền truy cập, và bật \"Âm nhạc và âm thanh\".",
+  "permissionMusicAudioDenied": "{app_name} cần quyền truy cập âm nhạc và âm thanh để gửi tệp, nhạc và âm thanh, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn Cài đặt → Quyền truy cập, và bật \"Âm nhạc và âm thanh\".",
   "permissionsAppleMusic": "{app_name} cần sử dụng Apple Music để phát các tập tin đính kèm phương tiện.",
   "permissionsAutoUpdate": "Tự động cập nhật",
   "permissionsAutoUpdateDescription": "Automatically check for updates on startup",
-  "permissionsCameraDenied": "{app_name} cần quyền truy cập máy ảnh để chụp ảnh và quay video, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn Cài đặt -> Quyền truy cập, và bật \"Máy ảnh\".",
+  "permissionsCameraDenied": "{app_name} cần quyền truy cập máy ảnh để chụp ảnh và quay video, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn Cài đặt → Quyền truy cập, và bật \"Máy ảnh\".",
   "permissionsFaceId": "Tính năng khóa màn hình trên {app_name} sử dụng Face ID.",
   "permissionsKeepInSystemTray": "Giữ trong khay hệ thống",
   "permissionsKeepInSystemTrayDescription": "{app_name} tiếp tục chạy nền khi bạn đóng cửa sổ",
   "permissionsLibrary": "{app_name} cần quyền truy cập thư viện ảnh để tiếp tục. Bạn có thể kích hoạt quyền truy cập trong phần cài đặt iOS.",
   "permissionsMicrophone": "Micrô",
-  "permissionsMicrophoneAccessRequired": "{app_name} cần truy cập microphone để thực hiện cuộc gọi và gửi tin nhắn âm thanh, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn vào cài đặt -> Quyền truy cập, và bật \"Microphone\".",
+  "permissionsMicrophoneAccessRequired": "{app_name} cần truy cập microphone để thực hiện cuộc gọi và gửi tin nhắn âm thanh, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn vào cài đặt → Quyền truy cập, và bật \"Microphone\".",
   "permissionsMicrophoneAccessRequiredDesktop": "Bạn có thể bật quyền truy cập microphone trong cài đặt quyền riêng tư của {app_name}",
   "permissionsMicrophoneAccessRequiredIos": "{app_name} cần quyền truy cập microphone để gọi điện và ghi âm tin nhắn thoại.",
   "permissionsMicrophoneDescription": "Cho phép truy cập vào micrô.",
   "permissionsMusicAudio": "{app_name} cần quyền truy cập âm nhạc và âm thanh để gửi tệp, nhạc và âm thanh.",
   "permissionsRequired": "Cần cấp quyền",
-  "permissionsStorageDenied": "{app_name} cần truy cập thư viện ảnh để bạn có thể gửi ảnh và video, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn Cài đặt -> Quyền truy cập, và bật \"Ảnh và video\".",
-  "permissionsStorageDeniedLegacy": "{app_name} cần quyền truy cập lưu trữ để bạn có thể gửi và lưu tệp đính kèm. Nhấn Cài đặt -> Quyền truy cập, và bật \"Lưu trữ\".",
+  "permissionsStorageDenied": "{app_name} cần truy cập thư viện ảnh để bạn có thể gửi ảnh và video, nhưng quyền này đã bị từ chối vĩnh viễn. Nhấn Cài đặt → Quyền truy cập, và bật \"Ảnh và video\".",
+  "permissionsStorageDeniedLegacy": "{app_name} cần quyền truy cập lưu trữ để bạn có thể gửi và lưu tệp đính kèm. Nhấn Cài đặt → Quyền truy cập, và bật \"Lưu trữ\".",
   "permissionsStorageSave": "{app_name} cần quyền truy cập lưu trữ để lưu các tập tin đính kèm và phương tiện.",
   "permissionsStorageSaveDenied": "{app_name} cần quyền truy cập lưu trữ để lưu ảnh và video, nhưng quyền này đã bị chặn. Vui lòng vào phần cài đặt ứng dụng, chọn \"Quyền truy cập\", và cho phép truy cập \"Lưu trữ\".",
   "permissionsStorageSend": "{app_name} cần quyền truy cập lưu trữ để gửi ảnh và video.",
-  "pin": "Ghim ",
+  "pin": "Ghim",
   "pinConversation": "Ghim cuộc trò chuyện",
   "pinUnpin": "Bỏ ghim",
   "pinUnpinConversation": "Bỏ ghim cuộc trò chuyện",
