--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -35,7 +35,7 @@
   "adminRemovedUser": "<b>{name}</b> was removed as Admin.",
   "adminRemovedUserMultiple": "<b>{name}</b> and <b>{count} others</b> were removed as Admin.",
   "adminRemovedUserOther": "<b>{name}</b> and <b>{other_name}</b> were removed as Admin.",
-  "adminSendingPromotion": "Sending admin promotion",
+  "adminSendingPromotion": "{count, plural, one [Sending admin promotion] other [Sending admin promotions]}",
   "adminSettings": "Admin Settings",
   "adminTwoPromotedToAdmin": "<b>{name}</b> and <b>{other_name}</b> were promoted to Admin.",
   "andMore": "+{count}",
@@ -275,18 +275,18 @@
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Failed to Update Group",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "You don’t have permission to delete others’ messages",
   "deleteMessage": "{count, plural, one [Delete Message] other [Delete Messages]}",
-  "deleteMessageConfirm": "Are you sure you want to delete this message?",
+  "deleteMessageConfirm": "{count, plural, one [Are you sure you want to delete this message?] other [Are you sure you want to delete these messages?]}",
   "deleteMessageDeleted": "{count, plural, one [Message deleted] other [Messages deleted]}",
   "deleteMessageDeletedGlobally": "This message was deleted",
   "deleteMessageDeletedLocally": "This message was deleted on this device",
-  "deleteMessageDescriptionDevice": "Are you sure you want to delete this message from this device only?",
+  "deleteMessageDescriptionDevice": "{count, plural, one [Are you sure you want to delete this message from this device only?] other [Are you sure you want to delete these messages from this device only?]}",
   "deleteMessageDescriptionEveryone": "Are you sure you want to delete this message for everyone?",
   "deleteMessageDeviceOnly": "Delete on this device only",
   "deleteMessageDevicesAll": "Delete on all my devices",
   "deleteMessageEveryone": "Delete for everyone",
   "deleteMessageFailed": "{count, plural, one [Failed to delete message] other [Failed to delete messages]}",
-  "deleteMessagesConfirm": "Are you sure you want to delete these messages?",
-  "deleteMessagesDescriptionDevice": "Are you sure you want to delete these messages from this device only?",
+  "deleteMessageNoteToSelfWarning": "{count, plural, one [This message cannot be deleted from all your devices] other [Some of the messages you have selected cannot be deleted from all your devices]}",
+  "deleteMessageWarning": "{count, plural, one [This message cannot be deleted for everyone] other [Some of the messages you have selected cannot be deleted for everyone]}",
   "deleteMessagesDescriptionEveryone": "Are you sure you want to delete these messages for everyone?",
   "deleting": "Deleting",
   "developerToolsToggle": "Toggle Developer Tools",
@@ -333,6 +333,7 @@
   "displayNameNew": "Pick a new display name",
   "displayNamePick": "Pick your display name",
   "displayNameSet": "Set Display Name",
+  "displayNameVisible": "Your Display Name is visible to users, groups and communities you interact with.",
   "document": "Document",
   "done": "Done",
   "download": "Download",
@@ -390,13 +391,16 @@
   "groupInviteFailedMultiple": "Failed to invite {name} and {count} others to {group_name}",
   "groupInviteFailedTwo": "Failed to invite {name} and {other_name} to {group_name}",
   "groupInviteFailedUser": "Failed to invite {name} to {group_name}",
-  "groupInviteSending": "Sending invite",
+  "groupInviteReinvite": "<b>{name}</b> invited you to rejoin <b>{group_name}</b>, where you are an Admin.",
+  "groupInviteReinviteYou": "You were invited to rejoin <b>{group_name}</b>, where you are an Admin.",
+  "groupInviteSending": "{count, plural, one [Sending invite] other [Sending invites]}",
   "groupInviteSent": "Invite sent",
   "groupInviteSuccessful": "Group invite successful",
   "groupInviteVersion": "Users must have the latest release to receive invitations",
   "groupInviteYou": "<b>You</b> were invited to join the group.",
   "groupInviteYouAndMoreNew": "<b>You</b> and <b>{count} others</b> were invited to join the group.",
   "groupInviteYouAndOtherNew": "<b>You</b> and <b>{other_name}</b> were invited to join the group.",
+  "groupInviteYouHistory": "<b>You</b> were invited to join the group. Chat history was shared.",
   "groupLeave": "Leave Group",
   "groupLeaveDescription": "Are you sure you want to leave <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Are you sure you want to leave <b>{group_name}</b>?<br/><br/>This will remove all members and delete all group content.",
@@ -422,6 +426,7 @@
   "groupNameEnterShorter": "Please enter a shorter group name.",
   "groupNameNew": "Group name is now {group_name}.",
   "groupNameUpdated": "Group name updated.",
+  "groupNameVisible": "Group name is visible to all group members.",
   "groupNoMessages": "You have no messages from <b>{group_name}</b>. Send a message to start the conversation!",
   "groupOnlyAdmin": "You are the only admin in <b>{group_name}</b>.<br/><br/>Group members and settings cannot be changed without an admin.",
   "groupPromotedYou": "<b>You</b> were promoted to Admin.",
@@ -436,6 +441,7 @@
   "groupRemovedMultiple": "<b>{name}</b> and <b>{count} others</b> were removed from the group.",
   "groupRemovedTwo": "<b>{name}</b> and <b>{other_name}</b> were removed from the group.",
   "groupRemovedYou": "You were removed from <b>{group_name}</b>.",
+  "groupRemovedYouGeneral": "You were removed from the group.",
   "groupRemovedYouMultiple": "<b>You</b> and <b>{count} others</b> were removed from the group.",
   "groupRemovedYouTwo": "<b>You</b> and <b>{other_name}</b> were removed from the group.",
   "groupSetDisplayPicture": "Set Group Display Picture",
@@ -549,6 +555,7 @@
   "next": "Next",
   "nicknameDescription": "Choose a nickname for <b>{name}</b>. This will appear to you in your one-to-one and group conversations.",
   "nicknameEnter": "Enter nickname",
+  "nicknameErrorShorter": "Please enter a shorter nickname",
   "nicknameRemove": "Remove Nickname",
   "nicknameSet": "Set Nickname",
   "no": "No",
