--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -35,8 +35,8 @@
   "adminRemovedUser": "<b>{name}</b> はアドミンから削除されました",
   "adminRemovedUserMultiple": "<b>{name}</b> と <b>{count}名</b> がAdminから削除されました。",
   "adminRemovedUserOther": "<b>{name}</b> と <b>{other_name}</b> がAdminに昇格しました。",
-  "adminSendingPromotion": "管理者への昇進を送信中",
   "adminSettings": "アドミン設定",
+  "adminTwoPromotedToAdmin": "<b>{name}</b> と <b>{other_name}</b> がアドミンに昇格しました",
   "andMore": "+{count}",
   "anonymous": "匿名",
   "appearanceAutoDarkMode": "オートダークモード",
@@ -149,7 +149,7 @@
   "callsPermissionsRequiredDescription": "プライバシー設定で「音声とビデオ通話」の許可を有効にできます。",
   "callsReconnecting": "再接続しています...",
   "callsRinging": "呼び出し中...",
-  "callsSessionCall": "{app_name} Call",
+  "callsSessionCall": "{app_name} 電話",
   "callsSettings": "通話 (ベータ版)",
   "callsVoiceAndVideo": "音声とビデオ通話",
   "callsVoiceAndVideoBeta": "音声通話とビデオ通話 (ベータ版)",
@@ -233,7 +233,7 @@
   "conversationsEmpty": "{conversation_name} にはメッセージがありません。",
   "conversationsEnter": "キーを入力",
   "conversationsEnterDescription": "会話中のEnterキーの機能",
-  "conversationsEnterNewLine": "SHIFT + ENTER 送信, ENTER 改行",
+  "conversationsEnterNewLine": "シフト + エンター 送信、エンター 改行",
   "conversationsEnterSends": "エンターでメッセージを送信、シフト + エンターで改行を開始",
   "conversationsGroups": "グループ",
   "conversationsMessageTrimming": "メッセージの削減",
@@ -241,10 +241,11 @@
   "conversationsMessageTrimmingTrimCommunitiesDescription": "6ヶ月以上のコミュニティと2,000以上のメッセージがあるコミュニティからメッセージを削除します。",
   "conversationsNew": "新しい会話",
   "conversationsNone": "まだ通知はありません",
-  "conversationsSendWithEnterKey": "Enter キーで送信",
+  "conversationsSendWithEnterKey": "エンターキーで送信",
   "conversationsSendWithEnterKeyDescription": "Enterキーをタップすると、改行ではなく、メッセージが送信されます。",
   "conversationsSettingsAllMedia": "すべてのメディア",
   "conversationsSpellCheck": "スペルチェック",
+  "conversationsSpellCheckDescription": "メッセージを入力するときにスペルチェックを有効にします",
   "conversationsStart": "会話を開始する",
   "copied": "コピーしました",
   "copy": "コピーする",
@@ -273,18 +274,14 @@
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "グループの更新ができませんでした",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "他のユーザーの投稿を削除する権限はありません",
   "deleteMessage": "{count, plural, other [メッセージを削除]}",
-  "deleteMessageConfirm": "本当にこのメッセージを削除しますか？",
   "deleteMessageDeleted": "{count, plural, other [メッセージが削除されました]}",
   "deleteMessageDeletedGlobally": "このメッセージは削除されました",
   "deleteMessageDeletedLocally": "このメッセージはこのデバイス上で削除されました",
-  "deleteMessageDescriptionDevice": "本当にこのメッセージをこのデバイスのみから削除しますか？",
   "deleteMessageDescriptionEveryone": "本当にこのメッセージを全員に対して削除しますか？",
   "deleteMessageDeviceOnly": "このデバイスのみを削除",
   "deleteMessageDevicesAll": "すべてのデバイスから削除",
   "deleteMessageEveryone": "全員から削除",
   "deleteMessageFailed": "{count, plural, other [メッセージの削除に失敗しました]}",
-  "deleteMessagesConfirm": "本当にこれらのメッセージを削除しますか？",
-  "deleteMessagesDescriptionDevice": "このデバイスからのみメッセージを削除してもよろしいですか？",
   "deleteMessagesDescriptionEveryone": "すべてのユーザーのメッセージを削除してもよろしいですか？",
   "deleting": "削除中",
   "developerToolsToggle": "開発者ツールを切り替える",
@@ -307,8 +304,9 @@
   "disappearingMessagesDisappearAfterSendState": "送信後に消えます - {time}",
   "disappearingMessagesFollowSetting": "設定をフォロー",
   "disappearingMessagesFollowSettingOff": "送信したメッセージはもう消滅しません。消滅メッセージを<b>オフ</b>にしてもよろしいですか？",
-  "disappearingMessagesFollowSettingOn": "あなたのメッセージを<b>{time}</b>後に<b>{disappearing_messages_type}</b>消えるように設定しますか？",
+  "disappearingMessagesFollowSettingOn": "メッセージを<b>{time}</b>後に<b>{disappearing_messages_type}</b>消えるようにセットしますか？",
   "disappearingMessagesLegacy": "{name}は古いクライアントを使用しています。消えるメッセージが期待通りに動作しない場合があります。",
+  "disappearingMessagesOnlyAdmins": "この設定はグループアドミンのみ変更可能です",
   "disappearingMessagesSent": "送信済み",
   "disappearingMessagesSet": "<b>{name}</b> が {time} になった後、{disappearing_messages_type}メッセージが消えるように設定しました。",
   "disappearingMessagesSetYou": "<b>You</b> は {time} になった後、{disappearing_messages_type}メッセージが消えるように設定しました。",
@@ -318,7 +316,7 @@
   "disappearingMessagesTurnedOffYou": "<b>You</b> は<b>消えるメッセージ</b>をオフにしました。送信されたメッセージは消えなくなります。",
   "disappearingMessagesTurnedOffYouGroup": "<b>あなた</b> は消えているメッセージを <b>オフ</b>にしました。",
   "disappearingMessagesTypeRead": "既読",
-  "disappearingMessagesTypeSent": "送信",
+  "disappearingMessagesTypeSent": "送信済み",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>が消えるメッセージの設定を更新しました",
   "disappearingMessagesUpdatedYou": "<b>You</b> は消えるメッセージの設定を更新しました",
   "dismiss": "キャンセル",
@@ -329,7 +327,7 @@
   "displayNameErrorNew": "表示名を読み込めませんでした。続行するには新しい表示名を入力してください。",
   "displayNameNew": "新しい表示名を選択してください",
   "displayNamePick": "表示名を選択してください",
-  "displayNameSet": "表示名を設定",
+  "displayNameSet": "表示名をセット",
   "document": "ドキュメント",
   "done": "完了",
   "download": "ダウンロード",
@@ -342,11 +340,13 @@
   "emojiCategoryFlags": "フラグ",
   "emojiCategoryFood": "食べ物・飲み物",
   "emojiCategoryObjects": "オブジェクト",
-  "emojiCategorySmileys": "スマイル & 人",
+  "emojiCategoryRecentlyUsed": "最近使用",
+  "emojiCategorySmileys": "スマイリーと人",
   "emojiCategorySymbols": "記号",
   "emojiCategoryTravel": "旅行&場所",
   "emojiReactsClearAll": "すべての項目の{emoji}を削除してもよろしいですか？",
-  "emojiReactsCoolDown": "スローダウンしました。絵文字リアクターが多すぎます。しばらくしてからもう一度試してください。",
+  "emojiReactsCoolDown": "スローダウンしてください。絵文字リアクションが多すぎます。しばらくしてからもう一度試してください。",
+  "emojiReactsCountOthers": "{count, plural, other [# が {emoji} をこのメッセージに反応しました]}",
   "emojiReactsHoverNameDesktop": "{name}が{emoji_name}でリアクションしました",
   "emojiReactsHoverNameTwoDesktop": "{name}と{other_name}が{emoji_name}でリアクションしました",
   "emojiReactsHoverTwoNameMultipleDesktop": "{name}と<span>{count}その他</span>が{emoji_name}で反応しました",
@@ -379,13 +379,12 @@
   "groupError": "グループエラー",
   "groupErrorCreate": "グループの作成に失敗しました。インターネット接続を確認して、もう一度やり直してください。",
   "groupErrorJoin": "{group_name} への参加に失敗しました",
-  "groupInformationSet": "Set Group Information",
+  "groupInformationSet": "グループの詳細をセット",
   "groupInviteDelete": "本当にこのグループ招待を削除しますか？",
   "groupInviteFailed": "招待に失敗しました",
   "groupInviteFailedMultiple": "{name} と他 {count} 人を {group_name} に招待できませんでした",
   "groupInviteFailedTwo": "{name} と {other_name} を {group_name} に招待できませんでした",
   "groupInviteFailedUser": "{name} を {group_name} に招待できませんでした",
-  "groupInviteSending": "招待状を送信中",
   "groupInviteSent": "招待を送信しました",
   "groupInviteSuccessful": "グループの招待が成功しました",
   "groupInviteVersion": "ユーザーは最新のリリースを持っている必要があります",
@@ -433,13 +432,13 @@
   "groupRemovedYou": "<b>{group_name}</b>から削除されました。",
   "groupRemovedYouMultiple": "<b>あなた</b> と <b>{count}名</b> がグループから削除されました。",
   "groupRemovedYouTwo": "<b>あなた</b> と <b>{other_name}</b> がグループから削除されました。",
-  "groupSetDisplayPicture": "グループのアイコン画像を設定",
+  "groupSetDisplayPicture": "グループのアイコン画像をセット",
   "groupUnknown": "不明なグループ",
   "groupUpdated": "グループが更新されました",
   "helpFAQ": "よくある質問",
   "helpHelpUsTranslateSession": "{app_name}の翻訳にご協力ください",
   "helpReportABug": "バグを報告",
-  "helpReportABugDescription": "詳細を共有して、私たちが問題を解決するのを手伝ってください。ログをエクスポートし、{app_name}のヘルプデスクを通じてファイルをアップロードしてください。",
+  "helpReportABugDescription": "詳細を共有して問題解決にご協力ください。ログをエクスポートして、{app_name}のヘルプデスクからファイルをアップロードしてください",
   "helpReportABugExportLogs": "ログのエクスポート",
   "helpReportABugExportLogsDescription": "ログをエクスポートし、{app_name} のヘルプデスクにてファイルをアップロードします。",
   "helpReportABugExportLogsSaveToDesktop": "デスクトップに保存",
@@ -466,12 +465,12 @@
   "legacyGroupMemberTwoNew": "<b>{name}</b> と <b>{other_name}</b> がグループに加わりました",
   "legacyGroupMemberYouNew": "<b>あなた</b>がグループに加わりました",
   "linkPreviews": "リンクプレビュー",
-  "linkPreviewsDescription": "サポートされている URL のリンクプレビューを表示します。",
+  "linkPreviewsDescription": "サポートされている URL のリンクプレビューを表示します",
   "linkPreviewsEnable": "リンクプレビューを有効にする",
   "linkPreviewsErrorLoad": "リンクプレビューを読み込めません",
   "linkPreviewsErrorUnsecure": "セキュアでないリンクのプレビューは読み込めません",
   "linkPreviewsFirstDescription": "送受信する URL のプレビューを表示します。これは便利ですが、{app_name} はプレビューを生成するためにリンクされた サイトにアクセスする必要があります。 {app_name} の設定でいつでもリンクのプレビューをオフにできます。",
-  "linkPreviewsSend": "リンクプレビューを送る",
+  "linkPreviewsSend": "リンクプレビューを表示",
   "linkPreviewsSendModalDescription": "リンクのプレビューを送信するとき、完全なメタデータ保護はありません。",
   "linkPreviewsTurnedOff": "リンクプレビューが無効です",
   "linkPreviewsTurnedOffDescription": "{app_name}は、送受信するリンクのプレビューを生成するためにリンクされたウェブサイトに接続する必要があります。<br/><br/>{app_name}の設定でプレビューをオンにできます。",
@@ -497,8 +496,8 @@
   "membersInviteShareDescription": "<b>{name}</b>にグループメッセージ履歴を共有しますか？",
   "membersInviteShareDescriptionMultiple": "<b>{name}</b>と<b>{count}人</b>にグループメッセージ履歴を共有しますか？",
   "membersInviteShareDescriptionTwo": "<b>{name}</b>と<b>{other_name}</b>にグループメッセージ履歴を共有しますか？",
-  "membersInviteShareMessageHistory": "Share message history",
-  "membersInviteShareNewMessagesOnly": "Share new messages only",
+  "membersInviteShareMessageHistory": "メッセージ履歴を共有",
+  "membersInviteShareNewMessagesOnly": "新しいメッセージのみを共有",
   "membersInviteTitle": "招待",
   "message": "メッセージ",
   "messageEmpty": "このメッセージは空です。",
@@ -519,7 +518,7 @@
   "messageRequestPending": "メッセージ・リクエストは現在承認待ちです。",
   "messageRequestPendingDescription": "受信者がこのメッセージリクエストを承認すると、音声メッセージと添付ファイルを送信できます.",
   "messageRequestYouHaveAccepted": "<b>{name}さん</b>のメッセージリクエストを承認しました",
-  "messageRequestsAcceptDescription": "このユーザーにメッセージを送信すると、自動的にメッセージリクエストが承認され、あなたのAccount IDが公開されます。",
+  "messageRequestsAcceptDescription": "このユーザーにメッセージを送ると、メッセージリクエストが自動的に承認され、アカウントIDが公開されます。",
   "messageRequestsAccepted": "メッセージ・リクエストが承認されました。",
   "messageRequestsClearAllExplanation": "本当に全てのメッセージリクエストとグループ招待を消去しますか？",
   "messageRequestsCommunities": "コミュニティメッセージリクエスト",
@@ -545,7 +544,7 @@
   "nicknameDescription": "<b>{name}</b>のニックネームを選んでください。これが1対1およびグループ会話で表示されます。",
   "nicknameEnter": "ニックネームを入力してください",
   "nicknameRemove": "ニックネームを削除",
-  "nicknameSet": "Set Nickname",
+  "nicknameSet": "ニックネームをセット",
   "no": "いいえ",
   "noSuggestions": "候補はありません",
   "none": "なし",
@@ -571,6 +570,7 @@
   "notificationsIosRestart": "{device}の再起動中にメッセージが届いたかもしれません",
   "notificationsLedColor": "LED色",
   "notificationsMentionsOnly": "メンションのみ",
+  "notificationsMessage": "メッセージ通知",
   "notificationsMostRecent": "最新の受信: {name}",
   "notificationsMute": "ミュート",
   "notificationsMuteFor": "{time_large}間ミュート",
@@ -607,7 +607,7 @@
   "onionRoutingPathDescription": "{app_name}は、{app_name}の分散型ネットワークの複数のService Nodeを介してメッセージをバウンスすることにより、IPアドレスを隠します。これが現在の経路です:",
   "onionRoutingPathDestination": "目的先",
   "onionRoutingPathEntryNode": "エントリーノード",
-  "onionRoutingPathServiceNode": "Service Node",
+  "onionRoutingPathServiceNode": "サービスノード",
   "onionRoutingPathUnknownCountry": "国名が不明",
   "onsErrorNotRecognized": "このONSを認識できませんでした。内容を確認して再度お試しください。",
   "onsErrorUnableToSearch": "このONSを検索できませんでした。後でもう一度お試しください。",
@@ -619,6 +619,7 @@
   "passwordConfirm": "パスワードを再確認",
   "passwordCreate": "パスワードを作成してください",
   "passwordCurrentIncorrect": "現在のパスワードが間違っています。",
+  "passwordDescription": "{app_name} のロックを解除するにはパスワードが必要です",
   "passwordEnter": "パスワードを入力してください",
   "passwordEnterCurrent": "現在のパスワードを入力してください",
   "passwordEnterNew": "新しいパスワードを入力してください",
@@ -630,7 +631,7 @@
   "passwordRemove": "パスワードを削除",
   "passwordRemoveDescription": "{app_name} のロックを解除するために必要なパスワードを削除します",
   "passwordRemovedDescription": "パスワードを削除しました。",
-  "passwordSet": "パスワードを設定",
+  "passwordSet": "パスワードをセット",
   "passwordSetDescription": "パスワードが設定されました。安全に保管してください。",
   "paste": "貼り付け",
   "permissionMusicAudioDenied": "{app_name} は、ファイル、音楽、およびオーディオを送信するために音楽およびオーディオアクセスが必要ですが、それが恒久的に拒否されています。設定に移動して、「権限」を選択し、「音楽およびオーディオ」を有効にしてください。",
@@ -662,7 +663,7 @@
   "profile": "プロフィール",
   "profileDisplayPicture": "ディスプレイの画像",
   "profileDisplayPictureRemoveError": "表示画像の削除に失敗しました。",
-  "profileDisplayPictureSet": "ディスプレイの画像を設定",
+  "profileDisplayPictureSet": "ディスプレイの画像をセット",
   "profileDisplayPictureSizeError": "小さいファイルを選んでください",
   "profileErrorUpdate": "プロフィールを更新できませんでした",
   "promote": "昇格",
@@ -671,11 +672,12 @@
   "qrNotRecoveryPassword": "このQRコードにはリカバリーパスワードが含まれていません",
   "qrScan": "QRコードをスキャン",
   "qrView": "QRコードを表示",
+  "qrYoursDescription": "友達があなたのQRコードをスキャンすることでメッセージを送信できます",
   "quit": "{app_name} を終了",
   "quitButton": "終了",
   "read": "既読",
   "readReceipts": "既読通知",
-  "readReceiptsDescription": "送信したすべてのメッセージに対する既読通知を表示します。",
+  "readReceiptsDescription": "送信したすべてのメッセージに対する既読通知を表示します",
   "received": "受信:",
   "recommended": "オススメ",
   "recoveryPasswordBannerDescription": "リカバリーパスワードを保存して、アカウントにアクセスできなくならないようにしてください",
@@ -743,12 +745,12 @@
   "settingsRestartDescription": "新しい設定を適用するために {app_name} を再起動する必要があります.",
   "share": "共有",
   "shareAccountIdDescription": "友達を{app_name} に招待して、チャットを始めましょう。アカウントIDを共有して招待できます。",
-  "shareAccountIdDescriptionCopied": "いつもどこでも友達と共有してください — ここで会話を移動します。",
+  "shareAccountIdDescriptionCopied": "いつでもどこでも友達と共有 — ここで会話を始めましょう",
   "shareExtensionDatabaseError": "データベースを開く際に問題が発生しました。アプリを再起動して再度お試しください。",
   "shareToSession": "{app_name}に共有",
   "show": "表示",
   "showAll": "すべて表示",
-  "showLess": "最小化",
+  "showLess": "少なく表示",
   "stickers": "ステッカー",
   "supportGoTo": "サポートページへ",
   "systemInformationDesktop": "システム情報: {information}",
