--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -35,7 +35,6 @@
   "adminRemovedUser": "<b>{name}</b> был(а) снят(а) с должности администратора.",
   "adminRemovedUserMultiple": "<b>{name}</b> и <b>{count} других пользователей</b> были удалены админом.",
   "adminRemovedUserOther": "Пользователи <b>{name}</b> и <b>{other_name}</b> были удалены админом.",
-  "adminSendingPromotion": "Изменение статуса до уровня администратора",
   "adminSettings": "Настройки администратора",
   "adminTwoPromotedToAdmin": "<b>{name}</b> и <b>{other_name}</b> назначены администраторами.",
   "andMore": "+{count}",
@@ -275,18 +274,14 @@
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Ошибка при обновлении группы",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "У вас недостаточно прав для удаления других сообщений",
   "deleteMessage": "{count, plural, one [Удалить Сообщение] few [Удалить сообщения] many [Удалить сообщения] other [Удалить сообщения]}",
-  "deleteMessageConfirm": "Вы уверены, что хотите удалить это сообщение?",
   "deleteMessageDeleted": "{count, plural, one [Сообщение удалено] few [Сообщения удалены] many [Сообщения удалены] other [Сообщения удалены]}",
   "deleteMessageDeletedGlobally": "Это сообщение было удалено",
   "deleteMessageDeletedLocally": "Это сообщение было удалено на этом устройстве",
-  "deleteMessageDescriptionDevice": "Вы уверены, что хотите удалить это сообщение (оно будет удалено только с этого устройства)?",
   "deleteMessageDescriptionEveryone": "Вы уверены, что хотите удалить это сообщение для всех?",
   "deleteMessageDeviceOnly": "Удалить только на этом устройстве",
   "deleteMessageDevicesAll": "Удалить на всех моих устройствах",
   "deleteMessageEveryone": "Удалить для всех",
   "deleteMessageFailed": "{count, plural, one [Не удалось удалить сообщение] few [Не удалось удалить сообщения] many [Не удалось удалить сообщения] other [Не удалось удалить сообщения]}",
-  "deleteMessagesConfirm": "Вы уверены, что хотите удалить эти сообщения?",
-  "deleteMessagesDescriptionDevice": "Вы уверены, что хотите удалить эти сообщения (они будут удалены только с этого устройства)?",
   "deleteMessagesDescriptionEveryone": "Вы уверены, что хотите удалить эти сообщения для всех?",
   "deleting": "Удаление",
   "developerToolsToggle": "Включить инструменты разработчика",
@@ -390,7 +385,6 @@
   "groupInviteFailedMultiple": "Не удалось пригласить {name} и {count} других в {group_name}",
   "groupInviteFailedTwo": "Не удалось пригласить {name} и {other_name} в {group_name}",
   "groupInviteFailedUser": "Не удалось пригласить {name} в {group_name}",
-  "groupInviteSending": "Отправка приглашения",
   "groupInviteSent": "Приглашение отправлено",
   "groupInviteSuccessful": "Приглашение в группу успешно",
   "groupInviteVersion": "Пользователи должны иметь последнюю версию приложения для получения приглашений",
@@ -494,7 +488,7 @@
   "lockAppUnlocked": "Приложение {app_name} разблокировано",
   "max": "Максимальный",
   "media": "Медиа",
-  "members": "{count, plural, one [# участник] few [# участника] many [# участников] other [# участников]}",
+  "members": "{count, plural, one [# Участник] few [# участника] many [# участников] other [# участников]}",
   "membersActive": "{count, plural, one [# активный участник] few [# активных участника] many [# активных участников] other [# активных участников]}",
   "membersAddAccountIdOrOns": "Добавить Account ID или ONS",
   "membersInvite": "Пригласить друзей в Session",
